Manual fix batch pt. 1

--- a/_posts/2010-1-29-2-10400.md
+++ b/_posts/2010-1-29-2-10400.md
@@ -1,81 +1,82 @@
 ---
 layout: post
-title: 第一百零四节 铸炮（三）
+title: "Section 104: Casting Cannons (III)"
 category: 2
 path: 2010-1-29-2-10400.md
 tag: [normal]
 ---
 
-　　现在炮兵小组的人又要面临抉择，到底是采用实心铸造加深钻工艺来制造身管，还是继续采用空心铸造法。
+Now the artillery team faced another choice: whether to adopt the solid casting plus deep drilling process to manufacture the barrel, or to continue using the hollow casting method.
 
-　　“下一步我们试验钻孔法吧？不过得先制造一台钻孔机。”机械组的几个人都兴致勃勃。
+"Let's try the drilling method next, shall we? But we have to build a drilling machine first." The few people in the machinery group were all enthusiastic.
 
-　　“钻孔法难了点。”林深河想了想，“效率也有点低，我看可以试试Rodman Casting。”
+"The drilling method is a bit difficult," Lin Shenhe thought for a moment, "and the efficiency is a bit low. I think we can try Rodman Casting."
 
-　　“中心冷却铸造吗？”[王洛宾][y003]问。
+"Center cooling casting?" [Wang Luobin][y003] asked.
 
-　　“你知道啊？”林深河有点吃惊，“我以为国内对这方面知道的人不多。”
+"You know about it?" Lin Shenhe was a little surprised. "I thought not many people in the country knew about this."
 
-　　“个人爱好，纯属个人爱好。”[王洛宾][y003]想要不是俺在水产大国不比你在腐朽的美帝那么为所欲为，我也早铸过大炮了。
+"Personal hobby, purely personal hobby." [Wang Luobin][y003] thought to himself, if I weren't in a major aquatic products country and not as free to do whatever I want as you are in the decadent American empire, I would have cast cannons long ago.
 
-　　所谓Rodman Casting铸造法，就是内模灌水冷却法。
+The so-called Rodman Casting method is the inner mold water cooling method.
 
-　　它的原理很简单：生铁浇铸时的冷却速率会影响其机械性能，理论上说冷却速率愈高质地愈硬，理想的大炮是中间（炮膛）最硬，但实际却是相反，铸造大炮的时候却是中间冷却最慢。因为第一外层包住内层，外层不冷里面冷不下来。其次外管的表面积也比内管大，不管是辐射或者对流传导散热，散热速度都是和表面积相等的，所以外面会先冷。而这就使炮管密度的分布不理想，身管寿命大打折扣。
+Its principle is very simple: the cooling rate of cast iron during casting will affect its mechanical properties. Theoretically, the higher the cooling rate, the harder the texture. The ideal cannon is the hardest in the middle (the bore), but the reality is the opposite. When casting a cannon, the middle cools the slowest. Because the first outer layer wraps the inner layer, the inside cannot cool down if the outside does not cool down. Secondly, the surface area of the outer tube is also larger than that of the inner tube. Whether it is radiation or convection heat conduction, the heat dissipation speed is equal to the surface area, so the outside will cool first. This makes the distribution of the barrel density not ideal, and the life of the barrel is greatly reduced.
 
-　　先冷却者先收缩。外层冷却硬化后，里层还没冷却的话，将造成外层比里层更硬，里层的内管可能会形变，或者在里层冷却时产生裂痕之类的。这导致铸炮时的废品率提升，缩减身管寿命，有时候还会影响到火炮的发射性能。
+The one that cools first shrinks first. After the outer layer cools and hardens, if the inner layer has not yet cooled, it will cause the outer layer to be harder than the inner layer, and the inner tube of the inner layer may deform, or cracks may occur when the inner layer cools. This leads to an increase in the scrap rate during cannon casting, shortens the life of the barrel, and sometimes affects the firing performance of the cannon.
 
-　　1860年美国南北战争期间，美陆军少校托马斯丁.罗德曼，发明了这一空心铸件工艺，围绕型芯进行铸炮，型芯内部以流水进行冷却，这是一个使炮膛内部先行硬化的方法。这就是所谓的Rodman Casting铸造法。这种工艺是早先套筒炮试验合乎逻辑的发展结果。外层金属冷却时向内缩拢，向已经硬化的内层继续加压，这样，发射药的爆炸力就为炮膛四周的整个厚金属层所吸收，而不是层层向外膨胀。在美国内战及以后的20年里，用这种方法制造了大部分美海军的重型铸铁炮。Rodman Casting铸造法的最大意义是大幅降低铸造时的炮管废品率，特别铸造重炮的时候。
+During the American Civil War in 1860, US Army Major Thomas J. Rodman invented this hollow casting process, casting cannons around a core, and cooling the inside of the core with running water. This is a method that allows the inside of the bore to harden first. This is the so-called Rodman Casting method. This process was a logical development of earlier sleeve cannon experiments. When the outer metal cools, it shrinks inward and continues to press on the already hardened inner layer. In this way, the explosive force of the propellant is absorbed by the entire thick metal layer around the bore, instead of expanding outward layer by layer. Most of the heavy cast iron cannons of the US Navy were manufactured using this method during the Civil War and for the next 20 years. The greatest significance of the Rodman Casting method is that it greatly reduces the scrap rate of cannon barrels during casting, especially when casting heavy cannons.
 
-　　从成本角度来说，Rodman Casting铸造法大幅度减少了废品率，减少了火炮的铸造成本。其次，这种工艺大幅度的增加了火炮的身管寿命，降低了使用成本。
+From a cost perspective, the Rodman Casting method greatly reduced the scrap rate and the casting cost of cannons. Secondly, this process greatly increased the service life of the cannon barrel and reduced the cost of use.
 
-　　穿越者面对的敌人和潜在敌人，无论从人力还是物力的掌握上，都远大于穿越者。穿越者要战胜他们，就必须控制自己的各种成本。
+The enemies and potential enemies that the transmigrators faced were far greater than the transmigrators in terms of both manpower and material resources. To defeat them, the transmigrators had to control their various costs.
 
-　　“这个方法可以试试看，不过这样的话我们要做一个可容水的硬内模，这样就不能用刚才的泥模了。”季无声考虑了下铸造的问题。
+"This method can be tried, but in this case we have to make a hard inner mold that can hold water, so we can't use the clay mold just now." Ji Wusheng considered the casting problem.
 
-　　“用铁模铸法吧，好像中国人还是第一个用使用的。”
+"Let's use the iron mold casting method. It seems that the Chinese were the first to use it."
 
-　　“没错，是龚振麟发明的，他也算个奇才了。”
+"That's right, it was invented by Gong Zhenlin. He was a genius."
 
-　　龚振麟是浙江嘉兴县县丞，本来和军火工业八竿子打不着，但是他有个“素有巧思”的名声在外，鸦片战争期间被两江总督裕谦调到宁波军营专门负责铸炮。
+Gong Zhenlin was the county magistrate of Jiaxing County, Zhejiang Province. He had nothing to do with the arms industry, but he had a reputation for being "ingenious." During the Opium War, he was transferred to the Ningbo military camp by the governor of Liangjiang, Yuqian, to be specifically responsible for casting cannons.
 
-　　当时中国的铸炮工艺是非常落后的，其方法是：
+At that time, China's cannon casting technology was very backward. The method was:
 
-　　用水和泥，制成模具，然后范金倾铸，层层笋合。泥模必须烘得干透才行，否则外表虽干，里面湿润，一遇金属熔液，潮气自生，铸成的火炮就有蜂窝，施放时炮筒容易炸裂伤人。烘干泥模往往要一个月之久，如果碰上雨雪阴寒天气，则须两三个月。况且一具泥模只能铸造一尊火炮，随即随弃，不能再用。
+Mix water and mud to make a mold, then cast it in layers. The mud mold must be thoroughly dried, otherwise, although the surface is dry, the inside is wet. When it encounters molten metal, moisture will be generated, and the cast cannon will have honeycombs. When fired, the barrel is easy to burst and injure people. It often took a month to dry a mud mold, and if it encountered rainy, snowy, or cold weather, it would take two or three months. Moreover, a mud mold could only cast one cannon and was then discarded and could not be reused.
 
-　　从这些描述看，1840年中国铸炮工匠们所用的工艺，和穿越众们所试验性的使用的欧洲在1713年以前的铸造工艺大致相同。但是欧洲的炮匠在150年前所使用的一些很简单的加工手段，如泥模的加强筋、泥模焙烧和铁炮铸造之后镗光完全都不知道。
+From these descriptions, the technology used by Chinese cannon makers in 1840 was roughly the same as the European casting technology used experimentally by the transmigrators before 1713. However, some very simple processing methods used by European cannon makers 150 years ago, such as reinforcing ribs for mud molds, firing of mud molds, and boring of iron cannons after casting, were completely unknown.
 
-　　工匠对泥模的制造毫无规范可言，尺寸手法完全存于心中，火炮的比例尺寸也不甚重视。这些已经远远落伍于时代的技术却是工匠的吃饭本钱，被视为“秘法”，既没有任何技术交流，也没有改进。就这样与时代脱节的铸炮水准之下居然还有多个完全封闭，互相保密的“流派”。结果就是造出来的大炮甚至还不如明代的仿制的红夷大炮，
+The craftsmen had no standards for making mud molds. The dimensions and techniques were all in their minds, and they didn't pay much attention to the proportions and dimensions of the cannons. These technologies, which were already far behind the times, were the craftsmen's livelihood and were regarded as "secret methods." There was no technical exchange or improvement. In this way, under the out-of-date cannon casting level, there were still multiple completely closed and mutually secret "schools." The result was that the cannons produced were not even as good as the imitation Hongyi cannons of the Ming Dynasty.
 
-　　龚振麟因为战况紧急，前线大炮损耗多，需求量极大，要这么一月成一批炮，那被英国人拆光大炮的虎门各座炮台多少年也补充不上去。他几经试验，终于发明了铁模铸炮法。
+Gong Zhenlin, because of the urgency of the war, the heavy loss of cannons on the front line, and the huge demand, if it took a month to produce a batch of cannons, the various forts in Humen, which had been dismantled by the British, would not be replenished for many years. After several experiments, he finally invented the iron mold casting method.
 
-　　铁模铸炮法是用铁制造成硬模。铸炮时，先将铁模的每瓣内侧刷上两层浆液。第一层浆液是用细稻壳灰和细沙泥制成的；第二层浆液是用上等极细窑煤调水制成的。然后，两瓣相合，用铁箍箍紧、烘热，节节相续，最后浇铸金属熔液。待浇足熔液，冷却成型以后，即刻按模瓣次序剥去铁模，如剥掉笋壳一样，逐渐露出炮身，再剔除炮心内的泥胚胎，膛内自然光滑。
+The iron mold casting method uses iron to make a hard mold. When casting a cannon, first brush two layers of slurry on the inside of each half of the iron mold. The first layer of slurry is made of fine rice husk ash and fine sandy mud; the second layer of slurry is made of top-grade fine kiln coal mixed with water. Then, the two halves are joined, clamped with iron hoops, heated, and connected section by section. Finally, the molten metal is poured. After the molten metal is poured and cooled to form, the iron mold is immediately peeled off in the order of the mold halves, like peeling off a bamboo shoot shell, gradually revealing the cannon body. Then, the mud embryo in the core of the cannon is removed, and the inside of the bore is naturally smooth.
 
-　　同传统泥模铸炮相比，铁模铸炮的优越性在于：铸造出来的炮身品质好，里外表面光滑，不像泥模那样会让炮身产生气泡。再来就是因为不需辛苦涂制泥模等干燥，因此制造速度快，且不受气候影响。因为模子可以重复使用，生产速度快，产量大，成本可以压得很低，更大的意义在于标准化制造。标准化制造批量制造出外形、性能几乎完全一模一样的产品，这点对于火炮来说是至关重要的。
+Compared with traditional mud mold casting, the superiority of iron mold casting is that the quality of the cast cannon body is good, and the inner and outer surfaces are smooth, unlike mud molds that will cause bubbles in the cannon body. In addition, because it does not require the laborious application of mud molds to dry, the manufacturing speed is fast and is not affected by the climate. Because the mold can be reused, the production speed is fast, the output is large, the cost can be kept very low, and the greater significance lies in standardized manufacturing. Standardized manufacturing can mass-produce products with almost exactly the same appearance and performance, which is crucial for artillery.
 
-　　同仁们称赞说：“其法至简，其用最便，一工收数百工之利，一炮省数十倍之资。且旋铸旋出，不延时日，无瑕无疵，自然光滑，事半功倍，利用无穷，辟众论之导轨，开千古之法门，其有裨于国家武备者，岂浅鲜哉！”
+His colleagues praised him, saying: "His method is the simplest, and its use is the most convenient. One worker can achieve the benefit of hundreds of workers, and one cannon can save dozens of times the cost. And it can be cast and produced in a short time, without delay, without flaws, naturally smooth, with half the effort and twice the result, and its use is endless. It is a guide for all discussions and opens a door for thousands of years. Its benefit to the country's military preparedness is by no means small!"
 
-　　龚振麟发明的铸模铸炮法，早于西方30年，这是中国近代少有的一项领先世界的科技成就。
+Gong Zhenlin's invention of mold casting for cannons was 30 years ahead of the West. This was a rare scientific and technological achievement in modern China that led the world.
 
-　　炮兵小组继续去骚扰木材加工厂，让他们先用木头制成阳模，然后季无声和[展无涯][y004]一起进行翻沙铸造，铸成铁制阴模，这样就可以用来铸炮了。型芯也用铁制，内部是空心的，两头各有管道用来进水和排水。
+The artillery team continued to harass the wood processing factory, asking them to first make a male mold out of wood. Then Ji Wusheng and [Zhan Wuya][y004] worked together to carry out sand casting to cast an iron female mold, which could then be used to cast cannons. The core was also made of iron, hollow inside, with pipes at both ends for water inlet and outlet.
 
-　　当金属液浇入模具后，金属液便开始慢慢冷却，这时候内模里的水就派上用场了，靠近内模的金属液在水的作用下最先冷却凝结成钢，而在外层的金属液冷却较慢。因为热胀冷缩的原理，等到整个铸件都冷却完毕后外层后冷却的部分就会紧紧地箍住内层先冷却部分，这样整个铸件就会产生一个向内紧箍的力，就是有了这个力才使得炮管能够承受更大的膛压。这种内模控制冷却的方法可以有“身管自紧”的效果。
+When the molten metal was poured into the mold, the molten metal began to cool slowly. At this time, the water in the inner mold came into play. The molten metal near the inner mold was the first to cool and solidify into steel under the action of water, while the molten metal in the outer layer cooled more slowly. Because of the principle of thermal expansion and contraction, when the entire casting was cooled, the later cooled part of the outer layer would tightly hoop the first cooled part of the inner layer. In this way, the entire casting would produce an inward hooping force. It was with this force that the barrel could withstand a greater chamber pressure. This method of controlling cooling with an inner mold can have the effect of "barrel self-tightening."
 
-　　经过身管自紧工艺的身管，使用寿命大为延长，还能大幅度的减少身管厚度，减轻重量，增加火炮的机动性。
+The service life of the barrel processed by the barrel self-tightening process is greatly extended, and the thickness of the barrel can be greatly reduced, reducing the weight and increasing the mobility of the artillery.
 
-　　Rodman Casting铸造法的工艺非常简单，有了模具之后炮兵小组很快就出了第一门成品，这门炮比泥模的要好得多，特别是炮身不再需要什么打磨了，炮膛的光洁度也大大提高，虽然还需要镗光工艺，但是对刀具的消耗要小得多了。
+The process of Rodman Casting was very simple. After having the mold, the artillery team quickly produced the first finished product. This cannon was much better than the one made with a clay mold. In particular, the cannon body no longer needed any polishing, and the smoothness of the bore was also greatly improved. Although the boring process was still needed, the consumption of cutters was much smaller.
 
-　　为了检测铸造出来的大炮是否符合各项技术参数，炮兵小组决定到博铺进行一次试射。炮弹是生铁铸成的实心弹，铸造的时候尽量控制了游隙精度，使其不致于差太大。机械组为这两门炮制造了双轮炮架，还带了一个弹药前车，看起来很像那么回事。[王洛宾][y003]去了次农场，才把农场的马借出了4匹。但是马到了现场才发现一个问题：没有合适多马牵引的马具——公路上跑的双轮大车都是单马牵引，马具也是直接从原来的时空买来的。虽说马具不算什么高深的学问，但是谁也不知道该如何制造。最后不得不继续发挥资料库的作用，从一张照片上找到了答案。
+In order to test whether the cast cannon met various technical parameters, the artillery team decided to conduct a test firing at Bopu. The cannonballs were solid balls made of cast iron. During casting, the clearance accuracy was controlled as much as possible to prevent it from being too large. The machinery group manufactured two-wheeled gun carriages for these two cannons, and also brought a limber, which looked very much like the real thing. [Wang Luobin][y003] went to the farm once and borrowed 4 horses from the farm. But when the horses arrived at the scene, a problem was discovered: there was no suitable harness for multi-horse traction—the two-wheeled carts running on the highway were all single-horse traction, and the harnesses were also directly bought from the original time and space. Although the harness is not a profound knowledge, no one knew how to make it. In the end, they had to continue to use the database and found the answer from a photo.
 
-　　还没等把马具造出来，已经不耐烦的海军听说火炮已经铸造完毕，立刻派了一艘划艇来运炮。两门6磅炮和炮架被捆在空油桶的浮筏上，由划艇拖带着拉到了博铺港。
+Before the harness could be made, the impatient navy heard that the cannons had been cast and immediately sent a boat to transport the cannons. The two 6-pounder cannons and their carriages were tied to a raft of empty oil drums and towed to Bopu Port by a boat.
 
-　　大炮被安放在博铺的造船厂旁空地上，来看热闹的人络绎不绝，特别是海军的人马，几乎个个都对这两门黑乎乎的铁炮爱不释手。怎么看怎么可爱，海军的一个叫李海平的，干脆提议就这么把炮装上船去好了。
+The cannons were placed on the open ground next to the shipyard in Bopu. There was an endless stream of people coming to watch the excitement, especially the navy personnel. Almost everyone was fond of these two black iron cannons. No matter how they looked at them, they were lovely. A navy man named Li Haiping simply proposed to install the cannons on the ship just like that.
 
-　　“装上船去好了？你看清楚，这可是牵引式6磅加农炮，地地道道的陆军火炮。”张柏林一看心爱的大炮要给海军夺去，马上跳出来制止。
+"Install them on the ship? Look clearly, this is a towed 6-pounder cannon, a genuine army artillery piece." Zhang Bolin saw that his beloved cannon was about to be taken by the navy and immediately jumped out to stop it.
 
-　　“拉倒吧，还牵引式呢，你给我来个自行式来？”李海平一脸不以为然，“这小破炮，海军还看不上眼呢。”
+"Come on, it's still towed. Can you give me a self-propelled one?" Li Haiping looked disdainful. "The navy doesn't even care about this little broken cannon."
 
-　　“你说什么？！”张柏林顿时怒发冲冠，很想冲上去给他一拳，让他看看陆军的力量。
+"What did you say?!" Zhang Bolin was furious and wanted to rush up and punch him to show him the power of the army.
 
-　　“争什么呢？”[王洛宾][y003]赶紧过来打圆场，“这炮能不能打还是个未知数，你们瞎吵吵什么！”
-[y003]: /characters/y003 "王洛宾"
-[y004]: /characters/y004 "展无涯"
+"What are you arguing about?" [Wang Luobin][y003] hurried over to smooth things over. "It's still unknown whether this cannon can be fired. What are you arguing about!"
+
+[y003]: /characters/y003 "Wang Luobin"
+[y004]: /characters/y004 "Zhan Wuya"
