--- a/_posts/2010-1-31-2-10600.md
+++ b/_posts/2010-1-31-2-10600.md
@@ -1,111 +1,112 @@
 ---
 layout: post
-title: 第一百零六节 Armstrong大炮
+title: "Section 106: The Armstrong Cannon"
 category: 2
 path: 2010-1-31-2-10600.md
 tag: [normal]
 ---
 
-　　炮弹飞过了400米处的土堆，在地上砸出了一个足有30cm深的坑，坑底的铁球还在冒着青烟。
+The cannonball flew past the mound at 400 meters and smashed a pit 30cm deep in the ground. The iron ball at the bottom of the pit was still emitting blue smoke.
 
-　　“这里的地面还是比较松软的。”林深河看了下，“如果地面够硬，就能产生跳射效应，威力就更大了。”
+"The ground here is still relatively soft," Lin Shenhe looked at it. "If the ground is hard enough, it can produce a ricochet effect, and the power will be even greater."
 
-　　张柏林开始拉皮尺，从400米标杆到弹坑，实际测出的距离有460米。
+Zhang Bolin began to pull the tape measure. From the 400-meter marker to the crater, the actual measured distance was 460 meters.
 
-　　“射程合格。”林深河觉得满意，“精度还算满意。”
+"The range is qualified," Lin Shenhe was satisfied. "The accuracy is still satisfactory."
 
-　　“这就算满意了？啥也没打着啊！”应喻觉得实在难以置信，就这个精度？这可是门加农炮，还是直瞄射击的。
+"This is considered satisfactory? We didn't hit anything!" Ying Yu found it incredible. This accuracy? This was a cannon, and it was direct fire.
 
-　　“没错，滑膛炮就这点水平。敌人是密集队形，这一炮下去起码也能干掉十多个了。”
+"That's right, smoothbore cannons are at this level. The enemy is in a dense formation, and this one shot can take out at least a dozen of them."
 
-　　接着又换用不同的角度和装药打了十多发，射程从400米一直打到了1200米之外。当仰角达到最大的45度的时候，炮弹飞出了1500米之远。不过射程超过400米之后，准头就完全没有了，基本上只能看大方向，整个过程中一共打中了的4个土堆。火炮变得又红又烫，但是炮身很稳定没出现裂纹。为了安全起见，在射击了十五次之后，林深河宣布停火，换一门炮来打。
+Then they fired more than ten more shots with different angles and charges, with ranges from 400 meters to over 1200 meters. When the elevation angle reached the maximum of 45 degrees, the cannonball flew over 1500 meters. However, after the range exceeded 400 meters, the accuracy was completely gone. Basically, they could only see the general direction. A total of 4 mounds were hit during the whole process. The cannon became red and hot, but the barrel was very stable and there were no cracks. For safety's sake, after firing fifteen times, Lin Shenhe announced a ceasefire and switched to another cannon.
 
-　　“还打啊？我都快累垮了。”炮兵们个个都累得喘不过气来了。其他倒还好，每次发射之后的火炮复位才是费力活，而且复位之后方向角度总有些问题，又要重新进行调整，体力消耗特别大。
+"Still firing? I'm almost exhausted." The artillerymen were all out of breath. The other things were fine, but the repositioning of the cannon after each shot was a laborious task. Moreover, there were always some problems with the direction and angle after repositioning, and they had to be readjusted, which consumed a lot of physical strength.
 
-　　“还是要上管退炮，这样非断气不可。”张柏林气喘如牛，几乎要瘫倒在地。
+"We still have to use recoiling cannons, otherwise we'll be out of breath." Zhang Bolin was panting like a cow and almost collapsed to the ground.
 
-　　“管退炮得工业部门出弹簧之后吧，”林深河也累得够呛，“在此之前就别想了。”
+"Recoiling cannons will have to wait until the industrial department produces springs," Lin Shenhe was also tired enough. "Don't even think about it before then."
 
-　　休息过后又对采用泥模铸造的大炮进行了试射，射程略短于硬模法铸造的大炮，表现也还不错。
+After a rest, they test-fired the cannon cast with a clay mold. The range was slightly shorter than that of the cannon cast with a hard mold, but the performance was not bad.
 
-　　随后，炮兵小组又用铁模加罗德曼法铸造了包括12磅榴弹炮、12磅山地榴弹炮、12磅加农炮等多种口径的火炮，在取得了铸造轻型火炮的经验基础上，开始铸造海军用的32磅加农炮和32磅舰炮【注：这是一种直射的短炮，为英国海军发明并使用】。这些林林总总的火炮在试射中都取得了成功，临高角附近整日里炮声隆隆，烟雾弥漫。
+Subsequently, the artillery team used iron molds and the Rodman method to cast a variety of cannons of different calibers, including 12-pounder howitzers, 12-pounder mountain howitzers, and 12-pounder cannons. On the basis of gaining experience in casting light artillery, they began to cast 32-pounder cannons and 32-pounder carronades for the navy [Note: This is a direct-fire short cannon invented and used by the British Navy]. All these various cannons were successful in the test firing. The area around Lingao Cape was filled with the roar of cannons and smoke all day long.
 
-　　在积累了足够的铸造经验之后，炮兵小组根据资料库里的Armstrong大炮的图纸和说明，自行设计了采用螺纹炮栓的改进版Armstrong大炮。
+After accumulating enough casting experience, the artillery team, based on the drawings and instructions of the Armstrong cannon in the database, designed an improved version of the Armstrong cannon with a threaded breechblock.
 
-　　线膛炮不比滑膛炮，虽然炮兵小组在铸造32磅大炮的时候，长炮（加农炮）的口径已经达到了120mm，炮兵小组的设计人员还是谨慎的把第一门Armstrong大炮的口径定为70mm。
+A rifled cannon is not the same as a smoothbore cannon. Although the caliber of the long cannon (cannon) had reached 120mm when the artillery team was casting the 32-pounder cannon, the designers of the artillery team cautiously set the caliber of the first Armstrong cannon to 70mm.
 
-　　火炮的材质采用铸钢。铸造对已经驾轻就熟的炮兵小组已经没有难度了。主要的问题是膛线的加工。在兵工厂里这需要专门机器的，至少也要有专门的工装。马上造是来不及了，好在穿越者有可以效法的前辈——八路军、新四军的军工战士，他们在最简单的机械设备和手工条件下，一样造出了步枪和火炮。通过翻阅资料，[展无涯][y004]决定模仿当年吴运铎制造平射炮时采用的一种土法挤膛线技术，即用一个橄榄形的钢柱，圆周的刻上凹凸斜线，再把钢柱硬楔入身管。
+The material of the cannon was cast steel. Casting was no longer difficult for the artillery team, who were already familiar with it. The main problem was the processing of the rifling. In an arsenal, this required special machines, or at least special tooling. It was too late to build them right away. Fortunately, the transmigrators had predecessors to learn from—the military-industrial soldiers of the Eighth Route Army and the New Fourth Army, who also made rifles and cannons under the simplest mechanical equipment and manual conditions. By consulting the materials, [Zhan Wuya][y004] decided to imitate a native method of extruding rifling used by Wu Yunduo when he made a direct-fire cannon, that is, using an olive-shaped steel column with concave and convex oblique lines carved on the circumference, and then wedging the steel column hard into the barrel.
 
-　　这个钢柱如何制造，吴运铎只是说了一下大概，没有具体的图样。炮兵小组召集全部懂机械和制图方面的人才，连夜进行会商研究，把设计图画了出来，由姜野负责，先用翻砂铸造，再用车床把钢模车制出来。
+How to make this steel column, Wu Yunduo only gave a general idea, without specific drawings. The artillery team gathered all the talents who understood machinery and drafting, and held a meeting overnight to study and draw the design drawings. Jiang Ye was in charge. They first used sand casting, and then used a lathe to turn the steel mold.
 
-　　最后，这个挤压法被证明是有效的，几天之后，第一门Armstrong大炮的身管已经加工完成了，炮栓稍有难度，但是在姜野和萧白朗两人的共同努力下，螺纹炮栓终于完工，并且顺利的安装成功。组装完毕打磨好的大炮看起来溜光水滑的，众人又看又摸，一脸的淫荡之色。
+Finally, this extrusion method proved to be effective. A few days later, the barrel of the first Armstrong cannon was processed. The breechblock was a little difficult, but with the joint efforts of Jiang Ye and Xiao Bailang, the threaded breechblock was finally completed and successfully installed. The assembled and polished cannon looked smooth and shiny. Everyone looked at it and touched it with a lewd look on their faces.
 
-　　炮弹采用的是铸铁的长尖实心弹，但是线膛炮的炮弹引信很不好解决。
+The projectile was a long-pointed solid shot made of cast iron, but the fuze of the rifled cannon projectile was very difficult to solve.
 
-　　引信不管有没有保险装置，基本结构都是弹簧击针式。这就需要两种东西：导火线和弹簧。相比导火线里用的雷汞，弹簧反倒是他们面临的一个大问题。弹簧制造本身没什么难度，难得是材料——现代的弹簧一般是采用合金钢制造的，这不是用个小转炉就能生产的，机械组的手里有弹簧钢的储备，但是炮弹信管属于消耗品，不能靠用储备的材料做。
+Regardless of whether there was a safety device, the basic structure of the fuze was a spring-loaded firing pin. This required two things: a fuze and a spring. Compared with the mercury fulminate used in the fuze, the spring was a big problem they faced. The manufacture of the spring itself was not difficult, but the material was—modern springs are generally made of alloy steel, which cannot be produced with a small converter. The machinery group had a reserve of spring steel, but the cannon fuze was a consumable and could not be made with reserved materials.
 
-　　“化学引信怎么样？”张柏林突发奇想。
+"How about a chemical fuze?" Zhang Bolin had a sudden idea.
 
-　　“怎么说？”
+"How so?"
 
-　　“用化学反应来引爆炮弹啊，”张柏林的想法很简单：用一个玻璃或者瓷器之类的小瓶，里面装上一种化学药品，周围是一种可以和其发生剧烈反应的另外一种化学药品，当炮弹被撞击的时候，玻璃瓶碎裂，两种药品混合起来发生剧烈反应，把炮弹里的炸药引爆。
+"Use a chemical reaction to detonate the shell," Zhang Bolin's idea was very simple: use a small bottle of glass or porcelain, filled with a chemical, surrounded by another chemical that can react violently with it. When the shell is hit, the glass bottle breaks, and the two chemicals mix and react violently, detonating the explosives in the shell.
 
-　　“不太安全。”萧白朗说，“炮弹要不断的搬动运输的，玻璃瓶万一碎了怎么办？”
+"Not very safe," Xiao Bailang said. "The shells have to be moved and transported constantly. What if the glass bottle breaks?"
 
-　　“分开运输。引信和炮弹分开运，要用的时候再装上去。”
+"Transport them separately. The fuze and the shell are transported separately, and they are assembled when they are to be used."
 
-　　[王洛宾][y003]连连摇头：“这个思路是不错，但是你忘记了一点：后装线膛炮的膛压比滑膛炮大得多，引信要有足够的强度才行，玻璃管肯定会在发射的瞬间破裂，结果就是——炸膛。”
+[Wang Luobin][y003] shook his head repeatedly: "This idea is good, but you forgot one thing: the chamber pressure of a breech-loading rifled cannon is much greater than that of a smoothbore cannon. The fuze must have sufficient strength. The glass tube will definitely break at the moment of firing, and the result is—a burst chamber."
 
-　　张柏林目瞪口呆，他根本没想过这个问题。
+Zhang Bolin was dumbfounded. He had never thought about this problem.
 
-　　“怎么样？大炮没想象中那么容易玩吧？”应喻拍了拍他的肩膀。
+"How about it? Cannons are not as easy to play with as you imagined, are they?" Ying Yu patted him on the shoulder.
 
-　　“这个引信用在其他爆炸品上面倒也不是不可以，”林深河说，“但是炮弹绝对不行。”
+"It's not impossible to use this fuze on other explosives," Lin Shenhe said, "but it's absolutely not possible for cannon shells."
 
-　　“看来光有先进的大炮还不行啊。”[王洛宾][y003]苦笑着。滑膛炮的开花弹倒是毫无技术难度，但是这种技术没法用在线膛炮上。
+"It seems that having advanced cannons is not enough." [Wang Luobin][y003] smiled bitterly. The bursting shell of a smoothbore cannon had no technical difficulty, but this technology could not be used on a rifled cannon.
 
-　　“碳素钢也能做弹簧的。”姜野想了半天，回忆起自己似乎是看到过碳素钢的弹簧。
+"Carbon steel can also be used to make springs." Jiang Ye thought for a long time and recalled that he seemed to have seen springs made of carbon steel.
 
-　　“是可以，用0.6％的碳素钢就可以。就是性能不知道够不够用。”季无声说，“可以试试看，我查查书看看热处理是怎么做得。”
+"Yes, 0.6% carbon steel can be used. I just don't know if the performance is good enough," Ji Wusheng said. "We can try it. I'll check the book to see how the heat treatment is done."
 
-　　“热处理的活你干得了不？”[展无涯][y004]自己也没什么把握，他就用热处理炉做过一些简单的活计。
+"Can you do the heat treatment?" [Zhan Wuya][y004] was not sure himself. He had only done some simple jobs with a heat treatment furnace.
 
-　　“我也没把握，只能靠查书和试验了。”
+"I'm not sure either. I can only rely on checking books and experimenting."
 
-　　“这事估计不简单，不是一天二天就能搞出来的。”
+"This is probably not a simple matter. It can't be done in a day or two."
 
-　　几个人苦思冥想了半天没有结果，最后还是林深河提议：既然第一批装备Armstrong大炮是海军用，反舰还是以穿甲弹为主，有实心的铸铁弹也就可以了。
+Several people thought hard for a long time without any result. In the end, it was Lin Shenhe who proposed that since the first batch of Armstrong cannons was for the navy, anti-ship warfare was still dominated by armor-piercing projectiles, and solid cast iron projectiles would be sufficient.
 
-　　“执行岸轰击任务怎么办？”
+"What about shore bombardment missions?"
 
-　　“用臼炮。”林深河说。
+"Use mortars," Lin Shenhe said.
 
-　　臼炮是迫击炮的前身，制造技术可比迫击炮要简单的多，配用的榴弹也很容易制造。缺点是榴弹的不炸率比较高，只能说是谓聊胜于无。
+Mortars were the predecessor of mortars, and the manufacturing technology was much simpler than that of mortars. The accompanying high-explosive shells were also very easy to manufacture. The disadvantage was that the dud rate of the high-explosive shells was relatively high, and it could only be said that it was better than nothing.
 
-　　“镀铅的问题怎么解决？”[王洛宾][y003]问。历史上Armstrong大炮就是因为炮弹出膛的瞬间，弹体上的铅片飞溅造成伤亡而被英国海军踢出战舰的。
+"How to solve the problem of lead plating?" [Wang Luobin][y003] asked. Historically, the Armstrong cannon was kicked out of warships by the British Navy because the lead sheets on the projectile flew off and caused casualties at the moment the projectile left the muzzle.
 
-　　“我看资料说当时有人提议用电镀法镀铅就不会出现这个问题——”林深河把自己所掌握的解决思路说了出来。
+"I read in the materials that someone at that time proposed that electroplating lead would not cause this problem—" Lin Shenhe explained the solution he had mastered.
 
-　　早期的线膛炮炮弹是类似米尼步枪弹的技术，利用爆炸气体使弹底扩张镶入膛线。所以弹体外部必须有一种软质的金属包裹，铅就是一种最合适的金属。问题随即而来——铸铁弹体和铅外皮之间的结合很难，特别是在没有水压机的情况下，勉强结合起来的结果就是英国皇家海军的Armstrong炮一样，铅皮飞落。
+The early rifled cannon projectiles used a technology similar to the Minie rifle bullet, which used the explosive gas to expand the base of the projectile and embed it into the rifling. Therefore, the outside of the projectile must be wrapped with a soft metal, and lead was the most suitable metal. The problem immediately followed—the combination between the cast iron projectile body and the lead skin was very difficult, especially in the absence of a hydraulic press. The result of a forced combination was the same as the Armstrong cannon of the Royal Navy, with the lead skin flying off.
 
-　　“电镀眼下太奢侈了，技术上也不大够。”[展无涯][y004]说。
+"Electroplating is too extravagant right now, and the technology is not good enough," [Zhan Wuya][y004] said.
 
-　　“有一种思路，不知道是不是可行，当年美国人的3英寸Shenkl炮的炮弹上用过。”
+"There is a line of thought, I don't know if it is feasible. It was used on the projectile of the American 3-inch Shenkl cannon back then."
 
-　　既然铅皮掉下来容易伤人，他们又没有办法阻止它掉下来，最好的办法就是换一种飞溅出来也不会伤人的东西。
+Since the lead skin falling off was easy to injure people, and they had no way to prevent it from falling off, the best way was to replace it with something that would not injure people even if it flew off.
 
-　　Shenkl的炮弹就是在炮弹的下半部围上paper－mache，这是一种用混凝纸浆制成的弹带，即有足够的强度和韧性镶入膛线，又不会因为出膛时候的碎裂飞落而伤人。
+The projectile of the Shenkl cannon was to surround the lower half of the projectile with paper-mache, which was a driving band made of concrete pulp. It had enough strength and toughness to be embedded in the rifling, and it would not injure people due to fragmentation and flying off when it left the muzzle.
 
-　　“这种混凝纸浆有难度吗？”
+"Is this concrete pulp difficult?"
 
-　　“1860年科技，应该不难吧，无非是纸浆和胶水，这没现成的配方工艺好用，只能靠实验党人了。”
+"1860s technology, it shouldn't be difficult, right? It's nothing more than pulp and glue. There is no ready-made formula for this, so we can only rely on the experimenters."
 
-　　“这个任务可以交给化工组，他们对这个有心得。”
+"This task can be handed over to the chemical group. They have experience with this."
 
-　　正说着话，军事组的何鸣忽然闯了进来，一脸严肃。
+As they were talking, He Ming of the military group suddenly rushed in with a serious face.
 
-　　“出什么事情了？”[王洛宾][y003]感觉有点不妙。
+"What happened?" [Wang Luobin][y003] had a bad feeling.
 
-　　“根据俘虏口供，海盗很可能会在最近向我们发动攻击！”他说着递过来一份文件，“这是治安组发出的审俘通报。”
-[y003]: /characters/y003 "王洛宾"
-[y004]: /characters/y004 "展无涯"
+"According to the confession of the prisoner, the pirates are very likely to attack us recently!" he said, handing over a document. "This is the interrogation report issued by the security team."
+
+[y003]: /characters/y003 "Wang Luobin"
+[y004]: /characters/y004 "Zhan Wuya"
