--- a/_posts/2010-1-4-2-07900.md
+++ b/_posts/2010-1-4-2-07900.md
@@ -1,52 +1,53 @@
 ---
 layout: post
-title: 第七十九节 广州行（一）
+title: "Section 79: Journey to Guangzhou (I)"
 category: 2
 path: 2010-1-4-2-07900.md
 tag: [normal]
 ---
 
-　　[萧子山][y001]从广州回来了。
+[Xiao Zishan][y001] returned from Guangzhou.
 
-　　去广州不是为了卖东西赚银子，恰恰相反，他们是一个标准的“赴羊城采购团”。和前些年每到美国人要发飙的时候，中国政府总会送出一张巨额的采购清单一样，他们也怀揣一张名目繁多的采购单。每个部门都罗列了他们急需的东西，其中最大宗的物品就是生铁。
+The trip to Guangzhou was not to sell things and make money. On the contrary, they were a standard "Guangzhou procurement delegation." Just like when the Chinese government would always send out a huge procurement list whenever the Americans were about to get angry in previous years, they also carried a long and varied procurement list. Each department had listed the things they urgently needed, and the largest item among them was pig iron.
 
-　　海南有中国最好最大的富铁矿，但是不论是田独还是石碌，穿越者暂时都没能力开发，而且海南要作为煤铁复合体还有个相当致命的问题——它没有煤炭。
+Hainan has China's best and largest rich iron ore, but whether it was Tiandu or Shilu, the transmigrators were temporarily unable to develop them. Moreover, Hainan had a rather fatal problem as a coal-iron complex—it had no coal.
 
-　　一个工业化国家的崛起，往往都和煤铁复合体的建立有着至关重要的作用。英国能够成为第一个进入工业化的国家，与它同时拥有丰富的铁矿和煤矿有很大的关系；美国有得天独厚的五大湖，不仅资源配套，还有便利廉价的水上运输；俄国有乌拉尔；德国有鲁尔。过去执委会对这些还只是从字面上了解，等到真正来到临高企图建立工业体系的时候，才发觉钢铁的问题不能解决，工业化就是一句空话。他们运来了成套的设备、各种机床、各种量具，建造了发电设备，造出了水泥，却被钢铁的问题困住了，没有最廉价的盘元钢筋，连一块司空见惯的钢筋水泥楼板、一个钢钉、一把锤子都做不出。船上倒是堆着成吨的钢锭，那全是他们短时间内造不出来的特殊钢——谁也舍不得动用。
+The rise of an industrialized country is often critically linked to the establishment of a coal-iron complex. The reason why Britain was able to become the first country to industrialize has a lot to do with its rich iron ore and coal mines; the United States has the unique advantage of the Great Lakes, not only with supporting resources, but also with convenient and cheap water transportation; Russia has the Urals; Germany has the Ruhr. In the past, the Executive Committee only understood these from a literal perspective. It was not until they actually came to Lingao and tried to establish an industrial system that they realized that if the problem of steel could not be solved, industrialization would be empty talk. They had transported complete sets of equipment, various machine tools, various measuring tools, built power generation equipment, and produced cement, but they were stuck by the problem of steel. Without the cheapest coiled rebar, they could not even make a common reinforced concrete floor slab, a steel nail, or a hammer. There were tons of steel ingots piled up on the ship, but they were all special steels that they could not produce in a short time—no one was willing to use them.
 
-　　工业委员会的几个主要小组领导讨论之后决定，既然铁矿石的开发一时间办不到，就跳过高炉的阶段，先炼钢！不管质量如何，把日常需求最大的粗钢炼制出来。炼钢所需要的大量生铁，就先尝试从广东买入。
+After discussion among the leaders of several major groups of the Industrial Committee, it was decided that since the development of iron ore could not be done for a while, they would skip the blast furnace stage and start with steelmaking! Regardless of the quality, they would first produce the crude steel with the largest daily demand. The large amount of pig iron needed for steelmaking would first be purchased from Guangdong.
 
-　　生铁不仅可做炼钢的材料，本身也是很好的材料，一些较为粗笨的构件都可以用生铁制造。冶金组开出的采购清单是要购入50吨生铁。据说是最最起码的了，他们带来的几座小转炉，就算只开工一台最小的一吨容量的，50吨生铁还不够生产一个月的。
+Pig iron can not only be used as a material for steelmaking, but it is also a good material in itself. Some relatively clumsy components can be made of pig iron. The procurement list issued by the metallurgical group was to purchase 50 tons of pig iron. It was said to be the very minimum. The several small converters they brought, even if only the smallest one-ton capacity one was put into operation, 50 tons of pig iron would not be enough for a month's production.
 
-　　这个计划从纸面上来说是完全可行的。广东在明代的生铁产量极其可观，根据嘉靖十三年（1534年）广东布政司的统计铁课数量推算，年产量竟然有6127500斤，合3100吨。3100吨生铁，在现代只是一家小钢铁厂几天的产量，但是1670年的俄罗斯的钢铁总产量才2700多吨。穿越者早期的炼钢业建立在输入生铁的基础上还是有一定的保证的。
+This plan was completely feasible on paper. The output of pig iron in Guangdong during the Ming Dynasty was extremely considerable. According to the statistics of the Guangdong Provincial Administration Commission in the 13th year of the Jiajing reign (1534), the annual output was as high as 6,127,500 jin, which is equivalent to 3,100 tons. 3,100 tons of pig iron is only a few days' output for a small modern steel plant, but the total steel output of Russia in 1670 was only more than 2,700 tons. The early steel industry of the transmigrators was based on the import of pig iron, which was still somewhat guaranteed.
 
-　　【注：钢铁产量的数字目前争论很大，这里纯属小说需要，不要较真。】
+[Note: The figures for steel production are currently highly debated. This is purely for the needs of the novel, so don't take it too seriously.]
 
-　　但是对[萧子山][y001]来说事情就没那么简单了，他对钢铁虽然一窍不通，经济史还是知道的，大明的广东省里，恐怕是没有一个冶铁场有现成的50吨生铁可以采购的，十有八九得到处搜罗才能搞到。搜罗到了之后，怎么把它们运出来？[萧子山][y001]大概记得，生铁这玩意貌似是不许出口的。他要把50吨铁装上船，官府知道了会怎么样？这都够他伤脑筋的。
+But for [Xiao Zishan][y001], things were not that simple. Although he knew nothing about steel, he knew about economic history. In the Guangdong province of the Ming Dynasty, there was probably no ironworks with 50 tons of pig iron ready for purchase. He would most likely have to search everywhere to get it. After finding it, how to transport it out? [Xiao Zishan][y001] vaguely remembered that pig iron seemed to be prohibited from being exported. What would happen if the government found out that he was loading 50 tons of iron onto a ship? This was enough to give him a headache.
 
-　　伤脑筋归伤脑筋，该做的事情还是得做。这个采购团的任务除了买东西，还有准备建立起广州情报网，打入广东富商乃至官府的任务。因此人员的配备足够强大，除了他作为总负责人之外，本来要派席亚洲作为军事方面的专干一同前往得，后来因为他在盐场村搞群众运动脱不了身就改把北炜从盐场村调出来，[萧子山][y001]想这也好，有个侦察兵在身边当保镖，去哪都放心。北炜又带了侦察队里的四个最好的学生，以这次广州之行作为训练的结业考察。
+Headache or not, what needed to be done still had to be done. The mission of this procurement delegation, in addition to buying things, was to prepare for the establishment of a Guangzhou intelligence network and to infiltrate the wealthy merchants and even the government of Guangdong. Therefore, the personnel were well-equipped. In addition to him as the general person in charge, Xi Yazhou was originally to be sent as a military specialist. Later, because he was tied up with the mass movement in the salt farm village, Bei Wei was transferred from the salt farm village instead. [Xiao Zishan][y001] thought this was good. With a scout as a bodyguard, he would feel at ease wherever he went. Bei Wei also brought the four best students from the reconnaissance team, using this trip to Guangzhou as a graduation examination for their training.
 
-　　队伍里随行的，还有准备在广州开设先遣站的几名人物。严茂达是过去是珠宝公司经理，对这行特别熟悉，他给执委会的建议是在广州利用现有的房产设施开设一家专门经营奢侈品的商行作为掩护据点——这种商行有几大好处：一是需要资本庞大，交易频繁。巨额现金和人员的频繁流动不容易招疑；二是接触的都是达官贵人的家小，容易打入敌人的内部，三是可以堂而皇之的壁垒森严。
+Accompanying the team were also several figures who were preparing to set up a forward station in Guangzhou. Yan Maoda used to be the manager of a jewelry company and was very familiar with this business. His suggestion to the Executive Committee was to use the existing real estate in Guangzhou to open a luxury goods firm as a cover—this kind of firm had several major advantages: first, it required a large amount of capital and frequent transactions. The frequent flow of huge amounts of cash and personnel would not easily arouse suspicion; second, it dealt with the families of high officials and nobles, making it easy to infiltrate the enemy's interior; third, it could be heavily fortified in a grand manner.
 
-　　陆荣则是从黎区刚返回就跟上了团。他熟练掌握多种南方方言，平时爱读读《古文观止》、《文选》之类的古文，能写一笔过得去的毛笔字。身体健壮，会马术，还懂些拳脚，是派驻到秘密战线上的合适人选。
+Lu Rong had just returned from the Li area and joined the group. He was fluent in several southern dialects, liked to read ancient texts such as "Guwen Guanzhi" and "Wen Xuan" in his spare time, and could write a decent hand of calligraphy. He was strong, knew how to ride a horse, and also knew some martial arts, making him a suitable candidate for the secret front.
 
-　　还有一位重要人物则是郭逸，他被委以重任的主要原因是团体中对秘密战线的工作的概念全来自电影和小说，他算是唯一真正接触过实务的人。一纸调令，郭逸忽然发现自己不是治安组打杂人员了，而成了先遣站负责人，要去大明的广州城里去搞特务活动了——这多少让他感到人生的无常，不到三个月前，他还在另一个时空的广州城里搞反特……
+Another important figure was Guo Yi. The main reason he was entrusted with this important task was that the group's concept of secret front work all came from movies and novels. He was the only one who had actually come into contact with practical work. With a transfer order, Guo Yi suddenly found that he was no longer a handyman in the security group, but the person in charge of the forward station, and was going to Guangzhou in the Ming Dynasty to engage in secret agent activities—this made him feel the impermanence of life. Less than three months ago, he was engaged in counter-espionage in Guangzhou in another time and space...
 
-　　除了十几名穿越众之外，还需要一些土著随行。已经零星回来的百仞滩生产队的人不是临高当地人就是福建射耕人，不要说去广州，很多人连琼州府都没去过。打破苟家庄之后抓到的俘虏里倒是有广东来的，但是还没过政审，不敢贸然使用。最后还是从盐场村找到了突破口。
+In addition to more than a dozen transmigrators, some natives were also needed to accompany them. The people from the Bairen Beach production team who had returned sporadically were either locals from Lingao or Fujianese slash-and-burn farmers. Not to mention going to Guangzhou, many had never even been to Qiongzhou Prefecture. Among the prisoners captured after breaking the Gou family estate, there were some from Guangdong, but they had not yet passed the political review and could not be used rashly. In the end, a breakthrough was found in the salt farm village.
 
-　　盐场村的村委会副主任谭桂璜听说短毛老爷们要找几个可靠的人一起去广州，便把雷州那边的盐商刘纲推荐给了他们。
+Tan Guihuang, the deputy director of the village committee of the salt farm village, heard that the short-haired masters were looking for a few reliable people to go to Guangzhou with them, so he recommended Liu Gang, a salt merchant from Leizhou, to them.
 
-　　这刘纲因为贩运食盐的关系，和盐场村的关系很熟络。谭桂璜渡海出去联络的盐商来买盐，他是第一个来的，还运来了当时村里急需的粮食和布匹。谭桂璜觉得这人讲义气靠得住。而且他虽然安家落户在雷州，自己却是地地道道的广州府南海县人，也常去广州周边做买卖，熟悉路上的情况。由他陪同再合适不过。谭桂璜和刘纲一说，自然满口答应——想不答应也不行，这盐场村的贩盐买卖他还想做下去。他也得了消息，这伙短毛就是盐场村的后台，正是他们出手把控制盐场的当地土豪苟大给结果了。这样的势力，走惯江湖的盐商自然不敢得罪。
+Because of the salt trade, Liu Gang had a very good relationship with the salt farm village. When Tan Guihuang went across the sea to contact salt merchants to buy salt, he was the first to come, and he also brought the grain and cloth that the village urgently needed at that time. Tan Guihuang felt that this person was righteous and reliable. And although he had settled down in Leizhou, he was a native of Nanhai County, Guangzhou Prefecture, and often did business around Guangzhou, so he was familiar with the road conditions. It was most appropriate for him to accompany them. When Tan Guihuang told Liu Gang, he naturally agreed—he had to agree if he wanted to continue the salt trade in the salt farm village. He had also received news that this group of short-haired people was the backer of the salt farm village, and it was they who had dealt with the local tyrant Gou Da who controlled the salt farm. A salt merchant who was used to the ways of the world would not dare to offend such a force.
 
-　　交通工具是船，不仅最为快捷方便，而且这支队伍带得东西也着实不少，除了必备的干粮、武器、银钱之外，还有为了建设广州情报站所需要的电台、手摇式发电机、太阳能电池板等物件，另有准备在广州寻找出手机会的各种货样——苟家没能完成的销赃，现在轮到他们办了。
+The means of transportation was a boat, which was not only the fastest and most convenient, but also because the team was carrying a lot of things. In addition to the necessary dry food, weapons, and silver, there were also radios, hand-cranked generators, solar panels, and other items needed to build the Guangzhou intelligence station. There were also various samples of goods that they were preparing to find opportunities to sell in Guangzhou—the unsold goods that the Gou family had failed to sell were now their turn to handle.
 
-　　不过，穿越者拥有的船只实在太过惹眼，不管开哪一艘过去，都得引起轰动。暂时还是低调一下。就托谭桂璜出面，从本地的渔主那里买了一只临高拖风。这种船22米长，排水量可达78吨，是不折不扣的大型渔船。跑广州搞搞短程贸易是小事一桩。
+However, the ships owned by the transmigrators were too eye-catching. No matter which one they sailed, it would cause a sensation. For the time being, it was better to keep a low profile. So they asked Tan Guihuang to come forward and buy a Lingao junk from a local fisherman. This kind of boat was 22 meters long and had a displacement of up to 78 tons, making it a veritable large fishing boat. It was a piece of cake to run to Guangzhou for short-distance trade.
 
-　　【注：临高拖风是海南著名的大型传统渔船，不过它的出现年代是比较晚近的】
+[Note: The Lingao junk is a famous large traditional fishing boat in Hainan, but its appearance is relatively recent.]
 
-　　有了船，还得有水手，这种大型帆船一般人伺候不了。穿越众里这类人才不怎么好找，邬德虽是个渔民出身，却从小就是看机帆船长大的，最后还是林传清自告奋勇当了船长，这个渔民出身的偷渡蛇头因为工作需要，海上的活计什么都会鼓捣两下。北美分队里的几个帆船爱好者也随即当上了水手。
+With a boat, they also needed sailors. Ordinary people could not handle this kind of large sailing boat. It was not easy to find such talents among the transmigrators. Although Wu De was from a fishing family, he grew up watching motorized fishing boats. In the end, Lin Chuanqing volunteered to be the captain. This fisherman-turned-smuggler, because of his work, knew how to do everything at sea. Several sailing enthusiasts from the North American team also became sailors.
 
-　　北美一干人到了临高之后一直没捞到什么职务，钱水廷因为是搞调查统计的，给分在计委和数字打交道，钱水协和周韦森在军事组当差每天站岗放哨，都淡出鸟来了。他们不比林深河，每天下班之后还能泡在机械组搞武器研发之类的事情。这次去广州要征集水手，就都报名了，权当消遣。几个人还打着自己的小算盘，把自己私存的武器带了不少，又把林传清拉上了，准备在海上干票海盗的买卖。林传清也不是啥善男信女，几个人一拍即合，准备一有机会就动手。
+After the North American group arrived in Lingao, they had not been assigned any positions. Qian Shuiting, because he was engaged in investigation and statistics, was assigned to the Planning Committee to deal with numbers. Qian Shuixie and Zhou Weisen were on duty in the military group every day, standing guard, and were bored to death. They were not like Lin Shenhe, who could still go to the machinery group to develop weapons after work. This time, when they were recruiting sailors to go to Guangzhou, they all signed up, just for fun. Several people also had their own little plans. They brought a lot of their privately stored weapons and also pulled in Lin Chuanqing, preparing to act as pirates at sea. Lin Chuanqing was not a good person either. The few of them hit it off and were ready to act as soon as they had the chance.
 
-　　不过要干海盗的买卖还是有点难度的，临高拖风是硬帆船，而这伙21世纪时空的帆船爱好者的驾驶操帆技术是软帆船。虽说经过几次试航大体掌握了使用方法，熟练度有多少就难说了。几个人商量了一下之后，就去和[萧子山][y001]说为了便于操作和安全起见——毕竟这广东沿海不太平，最好把船搞成机帆船——北美几个人知道萧委员这个人最是谨小慎微，对自己的安全问题更是关心，所以这个建议马上就被他批准了。工业组获准对这艘硬帆大船进行改装，增装两台12千瓦常柴动力的单缸柴油发动机，这玩意工业部门带了许多，它的结构简单，维护方便，而且用途极广，除了不能当飞机发动机之外几乎什么东西都能拿它当动力。
-[y001]: /characters/y001 "萧子山"
+However, it was still a bit difficult to be a pirate. The Lingao junk was a hard-sailed boat, and the sailing skills of this group of 21st-century sailing enthusiasts were for soft-sailed boats. Although they had basically mastered the method of use after several trial voyages, it was hard to say how proficient they were. After discussing for a while, they went to [Xiao Zishan][y001] and said that for the convenience of operation and for safety's sake—after all, the coast of Guangdong was not peaceful—it was best to turn the boat into a motorized sailing boat. The few people from North America knew that this Commissioner Xiao was the most cautious and was even more concerned about his own safety, so this suggestion was immediately approved by him. The industrial group was authorized to modify this large hard-sailed boat and install two 12-kilowatt Changchai-powered single-cylinder diesel engines. The industrial department had brought many of these things. They had a simple structure, were easy to maintain, and had a wide range of uses. They could be used as power for almost anything except airplane engines.
+
+[y001]: /characters/y001 "Xiao Zishan"
