--- a/_posts/2010-1-5-2-08000.md
+++ b/_posts/2010-1-5-2-08000.md
@@ -1,68 +1,69 @@
 ---
 layout: post
-title: 第八十节 广州行（二）
+title: "Section 80: Journey to Guangzhou (II)"
 category: 2
 path: 2010-1-5-2-08000.md
 tag: [normal]
 ---
 
-　　试车下来发现在满帆顺风的情况下，船速大概能到12节，装发动机对航速提升不大。不过，船舶的操作性有了很大提高，这对操作硬帆船毫无经验的穿越者来说算是一个好消息。
+The test run showed that with full sail and a tailwind, the boat could reach a speed of about 12 knots. The installation of the engine did not significantly increase the speed. However, the maneuverability of the ship was greatly improved, which was good news for the transmigrators who had no experience in operating a hard-sailed boat.
 
-　　“起码我们的船在逆风的情况下会有很大的优势。”林深河总结了一下这个优点。
+"At least our boat will have a great advantage against the wind," Lin Shenhe summarized this advantage.
 
-　　除了动力系统，船只还进行了一系列的改装措施，包括安装无线电台，添加居住舱房,加固货舱的舱壁，还改装了几个暗舱，里面除了武器弹药还装了林深河的私货——准备客串海盗的时候用。
+In addition to the power system, the ship also underwent a series of modifications, including the installation of a radio, the addition of living quarters, the reinforcement of the cargo hold bulkheads, and the modification of several secret compartments, which, in addition to weapons and ammunition, also contained Lin Shenhe's private goods—to be used when moonlighting as a pirate.
 
-　　包括穿越众在内，全体赴广州采购团人员共计二十五人，为了防备海盗的袭击，船上备足了武器弹药，还有许多干粮、清水、银钱和其他各种物资。
+Including the transmigrators, the entire Guangzhou procurement delegation consisted of twenty-five people. In order to guard against pirate attacks, the ship was well-stocked with weapons and ammunition, as well as a large amount of dry food, fresh water, silver, and various other supplies.
 
-　　1628年11月1日，大明崇祯元年十月初六，一个风和日丽的日子里，三等运输舰“登瀛洲”号扬帆起锚，从博铺启程，驶向阳光灿烂的大海。
+On November 1, 1628, the sixth day of the tenth month of the first year of the Chongzhen reign of the Ming Dynasty, on a beautiful day with a gentle breeze, the third-class transport ship "Dengyingzhou" set sail from Bopu and headed for the sunny sea.
 
-　　这个听起来威风凛凛的“三等运输舰登瀛洲”，纯属一群海军情节浓烈的人意淫。至于为什么是“三等运输舰”而不是二等或者四等，只有他们才知道了。
+This imposing-sounding "third-class transport ship Dengyingzhou" was purely the wishful thinking of a group of people with strong naval sentiments. As for why it was a "third-class transport ship" and not a second- or fourth-class one, only they knew.
 
-　　登瀛洲在徐闻的灯笼角接上了刘纲，这位小盐商自己也带了几个保镖伙计之类的人物。他原本是不肯坐船往广州去的，宁可走陆路安全些，不过既然听说短毛们火器犀利，大概也有恃无恐。只是传说中的大铁船没有见到稍有遗憾。
+The Dengyingzhou picked up Liu Gang at Denglong Cape in Xuwen. This small salt merchant also brought a few bodyguards and clerks. He was originally unwilling to go to Guangzhou by boat, preferring the safer land route. However, since he heard that the short-haired people's firearms were sharp, he was probably not afraid. It was just a little regrettable that he did not see the legendary great iron ship.
 
-　　一路无话，五天之后便到了广州的南城外码头。
+The journey was uneventful, and five days later they arrived at the wharf outside the south city of Guangzhou.
 
-　　1628年的珠江口并不似后世那般航运繁忙。最近海盗猖獗，又风闻俞军门要封船打刘老香，各种洋船全都走避一空，珠江上船只就更加稀少了。
+The Pearl River Estuary in 1628 was not as busy with shipping as it was in later generations. Recently, pirates had been rampant, and it was rumored that Admiral Yu was going to seal the ships to fight Liu Laoxiang. All kinds of foreign ships had fled, and the ships on the Pearl River were even scarcer.
 
-　　林传清这几天睡得不太安稳，这趟广州之行多少还是有那么点风险的。他当年在南海当蛇头搞偷渡，什么大风大浪都见过，但是毕竟洗手不干已经很久了。虽说他们这群北美分舵的人马时刻都准备在海上找机会捞一票。但他也最怕遇到海盗船：刘老香这样的海上巨寇岂是好惹的主？林传清当蛇头的时候就知道，偷渡船碰上哪国的巡逻艇都没关系，大不了这笔生意做不成，遇到了海盗就全完了。
+Lin Chuanqing had not slept well these past few days. This trip to Guangzhou was somewhat risky. When he was a smuggler in the South China Sea, he had seen all kinds of storms, but after all, he had washed his hands of it for a long time. Although this group of people from the North American branch was always ready to find opportunities to make a score at sea, he was also most afraid of encountering pirate ships: was a sea giant like Liu Laoxiang someone to be trifled with? When Lin Chuanqing was a smuggler, he knew that it didn't matter if a smuggling boat encountered a patrol boat from any country. At worst, the business would fail. If they encountered pirates, it would be all over.
 
-　　一旦遇到了刘香的海盗船，这满船人的性命就全指望这十几来条枪和新装的两台柴油机了。海上战斗大家都没经验，一艘两艘的海盗船还好应付，万一来个十七八艘的……
+Once they encountered Liu Xiang's pirate ship, the lives of everyone on board would depend on these dozen or so guns and the two newly installed diesel engines. No one had experience in naval combat. One or two pirate ships would be easy to deal with, but what if seventeen or eighteen of them came...
 
-　　幸好刘纲随身带了个熟悉沿海路程的舵工，在他的指引下一路上战战兢兢地贴着海岸线航行，一见有可疑的船只就驶入港湾内躲避。这样走走停停已经是非常不容易了。如今熬到了珠江口，自己总算可以睡个好觉了。想到此处，回头看了看船栏另一头的郭逸，不由得又是一脸苦笑。
+Fortunately, Liu Gang brought a helmsman who was familiar with the coastal route. Under his guidance, they sailed along the coastline with trepidation, and whenever they saw a suspicious ship, they would sail into a harbor to hide. It was already very difficult to travel like this, stopping and starting. Now that they had reached the Pearl River Estuary, he could finally get a good night's sleep. Thinking of this, he looked back at Guo Yi at the other end of the ship's rail and couldn't help but smile wryly again.
 
-　　对于郭逸来说，这五天的海上旅程可是受足了磨难。自从被调到治安组干审俘甄别工作之后，他的生活有了点新的希望。这次被委以重任出任广州地下先遣站站长，对他个人来说是一次质的飞跃——他已经被认可了。虽然这个任务充满了风险，但是高风险也就意味着高回报——他将利用自己的专业知识迅速的提升自己在穿越群体中的地位，从而进入到团体的上层。兴奋的郭逸准备好了全套的方案和计划，满怀希望地奔向理想中的新天地。
+For Guo Yi, this five-day sea journey was a great ordeal. Since he was transferred to the security team to do the work of interrogating and screening prisoners, his life had a new hope. This time, he was entrusted with the important task of being the station chief of the Guangzhou underground forward station. For him personally, this was a qualitative leap—he had been recognized. Although this task was full of risks, high risks also meant high returns—he would use his professional knowledge to quickly improve his status in the transmigrator group and thus enter the upper echelons of the group. The excited Guo Yi prepared a full set of plans and schemes, and rushed to the ideal new world with hope.
 
-　　虽然之前对晕船也有准备，岂料原计划一两天的旅程，因为东躲西藏的缘故，硬是到第五天都还没能踏上陆地。郭逸的脸色也由红转白、由白转绿、由绿转黑……他从来不知道自己原来是晕船的——显然这78吨的木船和上千吨的大船并不是一回事。该吐的东西在前三天的风浪中都已经吐尽了，某人自从被动穿越后，第一次有了想寻死的念头……
+Although he was prepared for seasickness, the journey, which was originally planned for one or two days, was extended to the fifth day because of hiding here and there, and he still couldn't set foot on land. Guo Yi's face also turned from red to white, from white to green, from green to black... He never knew that he was seasick—obviously, this 78-ton wooden boat was not the same as a thousand-ton ship. He had already vomited everything he could in the first three days of the storm. For the first time since he was passively transmigrated, someone had the idea of committing suicide...
 
-　　幸好最困难的时刻已经过去，像现在这样平和的航行时，偶尔也能故作镇静地出来呼吸下海风了。对于他来说，登陆后的考验可远远不止晕船那么简单，这也算是冥冥中给他的一个小小前奏吧。
+Fortunately, the most difficult moment had passed. During a peaceful voyage like this, he could occasionally pretend to be calm and come out to breathe the sea breeze. For him, the test after landing was far more than just seasickness. This could be regarded as a small prelude given to him by fate.
 
-　　“码头！码头！”瞭望斗中钱水协的喊声把整船人都搅合起来，闹哄哄地挤到两侧船舷争相一饱眼福。从船上望去，一条蜿蜒的绿色纽带一直往地平线方向延伸，这便是珠江了，远远的便是巍峨的广州城墙。四周棋布的民居和堡垒肉眼便可望见，码头内错落停泊着数只小型帆船。为防止遭到海盗偷袭，码头周围都已经布下了栅栏。
+"The wharf! The wharf!" The shout of Qian Shuixie from the lookout stirred up the whole boat. They crowded to both sides of the boat, eager to see it. From the boat, a winding green ribbon stretched to the horizon. This was the Pearl River, and in the distance was the majestic city wall of Guangzhou. The scattered houses and fortresses around could be seen with the naked eye, and several small sailboats were moored in the wharf. To prevent pirate attacks, fences had been set up around the wharf.
 
-　　在上陆希望的刺激下，众人奋力将船靠上了码头。码头上讨生活的伙计大都皮肤黝黑、身材瘦小，见到这一群因后世营养充足而显得高大健壮的人，纷纷疑惑地围拢上来看了究竟。蒙德是第一个跳下船的，随后跟着的是钱水协、周韦森等人，虽然大家事先都做了明人的打扮，也挽了假发髻，不至于那么容易被看破，但军人的习性还是让他们很快的拉开警戒的架势。双方就在这么奇怪的气氛中对峙着……
+Stimulated by the hope of landing, everyone worked hard to bring the boat to the wharf. The clerks who made a living on the wharf were mostly dark-skinned and small in stature. Seeing this group of tall and strong people who were well-nourished in later generations, they all gathered around in confusion to see what was going on. Meng De was the first to jump off the boat, followed by Qian Shuixie, Zhou Weisen, and others. Although everyone had dressed up as Ming people and wore fake hair buns, so that they would not be easily seen through, their military habits still made them quickly assume a vigilant posture. The two sides confronted each other in this strange atmosphere...
 
-　　“怎么还不登岸呢，磨蹭什么呢？”一声娇嗔从舱后传来。
+"Why haven't you disembarked yet? What are you dawdling for?" a coquettish voice came from behind the cabin.
 
-　　众人回头望去，只见一位国色天香的美人正掀开船帘向外探望，高耸的云鬓看似随意地挽在头上，却恰到好处地将几缕发丝垂在微微起伏的胸前，一袭道不完说不尽的庸懒美态。明艳动人的瓜子脸，轻纱笼罩下晶莹粉肤赛雪欺霜，犹胜芙蓉。一双盈盈秋水、清澈迷离，小巧挺拔的琼鼻下是薄嫩如玫瑰花瓣般的粉嫩红唇更是饱满欲滴。一颦一笑，皆有万种风情，端得是惊心动魄。
+Everyone looked back and saw a beautiful woman with a stunning face lifting the curtain of the boat and looking out. Her high cloud-like bun was casually tied on her head, but it just right to let a few strands of hair fall on her slightly heaving chest, a lazy beauty that could not be described. Her bright and moving melon-seed face, under the light gauze, her crystal-clear pink skin was whiter than snow and frost, even better than a hibiscus. A pair of sparkling autumn water eyes, clear and hazy, under the small and straight nose were thin and tender pink lips like rose petals, which were even more full and dripping. Every frown and smile had a myriad of charms, which was truly breathtaking.
 
-　　蒙德等一伙人顿时都呆了，那帮船工伙计是更是魂都不知道飞到哪里去了，睁着眼睛大张着嘴，两道哈拉子便不自觉的流淌一地。此时便是一刀结果了他们，估计也不会有任何反应。
+Meng De and his group were all stunned. The boatmen and clerks were even more lost, their eyes wide open and their mouths agape, two streams of saliva unconsciously flowing to the ground. At this time, even if they were killed with a single blow, they probably would not have any reaction.
 
-　　这时，舱内传来一声咳嗽，出来的是郭逸，故作老练拱拱手道：“家中女眷，多有叨扰，望各位海涵。”说罢便将美女赶回舱内，避免再起纷乱。
+At this time, a cough came from inside the cabin. It was Guo Yi who came out. He pretended to be experienced and cupped his hands, saying: "My family's womenfolk, I have disturbed you all, I hope you will forgive me." After saying that, he drove the beautiful woman back into the cabin to avoid further trouble.
 
-　　此美人正是穿越众大名鼎鼎情报组的秘密最终决战兵器，代号“P小姐”的PEPEI，其真实性别被列为最高机密。PEPEI的装扮技术在现代而言也是数一数二的，在船上旅途中，众人早已被其令人眼花缭乱的从萝莉到正太到御姐的连续转变迷得五体投地。如今再一次出现，连以为拥有免疫力的蒙德等人也仍然抵抗不住，可见其功力之深厚。
+This beauty was the famous secret ultimate weapon of the transmigrators' intelligence group, codenamed "Miss P," PEPEI. Her true gender was listed as a top secret. PEPEI's dressing skills were also one of the best in modern times. During the journey on the boat, everyone had already been mesmerized by her dazzling continuous transformation from loli to shota to onee-san. Now that she appeared again, even Meng De and others who thought they had immunity still could not resist, which showed the depth of her skills.
 
-　　船舱内，郭逸责备道：“P小姐，希望你能明白，虽然你受执委会情报资料组的直接委派，但是毕竟我是广东先遣站的负责人，有权统一协调，希望你不要给我们的整体行动制造困难。”郭逸明白，PEPEI是此次广州行动中最重要的秘密武器，但无论如何也不可以影响到整体计划的实现，因此有必要再提醒一下。
+Inside the cabin, Guo Yi reprimanded: "Miss P, I hope you can understand that although you are directly appointed by the Executive Committee's intelligence and data group, I am after all the person in charge of the Guangdong forward station and have the right to coordinate uniformly. I hope you will not create difficulties for our overall action." Guo Yi understood that PEPEI was the most important secret weapon in this Guangzhou operation, but in any case, it could not affect the realization of the overall plan, so it was necessary to remind her again.
 
-　　PEPEI婉尔一笑，道：“何必那么认真，没想到那帮土人这么好对付，有点枉费我的手艺了。”郭逸略一沉思，道：“现在将按计划建立情报站，前线情报据点的建设也将马上提上日程，只不过，酒楼也罢、客栈也罢，人手上我们始终还是有点问题。不过我会设法解决。在此之前，希望你能一直待在船上，以免出什么纰漏。毕竟这种事不适合你出面。”PEPEI微微一笑，算是点头应允。
+PEPEI smiled gracefully and said, "Why be so serious? I didn't expect those natives to be so easy to deal with. It's a bit of a waste of my skills." Guo Yi thought for a moment and said, "Now we will establish an intelligence station according to the plan, and the construction of the frontline intelligence base will also be put on the agenda immediately. However, whether it's a restaurant or an inn, we still have some problems with manpower. But I will try to solve it. Before that, I hope you can stay on the boat to avoid any mistakes. After all, this kind of thing is not suitable for you to come forward." PEPEI smiled slightly, which was regarded as a nod of approval.
 
-　　[萧子山][y001]道：“现在讨论下上岸之后的行动吧。”他是采购团的团长，但是只负责和高举接头，采办工业部门需要的各种物品。至于建立先遣站的工作，全权由郭逸负责。
+[Xiao Zishan][y001] said: "Now let's discuss the actions after landing." He was the head of the procurement delegation, but he was only responsible for contacting Gao Ju and purchasing various items needed by the industrial department. As for the work of establishing the forward station, it was entirely the responsibility of Guo Yi.
 
-　　“我们分头行动，萧委员你去和高举、孙掌柜谈合作的事情——毕竟你们是熟人。我打算和老严他们请刘纲带着，看一下广州的市面，盘算下开店的事情。其他人暂时先留船上。”
+"We will act separately. Commissioner Xiao, you go to talk with Gao Ju and Shopkeeper Sun about cooperation—after all, you are acquaintances. I plan to ask Liu Gang to take me and Lao Yan to see the market in Guangzhou and plan to open a shop. The others will stay on the boat for the time being."
 
-　　“我先回次宅子，然后打发轿子骡车把大家接到宅子里去松散一下。北炜认得孙常，让他带队好了。”[萧子山][y001]知道这行人在船上五六天都憋闷坏了，继续留在船上保不定闹出什么妖蛾子来，便把北炜留着镇场面。
+"I'll go back to the house first, and then send a sedan chair and a mule cart to pick everyone up to relax in the house. Bei Wei knows Sun Chang, let him lead the team." [Xiao Zishan][y001] knew that this group of people had been bored on the boat for five or six days. If they continued to stay on the boat, they might cause some trouble, so he left Bei Wei to keep the situation under control.
 
-　　大家计较停当，稍稍整顿后，[萧子山][y001]便在特种兵和北美二路人马的保护下，向广州城内进发。
+After everyone had made their plans and tidied up a bit, [Xiao Zishan][y001], under the protection of the special forces and the North American second-line personnel, set off for Guangzhou city.
 
-　　[萧子山][y001]算是故地重游，有几分亲切，其他人则完全是好奇，多数人连临高县城都没去过，现在乍然来到当时南中国最繁华的商业城市，用眼花缭乱四个字来形容是甚是贴切。
+[Xiao Zishan][y001] was revisiting an old place and felt a bit of intimacy. The others were completely curious. Most of them had never even been to Lingao County. Now that they suddenly came to the most prosperous commercial city in southern China at that time, the four words "dazzling" were very appropriate to describe it.
 
-　　不过眼下不是旅游观光的时候，回到惠福街的宅子里，留守在宅子里的管事孙常和高家全家还是一切照旧，见到主人回来都十分欢喜。他们离开的一年多时间里，宅子已经被修整的像模像样：院墙、驳岸整修一新，瓦砾被清理干净，房子也都修葺过。还在园子里开出了一片菜园，种上了许多蔬菜。
-[y001]: /characters/y001 "萧子山"
+However, now was not the time for sightseeing. Back at the house on Huifu Street, the steward Sun Chang and Gao's whole family who were left behind were still the same. They were very happy to see their master return. In the more than a year they had been away, the house had been repaired to look decent: the courtyard walls and revetments had been renovated, the rubble had been cleaned up, and the houses had also been repaired. A vegetable garden had also been opened in the garden, and many vegetables had been planted.
+
+[y001]: /characters/y001 "Xiao Zishan"
