--- a/_posts/2010-1-6-2-08100.md
+++ b/_posts/2010-1-6-2-08100.md
@@ -1,70 +1,71 @@
 ---
 layout: post
-title: 第八十一节 广州行（三）
+title: "Section 81: Journey to Guangzhou (III)"
 category: 2
 path: 2010-1-6-2-08100.md
 tag: [normal]
 ---
 
-　　[萧子山][y001]吩咐孙常去准备骡车和轿子去码头接人。其他人赶快做饭打扫，空荡荡的宅子一下子的忙乱起来。孙常说骡子和车的事情不需劳费，直接找起威镖局就行——镖局因为走镖的需要，一般设有骡马车行的“外柜”，什么都是现成的。
+[Xiao Zishan][y001] ordered Sun Chang to prepare mule carts and sedan chairs to pick up people at the wharf. The others hurried to cook and clean, and the empty house was suddenly in a flurry of activity. Sun Chang said that there was no need to worry about the mules and carts, just find the Qiwei Escort Agency—because of the need for escorts, the escort agency generally had an "outer counter" for mule and horse carts, and everything was ready-made.
 
-　　一面安排接人，一面又吩咐准备轿子去拜访高举。路上，他又问了问孙常这一年来各方面的动静。孙常说自从他们离开之后，高举也时常派人来送些东西。问问有没有澳洲海商的消息。街坊间倒也平静，除了因为刘老香在珠江口闹腾的厉害，市面稍有些惊扰之外没什么大事。官场上的事他知道不多，就知道北京倒了一个宫里的大官，广州城的官场也有些变化，其他就说不清了。
+On the one hand, he arranged to pick up people, and on the other hand, he ordered a sedan chair to be prepared to visit Gao Ju. On the way, he asked Sun Chang about the movements of various parties in the past year. Sun Chang said that since they left, Gao Ju had often sent people to send some things, asking if there was any news of the Australian sea merchants. The neighborhood was quiet. Except for the fact that Liu Laoxiang was making a lot of trouble at the Pearl River Estuary, and the market was slightly disturbed, there was nothing major. He didn't know much about officialdom. He only knew that a high-ranking official in the palace in Beijing had fallen, and there had been some changes in the officialdom of Guangzhou. He couldn't say anything else.
 
-　　[萧子山][y001]知道这个所谓的宫里的大官就是魏忠贤了，历史在这个时空并没有改变它的轨迹：权倾一时的九千岁已经于去年农历十一月初六在河北阜城县南关的一座旅店内自杀。从去年的十二月开始到今年的上半年，崇祯帝正在穷究魏逆余党，官场震动并不意外。穿越者在一定程度上应该感谢这样的局面：人心惶惶，谁也无心来应对海南岛上的一次海贼侵扰了。
+[Xiao Zishan][y001] knew that this so-called high-ranking official in the palace was Wei Zhongxian. History had not changed its trajectory in this time and space: the once powerful "Nine Thousand Years" had committed suicide in a hotel in Nangguan, Fucheng County, Hebei Province on the sixth day of the eleventh lunar month last year. From December last year to the first half of this year, the Chongzhen Emperor was thoroughly investigating the remnants of Wei's party, so it was not surprising that the officialdom was shaken. To a certain extent, the transmigrators should be grateful for this situation: everyone was in a state of panic, and no one had the heart to deal with a pirate invasion on Hainan Island.
 
-　　[萧子山][y001]的突然到访让高举又惊又喜。当初建魏忠贤的生祠之事，他别无良策，就用了文掌柜授得“拖”字决，当初这位掌柜还明确说了，当月必有大变，果不其然：杨太监原本坐镇广州，差不多是到府日日催促，高举不敢太过拖延，只是慢腾腾的预备，挨了差不多二十来天。忽然小杨公公就来告辞了，吩咐把筹建生祠的事情暂停，带着预备好的各种澳洲货匆忙回京去了。把个高举闹得目瞪口呆，又隔了十来天，他收到北京发来的信函，这才得知：五月十八日，皇帝忽然生病，情况十分严重。这下高举就不是惊讶了，而是脑后起了凉气，全身冒了鸡皮疙瘩。
+[Xiao Zishan][y001]'s sudden visit made Gao Ju both surprised and happy. At that time, when he was building the living shrine for Wei Zhongxian, he had no other choice but to use the "delay" tactic taught by Shopkeeper Wen. At that time, this shopkeeper had also clearly stated that there would be a major change in that month, and it turned out to be true: Eunuch Yang was originally stationed in Guangzhou and urged him almost every day. Gao Ju did not dare to delay too much, but only prepared slowly, and it took him almost twenty days. Suddenly, Little Eunuch Yang came to say goodbye, ordered the suspension of the construction of the living shrine, and hurriedly returned to Beijing with the various Australian goods that had been prepared. This left Gao Ju dumbfounded. After another ten days, he received a letter from Beijing and only then learned that on May 18, the emperor suddenly fell ill and his condition was very serious. This time, Gao Ju was not just surprised, but felt a chill in the back of his head and goosebumps all over his body.
 
-　　“五月十八，京中有变，事可缓。”这是文掌柜辞行的时候说的话。眼下一对照，这伙原本就有些神秘感的海商更让他觉得莫测。他赶紧四下着人打听，问可曾有人见过奇怪的外洋大船？却没任何消息。他只得死心，一门心思的坐等海商们来找他——毕竟有二十万两银子的货款还在这里。左等右等过了一年多还是杳无音信，正当他感到无望的时候，近一个月却听到一些风声：说琼州那边出现了一艘前所未有的巨船。船上水手，个个髡发短衣，十分凶悍。不由心里犯了嘀咕：莫非这就是澳洲海商的船？正寻思着要不要派人去当地打探一下。
+"On May 18, there will be a change in the capital, and the matter can be delayed." This was what Shopkeeper Wen said when he left. Now, in comparison, this group of sea merchants, who were already a bit mysterious, made him feel even more unpredictable. He hurriedly sent people to inquire everywhere, asking if anyone had seen a strange foreign ship, but there was no news. He had no choice but to give up and wait for the sea merchants to come to him—after all, there were still two hundred thousand taels of silver for the goods here. He waited and waited for more than a year without any news. Just when he was feeling hopeless, he heard some rumors in the past month: it was said that an unprecedentedly huge ship had appeared in Qiongzhou. The sailors on the ship all had their hair cut short and wore short clothes, and were very fierce. He couldn't help but wonder: could this be the ship of the Australian sea merchants? He was just thinking about whether to send someone to the local area to inquire.
 
-　　高举一边叫人摆酒接风，一边嘘寒问暖。又将货物的销货单子拿来，告诉他眼下就有五万两银子可以提，其他银子，等个十多天就可凑齐。
+Gao Ju ordered a banquet to welcome him, and at the same time asked about his well-being. He also brought out the sales list of the goods and told him that there were fifty thousand taels of silver available for withdrawal now, and the rest of the silver could be collected in ten days.
 
-　　“银子不着急，可以先存在高掌柜这里。”穿越者眼下不缺银子，缺得是物资。[萧子山][y001]没有太多客套，告诉他此行的目的是购货，因为货物种类庞杂，还要请高掌柜多多帮忙。高举以为还是过去的瓷器、香料和硬木之类，满口答应，待到打开清单一看，却傻了眼。上面开列的东西完全出乎意料：生铁、石墨、萤石、胆矾、明矾、皂矾、硝石、芒硝、碱面、硫磺、砒霜、雄黄、雌黄、朱砂、硼砂、石膏、锡、铅、铜、水银……
+"Don't worry about the silver, you can deposit it with Shopkeeper Gao for now." The transmigrators were not short of silver at the moment, but of materials. [Xiao Zishan][y001] did not waste too much time on pleasantries and told him that the purpose of this trip was to purchase goods. Because the types of goods were complex, he also asked Shopkeeper Gao for a lot of help. Gao Ju thought it was still the same porcelain, spices, and hardwood as before, and readily agreed. But when he opened the list, he was dumbfounded. The things listed on it were completely unexpected: pig iron, graphite, fluorite, chalcanthite, alum, melanterite, saltpeter, mirabilite, soda ash, sulfur, arsenic, realgar, orpiment, cinnabar, borax, gypsum, tin, lead, copper, mercury...
 
-　　这其中的大多数东西，高举自己也不认得，有些他知道，作坊里要用到，还有些干脆就是药材。硝石、硫磺是属于官府管制的东西，生铁开口就要一万石，这还好说，无非要多跑些铁场，这水银也要十石——广州全城的水银都搜罗出来恐怕都没有一石——他们要这些做什么？难道澳洲有什么皇帝贵人死了，要用水银防腐？
+Gao Ju himself did not recognize most of these things. He knew some of them were used in workshops, and some were simply medicinal materials. Saltpeter and sulfur were controlled by the government. He asked for ten thousand shi of pig iron at the beginning, which was not a big deal. It just required running to more ironworks. But he also wanted ten shi of mercury—even if all the mercury in Guangzhou was collected, there might not be one shi—what did they want these for? Could it be that some emperor or nobleman in Australia had died and they needed mercury for preservation?
 
-　　正胡思乱想间，[萧子山][y001]见他脸色变幻不定，问：“这些可有难处？”
+While he was lost in thought, [Xiao Zishan][y001] saw that his face was changing and asked, "Is there any difficulty with these?"
 
-　　“东西都找得到。”高举放下单子来，“只是这数量是不是多了一些？就说这胆矾、水银之类，全城能有一石就不错了，哪里有这许多。”
+"All the things can be found," Gao Ju put down the list. "But isn't the quantity a bit too much? For things like chalcanthite and mercury, it would be good if there was one shi in the whole city. Where can we find so much?"
 
-　　“那就请高老爷费心了，有多少要多少。”[萧子山][y001]也不知道这些东西有什么用，不过这既然是点名买得东西，想来是至关重要的。
+"Then I'll have to trouble Mr. Gao. We'll take as much as you can get." [Xiao Zishan][y001] didn't know what these things were for, but since they were specifically requested, they must be very important.
 
-　　“兄弟托兄长我办事，自当尽力，”高举忽然变了称呼，低声道，“不过内中颇多违禁之物，兄长不是办不了，只是凡事得问一声，办起事来才容易掌握分寸。”
+"Brother has entrusted me with this matter, so I will do my best," Gao Ju suddenly changed his address and said in a low voice, "But there are many prohibited items among them. It's not that I can't handle it, but I have to ask about everything so that it's easier to grasp the propriety when handling things."
 
-　　[萧子山][y001]愣了一下，他就知道硝石、硫磺之类可能是官府管制的东西，其他倒没想过：“不知道哪些是违禁的货物？”
+[Xiao Zishan][y001] was stunned for a moment. He knew that things like saltpeter and sulfur might be controlled by the government, but he hadn't thought about the others: "I don't know which are the prohibited goods?"
 
-　　“铁，此物是不许出口的。不过这个还容易。倒是铜、砒霜、硝石、硫磺可就有些难处了，特别是兄弟要的量还特别得大——”
+"Iron, this item is not allowed to be exported. But this is still easy. Copper, arsenic, saltpeter, and sulfur are a bit difficult, especially since the amount you want is particularly large—"
 
-　　“这些都是澳洲货物的原料。”[萧子山][y001]已经从孙常那里知道：高举在澳洲货上发了大财，成广州城里的“财富神话”。用造澳洲货的原料来当理由，他一定尽心竭力。不过这也是大实话：工业部急需这些东西开始现代制造业
+"These are all raw materials for Australian goods." [Xiao Zishan][y001] had already learned from Sun Chang that Gao Ju had made a fortune on Australian goods and had become a "wealth myth" in Guangzhou. Using the raw materials for making Australian goods as a reason, he would definitely do his best. But this was also the truth: the Ministry of Industry urgently needed these things to start modern manufacturing.
 
-　　果然，高举马上就沉默下来，似乎在斟酌着什么，片刻之后才像下了决心一般道：“既然兄弟要，兄长我一定帮忙。只是备货需要时间，兄弟能等多久？”
+Sure enough, Gao Ju immediately fell silent, as if he was weighing something. After a while, he seemed to have made up his mind and said, "Since brother wants it, I will definitely help. But it takes time to prepare the goods. How long can you wait?"
 
-　　“十五天。”
+"Fifteen days."
 
-　　“有些紧了，我叫手下掌柜分头出去采办。尽力安排！不知货物运到哪里？是否还是——”
+"It's a bit tight. I'll have my shopkeepers go out to purchase separately. I'll do my best to arrange it! I don't know where the goods will be transported to? Is it still—"
 
-　　“这事情，得求教兄长。”[萧子山][y001]此行的另外一个目的就是要建立起广州到海南的交通线来，以后还会在广州进行大规模的采购，急需合适的转运点。城里人多眼杂，大批进出货物殊为不便，所以，需在城外找一处仓栈作为货物转运的地方。
+"For this matter, I have to ask for your advice, brother." Another purpose of [Xiao Zishan][y001]'s trip was to establish a transportation line from Guangzhou to Hainan. In the future, there would be large-scale procurement in Guangzhou, and a suitable transshipment point was urgently needed. The city was crowded and it was inconvenient to move large quantities of goods in and out. Therefore, a warehouse outside the city was needed as a place for transshipment of goods.
 
-　　他把要求和高举说了，高举说此事容易，他在珠江口的游鱼洲上自设仓栈码头——那里是专门搞走私的渔民的地盘，都是些半民半匪的人物。城里做公的等闲不敢进去，差不多等于是法外世界。穿越者的船可以停靠在这里。他再单独拔出栈房一座，供货物周转。
+He told Gao Ju his request. Gao Ju said that this was easy. He had his own warehouse and wharf on Youyu Island at the mouth of the Pearl River—that was the territory of the fishermen who specialized in smuggling, and they were all half-civilian and half-bandit figures. The officials in the city did not dare to go in easily, and it was almost a lawless world. The transmigrators' ships could dock there. He would also set aside a warehouse for the turnover of goods.
 
-　　“这样甚好。”[萧子山][y001]对这个安排还算满意，接着又告诉高举，他们收购这些货物是长期的，只要能收购的到，有多少要多少。
+"That's very good." [Xiao Zishan][y001] was quite satisfied with this arrangement. Then he told Gao Ju that their purchase of these goods was long-term, and as long as they could be purchased, they would take as much as they could get.
 
-　　计议停当，高举才问起他们这次来广州有没有新的澳洲货物运到。[萧子山][y001]只是微微一笑，“那只是些小打小闹的玩意，再过得几个月，兄长自然就知道了。”
+After the discussion was over, Gao Ju asked if they had brought any new Australian goods to Guangzhou this time. [Xiao Zishan][y001] just smiled slightly, "Those are just some small things. In a few more months, you will know, brother."
 
-　　这番话给了高举无比的想像余地，但是也留给了他些许恐惧。从个人的角度来说他并不怕眼前的这个短毛，但是对方身后那股隐隐约约的强大力量却使他惴惴不安。这伙澳洲海商，决不是商人那么简单。
+These words gave Gao Ju infinite room for imagination, but also left him with some fear. From a personal point of view, he was not afraid of the short-haired man in front of him, but the faint and powerful force behind him made him uneasy. This group of Australian sea merchants was by no means as simple as merchants.
 
-　　[萧子山][y001]下一个拜访的起威镖局的孙可成孙掌柜，镖局有长途运输大宗物资的能力，是建立陆地交通线的好助手。
+The next person [Xiao Zishan][y001] visited was Sun Kecheng, the shopkeeper of the Qiwei Escort Agency. The escort agency had the ability to transport large quantities of goods over long distances and was a good helper in establishing land transportation lines.
 
-　　一路上孙常已经把镖局的底细原原本本的告诉了东家。这是一个以家族、同乡和师门关系组合起来的镖局，上至总镖头孙可成，下到柜面上的小伙计、马夫，不是同族、同乡就是同门师徒师兄弟关系，彼此之间的地域、血缘、宗法关系极其密切。他们专走广州往江西南昌的线路兼做省内短途，沿途设有多个外柜分号，在广东全省也算是中等规模，方方面面都有一些人脉。[萧子山][y001]盘算着如果把这个镖局掌握起来，对广东这里的贸易、情报活动会有很大的好处。
+On the way, Sun Chang had already told the owner the details of the escort agency. This was an escort agency composed of family, fellow villagers, and master-disciple relationships. From the chief escort Sun Kecheng down to the small clerks and grooms at the counter, they were either of the same clan, from the same hometown, or from the same school of master and disciples. The geographical, blood, and patriarchal relationships between them were extremely close. They specialized in the route from Guangzhou to Nanchang, Jiangxi, and also did short-distance transportation within the province. They had several branch offices along the way and had some connections in all aspects of Guangdong province. [Xiao Zishan][y001] calculated that if he could control this escort agency, it would be of great benefit to the trade and intelligence activities in Guangdong.
 
-　　孙掌柜对他的拜访颇为高兴——澳洲海商还真是伙讲交情的人物。[萧子山][y001]又送上了一些礼物，双方言谈甚欢，[萧子山][y001]就乘隙问起镖局业务上的事情了。
+Shopkeeper Sun was very happy about his visit—the Australian sea merchants were really a group of people who valued friendship. [Xiao Zishan][y001] also sent some gifts, and the two sides had a pleasant conversation. [Xiao Zishan][y001] took the opportunity to ask about the business of the escort agency.
 
-　　孙可成连连叹息，面色也阴沉了不少。
+Sun Kecheng sighed repeatedly, and his face darkened a lot.
 
-　　走镖的业务，倒是不差。就是沿途愈来愈不太平。过去路上匪盗不少，但还是江湖上有字号的人物，多少守江湖规矩。这二年，成了游匪流寇的天下，他们不是走投无路的农民就是关不到饷的逃兵，这两路人，根本不管你什么字号、规矩，见东西就抢，见人就杀。过去的匪盗还只要细软金银，如今遇到的流寇，干脆是连东西带车什么都要。
+The business of escorting was not bad. It was just that the road was becoming more and more unsafe. In the past, there were many bandits on the road, but they were still figures with a reputation in the martial arts world and more or less abided by the rules of the martial arts world. In the past two years, it has become the world of wandering bandits and roving rebels. They are either desperate farmers or deserters who cannot get their pay. These two groups of people don't care about your reputation or rules. They rob whatever they see and kill whoever they see. In the past, bandits only wanted valuables, gold, and silver. Now, the roving rebels they encounter simply want everything, including the goods and the cart.
 
-　　匪盗横行，沿途的村镇就个个建团，处处设寨，走村过镇到处要盘问戒备，像他们这样的外来镖局，要不是师徒兄弟基本都是江西籍，有些人情关系在，真是找地方打尖落脚都难。勉强走了几次，虽然没丢镖却死伤了十来个弟兄。镖局上上下下都有些觉得前途莫测。
+With bandits rampant, the villages and towns along the way all built up their defenses and set up stockades everywhere. When passing through villages and towns, they were questioned and guarded everywhere. For an outside escort agency like them, if it weren't for the fact that the masters and disciples were basically from Jiangxi and had some personal connections, it would be difficult to find a place to rest. They barely made a few trips. Although they didn't lose the goods, more than a dozen brothers were killed or injured. Everyone in the escort agency felt that the future was uncertain.
 
-　　[萧子山][y001]提出用入股的方法资助他们，同时新开镖路的提议的时候，孙可成的嘴巴都张大了——自有镖行这个买卖开始，镖局就不是个赚钱的买卖，兄弟几个搭伙张旗就能开起买卖来，赚得是力气卖命的钱，一年到头上上下下能混个小康，要说能大笔的分红是根本没有的事，所以镖局这买卖从来没有人用钱入股的。
+When [Xiao Zishan][y001] proposed to fund them by buying shares and at the same time opening a new escort route, Sun Kecheng's mouth fell open—since the beginning of the escort business, the escort agency had never been a profitable business. A few brothers could start a business by joining forces. They earned money by selling their strength and risking their lives. At the end of the year, everyone could live a moderately prosperous life. It was impossible to say that there would be a large dividend, so no one had ever invested money in the escort business.
 
-　　“不要分红。”[萧子山][y001]这才提出想法，“如今我们要在大明做买卖开字号，坐店运货的事情少不了，这水陆运货的事情，没有比你们这行更熟悉的。这些钱，我们一不要镖局分红，二不干涉镖局的内部事务，只是日后我们的买卖字号做到哪里，镖局的镖路也开到哪里！”
-[y001]: /characters/y001 "萧子山"
+"We don't want dividends." [Xiao Zishan][y001] then put forward his idea, "Now we want to do business and open a shop in the Ming Dynasty. We can't do without sitting in the shop and transporting goods. For this matter of land and water transportation, no one is more familiar with it than your line of work. For this money, we don't want the escort agency to pay dividends, and we won't interfere in the internal affairs of the escort agency. It's just that in the future, wherever our business goes, the escort agency's route will also go there!"
+
+[y001]: /characters/y001 "Xiao Zishan"
