--- a/_posts/2010-1-7-2-08200.md
+++ b/_posts/2010-1-7-2-08200.md
@@ -1,57 +1,58 @@
 ---
 layout: post
-title: 第八十二节 广州行（四）
+title: "Section 82: Journey to Guangzhou (IV)"
 category: 2
 path: 2010-1-7-2-08200.md
 tag: [normal]
 ---
 
-　　[萧子山][y001]给起威镖局绘制的未来蓝图其实是改组成一个武装货运公司——明末的社会秩序已经开始逐渐瓦解，远程运输如果没有武力押解根本行不通。
+The future blueprint that [Xiao Zishan][y001] drew for the Qiwei Escort Agency was actually to reorganize it into an armed freight company—the social order at the end of the Ming Dynasty had begun to gradually collapse, and long-distance transportation was simply impossible without armed escort.
 
-　　孙可成目瞪口呆，心想这人好大的口气，买卖做到哪里镖局开到哪里，别说他没这么多的师兄弟、徒子徒孙来干活，就是这到处都有的官、匪、土豪三路势力，他也没本事一一结交。
+Sun Kecheng was dumbfounded. He thought to himself, this person has such a big tone, wherever the business goes, the escort agency will open there. Not to mention that he doesn't have so many fellow disciples and apprentices to do the work, he also doesn't have the ability to befriend the three forces of officials, bandits, and local tyrants everywhere.
 
-　　“这不妨事。”[萧子山][y001]却并不在意，“暂时只需要新开一条镖路，就是从广州到海康、徐闻的。”
+"That's not a problem," [Xiao Zishan][y001] didn't care. "For now, we only need to open a new escort route, from Guangzhou to Haikang and Xuwen."
 
-　　“海康、徐闻？”孙可成有些不解，海康是雷州府的首县，徐闻则是下面的属县。两个地方在在广东都算是穷乡僻壤。要说出产，只有海盐和蔗糖为大宗。也没多少富豪大户。澳洲海商卖的东西他是知道的，都是价值连城的奇货宝物，这种买卖做到雷州岂不是赔本到家了。
+"Haikang, Xuwen?" Sun Kecheng was a little puzzled. Haikang was the capital of Leizhou Prefecture, and Xuwen was a subordinate county. Both places were considered poor and remote in Guangdong. In terms of products, only sea salt and sucrose were the main ones. There were not many rich and powerful families. He knew what the Australian sea merchants sold, they were all priceless rare treasures. Wouldn't it be a loss to do this kind of business in Leizhou?
 
-　　“不错。”[萧子山][y001]点点头。开辟这条商路的主要目的有二：一是打通海南与广州的陆地交通线，博铺港的对面就是徐闻灯笼角，两地是隔海相。如果海路阻滞，穿越者就可从博铺渡海，取道雷州往广州去。二是获得当地的蔗糖，雷州半岛的气候、土壤适宜甘蔗栽培，从东汉起就有土糖寮，到明代，当地的甘蔗种植和制糖业已经非常的发达。1700年前后土糖的年产量已达10000吨，大部分外销。糖是明清中国海外贸易中最赚钱的货物之一，穿越者当然不能放过。虽然眼下无力直接控制雷州半岛，但是设点收购，争取货源还是可以做的。
+"That's right," [Xiao Zishan][y001] nodded. There were two main purposes for opening this trade route: one was to open up the land transportation line between Hainan and Guangzhou. Opposite Bopu Port is Denglong Cape in Xuwen, and the two places are separated by the sea. If the sea route was blocked, the transmigrators could cross the sea from Bopu and go to Guangzhou via Leizhou. The second was to obtain local sucrose. The climate and soil of the Leizhou Peninsula were suitable for sugarcane cultivation. There had been earthen sugar mills since the Eastern Han Dynasty. By the Ming Dynasty, the local sugarcane planting and sugar industry were already very developed. Around 1700, the annual output of earthen sugar had reached 10,000 tons, most of which was exported. Sugar was one of the most profitable goods in China's overseas trade during the Ming and Qing dynasties, and of course the transmigrators could not let it go. Although they were currently unable to directly control the Leizhou Peninsula, it was still possible to set up a purchasing point and strive for sources of goods.
 
-　　[萧子山][y001]要起威镖局的做的事情就是在一个月内在海康、徐闻两县内各开设一家分号，随后逐步在沿路重要村镇则开设骡马大店或者轿车行，形成驿站式的交通线路。至于各处开设外柜所需要的资金，全部由他们负担。除此以外，另给起威三千两银子，用来招募人员、结交当地官府和支付一应杂费。
+What [Xiao Zishan][y001] wanted the Qiwei Escort Agency to do was to open a branch in each of Haikang and Xuwen counties within a month, and then gradually open large mule and horse inns or sedan chair agencies in important villages and towns along the way to form a post station-style transportation line. As for the funds needed to open the outer counters everywhere, they would be fully borne by them. In addition, another three thousand taels of silver would be given to Qiwei to recruit personnel, befriend the local government, and pay for all miscellaneous expenses.
 
-　　“一个月太紧张了，”孙可成连连摇头，“起威在雷州那边没有镖路，得派人去趟路。这事情前前后后没二三个月办不下来。”
+"A month is too tight," Sun Kecheng shook his head repeatedly. "Qiwei has no escort route in Leizhou, so we have to send people to scout the road. This matter can't be done in two or three months."
 
-　　“二个月吧，这事比较急。”[吴南海][y009]已经通知过他，甘蔗的收获期是每年的秋冬时分，如果能及时的把镖路打通，还来得及在雷州设庄收糖，明年春天就可以大规模的出白糖了——穿越者的外贸商品也有了着落。
+"Two months then, this matter is quite urgent." [Wu Nanhai][y009] had already informed him that the sugarcane harvest season was in the autumn and winter of each year. If the escort route could be opened in time, there would still be time to set up a village in Leizhou to collect sugar, and large-scale white sugar could be produced next spring—the transmigrators' foreign trade goods would also be settled.
 
-　　“这些还好说。”孙可成却并不见得如何的兴奋，“恕我多句嘴：掌柜们是远道而来得，这雷州是个穷乡僻壤，去那里做买卖要三思……”
+"These are easy to say," Sun Kecheng was not very excited. "Forgive me for being talkative: the shopkeepers have come from afar. Leizhou is a poor and remote place. You should think twice before doing business there..."
 
-　　[萧子山][y001]心中还有些感动，在另一个时空，不知道有多少人在挖空心思的巧立名目骗取拨款，把别人的东西打磨一下就算自己做出来的，轻而易举的骗走了几个亿的老百姓血汗税款。这位经营情形并不好的镖局掌柜却要自己对投资项目“三思”！人的境界，真的相差的太远了。
+[Xiao Zishan][y001] was still a little moved. In another time and space, he didn't know how many people were racking their brains to create various pretexts to defraud funds, polishing other people's things and claiming them as their own, and easily cheating away hundreds of millions of the common people's hard-earned tax money. This escort agency shopkeeper, whose business was not doing well, actually wanted him to "think twice" about the investment project! The realm of people is really too far apart.
 
-　　“不必担心，我们自有道理。”[萧子山][y001]知道若没有正经的理由，镖局这种为人处世极其正派的商家是很难单纯用钱打动的，好在买糖这个理由是现成的：“雷州出糖，澳洲最需蔗糖，一来一回就是对本的利。我们就是想在雷州当地设庄收糖。”
+"Don't worry, we have our own reasons." [Xiao Zishan][y001] knew that without a proper reason, it would be difficult to impress a business like an escort agency, which was extremely upright in its dealings, with money alone. Fortunately, the reason for buying sugar was ready-made: "Leizhou produces sugar, and Australia needs sucrose the most. A round trip is a profitable business. We just want to set up a village in Leizhou to collect sugar."
 
-　　孙可成这才恍然大悟，连称他们“有远见”，当下满口答应。[萧子山][y001]随即提出三项要求：一是尽快招募人手，扩充镖局的队伍；二是帮忙在本地物色老成可靠的商铺掌柜、伙计，作为开设字号之用；三是双方设立联络制度。高弟因为在镖局学武的关系，是一个比较合适的人选，于是商定惠福街和镖局之间的联系每七天一次。紧急情况下可以当天联系。双方计较停当，[萧子山][y001]将从高举那里拿来的银帖交给孙总镖头。双方的合作即告成立。
+Only then did Sun Kecheng suddenly realize, and repeatedly praised them for their "foresight," and immediately agreed. [Xiao Zishan][y001] then made three requests: first, to recruit people as soon as possible to expand the escort agency's team; second, to help find old and reliable shopkeepers and clerks locally to be used for opening a business; third, to establish a liaison system between the two parties. Because Gao Di was learning martial arts at the escort agency, he was a more suitable candidate. So it was agreed that the contact between Huifu Street and the escort agency would be once every seven days. In an emergency, they could contact each other on the same day. After the two parties had made their plans, [Xiao Zishan][y001] handed the silver note he had taken from Gao Ju to Chief Escort Sun. The cooperation between the two parties was thus established.
 
-　　随后的几天里，[萧子山][y001]一直在起威镖局和高宅之间奔走，他有太多的事情需要这些当地人的帮助了。而[萧子山][y001]也见识到了高举这样的商贾在广州的巨大的影响力，许多事情只要他派一名管事带着张名帖出去，就能搞定，比现代社会的领导批条子打电话都方便。
+In the following days, [Xiao Zishan][y001] was constantly running between the Qiwei Escort Agency and the Gao residence. He had too many things that needed the help of these locals. And [Xiao Zishan][y001] also saw the huge influence of a merchant like Gao Ju in Guangzhou. Many things could be done just by him sending a steward with a name card, which was more convenient than leaders in modern society approving documents and making phone calls.
 
-　　很快的，就办好了郭逸等人的保甲，算是正式注册了户口，其实户籍黄册之类的东西，明末的广州已经不需要了，保甲主要是一种治安措施。至于他们的籍贯来处，自然不能说是什么澳洲海商，就说是高家的一个同乡。有高家管事出马，负责地方的牌甲不敢怠慢，立刻就把事情办妥，[萧子山][y001]知道这种半官半民的“小鬼”无论过去现在都是最难缠的角色，关键的时候也容易下眼药，当下厚厚实实的拿出一个五两的赏包，果然对方眉开眼笑，愈发恭敬。
+Soon, the baojia for Guo Yi and others was completed, which was considered a formal registration of their household registration. In fact, things like household registration yellow books were no longer needed in Guangzhou at the end of the Ming Dynasty. Baojia was mainly a security measure. As for their place of origin, of course they could not say that they were Australian sea merchants, but that they were from the same hometown as the Gao family. With the Gao family's steward coming forward, the local paijia in charge did not dare to be negligent and immediately handled the matter. [Xiao Zishan][y001] knew that this kind of half-official and half-civilian "little ghost" was the most difficult character to deal with, both in the past and now, and it was also easy to cause trouble at critical moments. He immediately took out a generous five-tael reward package. Sure enough, the other party's face lit up with a smile and became even more respectful.
 
-　　采购团的人马除了留下少数人看船之外，都住进了惠福街的宅子。休息了两天，都嚷着要出去走走，见识见识这17世纪东南大都会的模样。
+Except for a few people who were left to watch the boat, the members of the procurement delegation all moved into the house on Huifu Street. After resting for two days, they all clamored to go out for a walk and see what this 17th-century southeastern metropolis looked like.
 
-　　[萧子山][y001]知道如果阻碍的话只会引来大家的意见，但是就这么一窝蜂的出去不惹出事情才怪。毕竟这些人的营养都太充分了点，举止行为也和周边的环境不大协调。当下把人分成五六个人一组，每组各请二名起威镖局的镖师陪同，以确保安全。每人再发给白银一两铜钱一千文作为零用。
+[Xiao Zishan][y001] knew that if he obstructed them, it would only attract everyone's opinions, but it would be strange if they went out in a swarm and didn't cause trouble. After all, these people were too well-nourished, and their behavior was not in harmony with the surrounding environment. He immediately divided the people into groups of five or six, and each group invited two escorts from the Qiwei Escort Agency to accompany them to ensure safety. Each person was also given one tael of silver and one thousand copper coins as pocket money.
 
-　　镖师这种职业，因为和黑白两道都有交谊，滋生了一种独特的担保关系。一般黑道上和镖局“交过朋友”的人要进城治病、观光或者采购东西，照例是由镖局里出面派人陪同照料的，好吃好喝好玩，最后再礼送出城——但有一条：进城的不能在城里惹事，不要说作案行凶，便是去嫖、赌，镖师都照例不奉陪，黑道上的朋友也守这个规矩。久而久之，城里缉捕的衙役探子见到匪人有镖师陪同，照例不会拿问盘查。[萧子山][y001]知道穿越者们都过于带相，成群结伙出去立马就会给衙门里的探子盯住，还是请镖师陪同稳妥一些。
+The profession of an escort, because of its dealings with both the underworld and the authorities, has given rise to a unique guarantee relationship. Generally, people from the underworld who have "made friends" with the escort agency and want to enter the city for medical treatment, sightseeing, or shopping are usually accompanied and taken care of by people sent by the escort agency. They are treated to good food, good drinks, and good fun, and are finally sent out of the city with courtesy—but there is one rule: those who enter the city cannot cause trouble in the city. Not to mention committing crimes and violence, even if they go to prostitutes or gamble, the escorts will not accompany them as a rule, and friends from the underworld also abide by this rule. Over time, the yamen runners and spies in the city who were responsible for arrests would not question or interrogate bandits who were accompanied by escorts. [Xiao Zishan][y001] knew that the transmigrators were too conspicuous. If they went out in groups, they would immediately be targeted by the spies in the yamen. It was safer to ask the escorts to accompany them.
 
-　　大家兴高采烈的去了，北炜自带了几名学员，也由镖师陪着出去了，不过他们不是去游览，而是实地勘察广州的地形地貌，绘出准确的城内道路、衙署、仓廪、城门等重要设施的地图。萧子、郭逸一行则由刘纲引路，在街上随便逛逛，主要是探查一下未来的商业发展模式。
+Everyone went happily. Bei Wei brought a few of his students and also went out with the escorts. However, they were not going for a tour, but to conduct a field survey of the terrain of Guangzhou and draw an accurate map of the city's roads, yamen, granaries, city gates, and other important facilities. Xiao Zi, Guo Yi, and their party were led by Liu Gang and strolled around the streets, mainly to explore the future business development model.
 
-　　一行人换好衣装，从惠福街出来，走过几条小街，来到闹市上，这里店铺林立，繁华异常，会集着各地商人，有南北两京的、各省的、以及外国的各种货物。从年代和范围上说，有三代以来的各种古董，有时兴的锦缎、绫罗、刺绣、布匹、家常用具，还有西洋来的自鸣钟和稀奇玩艺儿。商肆按行业分类，各占一段街道。一吃过早饭，大小街道都涌着人流，到巳时后就拥挤不堪。人们有买东西的，有看热闹的，有看稀奇开眼界的，也有专为看人的，拥来挤去，欢声笑语。真是比多少电影电视剧的场面都来得好看，几个人看得都不由得呆了——想到再过不到二十年，在明清交替的混战中，这红尘中的东南繁华之都三百年积累下的累累财货，或者付之一炬，或者被人抢掠而去，在这里营生观光的人又有多少要化作枯骨，不由得心生感慨。
+After changing their clothes, the group came out of Huifu Street, walked through a few small streets, and came to the bustling market. The shops here were lined up, extremely prosperous, and gathered merchants from all over the country. There were goods from the northern and southern capitals, various provinces, and foreign countries. In terms of age and scope, there were various antiques from the three dynasties, as well as fashionable brocades, silks, embroidery, cloth, and household utensils, as well as self-ringing clocks and rare toys from the West. The shops were classified by industry, each occupying a section of the street. After breakfast, the large and small streets were crowded with people, and after the si hour, it became extremely crowded. People were buying things, watching the excitement, seeing rare things to broaden their horizons, and some were just there to see people. They crowded and pushed, and there was laughter and talking. It was really more beautiful than the scenes in many movies and TV series. The few of them couldn't help but be stunned—thinking that in less than twenty years, in the chaos of the Ming and Qing transition, the accumulated wealth of this prosperous city in the southeast, accumulated over three hundred years, would either be burned to the ground or plundered, and how many of the people who lived and sightseeing here would turn into dry bones, they couldn't help but feel emotional.
 
-　　越走人越挤，生意越热闹，大家也不知道看什么好。刘纲对道路很熟悉，实在太拥挤难过得的地方，便引着他们走小路绕过去。正走着路，严茂达看到街旁有一座很大的珠宝店，他示意了一下，表示要进去看看。大家都觉得好奇，便一同进去随便观赏。店里的广东老板正在请一位客人看一面镜子——那粉红色的塑料镶边让[萧子山][y001]一下就想了起来：这不是他从小商品市场里批发来的温州镜子么？居然能在珠宝行里卖了。
+The more they walked, the more crowded it became, and the more lively the business was. Everyone didn't know what to see. Liu Gang was very familiar with the roads. When it was too crowded to pass, he would lead them through small alleys to bypass it. As they were walking, Yan Maoda saw a large jewelry store on the side of the street. He gestured, indicating that he wanted to go in and have a look. Everyone was curious and went in together to browse. The Cantonese owner of the shop was showing a mirror to a customer—the pink plastic frame made [Xiao Zishan][y001] think of it at once: isn't this the Wenzhou mirror he wholesaled from the small commodity market? It was actually being sold in a jewelry store.
 
-　　“这镜子非得卖一百五十两？能不能再下来一些。”
+"This mirror has to be sold for one hundred and fifty taels? Can't it be a little lower?"
 
-　　商人极其恭敬地回答说：“实在不能再少，这镜子如今您就是到高家的铺子里去买也寻觅不到这样的水晶霞玉镜了，您若要普通的墨玉镜子，小的只要一百两就行了。和您说了吧，这水晶的彩玉镜什么时候能再有货来，连高老爷都不知道呢！像这种少见的粉色的，恐怕再过个十天半月就得卖二百两了。”
+The merchant replied very respectfully: "It really can't be any less. You can't even find such a crystal rosy jade mirror in Gao's shop now. If you want an ordinary black jade mirror, I only need one hundred taels. Let me tell you, even Mr. Gao doesn't know when this kind of crystal colored jade mirror will be available again! A rare pink one like this will probably sell for two hundred taels in ten days or half a month."
 
-　　显然，高家不仅在零售，也在批发。这点上高举还是挺聪明的，只要澳洲海商能源源不断的供货，把持住总批发的渠道源头比只靠自己的铺子卖货要覆盖面大得多，虽然单价上少赚了一点，销售总量上却上去了。
+Obviously, the Gao family was not only retailing, but also wholesaling. Gao Ju was quite smart in this regard. As long as the Australian sea merchants could continue to supply goods, controlling the source of the general wholesale channel would have a much larger coverage than just relying on their own shops to sell goods. Although they earned a little less on a single price, the total sales volume went up.
 
-　　客人又把镜子端详一阵，说：“好吧，我留下吧。这镜子端得十分了得，照得人这么清楚！”
-[y001]: /characters/y001 "萧子山"
-[y009]: /characters/y009 "吴南海"
+The customer looked at the mirror again and said, "Alright, I'll take it. This mirror is really amazing, it reflects people so clearly!"
+
+[y001]: /characters/y001 "Xiao Zishan"
+[y009]: /characters/y009 "Wu Nanhai"
