--- a/_posts/2010-11-12-3-20800.md
+++ b/_posts/2010-11-12-3-20800.md
@@ -1,71 +1,71 @@
 ---
 layout: post
-title: 第二百零八节 学习班（二）
+title: "Section 208: The Study Class (II)"
 category: 3
 path: 2010-11-12-3-20800.md
 tag: [normal]
 ---
 
-　　想继续保留船只的，可以继续统带船队。参加外商委的新组建的联营特许公司——东南亚公司，专门从事海外贸易。头目们用船只入股。每艘一百吨的船只算一股，超过一百吨的以此类推。低于一百吨的船只不收。
+Those who wanted to continue to keep their ships could continue to command their fleets. They could join the newly formed joint-venture licensed company of the Foreign Trade Committee—the Southeast Asia Company, which specialized in overseas trade. The leaders would use their ships as shares. Each one-hundred-ton ship would be counted as one share, and those over one hundred tons would be calculated accordingly. Ships under one hundred tons would not be accepted.
 
-　　参加东南亚公司的船只除了执行海外贸易活动之外，也要完成海军部交下的运输、作战和巡逻任务——东南亚公司是受外商委和海军部的双重领导的。不过在级别上，该公司的管理层可以参加执委会的扩大会议。
+In addition to carrying out overseas trade activities, the ships participating in the Southeast Asia Company also had to complete the transportation, combat, and patrol tasks assigned by the Navy Department—the Southeast Asia Company was under the dual leadership of the Foreign Trade Committee and the Navy Department. However, at the level, the management of the company could participate in the enlarged meetings of the Executive Committee.
 
-　　这个政策出台之后，大家觉得可以接受。虽然经过补充人员，后勤统筹之后，他们对船队的私人控制力已经大大下降。但是能够保持船队的控制权还是让很多人在心理上觉得舒服一些。
+After this policy was introduced, everyone felt it was acceptable. Although after supplementing personnel and unifying logistics, their personal control over the fleet had been greatly reduced, being able to maintain control of the fleet still made many people feel more comfortable psychologically.
 
-　　多数人选择了参加东南亚公司。既然要走远海，小型船只留着无用，干脆全部缴纳上去，还能换些银子。施十四和其他人不一样，他坚决的要求把自己的全部船只上缴给组织上，而且不要一文钱。只要求自己能在海军部当个“千总”之类的小官。魏爱文觉得纳罕——这海盗头子怎么忽然觉悟如此之高，难道他真得已经觉得俺们能够打到北京让他当从龙之臣了？
+Most people chose to join the Southeast Asia Company. Since they were going to sail on the high seas, small ships were useless, so they simply handed them all over and could get some silver in exchange. Shi Shisi was different from the others. He resolutely demanded to hand over all his ships to the organization, and did not want a single penny. He only asked to be a small official like a "qianzong" in the Navy Department. Wei Aiwen found it strange—how could this pirate leader suddenly have such a high level of consciousness? Could it be that he really thought that we could fight all the way to Beijing and make him a founding minister?
 
-　　林淡也毫不犹豫的上交了自己的船。他同样不要银子，不过附有要求：穿越集团必须全力帮助他查找家属的下落。
+Lin Dan also handed over his ship without hesitation. He also did not want silver, but had a request: the transmigrator group must do its best to help him find the whereabouts of his family.
 
-　　“银子该给多少就是多少，这是信誉。”魏爱文说，“至于找你的家眷，一定竭尽所能——咱们不是一家人了么？”
+"You will be given as much silver as you deserve. This is a matter of credibility," Wei Aiwen said. "As for finding your family, we will definitely do our best—aren't we a family now?"
 
-　　胡胖子干脆利落的把属下的五条船全部缴纳了。他要求不再出海——想搞个田庄干干。
+Fatty Hu handed over all five of his ships without a second thought. He requested not to go to sea again—he wanted to run a farm.
 
-　　“没当海盗之前，我可是种地可是好手。要不是遭瘟杨六杨七一把火烧了老子的庄子，也不会干这个买买。”
+"Before I became a pirate, I was a good farmer. If it weren't for the plague of Yang Liu and Yang Qi who burned down my old man's farm, I wouldn't have done this business."
 
-　　“你要不干这买卖，说不定早就败落光了。”林淡说，“你这种乡下土财主，就一肥肉。”
+"If you didn't do this business, you might have been ruined long ago," Lin Dan said. "You country bumpkin, you're just a piece of fat meat."
 
-　　经过一番登记调配，十一个带船来的大小头目中有五人愿意上缴全部船只，其中胡五妹——也就胡胖子，他家长辈因为子嗣艰难就给他取了这么个女名——表示不愿意继续吃这碗海上的饭，想拿了银子买些田宅安顿下来。
+After a period of registration and allocation, five of the eleven big and small leaders who came with ships were willing to hand over all their ships. Among them, Hu Wumei—that is, Fatty Hu, whose elders gave him this female name because it was difficult to have children—said that he was not willing to continue to eat this bowl of rice on the sea and wanted to take the silver to buy some land and settle down.
 
-　　“田宅就不用买了。房子是我们给你配的。这样吧，你给我们干个庄头吧。”在旁的邬德点点头，“县城门外有个学田庄，那里有几百亩地正少个掌事的。你就带着老婆孩子亲戚住那里去好了。你的亲兵，也可以随身带几个去。”
+"You don't need to buy land and houses. We will provide you with a house. How about this, you can be a farm manager for us." Wu De, who was at the side, nodded. "There is a school farm outside the county town. There are hundreds of mu of land there that are short of a manager. You can live there with your wife, children, and relatives. You can also take a few of your personal soldiers with you."
 
-　　“成，管个田庄是老本行。”胡五妹对这样的安排还算满意，“我还想买些田地，行不行？”
+"Okay, managing a farm is my old profession." Hu Wumei was quite satisfied with this arrangement. "I still want to buy some land, is that okay?"
 
-　　邬德点点头道：“当然可以，不过买地我们有政策。你得稍微等等——反正银子放在身边总是银子，亏不了你的！”
+Wu De nodded and said, "Of course you can, but we have a policy for buying land. You have to wait a little—anyway, silver is always silver in your hands, you won't lose out!"
 
-　　“好，好。”胡五妹对这个安排很是满意。
+"Good, good." Hu Wumei was very satisfied with this arrangement.
 
-　　施十四、林淡、李广发等人愿意直接加入澳洲集团的“海军”。
+Shi Shisi, Lin Dan, Li Guangfa, and others were willing to directly join the "navy" of the Australian group.
 
-　　另外六个人则加入了东南亚公司，他们也上缴了一些小型的船只，只保留大船。平均下来，每人还有三到五艘大船。
+The other six people joined the Southeast Asia Company. They also handed over some small ships and only kept the large ones. On average, each person still had three to five large ships.
 
-　　严茗带着德隆粮行的人现场办理船只赎买的事情。中国古船的计量单位比较复杂，有用料的，也有按尺寸算的，也有按照载重量计算的。严茗合算的价格是按照广州站搜集来的广东、福建沿海的各种尺寸的船只造船价作为基本参照点，再对船只进行材质、状态、附件的评估给价。总的来说，给价从优。实际上这些船只在海上已经漂流了二三年没有整修过了，普遍状态欠佳。
+Yan Ming brought people from the Delong Grain Store to handle the ship redemption on the spot. The measurement units of ancient Chinese ships were relatively complex. Some were based on the materials used, some were based on size, and some were based on carrying capacity. The price calculated by Yan Ming was based on the shipbuilding prices of ships of various sizes in Guangdong and Fujian collected by the Guangzhou station as a basic reference point, and then the ships were evaluated for their material, condition, and accessories. In general, the price was favorable. In fact, these ships had been drifting at sea for two or three years without being repaired, and their condition was generally poor.
 
-　　给价全部用的是白银。如数付给头目们。这也算是取信于他们。严茗估计，按照临高目前的消费状况来看，这些人很快就会对不大好用的白银感到厌烦了。
+The price was all paid in silver, and it was paid to the leaders in full. This was also a way to gain their trust. Yan Ming estimated that according to the current consumption situation in Lingao, these people would soon get tired of the not-so-easy-to-use silver.
 
-　　手续办完之后，由各家头目指定几名亲信办理船只的移交手续。在计委人员打开启封之后每条船上的火炮、弹药、粮食、资材、私人行李之类都一一被搬运下来。私人物品一概经过消毒后由各人领回。至于火炮、粮食、武器之类的物品全部由计委登记入公。不管这些船只是否被赎买，造船厂都要对其进行全面的整修和改装处理。以便在秋季执行任务。
+After the procedures were completed, each leader designated a few trusted subordinates to handle the handover of the ships. After the seals were broken by the personnel of the Planning Committee, the cannons, ammunition, grain, materials, and personal luggage on each ship were all moved down. All personal items were disinfected and then returned to their respective owners. As for items such as cannons, grain, and weapons, they were all registered and put into public storage by the Planning Committee. Regardless of whether these ships were redeemed or not, the shipyard had to carry out comprehensive repairs and modifications on them in order to perform tasks in the autumn.
 
-　　安排妥当之后，宣布给假二个月，供大家安顿家属，处理私事。随后，由卫生部的大夫们给头目和他们的家眷也进行了一番身体检查——有若干人当场就进了性病防治所。余下的人经过“净化”程序之后得到了各自住宅的钥匙。
+After the arrangements were made, a two-month leave was announced for everyone to settle their families and handle their private affairs. Subsequently, the doctors of the Ministry of Health also conducted a physical examination for the leaders and their families—several people were admitted to the venereal disease prevention and treatment center on the spot. The rest of the people, after going through the "purification" procedure, received the keys to their respective residences.
 
-　　这批专供海盗头目们入住的住宅设在博铺公社的高级住宅区里。这是首批建设的试点高级住宅区。每排十二座联排别墅，一共建造了三排。海盗头目们除了去了田庄的胡五妹和林淡之外，另外九户都搬了进去。林淡因为是孤身一人，觉得一个人住这么大的屋子寥无生趣，便要求住到海军的营房里去。陈海阳给他在博铺海军营地里拨了一间军官宿舍。
+This batch of residences specially for the pirate leaders was located in the high-end residential area of Bopu Commune. This was the first pilot high-end residential area to be built. There were twelve terraced houses in each row, and a total of three rows were built. Except for Hu Wumei and Lin Dan who went to the farm, the other nine households all moved in. Because Lin Dan was alone, he felt that it was boring to live in such a large house alone, so he requested to live in the navy barracks. Chen Haiyang allocated him an officer's dormitory in the Bopu naval camp.
 
-　　里面的装潢、家具、陈设包含日用品一应俱全，邬德指示要体现“整齐、干净、舒适、体面”四大标准。前后院子里还种上了花木。让过惯了在海上窄小环境下日子的海盗眷属觉得很是舒适惬意。而那一扳杠子就能自动出水的水龙头简直引起了轰动。
+The interior decoration, furniture, and furnishings, including daily necessities, were all complete. Wu De instructed that the four major standards of "neat, clean, comfortable, and decent" should be embodied. Flowers and trees were also planted in the front and back yards, which made the pirate families who were used to living in the narrow environment at sea feel very comfortable and cozy. And the faucet that could automatically produce water with a single pull of the lever caused a sensation.
 
-　　穿越集团还给每户都安排了一个看门人，基本上是老头子，看看门，打扫卫生，还管接待访客什么的。穿着崭新的青衣在门口一坐，看上去很气派。实际上全是在政保总署领津贴的兼职告密员。
+The transmigrator group also arranged a gatekeeper for each household, basically an old man, to watch the door, clean, and also receive visitors. Wearing a brand-new blue robe and sitting at the door, he looked very imposing. In fact, they were all part-time informants who received allowances from the Political Security General Administration.
 
-　　各家搬迁的时候，文宣的头头丁丁照例又把吹打班子叫来一面吹吹打打，一面放鞭炮，努力渲染喜气洋洋的气氛，接着，以魏爱文、陈海阳、邬德、林佰光的名义分别送来了庆祝乔迁之喜的贺礼，最后，则是以执委会的名义致送了贺礼。
+When each family moved, Ding Ding, the head of the propaganda department, as usual, called the band to play music and set off firecrackers to create a festive atmosphere. Then, in the names of Wei Aiwen, Chen Haiyang, Wu De, and Lin Baiguang, congratulatory gifts for the housewarming were sent respectively. Finally, a congratulatory gift was sent in the name of the Executive Committee.
 
-　　头目们一时间还弄不清澳洲人这里的体系，有人以为这“执委会”大约是澳洲皇帝的名字，有的稍通文墨，知道这是“内阁”之类的机构的名头。不论怎么样都是难得的恩遇。所以礼物一到，众人还是跪下磕头谢恩。又把礼物恭恭敬敬的奉在堂屋正中。让来道贺的魏爱文哭笑不得。
+For a time, the leaders could not figure out the system of the Australians. Some thought that this "Executive Committee" was probably the name of the Australian emperor, and some who were slightly literate knew that it was the name of an institution like the "cabinet." In any case, it was a rare favor. So as soon as the gifts arrived, everyone knelt down and kowtowed to thank them. They also respectfully placed the gifts in the center of the main hall. This made Wei Aiwen, who had come to congratulate them, not know whether to laugh or cry.
 
-　　送来的礼物都很简单，并没有金银珠宝，古玩字画，全是日常所用之物：柴米油盐、布匹绸缎之类。虽然不值钱，但是对初来乍到，连买东西都不知道去哪里的新人来说却是很贴心的举措。
+The gifts sent were all very simple, with no gold, silver, jewelry, antiques, or calligraphy and paintings. They were all daily necessities: firewood, rice, oil, salt, cloth, and silk. Although they were not valuable, it was a very thoughtful gesture for the newcomers who did not even know where to buy things.
 
-　　最后，由食堂送来了乔迁之喜的酒宴。魏爱文、陈海阳等亲自作陪，气氛十分热烈。登陆之后给予的种种优待，让大家很是感激。
+Finally, the cafeteria sent a housewarming banquet. Wei Aiwen, Chen Haiyang, and others personally accompanied them, and the atmosphere was very warm. Everyone was very grateful for the various preferential treatments given after landing.
 
-　　随后就是隔三差五的开展“学习”。学习的内容不外乎是看电影上课。外加当年共党搞“改造思想”的时候屡试不爽的“参观”。唯一遗憾的是穿越集团没有这么多的工矿企业能给他们看，而且这些企业的规模大多看起来也实在有些寒伧。不过就是有限的几家工厂表现出来的半近代化的生产能力就已经够给中古时代的人以足够的震撼了。
+Then there were "study sessions" every three to five days. The content of the study was nothing more than watching movies and attending classes, plus the "visits" that the Communist Party had repeatedly used to "reform ideology" in those years. The only regret was that the transmigrator group did not have so many industrial and mining enterprises for them to see, and the scale of these enterprises was mostly a bit shabby. However, the semi-modern production capacity displayed by the limited number of factories was enough to give the people of the Middle Ages a sufficient shock.
 
-　　魏爱文给每个头目都配了一个政治部培训班出来的学生，名义上是担任翻译，让他们能够听懂宣讲的内容，本质上进行一对一的渗透式宣传。
+Wei Aiwen assigned a student from the political department's training class to each leader, nominally as a translator, so that they could understand the content of the lectures, but in essence, it was a one-on-one infiltration-style propaganda.
 
-　　他们还参观了陆海军的操练，火炮打靶，步兵队形操练。但是这些玩意除了火炮射击时候的强大威力之外反而没有工厂给他们的印象深刻，纯粹的看热闹而已——多数头目对兵事所知甚少。就算海战战术也不过了了，基本就是跟着旗号冲锋，远的用炮打，近的放火箭，最后跳帮肉搏战。
+They also visited the drills of the army and navy, artillery target practice, and infantry formation drills. But these things, except for the powerful force of the artillery fire, did not impress them as much as the factories. It was purely for the excitement—most of the leaders knew very little about military affairs. Even their naval combat tactics were mediocre, basically just following the flag to charge, using cannons at a distance, firing rockets at close range, and finally boarding and fighting hand-to-hand.
 
-　　除了参观、看电影，还开展讲座。虽然他们大多目不识丁，但是现阶段对其并不搞扫盲——这些人都是无拘无束惯了的人，对知识的重要性也了解不够。如果要其象学生一样一本正经的坐着上课是不行的。所以讲座是座谈会式的，以思想灌输为主。除了魏爱文本人，还有林佰光、邬德、陈海阳等人轮流到来。座谈会一般选择在农场的凉亭里举行，有茶水有点心果品，吃吃喝喝，再聊聊天。在这样的聊天中把穿越集团的观点慢慢的灌输下去，时而还要答疑解惑。从科普方面的铁船为什么能漂在水上到“澳洲人”是不是要造反打天下——对于是不是造反的问题，魏爱文总是神秘的笑而不答。
+In addition to visits and watching movies, lectures were also held. Although most of them were illiterate, at this stage, they were not taught to read—these people were used to being unrestrained, and they did not understand the importance of knowledge enough. It was impossible for them to sit in class like students. Therefore, the lectures were in the form of symposiums, mainly for ideological indoctrination. In addition to Wei Aiwen himself, Lin Baiguang, Wu De, Chen Haiyang, and others also took turns to come. The symposiums were generally held in the pavilion of the farm, with tea, snacks, and fruits, eating, drinking, and chatting. In such chats, the views of the transmigrator group were slowly instilled, and from time to time, they had to answer questions and clear up doubts. From the scientific popularization of why iron ships can float on water to whether the "Australians" are going to rebel and conquer the world—for the question of whether to rebel, Wei Aiwen always smiled mysteriously and did not answer.
 
-　　这种平等互信的谈话方式给头目们很大的好感——他们差不多都是穷苦人出身，见惯了官府的横暴，海盗集团里虽然有些“民主”气氛，但是家族式的管理体制下，身为旁系外姓，对集团内部的种种不公的怨言也只能藏在心里。现在这样大伙摊开了谈话，畅所欲言，颇有痛快淋漓的感觉。许多人不由得把对诸彩老的不满都发泄出来。魏爱文边听边点头，想这会在检疫营里，估计水手们也在发泄对他们这伙人的不满吧。
+This equal and trusting way of talking gave the leaders a great deal of goodwill—they were almost all from poor backgrounds and were used to the tyranny of the government. Although there was some "democratic" atmosphere in the pirate group, under the family-style management system, as collateral relatives with different surnames, they could only hide their complaints about the various injustices within the group in their hearts. Now that everyone was talking openly and freely, they felt a sense of relief. Many people could not help but vent their dissatisfaction with Zhu Cailao. Wei Aiwen listened and nodded, thinking that at this moment in the quarantine camp, the sailors were probably also venting their dissatisfaction with them.
