--- a/_posts/2010-11-14-3-21000.md
+++ b/_posts/2010-11-14-3-21000.md
@@ -1,59 +1,59 @@
 ---
 layout: post
-title: 第二百一十节 夏末
+title: "Section 210: Late Summer"
 category: 3
 path: 2010-11-14-3-21000.md
 tag: [normal]
 ---
 
-　　夏季渐渐过去了。1629年的夏天临高县城显得十分安静。一则天气炎热，城里人不想活动，农民忙着在烈日下夏收夏种，车水耘田，没时间进城。二来这座城市在经济上已经被逐渐被边缘化了，城里本来就不多的商户们逐渐被吸引到了东门市去开店做买卖，老百姓和士绅们也渐渐地习惯了这个新的市场，不管是买东西，还是闲着无事的散步闲逛，东门市可买的东西还有购物的环境上都比县城好得多。
+Summer was gradually passing. The county town of Lingao seemed very quiet in the summer of 1629. For one thing, the weather was hot, and the people in the city did not want to move. The farmers were busy with the summer harvest and planting under the scorching sun, plowing the fields with water buffaloes, and had no time to go to the city. Secondly, this city had been gradually marginalized economically. The few merchants in the city were gradually attracted to Dongmen Market to open shops and do business. The common people and the gentry also gradually got used to this new market. Whether it was for shopping or for a leisurely stroll, Dongmen Market had much more to offer in terms of goods and shopping environment than the county town.
 
-　　城里的几户手工业匠人全部歇业关门了，包括县里唯一的铁匠铺。他们的产品和穿越者根本无法相比，甚至在价格上也完败。终于在自由竞争中落败。如今都不在县城了，据说在髡人那里当工匠，待遇不错。据看到的人说原本穷得叮当响的箍桶匠居然还娶到了个老婆，还带了四五个徒弟，天天在那里箍桶。
+The few handicraft workshops in the city had all closed down, including the only blacksmith shop in the county. Their products could not be compared with those of the transmigrators at all, and they were even completely defeated in terms of price. They were finally defeated in the free competition. Now they are no longer in the county town. It is said that they are working as craftsmen for the 髡人 (kūn rén - a derogatory term for the transmigrators), and the treatment is not bad. According to those who have seen it, the cooper who was originally so poor that he was penniless even got a wife, and also took on four or five apprentices, and is there every day making barrels.
 
-　　城里唯一还显得稍微热闹些的地方，就剩下润世堂了。自从润世堂的东家去了次大陆之后，原本一直安静沉寂的润世堂忽然热闹起来，添了许多外来的药工干活。一娄子一娄子的药材运进去，运出去一箱子一箱子的成药。大家都说润世堂的东家杨世祥这下是发了。每十天一次，就会有几大车的货物运到博铺去，装的是润世堂最新制造的诸葛行军散和避瘟散——据说在广州一带卖得很火。这两种药在临高也大获好评，特别是价廉物美的避瘟散，许多人是人手一瓶的带在身上，成了夏季常备的平安药。就算实在买不起的，到东门市的教堂门口也能要得到——代价是去听里面的洋和尚说一段经。
+The only place in the city that still seemed a little lively was Runshitang. Since the owner of Runshitang went to the mainland, the originally quiet Runshitang suddenly became lively, and many outside medicine workers were added. Baskets of medicinal materials were transported in, and boxes of finished medicines were transported out. Everyone said that Yang Shixiang, the owner of Runshitang, had made a fortune this time. Every ten days, several large carts of goods would be transported to Bopu, loaded with the newly manufactured Zhuge Xingjun San and Biwen San of Runshitang—it was said that they were selling very well in the Guangzhou area. These two medicines were also highly praised in Lingao, especially the cheap and good Biwen San. Many people carried a bottle with them, and it became a standing peace medicine in summer. Even if you really couldn't afford it, you could get it at the entrance of the church in Dongmen Market—the price was to go inside and listen to the foreign monk preach a passage of scripture.
 
-　　洋和尚人又和气，说的故事也挺动听，还会拿出好看的画册来。就算不为了药物，权作消遣也是个不错的选择。
+The foreign monk was also very kind, and the stories he told were quite moving. He would also take out beautiful picture albums. Even if it wasn't for the medicine, it was a good choice for entertainment.
 
-　　消息灵通的人说，润世堂之所以能咸鱼翻身都是因为杨掌柜搭上了髡人中一位“神医”的路子，制药的方子就是他拿出来的。听闻还获得了在钱财上的支援。
+People with good sources of information said that the reason why Runshitang was able to turn the tables was because Shopkeeper Yang had made a connection with a "divine doctor" among the 髡人 (kūn rén). The prescription for the medicine was given by him. It was heard that he also received financial support.
 
-　　这澳洲人可真是善财童子啊。县里面脑子活络些的人都有这样的感觉，就说拿开全福商行的林全安吧，原本只是个挑担贩货的福建佬，现在已经成了本县的大财主，出入都是四人轿子，全府到处跑，现在又有了杨世祥……很多人的心思开始活络起来了。有人便在打听用什么法子可以搭上穿越集团里的人。
+These Australians are really good-luck boys. People with active minds in the county all had this feeling. Take Lin Quan'an of the Quanfu Commercial Firm, for example. He was originally just a Fujianese who carried goods on a shoulder pole. Now he has become a big rich man in the county, and he goes in and out in a four-person sedan chair, traveling all over the prefecture. Now there is Yang Shixiang... Many people's minds began to become active. Some people were inquiring about what methods could be used to get in touch with the people in the transmigrator group.
 
-　　临高的中枢所在县衙，整个夏季里也无精打采，大门紧闭，看门的两个衙役也躲在门洞里乘凉。眼下已经是征收夏粮的时候了，但是每逢秋天县衙门口耀武扬威的书办、胥吏和“粮差”都不见踪影——本地的夏粮额度不过区区三十二石的份额。就算翻倍浮征也没多少油水可言。自然都不起劲。
+The yamen, the center of Lingao, was also listless throughout the summer. The main gate was tightly closed, and the two yamen runners guarding the gate were also hiding in the gatehouse to cool off. It was already the time to collect the summer grain tax, but the clerks, runners, and "grain tax collectors" who used to show off their power at the yamen gate every autumn were nowhere to be seen—the local summer grain quota was only a mere thirty-two shi. Even if it was doubled, there was not much profit to be made. Naturally, no one was enthusiastic.
 
-　　县里的大小官吏们都从这城里沉寂的空气里嗅出了些什么，感到心里不安，但是到底是什么让他们心神不宁，没有一个人说得清楚。
+The officials, big and small, in the county all smelled something from the silent air in the city and felt uneasy in their hearts, but no one could say clearly what was making them uneasy.
 
-　　现在他们有什么不满意的呢？土匪已经基本上肃清了；大规模的海盗的登陆抢劫完全绝迹，光这两条，在吴明晋等人看来就已经是了不得的政绩了，至于在县城门口经过，不断延伸的道路，更是他想了好几年都没能办成的善政。
+What were they dissatisfied with now? The bandits had basically been wiped out; large-scale pirate landings and robberies had completely disappeared. In the eyes of Wu Mingjin and others, these two things alone were already remarkable political achievements. As for the road that passed by the county town gate and was constantly extending, it was a good policy that he had been thinking about for several years but had not been able to accomplish.
 
-　　就个人来说，每个人都过得不错。上到吴明晋，下到衙门里的一般小吏，每个月都能按照等级表从髡人那里领到一笔“流通券”——虽然不是白花花的银子，可是拿到东门市去能花出去。吴明晋原本对这种“伪钞”不屑一顾，但是自从他喜欢上了烟卷这种味道淳厚不冲鼻子，吸取又很方便的东西之后，这种“伪钞”就体现出了很大的价值，东门市上卖烟卷的铺子只收这种钱。
+Personally, everyone was doing well. From Wu Mingjin down to the ordinary clerks in the yamen, everyone could receive a sum of "circulation coupons" from the 髡人 (kūn rén) every month according to the grade table—although it was not white silver, it could be spent in Dongmen Market. Wu Mingjin originally disdained this kind of "counterfeit money," but since he fell in love with the mellow and non-irritating taste of cigarettes, and the convenience of smoking them, this "counterfeit money" showed great value. The shops selling cigarettes in Dongmen Market only accepted this kind of money.
 
-　　而他从琼山接回来的老婆孩子，对澳洲货的喜爱程度远比他强。首先是他老婆对玻璃镜子爱不释手，其次自从熊卜佑送了一对瓷瓶包装的天厨“秘制味精”之后，厨房里做菜肴就非放这个不可了。继而又送来了各种天厨的酱菜，这对客居这荒蛮之地的吴太太来说真如久旱逢甘霖——吴明晋是南直隶人，对酱菜、糟蛋这种东西有天然的好感，虽然这些在南直隶很普遍又便宜，但是在临高可就是稀罕物了。吴明晋吃了几片“扬州酱乳黄瓜”，觉得味虽然不是很对，但是风味大致还一样，颇起了一番“莼鲈之思”。还即兴写了几首诗。一时间雅兴大发，遣人去叫请王师爷一起来吟诗，却被告知王师爷带着新纳的小妾出门去了。让吴明晋很是扫兴。
+And his wife and children, whom he had brought back from Qiongshan, loved Australian goods far more than he did. First, his wife was inseparable from the glass mirror. Second, since Xiong Buyou sent a pair of porcelain bottles of Tianchu's "secretly made MSG," this had to be added to the dishes in the kitchen. Then, various kinds of Tianchu's pickles were sent. For Mrs. Wu, who was a guest in this barren land, it was like a timely rain after a long drought—Wu Mingjin was from Nanzhili and had a natural fondness for things like pickles and preserved eggs. Although these were common and cheap in Nanzhili, they were rare things in Lingao. Wu Mingjin ate a few slices of "Yangzhou pickled cucumber" and felt that although the taste was not quite right, the flavor was roughly the same, which aroused a feeling of "longing for home." He even wrote a few poems on the spur of the moment. For a time, he was in a great mood and sent someone to invite Master Wang to come and recite poems with him, but was told that Master Wang had gone out with his newly taken concubine. This made Wu Mingjin very disappointed.
 
-　　不过髡贼们却鬼得很，虽然经常送东西，却不肯重样。味精、酱菜、糟蛋没了巴巴的指望熊卜佑再送，却没了踪影。要买得上东门市去。吴明晋只好把自己的烟钱压缩一部分给老婆去开销。
+However, the 髡贼 (kūnzéi - 髡 bandits, a derogatory term for the transmigrators) were very cunning. Although they often sent things, they never sent the same thing twice. After the MSG, pickles, and preserved eggs were gone, he eagerly hoped that Xiong Buyou would send more, but there was no sign of them. To buy them, he had to go to Dongmen Market. Wu Mingjin had no choice but to cut down on his cigarette money to cover his wife's expenses.
 
-　　随着熊卜佑送礼物的次数愈来愈多，吴明晋发觉自己买烟的钱日趋紧张起来。他的办法就是把朝廷发给他的俸禄——糙米让佣人拿到东门市上去兑换成流通券，这种做法实在让他自己都觉得匪夷所思。不过，流通券确实是好东西啊。
+As Xiong Buyou sent gifts more and more frequently, Wu Mingjin found that his cigarette money was becoming increasingly tight. His solution was to have his servant take the coarse rice that the court gave him as a salary to Dongmen Market to exchange for circulation coupons. This practice really made him feel incredible. However, circulation coupons were indeed good things.
 
-　　不过这“澳洲货”的价格也太高了！他吸的原来是“圣船”牌烟卷，十支白白的烟卷，每支上还附带着一个小小的竹管做的烟嘴，盒子上有艘船的图案——吴明晋知道这就是博铺那艘巨船。圣船牌的价格是每包6元。按照德隆粮行的牌价，差不多合到四五斤糙米！
+But the price of these "Australian goods" was too high! He used to smoke "Holy Ship" brand cigarettes. Ten white cigarettes, each with a small bamboo mouthpiece, and a picture of a ship on the box—Wu Mingjin knew that this was the giant ship in Bopu. The price of the Holy Ship brand was 6 yuan per pack. According to the price list of the Delong Grain Store, it was almost equivalent to four or five catties of coarse rice!
 
-　　小小的烟卷一点，就是半斤米啊！吴明晋觉得自己实在是太奢侈了，于是关照佣人买便宜些的。佣人便买了一种“百仞滩”牌烟卷。烟得味道倒也差不多，只是没了竹管的烟嘴。烟盒包装也变得简单多了。价格不过3元。抽了几天之后，他发觉县衙里的书办们抽得也是这种烟。再仔细观察，原来这纸烟还有不同的字号。最贵的是“圣船”，其次是“百仞滩”，接着还有一种1元的叫“高山岭”，最后是“大生产”，只要50分就可以。贩夫走卒们就抽这样的
+A small cigarette, when lit, was half a catty of rice! Wu Mingjin felt that he was too extravagant, so he told his servant to buy cheaper ones. The servant then bought a brand of cigarettes called "Bairen Beach." The taste of the cigarettes was about the same, but there was no bamboo mouthpiece. The cigarette box packaging was also much simpler. The price was only 3 yuan. After smoking for a few days, he found that the clerks in the county yamen also smoked this kind of cigarette. Upon closer observation, he found that there were different brands of cigarettes. The most expensive was "Holy Ship," followed by "Bairen Beach," then there was a 1-yuan one called "Gaoshanling," and finally "Great Production," which only cost 50 cents. The peddlers and porters smoked this kind.
 
-　　吴明晋身为本县的最高长官，抽和衙门书办一样档次的烟卷，实在是有失体统。于是他只好继续抽“圣船”了。
+As the highest official in the county, it was really a loss of dignity for Wu Mingjin to smoke the same grade of cigarettes as the yamen clerks. So he had to continue to smoke "Holy Ship."
 
-　　最近东门市又在发卖冰块——此事引起了极大的轰动，全临高的人都想知道髡贼的冰块是哪里来的。临高的冬季是不结冰的，本地也没有能够积雪藏冰的深山。髡贼看起来不但有冰，而且似乎来得十分容易，自己用不算，还能发卖。流通券10分钱就能买一大块回来。
+Recently, Dongmen Market was also selling ice cubes—this caused a huge sensation. Everyone in Lingao wanted to know where the 髡贼 (kūnzéi) got their ice. The winter in Lingao does not freeze, and there are no deep mountains in the local area that can accumulate snow and store ice. The 髡贼 (kūnzéi) not only seemed to have ice, but it also seemed to come very easily. They not only used it themselves, but also sold it. A large block could be bought for 10 cents of circulation coupons.
 
-　　一大块冰放在厅堂里立马就觉得清凉许多，用冰块来冰镇水果更是好。熊卜佑又让人送来了几小坛子的酸梅卤——喝上一碗冰镇酸梅汤也是见美事——只是得吴明晋的流通券开支进一步扩大了。
+A large block of ice placed in the hall immediately made it feel much cooler. It was even better to use ice cubes to chill fruits. Xiong Buyou also sent a few small jars of sour plum sauce—drinking a bowl of iced sour plum soup was also a beautiful thing—but it further increased Wu Mingjin's expenditure on circulation coupons.
 
-　　吴县令相当聪明地察觉到，这是穿越集团在用种种“奇巧淫技”的物质享受诱惑他和他全家上钩。真金白银不送，送来的都是享用的玩意，这些东西还只有髡贼们才有。
+County Magistrate Wu was smart enough to realize that this was the transmigrator group luring him and his whole family with all kinds of "strange and ingenious" material enjoyments. They didn't send real gold and silver, but all kinds of things for enjoyment, and these things were only available from the 髡贼 (kūnzéi).
 
-　　吴明晋暗自冷笑：尔等以为我不知道你们的伎俩么！
+Wu Mingjin sneered secretly: Do you think I don't know your tricks!
 
-　　知道归知道，但是需求却是无法阻挡。所谓由俭入奢易由奢入俭难。一个人习惯了生活享受之后，再要改变就变得很困难。比如他重新抽旱烟的企图就遭到了失败，又辣又苦，还尽冒烟油子，抽了几口之后他就发怒了，直接把旱烟杆一甩。吓得听差跪地上不敢言声。最后还是给他从东门市买烟了事。
+Knowing was one thing, but the demand was unstoppable. As the saying goes, it is easy to go from frugality to luxury, but difficult to go from luxury to frugality. After a person gets used to enjoying life, it becomes very difficult to change. For example, his attempt to smoke a dry pipe again failed. It was spicy and bitter, and it also produced a lot of smoke oil. After a few puffs, he got angry and threw the dry pipe away. The servant who was listening was so scared that he knelt on the ground and dared not say a word. In the end, he bought cigarettes for him from Dongmen Market.
 
-　　至于冰块，就算他能忍受，老婆孩子却不能理解他的苦衷，非要不可。儿子居然提议：派人要澳洲人每天送些冰块过来——想来他们也不会不送。气得吴明晋只想抽他几个嘴巴。
+As for the ice cubes, even if he could endure it, his wife and children could not understand his difficulties and insisted on having them. His son even suggested: send someone to ask the Australians to send some ice cubes every day—they probably wouldn't refuse. Wu Mingjin was so angry that he wanted to slap him a few times.
 
-　　自己买冰当然可以，只是烟钱日渐减少……现代男人经常遇到的烟钱不足的问题，吴明晋也遇到上。
+Of course, he could buy ice himself, but his cigarette money was decreasing day by day... The problem of insufficient cigarette money that modern men often encounter, Wu Mingjin also encountered.
 
-　　钱，他自然是有的。临高虽然边鄙小县，每年夏秋两赋里县令该得的一份照例也是有的。但是过去积攒的银子已经陆续送回老家去了。夏赋没什么花头，秋赋还没到时候，一时半会除了每月可怜的一点俸禄之外，也没地方闹钱去——吴明晋自认还是个“有良心”的县官，捞黑心钱，贪赃枉法的事情，他一般是不会做的。
+Of course, he had money. Although Lingao was a remote and small county, the county magistrate's share of the summer and autumn taxes was still there as usual. But the silver he had accumulated in the past had been sent back to his hometown one after another. There was nothing to be gained from the summer tax, and the autumn tax was not yet due. For a while, besides the pitiful little salary every month, there was no other place to get money—Wu Mingjin considered himself a "conscientious" county magistrate. He would generally not do things like taking ill-gotten gains or bending the law for personal gain.
 
-　　当然了，只要他稍有表示，和吴亚叹叹苦经，估计髡贼们十有八九就会主动的把“津贴”提高一些。不过吴县令除了“有良心”之外，还有那么一点“骨气”——他绝不做这样近乎“乞讨”的事情来。
+Of course, as long as he showed a little sign, and complained to Wu Ya, the 髡贼 (kūnzéi) would probably take the initiative to increase his "allowance." But besides being "conscientious," County Magistrate Wu also had a little bit of "backbone"—he would never do such a thing that was close to "begging."
 
-　　没想到几天后熊卜佑居然很善解人意的送来了一叠冰票，凭票到东门市取冰，每票一块。一个月三十块。吴明晋的情绪十分复杂：澳洲人的贿赂，他没有勇气拒绝，但是接受下来——他觉得自己陷得越来越深了。不仅是他，也包括全县的上下僚属们。
+Unexpectedly, a few days later, Xiong Buyou was very considerate and sent a stack of ice tickets. With each ticket, you could get a block of ice from Dongmen Market. Thirty blocks a month. Wu Mingjin's emotions were very complicated: he did not have the courage to refuse the Australians' bribes, but accepting them—he felt that he was sinking deeper and deeper. Not only him, but also all the officials and subordinates in the county.
