--- a/_posts/2010-11-15-3-21100.md
+++ b/_posts/2010-11-15-3-21100.md
@@ -1,85 +1,85 @@
 ---
 layout: post
-title: 第二百一十一节 王赐
+title: "Section 211: Wang Ci"
 category: 3
 path: 2010-11-15-3-21100.md
 tag: [normal]
 ---
 
-　　不仅他有冰块，正如每个月的津贴一样，冰票也是按着等级致送给县衙上下，但是县里的其他人似乎都没有他这种忧虑。县里和髡贼们办交涉最多的吴亚每天在衙署里吃吃喝喝。这个老油子喝的居然是髡贼的什么浪木酒，吴亚是去了一次百仞城之后喜欢上这种酒和它那奇怪的喝法的，兑上些咝咝冒泡的酸水，再加上碎冰。有时候还会加上几片薄荷叶。据说喝下去消暑解渴，很是舒适。还屡次向他推荐，吴明晋觉得这种喝法，水火相交，冰火相攻，未免不合养生之道，敬谢不敏了。
+Not only did he have ice, but just like the monthly allowance, the ice tickets were also given to the county yamen according to rank. However, no one else in the county seemed to have his worries. Wu Ya, who dealt with the 髡人 (kūn rén - a derogatory term for the transmigrators) the most in the county, ate and drank in the yamen every day. This old fox actually drank the 髡人's (kūn rén's) "langmu" wine. Wu Ya had taken a liking to this wine and its strange way of drinking after a trip to Bairen City. It was mixed with some hissing and bubbling sour water, plus crushed ice. Sometimes a few mint leaves were added. It was said that drinking it was very comfortable for relieving summer heat and quenching thirst. He had recommended it to him several times. Wu Mingjin felt that this way of drinking, with water and fire intersecting, and ice and fire attacking each other, was not in line with the way of health preservation, so he politely declined.
 
-　　至于典史，更是不得了，吴明晋生气的想：也不知道他是在做谁的官。典史老爷住在衙署里，对髡贼的要求简直就是随叫随到。鞍前马后的忙个不亦乐乎。髡贼们去南宝开矿，典史带着衙役一路开道，鞍前马后忙个不亦乐乎，说办文书就办文书，说做地契就做地契。
+As for the county registrar, it was even more incredible. Wu Mingjin thought angrily: I don't know whose official he is. The registrar lived in the yamen and was at the beck and call of the 髡人 (kūn rén). He was busy running errands for them. When the 髡人 (kūn rén) went to Nanbao to open a mine, the registrar led the yamen runners to clear the way, busy running errands. If they said to prepare documents, he would prepare documents. If they said to make land deeds, he would make land deeds.
 
-　　过去你怎么不这么卖力！吴明晋怨恨的想。从典史家里最近日渐宽气的吃穿用度和每“星期”——这是髡贼们的计算方式——都要去东门市一趟来看，所谓有钱能使鬼推磨这话还真是不错。
+Why weren't you so diligent in the past! Wu Mingjin thought resentfully. From the increasingly comfortable food and clothing of the registrar's family and his trip to Dongmen Market every "week"—this was the 髡人's (kūn rén's) way of calculating—it was true that money can make the devil push the millstone.
 
-　　县里的教谕王赐，是个最方正不过的夫子了。吴明晋没料到他也会去找髡贼帮忙。如今西门外的几百亩学田已经算是易手了。他偷偷的在城墙上看了几回——学田的模样大为改观，让他且喜且忧，喜的是自己有心要扶助临高的文气，却一直拿不出钱来。现在学田经过这番整顿，县学的经费是有了着落。忧的是，髡贼靠着这手，不免就插手到士子当中去了。
+Wang Ci, the county's educational official, was the most upright scholar. Wu Mingjin did not expect that he would also ask the 髡人 (kūn rén) for help. Now the hundreds of mu of school land outside the West Gate had changed hands. He secretly watched from the city wall several times—the appearance of the school land had greatly changed, which made him both happy and worried. He was happy because he had always wanted to support the literary atmosphere of Lingao, but had never been able to come up with the money. Now that the school land had been rectified, the county school's funds were secured. He was worried because the 髡人 (kūn rén), with this move, would inevitably interfere with the scholars.
 
-　　泥腿子老百姓的想法，吴明晋是不甚关心的。虽然他也知道“民为贵君为轻”、“水能载舟亦能覆舟”、“民心向背”之类的话，倒是士子们的态度是他最为忧虑的，若是读书明事理的人也对髡贼有了好感，甚至出了几个背叛名教的奸恶之徒，这人心就不好办了。古人虽然没有明确的“意识形态”上的理论，但是基本的道理还是明白的。所以他对此一直很担心。
+Wu Mingjin was not very concerned about the thoughts of the common people. Although he also knew sayings like "the people are precious and the ruler is light," "water can carry a boat and can also capsize it," and "the hearts of the people," the attitude of the scholars was his biggest worry. If the people who read and understood reason also had a good impression of the 髡人 (kūn rén), and even a few traitors who betrayed the teachings of the sages appeared, it would be difficult to manage the hearts of the people. Although the ancients did not have a clear theory of "ideology," they still understood the basic principles. So he had always been very worried about this.
 
-　　吴明晋没读过太多的史籍，但是资治通鉴之类的总是看过的。但凡造反作乱，一旦有读书人厕身其中，流毒祸害就会百倍千倍于几个泥腿子揭竿而起。
+Wu Mingjin had not read too many history books, but he had always read things like the "Zizhi Tongjian." Whenever there was a rebellion, once scholars were involved, the poison and harm would be a hundred or a thousand times greater than a few peasants rising up.
 
-　　自古读书人厕身为贼也不乏其例。据说假髡中也颇有几个读书人——真是斯文扫地！吴明晋忽然警觉起来——这王教谕会不会也经受不住髡贼的利诱？这可是了不得的大事！临高是个小县城，全县生员名额不过三十个，只要有几个秀才卖身投靠……
+There were not a few examples of scholars becoming rebels in ancient times. It was said that there were also quite a few scholars among the fake 髡人 (kūn rén)—what a disgrace to the literati! Wu Mingjin suddenly became alert—would this Educational Official Wang also be unable to resist the temptation of the 髡人 (kūn rén)? This was a major event! Lingao was a small county town, and the quota for students in the whole county was only thirty. If only a few xiucai sold themselves into service...
 
-　　吴明晋简直不敢想下去了，秀才从贼，本朝貌似还没开过这个先例。想到这里他坐卧不安，赶紧吩咐人去找王教谕。
+Wu Mingjin simply dared not think about it anymore. A xiucai becoming a rebel, it seemed that there was no precedent for this in this dynasty. Thinking of this, he was restless and hurriedly ordered someone to find Educational Official Wang.
 
-　　王赐这会正从西门外进城来——一路走来，不时的嗟叹。
+At this moment, Wang Ci was just entering the city from outside the West Gate—he sighed from time to time as he walked.
 
-　　他是去吊孝的。县里的一个“附学”生员刚刚去世。作为师长，这是非去不可的。好在现如今澳洲人路修得好，这家人家又离大路不甚远，一来一去，居然只用了一天时间。要在过去，非得第二天早晨才能回县了。
+He was going to offer condolences. A "fuxue" student in the county had just passed away. As a teacher, it was a must for him to go. Fortunately, the road built by the Australians was good now, and this family was not far from the main road. It only took one day to go back and forth. In the past, he would not have been able to return to the county until the next morning.
 
-　　路虽然好走，王赐的心情却很沉重。去世的生员不过四十出头而已。他去吊唁的时候，逝者留下一对孤儿寡母十分可怜，这家的家境很是不堪——原来也不过是靠着开个私塾，收几个孩子开蒙读书维持生计而已。县里的膏火银子又是多年发不出来——若是能有钱米贴补，兴许他也不会死。
+Although the road was easy to walk, Wang Ci's mood was very heavy. The deceased student was only in his early forties. When he went to offer condolences, the deceased left behind a pair of orphans and a widow who were very pitiful. The family's situation was very bad—originally, they only made a living by opening a private school and teaching a few children to read. The county's allowance for scholars had not been issued for many years—if there had been money and rice to supplement, perhaps he would not have died.
 
-　　临高这里，本来文气就弱，这样又死掉了一个，虽然名额空了，自然会有人考上替补，但是本县原本读书人就不多……
+Here in Lingao, the literary atmosphere was already weak. Now another one had died. Although the quota was vacant and someone would naturally be admitted to fill it, there were not many scholars in the county in the first place...
 
-　　一般来说，古代凡是走上读书应试道路的人，家里不会是赤贫的状态，在农村，起码也得是个中农以上才行。但是人一读上书，家里就失去了一个壮劳力，如果家中人口不多，或者遇到了什么三灾六病的，很容易陷入到贫困状态里。
+Generally speaking, in ancient times, those who embarked on the road of studying for the imperial examinations would not be in a state of extreme poverty at home. In the countryside, they had to be at least middle peasants or above. But once a person started to study, the family would lose a strong laborer. If the family was small, or if they encountered some disasters or illnesses, it was easy to fall into poverty.
 
-　　临高县里的读书人，经济状态欠佳的就有不少。不仅是秀才穷，没份有领膏火银子的童生更穷，上次县考的时候，不少童生都是鹑衣百结，形同乞丐一般——除了秀才们要救济，童生是读书人的根苗，也得要补助一些。
+There were quite a few scholars in Lingao County whose economic situation was not good. Not only were the xiucai poor, but the tongsheng who were not entitled to receive the allowance were even poorer. During the last county examination, many tongsheng were in rags, looking like beggars—besides the xiucai who needed relief, the tongsheng were the root of the scholars, and they also needed some subsidies.
 
-　　县里自然是拿不出钱来了，士绅的捐助也用得差不多了，向他们开口的次数太多，王赐也实在没脸再去了。看来只有等秋收之后，学田里的秋粮下来，学的钱米就能多一些了吧。王赐想。
+The county naturally could not come up with the money. The donations from the gentry were almost used up. Wang Ci had asked them too many times, and he was really too ashamed to go again. It seemed that he could only wait until after the autumn harvest, when the autumn grain from the school land came down, and the school's money and rice would be more. Wang Ci thought.
 
-　　走过县城的西门外，看到修缮一新的学田庄的时候，他就会犯嘀咕——自己这步到底是对还是错？
+When he walked past the West Gate of the county town and saw the newly renovated school farm, he would wonder—was this step right or wrong?
 
-　　从地里的情况来说，这学田的面貌是王赐自打到临高任职以来最好的时候，绿油油的秧苗，整齐的田埂和水渠，园子地里新搭的篱笆和上面缠绕着正盛开的南瓜花，这番美丽的田园风景，在学田里他从来就没见过——见到的只是大片荒芜的田地和种得半死不活的庄稼。
+From the situation in the fields, the appearance of this school land was the best since Wang Ci came to Lingao to take office. The green seedlings, the neat ridges and ditches, the newly built fences in the garden and the pumpkin flowers in full bloom on them, he had never seen such a beautiful pastoral scene in the school land—what he had seen was a large area of barren land and crops that were half-dead.
 
-　　但是再看那干脆就修到了西门口的道路，还有城门外刚刚耸立起来的堡垒式的房子，这房子是澳洲人为学田的佃户们修建的。房子修得很是考究——居然是砖瓦的房子！王赐进去过好几次，里面有晒场、有厕所、有牲口棚还有水井，一应生活设施不但应有尽有，而且布局之合理，使用之方便，都是他前所未见的。当然里面住得不止是佃户，还有澳洲人从大陆上成批搜罗来的长工之类的人物，也在种学田。
+But looking at the road that was simply built to the West Gate, and the fortress-like houses that had just been erected outside the city gate, these houses were built by the Australians for the tenants of the school land. The houses were very well built—they were actually brick and tile houses! Wang Ci had been in several times. There was a drying yard, a toilet, a livestock shed, and a well. All the living facilities were not only complete, but also the layout was reasonable and the use was convenient, which he had never seen before. Of course, it was not just the tenants who lived there. There were also long-term workers and other people who the Australians had gathered in batches from the mainland, who were also planting the school land.
 
-　　虽然王赐看不出到底有什么不妥，但是眼看着这座小寨子焕然一新的矗立在离城门不到半里地的地方，他心里总觉得不安。
+Although Wang Ci could not see what was wrong, he always felt uneasy in his heart when he saw this small stockade standing brand new less than half a li from the city gate.
 
-　　正想着，路上遇到了路大，只见这学田的佃户庄头正推着辆全新的手推车在新铺好的机耕路上走着，车上装着两个封着盖子的大木桶。远远得飘来一股说不清楚的气味，有点象大粪但是要刺鼻的多了。
+As he was thinking, he met Lu Da on the road. The head of the tenants of the school land was pushing a brand-new wheelbarrow on the newly paved machine-plowed road. There were two large wooden barrels with lids on the cart. A strange smell drifted from afar, a bit like manure but much more pungent.
 
-　　看到王教谕过来，路大慌忙把车子停下，恭恭敬敬地站在路边叫了声：“王老爷。”
+Seeing Educational Official Wang coming, Lu Da hurriedly stopped the cart, stood respectfully by the side of the road, and called out, "Master Wang."
 
-　　王赐原本是和这样的泥腿子是没什么话好说的，但是他有心要打听下澳洲人的动向，便微笑道：“好，你这是送粪到地头？”
+Wang Ci originally had nothing to say to such a commoner, but he wanted to inquire about the movements of the Australians, so he smiled and said, "Good, are you sending manure to the fields?"
 
-　　“回老爷的话，这不是粪，是氨水。”路大说。
+"To answer your honor, this is not manure, but ammonia water," Lu Da said.
 
-　　“安水？”
+"Ammonia water?"
 
-　　“是，是从博铺那边运来的，用来肥田，据说比粪尿、豆饼还要好。”
+"Yes, it was transported from Bopu. It is used to fertilize the fields. It is said to be better than manure, urine, and soybean cakes."
 
-　　“这样？”王赐如今对澳洲人的新鲜玩意已经不大会惊讶了。想来这又是他们的新鲜玩意。
+"Is that so?" Wang Ci was no longer surprised by the novelties of the Australians. He thought this was another one of their novelties.
 
-　　“庄稼怎么样？”
+"How are the crops?"
 
-　　“好得很！”路大脸上笑开了花，“我种了几十年的地，从来没见过这么好的庄稼！神了！”
+"Very good!" Lu Da's face bloomed with a smile. "I have been farming for decades, and I have never seen such good crops! It's amazing!"
 
-　　路大兴致勃勃的说起澳洲人种地的许多新鲜事，有些是王赐听说过的，有些则没有。他饶有兴趣地听着澳洲人的种种奇思怪想和他们的各种新奇古怪的玩意。时而觉得好奇，时而又对他们宏大的手笔感到惊讶。
+Lu Da enthusiastically talked about the many new things about the Australians' farming, some of which Wang Ci had heard of, and some he had not. He listened with great interest to the various strange ideas of the Australians and their various novel and strange things. Sometimes he felt curious, and sometimes he was surprised by their grand scale.
 
-　　王赐模模糊糊地感到，澳洲人的厉害之处，还不仅是有许多自己不了解的“奇巧淫技”，更多的是他们的执行力和魄力。
+Wang Ci vaguely felt that the power of the Australians was not only that they had many "strange and ingenious skills" that he did not understand, but also their execution and courage.
 
-　　几百亩的学田，说改造就改造，地翻起来，水渠全部重修。不过一个月时间，学田的面貌就焕然一新——他估计着，要是县里来搞，就算钱粮充裕，吴大令亲自坐镇，没个半年也做不出来。至于他脚下的道路，那更是想都不敢想的事情。
+Hundreds of mu of school land, they said they would transform it, and they did. The land was turned over, and the ditches were all rebuilt. In just one month, the appearance of the school land was completely new—he estimated that if the county were to do it, even if there was sufficient money and grain, and Magistrate Wu personally supervised it, it would not be done in half a year. As for the road under his feet, it was something he dared not even think about.
 
-　　不但敢做，而且能做。这一点，让王赐感到由衷的钦佩。
+Not only did they dare to do it, but they were also able to do it. This point made Wang Ci feel sincere admiration.
 
-　　“百无一用是书生！”他的脑海里忽然闪现出了这样一句话。自己也好，吴大令也好，县里但凡有个功名的人也好，哪个不是饱读诗书，四书五经烂熟于胸的人？为什么县里许多要办的事情，要解决的问题却始终都做不下来呢？光学田的问题，在他手里已经七八年了，他想来想去就是没辙；县里的土匪和道路，吴大令屡次召集士绅们想解决，也没有解决。
+"A scholar is useless!" This sentence suddenly flashed in his mind. Whether it was himself, Magistrate Wu, or anyone in the county with a scholarly title, who was not well-read and familiar with the Four Books and Five Classics? Why were there so many things that needed to be done in the county, and so many problems that needed to be solved, but they could never be done? Just the problem of the school land, it had been in his hands for seven or eight years, and he had thought about it over and over again but could not find a solution; as for the bandits and roads in the county, Magistrate Wu had repeatedly summoned the gentry to try to solve them, but they were not solved.
 
-　　澳洲人一来，好像是刮起了一场台风，顷刻之间，就把这一切都刮得干干净净。
+When the Australians came, it was as if a typhoon had blown, and in an instant, it blew all this away cleanly.
 
-　　开风气之先啊。王赐感叹道。他已经预感到，澳洲人在临高的所作所为，不会只在临高而已。
+A pioneer of a new era. Wang Ci sighed. He had already foreseen that what the Australians were doing in Lingao would not be limited to Lingao.
 
-　　王赐又打听学田庄内部的事情，路大说眼下学田里的佃户，13岁以下的小孩子被送去上学了，食宿都是澳洲人出，不但一日三餐吃得饱，连衣服、被子、鞋子之类的日用品全部是他们供给。孩子基本上就是光着屁股带张嘴去就可以了。
+Wang Ci also inquired about the internal affairs of the school farm. Lu Da said that the children of the tenants in the school land who were under 13 years old had been sent to school. The Australians provided food and lodging. Not only did they have three full meals a day, but also all the daily necessities such as clothes, quilts, and shoes were provided by them. The children basically just had to go with their mouths open.
 
-　　“什么？！”王赐失声惊叫道，“他们在办学？”
+"What?!" Wang Ci cried out in surprise. "They are running a school?"
 
-　　这可大大的刺激了王赐的神经。身为大明临高县教育部门的最高领导，他天天在为县学犯愁，这澳洲人居然不声不响的办起了学校——听路大的口气，似乎办得还很不错！
+This greatly stimulated Wang Ci's nerves. As the highest leader of the education department of Lingao County in the Ming Dynasty, he was worried about the county school every day. These Australians had actually quietly set up a school—from Lu Da's tone, it seemed that it was running very well!
 
-　　“是，”路大奇怪地看着他，“老爷您不知道？小的的二个猴崽子已经念了几个月了。”
+"Yes," Lu Da looked at him strangely. "Didn't you know, sir? My two little monkeys have been studying for several months."
