--- a/_posts/2010-11-3-3-19900.md
+++ b/_posts/2010-11-3-3-19900.md
@@ -1,210 +1,209 @@
 ---
 layout: post
-title: 第一百九十九节 假戏真唱
+title: "Section 199: Turning a Fake Show into a Real One"
 category: 3
 path: 2010-11-3-3-19900.md
 tag: [normal]
 ---
 
-　　从辕门下通过后，面前一下变得豁然开朗起来。先前道路两边密布的供海匪们住宿用的营帐，在这个辕门里再也看不到了，呈现再众人眼前的是一片宽敞空地。高出周围数尺，从四周散落的建筑材料看，这多半是过去水师营寨的衙署的屋基。
+After passing through the gate, the view in front of him suddenly opened up. The tents for the pirates to stay in, which were densely packed on both sides of the road, were no longer visible inside this gate. What appeared before everyone was a spacious open space. It was several feet higher than the surroundings. From the scattered building materials, this was most likely the foundation of the yamen of the former naval camp.
 
-　　在这块屋基上，搭建着一座用各色绫罗绸缎缝制的大帐，很有海盗的豪气。帐门已经全部打开，在门口站立着四个手持大刀的彪形大汉。大帐前的空地上立着一根旗杆，旗杆顶端悬挂的正是那面迎风飘扬的“诸”字的姓字旗。
+On this foundation, a large tent made of various silks and satins was erected, which was very much in the heroic spirit of pirates. The tent door was fully open, and four burly men with large sabers stood at the door. On the open space in front of the large tent stood a flagpole, and at the top of the flagpole hung the surname flag with the character "Zhu" fluttering in the wind.
 
-　　“请！”
+"Please!"
 
-　　林佰光走进中军大帐。直接面对这个纵横海上二十多年，和郑芝龙一样史籍留名的海商兼海盗，心情不免有些紧张。到目前为止穿越集团还没有人真正见过历史上的名人呢。这算是第一个吧。
+Lin Baiguang walked into the central army tent. Facing this sea merchant and pirate who had been roaming the seas for more than twenty years and was as famous in history as Zheng Zhilong, he couldn't help but feel a little nervous. So far, no one in the transmigrator group had actually seen a famous person in history. This was probably the first one.
 
-　　端坐在大帐中央交椅上的，是一个五十多的老者。头发斑白，皮肤黝黑。一双渔民的眼睛闪闪发亮。他穿着奢侈到夸张的南京宝蓝色缎袍，腰束犀角玉带，脚上是软皮靴子。腰里插着一柄土耳其式的镶满珠宝的金柄银鞘小弯刀。
+Sitting on the chair in the center of the large tent was an old man in his fifties. His hair was graying, and his skin was dark. A pair of fisherman's eyes shone brightly. He wore a luxurious to the point of exaggeration Nanjing treasure blue satin robe, a rhinoceros horn and jade belt around his waist, and soft leather boots on his feet. Tucked into his waist was a Turkish-style small scimitar with a gold handle and silver scabbard inlaid with jewels.
 
-　　林佰光的第一念头很奇怪：他穿成这样，不怕热吗？
+Lin Baiguang's first thought was strange: isn't he afraid of the heat dressed like this?
 
-　　心情顿时已经平静下来了，在微微一愣之后，他便回过神来，迅速打量了一下帐中的情形。
+His mood suddenly calmed down. After a slight daze, he came back to his senses and quickly looked around the tent.
 
-　　这个奢侈无比，极有匪气的绸缎大帐，空间广大，但是里面却不伦不类的塞满了东西。各种中西奢侈品摆件杂乱无章的陈列着。本意大概是炫耀财富，结果看起来象有杂货铺一般的感觉。
+This luxurious and very bandit-like satin tent was spacious, but it was filled with things in a disorderly manner. Various Chinese and Western luxury ornaments were displayed in a chaotic manner. The original intention was probably to show off wealth, but the result looked like a grocery store.
 
-　　整个帐中只有不到十个人，分成两列坐在两侧。显然这几个人就是诸彩老大伙里的主要头目了。有男有女，有老有少，人员组成很是复杂。
+There were less than ten people in the entire tent, sitting in two rows on both sides. Obviously, these few people were the main leaders of Zhu Cailao's gang. There were men and women, old and young, and the composition of the personnel was very complex.
 
-　　看清了帐中形势，林佰光径自大踏步走到诸彩老座前面，深深打一躬道：“林佰光见过诸大掌柜的！”
+After seeing the situation in the tent clearly, Lin Baiguang strode straight to the front of Zhu Cailao's seat, bowed deeply and said, "Lin Baiguang pays his respects to the great shopkeeper Zhu!"
 
-　　诸彩老似乎对林佰光很有兴趣，将他上下打量了半天，方才道：“林掌柜是从临高的澳洲人哪里来得？”他说得居然是一口标准的南京官话。
+Zhu Cailao seemed to be very interested in Lin Baiguang. He looked him up and down for a long time before saying, "Shopkeeper Lin is from the Australians in Lingao?" He actually spoke in a standard Nanjing official dialect.
 
-　　林佰光忙答道：“正是，特来请诸大掌柜安！”
+Lin Baiguang hurriedly replied, "That's right, I've come specially to pay my respects to the great shopkeeper Zhu!"
 
-　　“胆子挺大。”诸彩老笑道。开门见山地说道：“你们澳洲人抢了我的东西
-　　，杀了我的人，也没半点表示，一两银子没有就让你过来做什么，给我做醒酒汤？”
+"You're quite brave," Zhu Cailao said with a smile. He got straight to the point: "You Australians have robbed my things and killed my people, and you haven't shown any sign of it. You came over without a single tael of silver. What are you here for, to make me a sobering soup?"
 
-　　帐下的头目们发出一阵不怀好意的笑声。
+The leaders under the tent let out a burst of malicious laughter.
 
-　　林佰光知道江湖豪杰的醒酒汤乃是一道名物，照例是要用人肝做的。这话既包括他的不满，又有恐吓的成分在内。
+Lin Baiguang knew that the sobering soup of the heroes of the martial arts world was a famous thing, and it was usually made with human liver. This statement included both his dissatisfaction and a component of intimidation.
 
-　　“呵呵！我们初来乍到，不辨路途，一时有眼不识泰山冲撞了诸大掌柜的虎威，是我们的不是——”说着林佰光深深一躬，“还请诸大掌柜海涵！”
+"Hehe! We are new here and don't know the way. We have offended the great shopkeeper Zhu's tiger-like might for a moment. It is our fault—" Lin Baiguang bowed deeply and said, "I hope the great shopkeeper Zhu will forgive us!"
 
-　　“好说，”诸彩老还是带着笑容，“虎威不虎威的，倒没什么。你们把苟大全家良贱都宰了，也没什么。只是苟家的存的那些钱粮财货，也总得给我个交代吧？丢块银子到海里，我还听得到个响动，到你们这就没声了？”
+"No problem," Zhu Cailao still had a smile on his face. "It doesn't matter whether it's tiger-like might or not. You killed all of Gou Da's family, both good and bad, and that's nothing. But you have to give me an explanation for the money, grain, and goods that the Gou family had stored, right? If I throw a piece of silver into the sea, I can still hear a sound. But with you, there's no sound at all?"
 
-　　林佰光加上了小心，虽然和诸彩老的谈判只是一个幌子，但是为了让他深信不疑，林佰光还是本着假戏真做的精神准备了谈判资料。他想了想才开口道：
+Lin Baiguang was extra careful. Although the negotiation with Zhu Cailao was just a cover, in order to make him believe it, Lin Baiguang had prepared negotiation materials in the spirit of turning a fake show into a real one. He thought for a moment before speaking:
 
-　　“诸大掌柜明鉴！我们消灭苟家，实在是无心之举，实非有意为之。”林佰光再一次表达了己方没有针对他的敌意，“所以当时放回施掌柜的时候，就曾提出，我澳洲的玻璃货物，在南洋尚无人代销……”
+"Great Shopkeeper Zhu, please understand! Our annihilation of the Gou family was truly unintentional, not on purpose." Lin Baiguang once again expressed that his side had no hostility towards him. "So when we released Shopkeeper Shi at that time, we proposed that our Australian glass goods have no agent in Southeast Asia..."
 
-　　“玻璃也好，镜子也好，都是好东西。”诸彩老一笑，“可是抵不过白花花的银子好使。尊驾以为如何？”诸彩老面色忽然一沉，“少打马虎眼了，说吧！我的条件，你们认不认？”
+"Glass is good, and mirrors are good too," Zhu Cailao smiled. "But they are not as good as white silver. What do you think, Your Excellency?" Zhu Cailao's face suddenly darkened. "Stop beating around the bush and tell me! Do you accept my conditions or not?"
 
-　　“诸大掌柜的事情，我们岂敢怠慢。”林佰光继续打他的太极推手，又注意不要触怒他，免得一时间急火攻心来个“推出去砍了”，自己虽然可以学小说电影里的主人公那样哈哈大笑来挽救自己，但是这个招数在现实中是不是管用只有天知道。
+"How dare we neglect the great shopkeeper Zhu's affairs." Lin Baiguang continued to play his tai chi, but he was also careful not to anger him, lest he get angry and order him to be "taken out and beheaded." Although he could laugh out loud like the protagonist in a novel or movie to save himself, only God knew if this trick would work in reality.
 
-　　“只是有几句话，还要容我禀报——”
+"But there are a few things I have to report—"
 
-　　“说吧。”
+"Speak."
 
-　　“诸大掌柜所要的现银数额巨大。我等在临高食指浩繁，一时间也筹措不出这许多的银两来，”他不慌不忙的说，“所以赔款四万两的事情，一时恕难以从命……”
+"The amount of silver that the great shopkeeper Zhu wants is huge. We have a large number of people to feed in Lingao, and we can't raise so much silver for a while," he said unhurriedly. "So for the matter of the forty thousand taels of compensation, I'm afraid we can't comply for the time being..."
 
-　　诸彩老的面孔变得阴晴不定，看起来似乎摸不透他在想什么。但是林佰光注意到他的眉毛渐渐地拧了起来——这是要发怒的征兆。
+Zhu Cailao's face became uncertain, and it seemed that he could not figure out what he was thinking. But Lin Baiguang noticed that his eyebrows were gradually knitting together—this was a sign of anger.
 
-　　“至于贷款还有供应火器的事情，”他说，“敝首领已经准了——”
+"As for the loan and the supply of firearms," he said, "our leader has already approved it—"
 
-　　“哼。”看得出诸彩老的眉毛又松开了。
+"Humph." It was obvious that Zhu Cailao's eyebrows had relaxed again.
 
-　　“……只是有几个条件。”
+"...But there are a few conditions."
 
-　　“呵呵，不还钱，还要提条件？”诸彩老又笑了起来，“看来我只好亲自带队上门连本带利的要这笔账了！”
+"Hehe, you don't pay back the money, and you still want to set conditions?" Zhu Cailao laughed again. "It seems I'll have to personally lead a team to your door to collect this debt with interest!"
 
-　　“这个不敢劳动大驾。”
+"I dare not trouble you with that."
 
-　　“哼，尔等在临高有多少人船？就算你有四条快船一艘铁船，经受得住我们大帮六百条船，二万弟兄么？！”旁边早跳出头目来怒喝。
+"Humph, how many people and ships do you have in Lingao? Even if you have four fast boats and one iron ship, can you withstand our big gang of six hundred ships and twenty thousand brothers?!" A leader jumped out from the side and shouted angrily.
 
-　　“我等不过在临高有个小小的局面，怎敢和诸大掌柜比家当？”林佰光知道这家伙多半是出来唱白脸的，“只是眼下贵帮大敌当前，有人欲除诸大掌柜为快，这样关键的时候，相信诸大掌柜不会做这等本末倒置的事情来……”
+"We only have a small establishment in Lingao, how dare we compare our assets with the great shopkeeper Zhu?" Lin Baiguang knew that this guy was probably playing the bad cop. "But right now, your gang is facing a great enemy, and someone wants to get rid of the great shopkeeper Zhu as soon as possible. At such a critical moment, I believe the great shopkeeper Zhu will not do such a thing as putting the cart before the horse..."
 
-　　这一句直打在大帐中众人的要害上，所谓亲自带队上临高去索要，本来就恐吓之词——眼下他们就是想全队杀回广东洋面也得和刘香大打出手一番才行，怕是走不到临高，在珠江口就要损折一半的人船，澳洲人虽然人少船少，却是船坚炮利的主，这么个硬核桃就算能砸开也得损兵折将，最后白白的便宜了郑芝龙和刘香。
+This sentence hit the vital point of everyone in the tent. The so-called personally leading a team to Lingao to demand payment was originally just a threat—right now, even if they wanted to kill their way back to the Guangdong waters with their entire team, they would have to fight a big battle with Liu Xiang. They were afraid that they would lose half of their men and ships at the mouth of the Pearl River before they even reached Lingao. Although the Australians had few people and ships, they were the ones with strong ships and sharp cannons. Even if they could crack this hard nut, they would suffer heavy losses, and in the end, Zheng Zhilong and Liu Xiang would benefit for nothing.
 
-　　“林掌柜对这海上的事情知道得很清楚么！”诸彩老缓缓道，“说吧，你们的首领提的是什么条件。”
+"Shopkeeper Lin knows a lot about the affairs on the sea!" Zhu Cailao said slowly. "Tell me, what are the conditions that your leader has proposed?"
 
-　　“贷款的事情——”
+"About the loan—"
 
-　　“且慢！”诸彩老制止了他的发言，冷笑道，“你先别把话滑过去——给个准信：这笔欠账，你们是还是不还？”
+"Wait a minute!" Zhu Cailao stopped him and said with a cold smile, "Don't try to slip away—give me a straight answer: are you going to pay back this debt or not?"
 
-　　“欠债还钱，天经地义。只是敝首领觉得，自己并未欠诸大掌柜的银子……”
+"It is only right and proper to pay back a debt. But our leader feels that he does not owe the great shopkeeper Zhu any silver..."
 
-　　“什么？！”
+"What?!"
 
-　　“放屁！”
+"Nonsense!"
 
-　　“拉出去一刀砍了！这种口出狂言的王八蛋留他不得！”大帐里顿时人群汹汹。
+"Drag him out and behead him! We can't keep such an arrogant bastard!" The tent was suddenly in an uproar.
 
-　　“诸位，且听我言。”林佰光知道自己身处极大的危险之中，这事情其实空口许诺也无关系——反正是不会兑现的。但是他存心要博出位，给诸彩老的手下留下个深刻的印象，否则说什么就答应什么的人，海匪们也根本不会看重。
+"Everyone, please listen to me." Lin Baiguang knew that he was in great danger. This matter could have been promised verbally without any problem—it would not be fulfilled anyway. But he was determined to make a name for himself and leave a deep impression on Zhu Cailao's men. Otherwise, the pirates would not take seriously a person who agreed to everything.
 
-　　“我等灭的乃是苟家庄，所得的财物也都是苟家的财产，如何说得是诸大掌柜的财物？就算有欠债，这钱也是该向苟二去追讨——他可还活着。”
+"We destroyed the Gou family estate, and the property we obtained was all the property of the Gou family. How can you say it is the property of the great shopkeeper Zhu? Even if there is a debt, this money should be collected from Gou Er—he is still alive."
 
-　　下面的首领们几乎要发狂了，一个个都要冲上来很不得要将他撕个稀巴烂。林佰光虽然早有把生死置之度外的觉悟，还是一阵的胆寒。不知道自己这套“故作惊人语”的说辞能不能奏效。
+The leaders below were almost furious, and they all wanted to rush up and tear him to pieces. Although Lin Baiguang had long been prepared to disregard life and death, he still felt a chill in his heart. He didn't know if his "deliberately startling words" would work.
 
-　　诸彩老挥手止住了手下人的聒噪。冷冷地望着林佰光，半晌，他点了点头：
+Zhu Cailao waved his hand to stop the noise of his men. He looked at Lin Baiguang coldly for a long time, then he nodded:
 
-　　“你们和苟家有什么深仇大恨？”
+"What deep hatred do you have with the Gou family?"
 
-　　“并无任何仇怨，只不过所谓斩草除根——”
+"There is no hatred at all, it's just that we want to cut the weeds and dig up the roots—"
 
-　　“好！”诸彩老点点头，“苟二父子一经拿获，我自会派人送来与尔等交涉，看看到底该还我多少银钱！”
+"Good!" Zhu Cailao nodded. "Once Gou Er and his son are captured, I will send someone to negotiate with you to see how much silver you should pay me!"
 
-　　其实苟二是死是活，穿越集团并不感兴趣，林佰光拿他做文章不过是种迷惑诸彩老的伎俩而已。
+In fact, the transmigrator group was not interested in whether Gou Er was dead or alive. Lin Baiguang was just using him as a trick to confuse Zhu Cailao.
 
-　　“至于贷款的事情，首领已经允准。只不过是不用现银，全部用临高流通券支付。额度是一百万元。贷期为一年，前三个月不收利息，以后每月一厘。”林佰光说着解释了下他们在临高发行的流通券的概念。
+"As for the loan, the leader has already approved it. But it will not be in cash, but all paid in Lingao circulation coupons. The amount is one million yuan. The loan period is one year, with no interest for the first three months, and one li per month thereafter." Lin Baiguang explained the concept of the circulation coupons they issued in Lingao.
 
-　　“拿纸片给兄弟们发饷？”有人怒气冲冲道。
+"Pay the brothers with paper?" someone said angrily.
 
-　　“流通券是用来买东西的。”林佰光毫不示弱，“哪里说是给你们发饷了。”
+"The circulation coupons are for buying things," Lin Baiguang said without showing any weakness. "Where did I say it was for paying you?"
 
-　　实际上，执委会的政策是发放出口信用贷款——虽然他们不打算真的给诸彩老这笔贷款，一百万的流通券可不是个小数字，而且他们也根本不可能把宝贵的资源和生产能力放在为诸彩老生产武器上。
+In fact, the Executive Committee's policy was to issue export credit loans—although they did not intend to really give Zhu Cailao this loan. One million circulation coupons was not a small number, and it was impossible for them to put their precious resources and production capacity into producing weapons for Zhu Cailao.
 
-　　几个头目怒发冲冠，简直就想冲上来直接砍人了。对他们来说，没有银子就无法发饷，也就无法稳定军心，不管那劳什子流通券在临高能买什么，到这福建的洋面上可就是一张废纸而已！
+Several leaders were furious and almost wanted to rush up and kill him directly. For them, without silver, they could not pay their men, and thus could not stabilize the morale of the army. No matter what that damn circulation coupon could buy in Lingao, it was just a piece of waste paper on the Fujian waters!
 
-　　“这是敝首领准备供应给贵帮的各种货物。全部可以用流通券支付。”
+"These are the various goods that our leader is prepared to supply to your gang. All can be paid for with circulation coupons."
 
-　　执委会承诺可以用销售的东西琳琅满目，从火炮、火枪、弹药到各种药品、干粮、砂糖应有尽有，不但写出种类，不少物品还绘制了图案并且加以简单的说明——看起来有点象广告宣传小册子。
+The list of things that the Executive Committee promised to sell was dazzling, from cannons, muskets, and ammunition to various medicines, dry food, and sugar. Not only were the types written down, but many items also had drawings and simple explanations—it looked a bit like an advertising brochure.
 
-　　至于价格，明码标价，童叟无欺，还注明一行小字：“实价交易，无明暗扣”。
+As for the price, it was clearly marked, and there was no deception. There was also a line of small characters: "Fair trade, no hidden discounts."
 
-　　“这些是你们造的——就在临高造的？”
+"You made these—right here in Lingao?"
 
-　　“正是，”林佰光见他的神情有变化，知道这东西已经打动了他。
+"That's right," Lin Baiguang saw that his expression had changed and knew that this thing had moved him.
 
-　　“我要你们的火炮，24磅的叫——卡隆的，要三十门！最快多久能有？”
+"I want your cannons, the 24-pounder called—Carronade, I want thirty of them! How soon can you have them?"
 
-　　“没有现货，要备料铸造，起码得二个月。”
+"There are no ready-made ones. We have to prepare the materials and cast them. It will take at least two months."
 
-　　“太久了。”诸彩老摇摇头，“赶不上了。”
+"Too long." Zhu Cailao shook his head. "It's too late."
 
-　　林佰光原来很怕他要买到炮之后再发动对闽安的攻击，细节一旦变化，历史的走向也许就会大为不同。现在看来诸彩老不打算推迟进攻计划。这让他放心了。
+Lin Baiguang was originally very afraid that he would attack Min'an after buying the cannons. Once the details changed, the course of history might be very different. Now it seemed that Zhu Cailao did not intend to postpone the attack plan. This made him feel relieved.
 
-　　“时间虽然久了一些，炮总归是要用的。”
+"Although the time is a bit long, the cannons will be used eventually."
 
-　　“嗯。”诸彩老点点头，“银子没有，临高的存粮可丰？”
+"Hmm." Zhu Cailao nodded. "There is no silver. Is the grain reserve in Lingao abundant?"
 
-　　“凡有一元流通券在外，临高便有一斤糙米储备。”
+"For every one yuan of circulation coupons in circulation, there is one catty of coarse rice in reserve in Lingao."
 
-　　诸彩老点头说了声：“好。”
+Zhu Cailao nodded and said, "Good."
 
-　　双方约定，货物由诸彩老派船自行提货，用款从信用额度中扣除。
+The two sides agreed that the goods would be picked up by Zhu Cailao's own ships, and the payment would be deducted from the credit line.
 
-　　至于还款，诸彩老自然没地方找流通券来还本付息，所以双方约定，诸彩老用战利品支付贷款和利息。双方就流通券的价值如何计算，货物怎么折价进行了详细的讨论。林佰光事先也和财金委准备了详细周密的方案。
+As for the repayment, Zhu Cailao naturally had no place to find circulation coupons to repay the principal and interest, so the two sides agreed that Zhu Cailao would use the spoils of war to pay the loan and interest. The two sides had a detailed discussion on how to calculate the value of the circulation coupons and how to price the goods. Lin Baiguang had also prepared a detailed and meticulous plan with the Finance and Economics Committee in advance.
 
-　　虽然根本就不会执行贷款计划，但是这种发放信用贷款的政策将来也会实施。先做出方案来绝不会是白费功夫。
+Although the loan plan would not be implemented at all, this policy of issuing credit loans would also be implemented in the future. It would not be a waste of effort to make a plan first.
 
-　　林佰光眼见事情已经成了一多半，心中大喜。诸彩老突然微笑着问道：“你们给我这一百万买炮买粮，不怕我收拾了郑芝龙、刘香之后再来对付你们？”
+Lin Baiguang was overjoyed to see that the matter was more than half done. Zhu Cailao suddenly asked with a smile, "You give me this one million to buy cannons and grain, aren't you afraid that I will come to deal with you after I have dealt with Zheng Zhilong and Liu Xiang?"
 
-　　这个问题不算刁钻，但是问得突如其来，很有会心一击的威力。林佰光赶紧定了定神：
+This question was not tricky, but it was asked suddenly and had the power of a fatal blow. Lin Baiguang quickly composed himself:
 
-　　“诸大掌柜此言差矣。”林佰光道，“郑芝龙、刘香是何等人物，岂会轻易授首？”
+"Great Shopkeeper Zhu, you are wrong." Lin Baiguang said, "What kind of people are Zheng Zhilong and Liu Xiang? How can they be easily defeated?"
 
-　　言下之意就是根本不相信他能立刻击败郑芝龙和刘香——这自然也是实情。
+The implication was that he did not believe at all that he could immediately defeat Zheng Zhilong and Liu Xiang—this was naturally also the truth.
 
-　　林佰光想传达给诸彩老的意思就是：澳洲人要在这闽粤洋面上生存，就不会允许这里的任何一股势力独大，支持诸彩老就是保护自己——澳洲人不希望让刘香、郑芝龙坐大。
+What Lin Baiguang wanted to convey to Zhu Cailao was: if the Australians want to survive in the Fujian and Guangdong waters, they will not allow any force here to become dominant. Supporting Zhu Cailao is to protect themselves—the Australians do not want Liu Xiang and Zheng Zhilong to become too powerful.
 
-　　这在策略上是说得通的，而且合情合理。不由诸彩老不信。
+This was strategically sound and reasonable. Zhu Cailao had no choice but to believe it.
 
-　　诸彩老点点头：“你倒是很坦白啊。”
+Zhu Cailao nodded: "You are very frank."
 
-　　林佰光笑道：“我是后生小儿，这点心思如何能瞒得住前辈？”
+Lin Baiguang smiled and said, "I am a young man. How can I hide these little thoughts from my senior?"
 
-　　诸彩老关照施十四把林佰光带到中军后营，拔出一间帐幕供他休憩。林佰光知道这事情已经成了一多半，但是以诸彩老这样老奸巨猾的人物，自己这点伎俩到底能不能瞒住他还犹未可知。
+Zhu Cailao ordered Shi Shisi to take Lin Baiguang to the rear camp of the central army and set aside a tent for him to rest. Lin Baiguang knew that the matter was more than half done, but with an old and cunning person like Zhu Cailao, it was still unknown whether his little tricks could deceive him.
 
-　　心中虽然忐忑不安，却做出一副不在意的模样，随着施十四进了帐篷。
+Although he was uneasy in his heart, he pretended to be indifferent and followed Shi Shisi into the tent.
 
-　　“这间帐篷就是你的了。”
+"This tent is yours."
 
-　　“多谢施大哥了。”林佰光朝帐中一扫，只觉哭笑不得。这不知道是从哪家有钱人的闺阁里抢劫来的家具陈设：绣花的帐子乱七八糟的挂着，只有床板的大床，甚至还有个梳妆台。上面放了些茶盏茶壶。
+"Thank you, Brother Shi." Lin Baiguang glanced around the tent and didn't know whether to laugh or cry. He didn't know from which rich family's boudoir these furniture and furnishings were looted: the embroidered curtains were hung in a mess, the bed had only a bed board, and there was even a dressing table. There were some teacups and teapots on it.
 
-　　“对不住兄弟，我们在海上讨饭吃的人，这些家伙都是临时找的——”施十四是见识过穿越众的生活水平的。
+"I'm sorry, brother. We who make a living at sea, these things are all temporary—" Shi Shisi had seen the living standards of the transmigrators.
 
-　　“哪里，出门在外也没法讲究不是。”
+"Not at all. We can't be picky when we're away from home."
 
-　　“呵呵，哥哥一会给你找你个乐子。”施十四淫笑了几声。林佰光知道这多半要搞个女人来了。
+"Hehe, I'll find you some fun later," Shi Shisi said with a lewd smile. Lin Baiguang knew that he was probably going to bring a woman.
 
-　　不多片刻，果然施十四果然带人送来一名女子。
+In a short while, Shi Shisi indeed brought a woman.
 
-　　“怎么样，这女人还不错吧？可是大户人家的闺女！玩过的人不多，还挺新鲜……”
+"How about it, this woman is not bad, right? She is the daughter of a big family! Not many people have played with her, she is still quite fresh..."
 
-　　和当地女人发生关系要冒健康风险，这是卫生部反复提醒过的。林佰光自从D日之后，虽然有得是机会可以隐蔽的找女人，但是他从来没有染指过——屈从于性欲是人性软弱的标记。
+Having a relationship with a local woman carried a health risk, which the Ministry of Health had repeatedly reminded. Since D-Day, although Lin Baiguang had had many opportunities to secretly find women, he had never touched them—succumbing to sexual desire was a sign of human weakness.
 
-　　但是此时，他决定要收用这个女人。他很清楚这种下层匪徒的心态：把吃酒、玩女人看得比什么都要紧，你要是不干，就是“没种”，这对他取得他们的信任，开展工作是很不利的。
+But at this moment, he decided to accept this woman. He was very clear about the mentality of these low-level bandits: they regarded drinking and playing with women as more important than anything else. If you didn't do it, you were "not a man," which was very detrimental to gaining their trust and carrying out his work.
 
-　　眼见送来得女人大约二十出头，长得倒是白白嫩嫩的，不象个海上人家的女子，裹着一件男人的青布直缀，无精打采的模样。
+The woman who was sent was about in her early twenties. She was fair and tender, not like a woman from a seafaring family. She was wrapped in a man's blue cloth robe and looked listless.
 
-　　“晚上你就好好得乐一乐吧！”施十四似乎颇为得意，“大掌柜的对你真是高看，还特意关照给你找个女人，哈哈，我们这里的小头目都没这个待遇呢。”说着又叫人抬进一个食盒来：
+"You can have a good time tonight!" Shi Shisi seemed quite proud. "The big boss really thinks highly of you. He even specially told me to find you a woman. Haha, even the small leaders here don't have this treatment." As he spoke, he had someone bring in a food box:
 
-　　“岛上没什么好吃的，这是大掌柜的一点小意思。”
+"There's nothing good to eat on the island. This is a small token from the big boss."
 
-　　“当不起，当不起，大掌柜真是太抬爱了——”
+"I don't deserve it, I don't deserve it. The big boss is too kind—"
 
-　　“嘿嘿，你就好好享受吧。”施十四笑嘻嘻地说着，又正色道，“晚上无事，莫要出去，夜里营寨里不许走动，抓住了就要砍头——你是大掌柜的贵客，砍头虽然不至于，白白吃一番苦头也是没必要。”
+"Hehe, just enjoy yourself." Shi Shisi said with a grin, and then said seriously, "If you have nothing to do at night, don't go out. No one is allowed to walk around in the camp at night. If you are caught, you will be beheaded—you are the big boss's distinguished guest. Although you won't be beheaded, it's unnecessary to suffer for nothing."
 
-　　“有这满室春光，我到黑地里吃海风做什么。”林佰光敷衍着把送走了。
+"With all this spring scenery in the room, why would I go out to eat the sea breeze in the dark?" Lin Baiguang said perfunctorily and sent him away.
 
-　　林佰光送走了施十四，自顾自地走到食盒旁打开，林佰光吃了一惊。里面的菜肴出乎意料的考究：灼鹅掌、小炒羊肉、豆腐螃蟹羹、腌牡蛎……居中是两个瓷罐子，打开一看，一个装着雪白的米饭，另外一个则是鸡汤，配着酸菜和韭黄。
+Lin Baiguang saw Shi Shisi off and went to the food box to open it. Lin Baiguang was surprised. The dishes inside were unexpectedly exquisite: braised goose feet, stir-fried mutton, crab and tofu soup, pickled oysters... In the middle were two porcelain jars. When he opened them, one was filled with snow-white rice, and the other was chicken soup, with pickled vegetables and chives.
 
-　　除了菜肴，还配着两壶酒，一黄一白。
+In addition to the dishes, there were also two pots of wine, one yellow and one white.
 
-　　在一个地方不大的小岛上置办这样一桌菜肴，烹调得还如此的精美，这手笔真是不小。
+To prepare such a table of dishes on a small island, and to cook them so exquisitely, this was really no small feat.
 
-　　他原以为不过粗鱼大肉之类的东西——海盗们吃东西能讲究到哪里去？他忽视了一点，这个时空的海商海盗不分家，诸彩老和他手下的一干头目除了是大海盗，也是大商人，饮食起居一贯讲究。
+He had originally thought it would be just some coarse fish and meat—how could pirates be particular about what they ate? He had overlooked one point: in this time and space, sea merchants and pirates were not separated. Zhu Cailao and his leaders were not only great pirates, but also great merchants, and they were always particular about their food and daily life.
 
-　　不过，林佰光想到看门的海匪说到供给困难，有的船只甚至断了顿，就知道这种奢侈是建筑在广大的贫乏之上的——他倒没有由此产生什么感慨，而是暗暗高兴，上层穷奢极侈，下层却在忍饥挨饿，这团队的凝聚力好不到哪里去。自己的挖墙角行动成功的可能性就愈发大了几分。
+However, when Lin Baiguang thought of the gatekeeper pirate's words about the difficulty of supplies, and that some ships had even run out of food, he knew that this luxury was built on widespread poverty—he did not feel any emotion from this, but was secretly happy. The upper class was extravagant, while the lower class was starving. The cohesion of this team could not be good. The possibility of his undermining action succeeding was even greater.
 
-　　“你叫什么？”林佰光自取自饮，抽闲问还坐在地上发呆的女人。
+"What's your name?" Lin Baiguang drank by himself and asked the woman who was still sitting on the ground in a daze.
 
-　　“婢子叫小树。”
+"My name is Xiaoshu."
