--- a/_posts/2010-11-4-3-20000.md
+++ b/_posts/2010-11-4-3-20000.md
@@ -1,241 +1,241 @@
 ---
 layout: post
-title: 第二百节 深入敌穴
+title: "Section 200: Deep into the Enemy's Lair"
 category: 3
 path: 2010-11-4-3-20000.md
 tag: [normal]
 ---
 
-　　裹在女人身子上的青布直缀滑落到地上，里面只穿着件小小的肚兜，林佰光是久旷之夫，哪里还按捺的住，当即从口袋里掏出个小塑封片来“刺啦”一声扯开……帐幕中顿时一片春色昂然。
+The blue cloth robe wrapped around the woman's body slipped to the ground, revealing only a small dudou underneath. Lin Baiguang, who had been abstinent for a long time, could no longer hold back. He immediately took out a small plastic-sealed packet from his pocket and tore it open with a "hiss"... The tent was suddenly filled with a vibrant spring atmosphere.
 
-　　吃饱喝足，林佰光微薰的搂着已经光溜溜的小树上了床，他从兜里摸出一支烟来，小心翼翼的叼在嘴里，用油灯点着了火，舒舒服服地抽了一口，准备着一会再大干一场。
+After eating and drinking his fill, Lin Baiguang, slightly drunk, embraced the naked Xiaoshu and got into bed. He took out a cigarette from his pocket, carefully put it in his mouth, lit it with an oil lamp, and took a comfortable puff, preparing for another big battle later.
 
-　　凭林佰光在另一个时空出入风月场所的经验，他知道这女人挺干净。这种机会得好好的把握。当然安全套他还是得用——多亏自己有先见之明，带了好几个出来。
+Based on Lin Baiguang's experience in brothels in another time and space, he knew that this woman was quite clean. He had to seize this opportunity. Of course, he still had to use a condom—thanks to his foresight, he had brought several with him.
 
-　　正在考虑着一会换种什么体位，再搞个啥花样，只听得怀中的女人在嘤嘤的抽泣，林佰光吐出一口烟，很是关怀地问道：“好好的，哭什么？”
+Just as he was considering what position to try next and what other tricks to play, he heard the woman in his arms sobbing. Lin Baiguang exhaled a puff of smoke and asked with great concern, "What's wrong? Why are you crying?"
 
-　　“没什么，怨婢子命苦。”
+"It's nothing, I'm just lamenting my bitter fate."
 
-　　林佰光想这桥段很是熟悉么，但是她的命苦是海盗造成的，顺便也有自己的份，便含糊地应了几声。
+Lin Baiguang thought this plot was very familiar, but her bitter fate was caused by the pirates, and he also had a share in it, so he vaguely agreed a few times.
 
-　　“老爷是哪里人？”小树拥在他怀里，一幅小鸟依人的模样，“婢子觉得老爷是漳泉一带的……”
+"Where are you from, sir?" Xiaoshu snuggled in his arms, looking like a small bird relying on a person. "I feel that you are from the Zhangzhou-Quanzhou area..."
 
-　　林佰光想这还真说对了，我家祖辈在台湾生活过一百多年，算是半个闽南人吧。
+Lin Baiguang thought this was quite right. His ancestors had lived in Taiwan for more than a hundred years, so he could be considered half a Minnanese.
 
-　　“哪里，我是澳洲人。”林佰光说，“先祖倒是从闽南渡海去的。”
+"Not at all, I'm an Australian," Lin Baiguang said. "My ancestors did cross the sea from Minnan."
 
-　　“和婢子也算是半个同乡了。”
+"Then we can be considered half-countrymen."
 
-　　“也算他乡遇故知吧。”林佰光笑着说，心里却警惕起来。
+"It can be considered meeting an old friend in a foreign land," Lin Baiguang said with a smile, but he became vigilant in his heart.
 
-　　果然，小树用几乎听不到的声音对他说：“婢子有事想求您。”
+Sure enough, Xiaoshu said to him in a voice that was almost inaudible, "I have something to ask of you."
 
-　　“嗯，什么事？”
+"Hmm, what is it?"
 
-　　“小声点！”
+"Softer!"
 
-　　小树用手指按了按林佰光的嘴唇。指了指耳朵。做了个“隔墙有耳”的手势。
+Xiaoshu pressed Lin Baiguang's lips with her finger, pointed to her ear, and made a gesture of "walls have ears."
 
-　　林佰光给烟点上火，并不理睬她的提醒：“说说看。”
+Lin Baiguang lit his cigarette and ignored her reminder: "Tell me."
 
-　　“能带婢子走吗？”
+"Can you take me away?"
 
-　　“走？”林佰光不由得压低了声音。
+"Away?" Lin Baiguang couldn't help but lower his voice.
 
-　　“是。”
+"Yes."
 
-　　“……” 林佰光忽然面对这样的局势，有些不知所措，小树到底在动什么脑筋？这里面有没有使诈？
+"..." Lin Baiguang was suddenly faced with such a situation and was a little at a loss. What was Xiaoshu thinking? Was there any trickery in this?
 
-　　“求求你，老爷，带我走吧，再这样下去，迟早要被他们糟蹋死了。”小树见他神色变幻不定，趴在他的胸前，压低着声音哭求着。
+"Please, sir, take me away. If this goes on, I will be ruined by them sooner or later." Seeing his expression change, Xiaoshu lay on his chest and begged in a low voice, crying.
 
-　　“不要哭么，”林佰光轻声安慰道，“到底是什么事情……”
+"Don't cry," Lin Baiguang comforted her softly. "What is it..."
 
-　　“婢子原来是漳州府人氏……”
+"I was originally from Zhangzhou Prefecture..."
 
-　　小树自述她是上个月被海盗掳来的，一直被关在老营，专供大头目们淫乐之用。
+Xiaoshu said that she was captured by pirates last month and had been locked up in the old camp, exclusively for the pleasure of the big leaders.
 
-　　“……十多个人，轮番糟蹋婢子的身子不算，稍有违碍还要挨打，真是生不如死。”小树小声哭诉着。
+"...More than a dozen people took turns to ravage my body. If I disobeyed even a little, I would be beaten. It was truly a life worse than death," Xiaoshu sobbed softly.
 
-　　“原来如此。”
+"I see."
 
-　　林佰光轻轻地答道。他想，帐篷外面多半有人在偷听。
+Lin Baiguang replied softly. He thought that there were probably people eavesdropping outside the tent.
 
-　　“只求老爷发发慈悲，带婢子逃出这匪窝。婢子家在漳州也有几个钱财，必然重重酬谢老爷。”
+"I only ask that you have mercy, sir, and take me out of this bandit's den. My family in Zhangzhou also has some money, and they will definitely reward you heavily."
 
-　　“你家既然有钱，为何不来赎人？”
+"Since your family has money, why didn't they come to ransom you?"
 
-　　“谈不拢，”小树凄然道，“要一大笔钱，非得卖房卖地不能筹办……”
+"We couldn't agree on a price," Xiaoshu said sadly. "They want a large sum of money, which can only be raised by selling our house and land..."
 
-　　“舍命不舍财啊。”
+"You'd rather lose your life than your money."
 
-　　“总是婢子命苦，求老爷发发慈悲婢子走吧。” 小树止住哭泣悄声道，“婢子来之前，听他们议论，说老爷多半是别有企图才到南日岛来的。要大掌柜的把你一刀两断了账。”
+"It's just my bitter fate. Please have mercy on me and let me go." Xiaoshu stopped crying and whispered, "Before I came, I heard them discussing that you probably came to Nanri Island with ulterior motives. They want the big boss to cut you in two."
 
-　　“……”
+"..."
 
-　　小树不停劝说：“大掌柜这个人，疑心病很重，他不会相信你的。”她小声说，“你是打听消息的吧？诸大掌柜的人、船、炮、粮的数目婢子都暗中都查得了。”似乎是怕他不信，她小声说，“二千料大船，七艘——”
+Xiaoshu kept persuading him: "The big boss is a very suspicious person. He won't believe you." She whispered, "Are you here to gather information? I have secretly found out the number of men, ships, cannons, and grain of the great shopkeeper Zhu." As if afraid that he would not believe her, she whispered, "Seven large ships of two thousand liao—"
 
-　　“我不是探子，不要知道这些。”林佰光柔声道。他这会已经完全判明，小树说的是谎话——这是个用来试探自己的女人。
+"I'm not a spy, I don't want to know this," Lin Baiguang said softly. He had already completely determined that Xiaoshu was lying—this was a woman used to test him.
 
-　　“你若是想要离开此地回家：我明日见过诸大掌柜，自然求个情，把你要去了。就算出几个赎金，我们澳洲人也出得起。到时候自然送你回家。至于酬劳，不要分文。只是——”他的言辞很是严肃，“你居然私查诸大掌柜的兵马钱粮钱，这可是大逆不道的事情。我看你不要干这样的蠢事了。你说的话我就不告诉施十四他们了，你老老实实的认命，不然小命难保！”
+"If you want to leave this place and go home, I will see the great shopkeeper Zhu tomorrow and naturally plead for you and ask for you. Even if it costs a few ransoms, we Australians can afford it. At that time, I will naturally send you home. As for the reward, not a single penny. But—" his words were very serious, "you actually secretly investigated the great shopkeeper Zhu's troops, horses, money, and grain. This is a great act of treason. I think you should not do such a stupid thing. I will not tell Shi Shisi and the others what you said. You should resign yourself to your fate, otherwise your life will be in danger!"
 
-　　林佰光吐出了冷酷无情的话。可是他心里真想说，这拙劣表演该收场了。虽然演员表演的不错，但是剧本太糟糕了。
+Lin Baiguang spoke cold and ruthless words. But in his heart, he really wanted to say that this clumsy performance should end. Although the actor's performance was not bad, the script was too bad.
 
-　　“老爷饶命！”小树抽泣着，要下床去跪着。
+"Spare my life, sir!" Xiaoshu sobbed and was about to get off the bed to kneel.
 
-　　“不必担心，这些话我就当没听见。不过你也得老老实实的。”
+"Don't worry, I'll pretend I didn't hear these words. But you have to be honest."
 
-　　林佰光把烟头掐灭，翻身把女人压在身下，做出跪趴的姿势。他得意的在小树的屁股上狠拍了两下，再一次的强迫她配合起来。
+Lin Baiguang stubbed out his cigarette, turned over and pressed the woman under him, forcing her into a kneeling and prostrate position. He triumphantly slapped Xiaoshu's buttocks hard twice and once again forced her to cooperate.
 
-　　那一晚，林佰光连着发泄了好几次，知道身下的女人其实是个探子，他连最后的一点怜香惜玉之情也没有了。直到最后筋疲力尽，才沉沉睡去。
+That night, Lin Baiguang vented several times. Knowing that the woman under him was actually a spy, he lost even the last bit of pity for her. It was not until he was exhausted that he fell into a deep sleep.
 
-　　林佰光在大战三百回合沉沉睡去的时候，中军大帐里却是灯火通明。诸彩老和他手下的众头目正在商议形势，也评估下澳洲人作为盟友的可靠性。
+While Lin Baiguang was sleeping soundly after three hundred rounds of battle, the central army tent was brightly lit. Zhu Cailao and his leaders were discussing the situation and also assessing the reliability of the Australians as allies.
 
-　　大家觉得林佰光这人说的话应该是靠谱的。现在多这么一个盟友大有好处，更不用说对方已经答应供应火器粮食这些至关重要的物资，这对处境窘怕的大帮来说是急需的。
+Everyone felt that what Lin Baiguang said should be reliable. Now, having such an ally was of great benefit, not to mention that the other party had already promised to supply vital materials such as firearms and grain, which was urgently needed by the gang in dire straits.
 
-　　下一步，就是是否要发动对闽安的进攻了。头目们众说纷纭，但是都觉得再不能这样在南日岛上僵持下去了。得干票大的补充下匮乏的粮饷。
+The next step was whether to launch an attack on Min'an. The leaders had different opinions, but they all felt that they could not continue to be in a stalemate on Nanri Island. They had to do a big job to supplement the scarce food and pay.
 
-　　老营总管汪友眉头紧蹙，道：“大掌柜！弟兄们的粮饷实在匮乏的厉害，连吃饭都有问题了。”
+The old camp's general manager, Wang You, frowned and said, "Big boss! The brothers' food and pay are really scarce, and even eating is a problem."
 
-　　诸彩老的面色很不好看，粮食已经成了他一个心病。原本当海盗的从不愁粮食的事情，岸上通海的大户豪商多如牛毛，只要肯出价钱，都会舍生忘死的把粮食运来接济。然而如今却一点也指望不上他们了——福建漳泉一带，都是郑芝龙的地盘，现在他脑袋上又有官帽子，通海的大户们谁也不敢得罪他，诸彩老筹集粮食的手段只剩下抢劫一途。抢劫粮草看似不花钱，如今的成本远高于买粮。岸上遍地都是寨子和乡勇，官军虽然多数是充当打酱油的，但是郑芝龙对自己的地盘却看得极紧，几乎闻警必出。弄得每次出去筹粮都得出动大批船只和人马。简直有些得不偿失。
+Zhu Cailao's face was not good. Food had become a heartache for him. Originally, pirates never had to worry about food. There were as many rich and powerful merchants on the shore who were connected to the sea as there were hairs on an ox. As long as they were willing to pay the price, they would risk their lives to transport grain to help. However, now they could not count on them at all—the Zhangzhou-Quanzhou area of Fujian was all Zheng Zhilong's territory. Now he had an official hat on his head, and no one among the big households connected to the sea dared to offend him. Zhu Cailao's only means of collecting grain was robbery. Robbing grain and fodder seemed to cost no money, but now the cost was far higher than buying grain. The shore was full of stockades and local braves. Although most of the official army was just playing soy sauce, Zheng Zhilong was very protective of his territory and would almost certainly come out whenever there was an alarm. This made it necessary to dispatch a large number of ships and men every time they went out to collect grain, which was somewhat not worth the loss.
 
-　　“还有多少余粮？”
+"How much surplus grain is there?"
 
-　　“省着给大约可以维持十天。”汪青禀告道，“饷尚可拖一拖，这粮食的事情，可是一天也拖不起了。”
+"If we use it sparingly, it can last for about ten days," Wang Qing reported. "The pay can be delayed for a while, but the matter of grain cannot be delayed for a single day."
 
-　　头目们发出一阵骚动。
+A commotion broke out among the leaders.
 
-　　“大掌柜，这样下去可不是办法，我们还是回广东去吧。”
+"Big boss, this is not a solution. We should go back to Guangdong."
 
-　　广东是诸彩老的起家地盘，返回去获得粮食接应都要容易的多。
+Guangdong was Zhu Cailao's home base, and it was much easier to get food and supplies by returning there.
 
-　　“回去？说得容易！刘老香这小崽子会让我们过去？他最好我们烂在福建这里。”
+"Go back? Easy to say! Will that little brat Liu Laoxiang let us pass? He'd rather we rot here in Fujian."
 
-　　“大不了和他打一仗，谁胜谁负还不见得。”
+"At worst, we'll fight him. It's not certain who will win or lose."
 
-　　“对！他也未必就是我们的对手！”
+"That's right! He may not be our match!"
 
-　　……
+...
 
-　　诸彩老哼了一声：
+Zhu Cailao snorted:
 
-　　“回去？回去做什么，喝西北风去？”他的巴掌往桌子上一拍，“广州城的洋货生意，都是佛朗机人的买卖，我们插不上手的。要想赚钱就得在这里混！”
+"Go back? Go back for what, to drink the northwest wind?" He slammed his palm on the table. "The foreign goods business in Guangzhou is all the business of the Franks. We can't get a foot in. If we want to make money, we have to stay here!"
 
-　　“再说了，和刘老香打一仗，结果还不是便宜了临高的髡贼！”诸彩老冷笑一声，“这群海外蛮子，大约就是在等我和刘香开打，自己好检便宜。”
+"Besides, if we fight a battle with Liu Laoxiang, won't the 髡贼 (kūnzéi) in Lingao benefit in the end!" Zhu Cailao sneered. "This group of overseas barbarians is probably just waiting for me and Liu Xiang to start fighting so they can pick up the pieces."
 
-　　“大掌柜，他们可是愿意供给我们粮食火器的……”
+"Big boss, they are willing to supply us with grain and firearms..."
 
-　　“这粮食火器你以为是好拿的？要我们自己派船去运，我整队回广东，刘香岂能容我安然返还？”
+"Do you think this grain and firearms are easy to get? We have to send our own ships to transport them. If I return to Guangdong with my entire team, how can Liu Xiang let me return safely?"
 
-　　“X你老母！还有这个道道！”有头目已经开骂了，“宰了那衰仔！”
+"F*ck your mother! There's still this way!" A leader had already started cursing. "Kill that unlucky boy!"
 
-　　“算啦，人现在也算是和我们结盟了。我们以后的大炮和快枪都要指着他们。”诸彩老摆了摆手，“不过眼下就想指望他们的接济，未免是画饼充饥。”
+"Forget it, they are now considered to be in an alliance with us. We will have to rely on them for our cannons and fast guns in the future." Zhu Cailao waved his hand. "But for now, to expect their help is like drawing a cake to satisfy hunger."
 
-　　“这也未必。”汪青说。
+"That's not necessarily true," Wang Qing said.
 
-　　“哦？汪总管有何高见？”
+"Oh? What's your brilliant idea, General Manager Wang?"
 
-　　“大帮全队回广东是不能的，不如先派遣些船只去临高，要他们供给一批粮食火器。”
+"The whole gang can't go back to Guangdong. Why don't we send some ships to Lingao first and ask them to supply a batch of grain and firearms."
 
-　　“不行不行，大队的船只刘香都不肯放过，几十条船，他还不逮个正着，一口吞下去！”
+"No, no, Liu Xiang won't even let a large group of ships pass. If there are dozens of ships, won't he catch them all and swallow them in one bite!"
 
-　　“刘香又不是千里眼顺风耳，他在这里肯定有探子，我们船只一动他就会得到消息。”汪青似乎早有预案，“但是我们不走内洋，走外海。他就算知道了，大海茫茫，上哪里去找？”
+"Liu Xiang doesn't have clairvoyance or clairaudience. He must have spies here. He will get the news as soon as our ships move." Wang Qing seemed to have a plan in mind. "But we won't take the inner sea, we'll take the outer sea. Even if he knows, the sea is vast, where can he find us?"
 
-　　“若走外海，小船便不能去了。”外海风浪大，且无地标，占海盗船队中的大头的小型船只就不便航行了。
+"If we take the outer sea, the small boats can't go." The wind and waves on the outer sea are big, and there are no landmarks. The small boats that make up the bulk of the pirate fleet are not suitable for sailing.
 
-　　“既是去装货，小船去亦无用，装不了多少。自然要派大船去。”
+"Since we are going to load goods, it's useless to send small boats. They can't carry much. Naturally, we have to send large ships."
 
-　　但是大船去了，海上的战力不免就要下降。这又是个两难的选择。会议下来，决定先派遣一队大船去临高装运粮食回来，等船回来人心稍安再发动对闽安的进攻。
+But if the large ships went, the combat power at sea would inevitably decline. This was another dilemma. After the meeting, it was decided to first send a team of large ships to Lingao to transport grain back. After the ships returned and the morale was slightly boosted, they would launch an attack on Min'an.
 
-　　第二天醒来，已经是上午了。林佰光没有手表，但是看外面的光影，大约已经是将近十点了。
+When he woke up the next day, it was already morning. Lin Baiguang didn't have a watch, but from the light and shadow outside, it was probably close to ten o'clock.
 
-　　醒来只觉得浑身轻松，精神振奋。再看身边，小树已经不在了。只要枕上的长发才让回忆起昨晚的旖旎风光，不由得有些怅然。
+When he woke up, he felt relaxed and refreshed. Looking beside him, Xiaoshu was already gone. Only the long hair on the pillow reminded him of the beautiful scenery of last night, and he couldn't help but feel a little sad.
 
-　　“老弟起来了？”施十四笑着从外面进来，身后是个小海匪，端着洗脸水。
+"Brother, you're up?" Shi Shisi came in from outside with a smile, followed by a young pirate carrying a basin of water for washing his face.
 
-　　“起迟了，让施大哥见笑了。”
+"I'm up late, I've made a fool of myself in front of Brother Shi."
 
-　　“呵呵，昨晚你太威猛了么！”施十四带着暧昧的笑容，“怎么样？小树还不错吧？”
+"Hehe, you were too fierce last night!" Shi Shisi said with an ambiguous smile. "How about it? Xiaoshu is not bad, right?"
 
-　　“好，挺好的。”
+"Good, very good."
 
-　　“这细皮白肉的小婊子——”施十四带着羡慕的口吻，“唉，不说了，一会大掌柜的要见你。”
+"This fair-skinned little bitch—" Shi Shisi said with an envious tone. "Alas, let's not talk about it. The big boss wants to see you in a while."
 
-　　盥洗完毕，林佰光又由施十四引路，来到诸彩老的中军大帐。不过这次，他是在后账受到接见了。
+After washing up, Lin Baiguang was led by Shi Shisi to Zhu Cailao's central army tent again. But this time, he was received in the rear tent.
 
-　　帐篷里没有其他人，只有诸彩老一个端坐在椅子上，桌子上堆着许多地图卷轴。
+There was no one else in the tent, only Zhu Cailao sitting on a chair, with many map scrolls piled on the table.
 
-　　“坐。”比起昨天，诸彩老的态度缓和多了。
+"Sit." Compared to yesterday, Zhu Cailao's attitude was much milder.
 
-　　“昨个睡得还好吧？”
+"Did you sleep well last night?"
 
-　　“托大掌柜的福，很是香甜。”林佰光站起来施礼，“还要谢过大掌柜的厚爱。”
+"Thanks to the great shopkeeper, it was very sweet." Lin Baiguang stood up and bowed. "I also have to thank the great shopkeeper for his great love."
 
-　　诸彩老点点头，开门见山道：“你们用的连珠快枪也肯卖？”SKS步枪通过逃回去的海盗的描述，给诸彩老留下的极深的印象。
+Zhu Cailao nodded and got straight to the point: "Are you also willing to sell the repeating fast guns you use?" The description of the SKS rifle by the pirates who had escaped back had left a deep impression on Zhu Cailao.
 
-　　这话说出来，显然是已经认可了双方的协议，林佰光一阵小小的激动。他提醒自己要沉住气：
+When he said this, it was obvious that he had already recognized the agreement between the two sides. Lin Baiguang felt a little excited. He reminded himself to stay calm:
 
-　　“当然能卖，只不过——”
+"Of course we can sell them, but—"
 
-　　“价钱好说！若是贷款用完了，我用现银买就是。”
+"The price is negotiable! If the loan is used up, I will buy them with cash."
 
-　　“不是价钱。此是钢枪。”林佰光当然不能说临高一时半会还造不出了SKS，也没办法批量制造子弹。
+"It's not the price. This is a steel gun." Of course, Lin Baiguang could not say that Lingao could not produce SKS for a while, nor could it mass-produce bullets.
 
-　　“枪身用得都是最好的百炼钢，我等在临高的铁匠就是不吃不喝一个月也造不了几支。”
+"The body of the gun is made of the best hundred-refined steel. Even if our blacksmiths in Lingao don't eat or drink, they can't make many in a month."
 
-　　“我要一百支。”诸彩老豪不含糊，“价钱翻倍都可以。最快要多久？”
+"I want a hundred of them." Zhu Cailao was not vague. "The price can be doubled. How soon can you have them?"
 
-　　“那，”林佰光故作为难道，“三个月吧。”
+"Well," Lin Baiguang said with feigned difficulty, "three months, I guess."
 
-　　“太迟了。”他有些遗憾，“旧的连珠枪可卖么？”
+"Too late." He was a little regretful. "Can you sell the old repeating guns?"
 
-　　就这么几百支SKS，卖给你俺们还活不活了。林佰光想着拱手笑道：“这可为难了。您老也知道，我们人少船少，能在临高混着，除了靠着大掌柜不和我们计较，就是这几支快抢了。大掌柜的要买枪，宽限几月，自然就有了。”
+There are only a few hundred SKSs. If we sell them to you, can we still live? Lin Baiguang thought and said with a smile, "This is difficult. You also know, old sir, that we have few people and few ships. We can get by in Lingao, besides relying on the great shopkeeper not to bother with us, it is these few fast guns. If the great shopkeeper wants to buy guns, if you give us a few more months, we will naturally have them."
 
-　　诸彩老盯着林佰光良久才道：“稀罕，买门炮，要二个月，买几支枪，又得三个月。你们有什么东西是现成的？莫不是只是一纸空文吧。”
+Zhu Cailao stared at Lin Baiguang for a long time before saying, "It's strange. It takes two months to buy a cannon, and three months to buy a few guns. What do you have that is ready-made? Is it just an empty document?"
 
-　　林佰光被他的眼睛看得胆寒——这种海商巨渠的威势真不是盖的，什么叫王霸之气，这TMD才叫王霸之气啊，就俺们执委会那群一天到晚故作深沉，满口理论的人民委员，简直就是天上地下。
+Lin Baiguang was frightened by his eyes—the power of this great sea merchant was really not a joke. What is the aura of a king? This is the f*cking aura of a king. The people's commissars in our Executive Committee who pretend to be profound and talk about theories all day long are simply heaven and earth.
 
-　　林佰光低眉顺目等着。听他发话才应道：
+Lin Baiguang lowered his eyebrows and waited. He only answered after he spoke:
 
-　　“诸大掌柜您明鉴！武器不是说有就有的。都是耗工费料的事情，”林佰光小心地说道，“至于旁的东西都是现成的。”
+"Great Shopkeeper Zhu, please understand! Weapons are not something that can be had just by saying so. They are all things that consume labor and materials," Lin Baiguang said carefully. "As for the other things, they are all ready-made."
 
-　　“粮食也是现成的？”
+"Is the grain also ready-made?"
 
-　　“是。”林佰光有些料到他最感兴趣的除了军火就是粮食了。
+"Yes." Lin Baiguang had expected that what he was most interested in besides arms was grain.
 
-　　“火药呢。”
+"What about gunpowder?"
 
-　　“有的。”
+"We have it."
 
-　　“明日我就派船队去临高买货，”诸彩老装作若无其事的样子，“林掌柜要不要随船一起回去？”
+"Tomorrow I will send a fleet to Lingao to buy goods," Zhu Cailao said as if nothing had happened. "Does Shopkeeper Lin want to go back with the ship?"
 
-　　林佰光毫不犹豫地回答道：“我还是留在这里比较好，买卖未成。我在这里也算是个见证。”
+Lin Baiguang answered without hesitation, "It's better for me to stay here. The business is not done yet. I can also be a witness here."
 
-　　他来这里就是为了搞策反，就这么回去了算是怎么回事？自己的一番做作不就白费了。
+He came here to instigate a rebellion. What would it be if he just went back like this? Wouldn't all his efforts be in vain?
 
-　　他接着说，“大掌柜的要派船去运粮自是没有问题。临高现今粮食还是足够的。我这就写一封书子回去。”
+He continued, "There is no problem for the great shopkeeper to send ships to transport grain. There is still enough grain in Lingao now. I will write a letter back right away."
 
-　　“好，我即刻就派大船去。”诸彩老笑道，“船回来之前，就请林掌柜在我这里多盘桓几天了。”
+"Good, I will send a large ship right away," Zhu Cailao said with a smile. "Before the ship comes back, please stay here for a few more days, Shopkeeper Lin."
 
-　　“多多叨扰了。”
+"I've troubled you a lot."
 
-　　诸彩老点点头，问起林佰光个人的一些事情来。他对林佰光自称是澳洲人含笑不语，他和林佰光说起泉州的开元寺、洛阳桥，谈起泉州的咸饭和茜草粿……有些是他过去听说过的，有的则是没听说过的。林佰光只好知之为知之不知为不知，再说说自己只是祖籍在闽南，故乡的情况，自己一直不清楚。接着诸彩老又说起他年轻的时候在福建沿海做生意的往事。
+Zhu Cailao nodded and asked about some of Lin Baiguang's personal affairs. He smiled and said nothing about Lin Baiguang's claim to be an Australian. He talked to Lin Baiguang about the Kaiyuan Temple and Luoyang Bridge in Quanzhou, and about the salty rice and qiancao cake of Quanzhou... Some of them he had heard of in the past, and some he had not. Lin Baiguang had no choice but to say what he knew and what he didn't know, and then said that his ancestral home was only in Minnan, and he had never been clear about the situation in his hometown. Then Zhu Cailao talked about his past of doing business along the coast of Fujian when he was young.
 
-　　诸彩老聊起这些的时候，既亲切又随和，好像就是个退休的邻居老人不甘寂寞的找人聊家常而已。林佰光忽然警醒：他这是在盘自己的底。
+When Zhu Cailao talked about these things, he was both cordial and amiable, as if he were a retired old neighbor who was unwilling to be lonely and was looking for someone to chat with. Lin Baiguang suddenly became alert: he was trying to find out his background.
 
-　　这老奸巨猾的家伙。林佰光意识到这点，愈发感到自己的处境凶险万分。此时他觉得自己秉承的“尽量说真话，关键的时候才说假话”的思路是完全对的。光棍眼里揉不得沙子——稍有前后不对的地方，恐怕这老海匪就要翻脸！
+This old and cunning fellow. Lin Baiguang realized this and felt that his situation was extremely dangerous. At this time, he felt that his principle of "telling the truth as much as possible, and only telling lies at critical moments" was completely correct. You can't fool a shrewd person—if there is any inconsistency, I'm afraid this old pirate will turn hostile!
 
-　　亲热的拉家常持续了大约一小时左右，林佰光拿出过去对付县领导的全挂子本事应付着。诸彩老再牛B，林佰光认为也不见得能比自己服务过的县委领导强。
+The intimate chat lasted for about an hour. Lin Baiguang used all his skills from dealing with the county leaders in the past to cope with it. No matter how awesome Zhu Cailao was, Lin Baiguang didn't think he could be stronger than the county party committee leaders he had served.
 
-　　午饭的时候没有给他留饭，又亲热的派人送他回了帐篷。
+He was not asked to stay for lunch. He was sent back to his tent with great warmth.
 
-　　林佰光回到自己的帐篷内。他看了看随身的日历。离诸彩老攻打闽安的日子已经不多了。他有一点没有搞清，诸彩老急于要去临高运粮，显然是供给到了相当困难的地步。若是这样，他会不会等到粮食运回来之后再发动进攻？
+Lin Baiguang returned to his tent. He looked at the calendar he carried with him. There were not many days left before Zhu Cailao's attack on Min'an. There was one thing he hadn't figured out. Zhu Cailao was in a hurry to go to Lingao to transport grain, which obviously meant that the supply had reached a very difficult point. If so, would he wait until the grain was transported back before launching the attack?
 
-　　从种种迹象来看，这是很有可能的事情。
+From all indications, this was very likely.
 
-　　装满十二艘大船的粮食，临高自然是拿得出来的，但是这么一来，等到闽安兵败的时候，这些粮食就都便宜了郑芝龙——而他到底能从诸彩老手里拉出多少人船还是未知数。要是白送了十多船的大米给诸彩老，最后只是闹得他单身逃出乱军，这岂不是成了天大的笑话。自己在穿越集团内部就永世不得翻身了。
+Lingao could naturally provide enough grain to fill twelve large ships, but in this way, when Min'an was defeated, all this grain would be a cheap gift to Zheng Zhilong—and it was still unknown how many men and ships he could pull out from Zhu Cailao's hands. If he gave more than ten ships of rice to Zhu Cailao for nothing, and in the end, he just escaped from the chaotic army alone, wouldn't this be a huge joke? He would never be able to make a comeback in the transmigrator group.
 
-　　林佰光打定注意：粮食，绝对不能给。诸彩老在南日坚持不了几天了。只要顶过几天，他就非得冒险行动起来不可。
+Lin Baiguang made up his mind: he absolutely could not give the grain. Zhu Cailao could not hold out on Nanri for a few more days. As long as he held out for a few days, he would have to take a risk and act.
 
-　　只有用“拖”字决把运粮的船队扣在临高，这样即使他的策反失败，至少到最后穿越集团能获得十二艘大海船和几百人。
+The only way was to use the "delay" tactic to detain the grain transport fleet in Lingao. In this way, even if his 策反 (cèfǎn - instigate rebellion) failed, at least in the end, the transmigrator group could obtain twelve large sea ships and hundreds of men.
 
-　　但是这样一来，自己的处境就危险的多了。林佰光估计不出诸彩老得不到粮食之后的态度，推诿几天或许可以，日子久了，自己小命不保不去说他，恼羞成怒的诸彩老会不会不打闽安，干脆全军发动来打临高也未可知。
+But in this way, his own situation would be much more dangerous. Lin Baiguang could not predict Zhu Cailao's attitude after he did not get the grain. It might be possible to delay for a few days, but if it dragged on for a long time, not to mention that his own life would be in danger, it was also unknown whether the angry and ashamed Zhu Cailao would not attack Min'an, but simply launch a full-scale attack on Lingao.
