--- a/_posts/2010-11-5-3-20100.md
+++ b/_posts/2010-11-5-3-20100.md
@@ -1,199 +1,199 @@
 ---
 layout: post
-title: 第二百零一节 当船开始漏水的时候
+title: "Section 201: When the Ship Starts to Leak"
 category: 3
 path: 2010-11-5-3-20100.md
 tag: [normal]
 ---
 
-　　不过，这个险还是值得冒一冒！林佰光来到南日的时候就是走的外洋航线，单程差不多要花六天以上。古代没有电报电话可以即时联络，船队一从南日出发，诸彩老就只能干等着，起码也得等上十五天以上才会发觉情势不对。
+However, this risk was worth taking! When Lin Baiguang came to Nanri, he took the outer sea route, and the one-way trip took more than six days. In ancient times, there were no telegraphs or telephones for instant communication. Once the fleet set off from Nanri, Zhu Cailao could only wait. It would take at least fifteen days for him to realize that something was wrong.
 
-　　就算发现情势不对，他也不知道到底是出了什么问题：到底是船只途中遇险沉没、遭劫还是迷航……航海的种种不确定性使他一时半会难以下决心来对付自己。林佰光估计，从船队起航起，至少有十五天他是安全的。
+Even if he found out that something was wrong, he wouldn't know what the problem was: whether the ship had encountered danger and sank, was robbed, or got lost... The various uncertainties of sailing made it difficult for him to make a decision to deal with him for a while. Lin Baiguang estimated that he would be safe for at least fifteen days from the time the fleet set sail.
 
-　　十五天，可以做很多事情。十五天，也足以让诸彩老粮食耗尽，被迫发动进攻。
+Fifteen days, a lot of things can be done. Fifteen days was also enough for Zhu Cailao to run out of food and be forced to launch an attack.
 
-　　想到这里，他开始动笔写这封书信。
+Thinking of this, he began to write this letter.
 
-　　书信的内容很是简单，无非是将协议达成的情况告知执委会，写上双方的条件和要求。同时告知临高，诸彩老马上就动用贷款买粮，船只一到即请售粮。
+The content of the letter was very simple, nothing more than informing the Executive Committee of the agreement, writing down the conditions and requirements of both sides. At the same time, he informed Lingao that Zhu Cailao would immediately use the loan to buy grain, and as soon as the ship arrived, he would ask for the grain to be sold.
 
-　　书信平铺直叙，不用任何暗语。为得是取信于诸彩老——他必然是要仔细的检查过了才会让使者带走。所以林佰光也没有搞任何的密写或者密码，他不知道古人的密写水平有多高。至于密码，对方虽然不见得能破解，但是看到了自然会有疑心。
+The letter was straightforward and did not use any code words. This was to gain the trust of Zhu Cailao—he would definitely have to check it carefully before letting the messenger take it away. Therefore, Lin Baiguang did not use any secret writing or code. He did not know how high the level of secret writing was in ancient times. As for the code, although the other party might not be able to decipher it, they would naturally be suspicious if they saw it.
 
-　　他相信冉耀等人有充分的智慧理解自己在书信中传达的意思。写完之后将墨吹干，装入封套，不写任何题款。交给外面的小海匪，要他交给去临高的使者。
+He believed that Ran Yao and others had enough wisdom to understand the meaning he conveyed in the letter. After finishing writing, he blew the ink dry, put it in an envelope, and did not write any inscription. He gave it to the young pirate outside and asked him to give it to the messenger going to Lingao.
 
-　　诸彩老要研究就让他去研究吧，林佰光心中暗笑。
+Let Zhu Cailao study it if he wants to, Lin Baiguang thought with a secret smile.
 
-　　中午，施十四带人来送饭来，饭菜还是照旧精美。林佰光很难相信这是一支已经快要断粮的军队里的伙食：依然是四道菜：火燎牛头皮、白灼鸭舌、清汤燕菜、蒸鲍鱼。这几道菜除了调味与现代略有不同之外，就算拿到现代的大型酒楼也是毫不逊色的。
+At noon, Shi Shisi brought people to deliver food. The food was as exquisite as usual. Lin Baiguang found it hard to believe that this was the food of an army that was about to run out of food: there were still four dishes: roasted ox scalp, blanched duck tongue, clear soup with bird's nest, and steamed abalone. Except for the slightly different seasoning from modern times, these dishes would not be inferior even if they were served in a large modern restaurant.
 
-　　“这样一桌好酒席，我一个人太浪费了。有菜有酒，不如施大哥同饮。”
+"Such a good table of wine and food is too wasteful for me alone. With dishes and wine, it's better for Brother Shi to drink with me."
 
-　　“好，”施十四也不是忸怩作态之人，何况这种饭菜最近在南日岛上几乎完全吃不上了。他这个中层头目虽然饭吃得饱，到底也没这么考究。
+"Good," Shi Shisi was not a coy person, not to mention that this kind of food was almost completely unavailable on Nanri Island recently. Although he, a middle-level leader, had enough to eat, it was not so exquisite after all.
 
-　　“我这就去取几坛好酒来。”施十四说着就要往外面去。
+"I'll go get a few jars of good wine right away." Shi Shisi was about to go out as he spoke.
 
-　　“既然喝酒，人多些才好。”
+"Since we are drinking, it's better to have more people."
 
-　　“这自然是好，不过——”他盯着桌子上酒菜，面露迟疑之色。
+"That's naturally good, but—" he stared at the wine and dishes on the table with a hesitant look on his face.
 
-　　林佰光笑道：“无事，这南日岛四周都是海，难不成还捞不起几网鱼虾来？”他从腰间摸出一小块银子，总有二两，“施大哥拿去采买，找个厨子做做——我看这里厨子的手艺很是了得。”
+Lin Baiguang smiled and said, "It's nothing. This Nanri Island is surrounded by the sea. Is it possible that we can't catch a few nets of fish and shrimp?" He took out a small piece of silver from his waist, which was about two taels. "Brother Shi, take it to buy, and find a cook to cook—I think the cook's skills here are very good."
 
-　　“那里需要这许多？”施十四不肯接他的银子，“鱼虾，叫小的们去捞就是，都是渔家出身，还不是手到擒来的事情。至于厨子，有个五钱就够了——我出得起！诸老大专用的厨子请不动，小伙房的还是行的。”
+"Where do we need so much?" Shi Shisi refused to take his silver. "Fish and shrimp, just ask the young ones to go and catch them. They are all from fishing families, so it's a piece of cake. As for the cook, five qian is enough—I can afford it! We can't afford the chef dedicated to Zhu Laoda, but the one from the small kitchen is fine."
 
-　　施十四不肯拿银子，自顾自的去了。林佰光自己动手，将桌子手势开，又从行囊里取出肉干、果脯之类的适宜下酒的干粮取出来。
+Shi Shisi refused to take the silver and went away by himself. Lin Baiguang helped himself, cleared the table, and took out some dried meat, preserved fruits, and other dry food suitable for drinking from his bag.
 
-　　过来大约半小时，施十四带着人来，又在桌子上添了七八个菜，都是海味。无非是蛏子、牡蛎、大虾、海菜之类的东西，在这海岛上是最平常不过的食物。
+About half an hour later, Shi Shisi came with people and added seven or eight more dishes to the table, all of which were seafood. They were nothing more than razor clams, oysters, prawns, and seaweed, which were the most common food on this island.
 
-　　“只有这些海味了……”施十四有写不好意思的搓了下手，“想找几个鸡蛋也没地方寻去。”
+"There's only this seafood..." Shi Shisi rubbed his hands with some embarrassment. "I couldn't even find a few eggs."
 
-　　“已经很丰盛了！”
+"It's already very sumptuous!"
 
-　　“我请了几个平日里交好的朋友，他们也想见见你这位兄弟！”施十四眯着眼睛笑着，“大伙都想到临高去开开这澳洲的洋荤呢。”说着哈哈大笑。
+"I've invited a few friends I usually get along with. They also want to meet you, brother!" Shi Shisi said with a squinting smile. "Everyone wants to go to Lingao to have a taste of this Australian novelty." He laughed out loud as he spoke.
 
-　　林佰光笑道：“这有何难？等这边的事情了了。过来就是，一切都由兄弟作东！”
+Lin Baiguang smiled and said, "What's so difficult about that? When things are settled here, just come over. Everything will be on me!"
 
-　　正说着话，又陆续进来四五个人，高矮胖瘦各不相同。施十四一一介绍，都是各股的“掌柜”，也有在诸彩老中军的小头目。大家见过礼各自落座。
+As they were talking, four or five more people came in one after another, of different heights and builds. Shi Shisi introduced them one by one. They were all "shopkeepers" of various groups, and there were also small leaders in Zhu Cailao's central army. Everyone greeted each other and took their seats.
 
-　　施十四又让人抬进几坛酒来。
+Shi Shisi had someone bring in a few more jars of wine.
 
-　　“这是几年前我从一艘船上得来的，真正的兰陵酒。”施十四豪兴大发，拍碎泥封，提起来一一给众人斟酒。
+"I got this from a ship a few years ago. It's real Lanling wine." Shi Shisi was in high spirits. He broke the mud seal and poured wine for everyone one by one.
 
-　　一番酬劝，三巡酒过，大伙开始闲聊乱谈，只说些临高的澳洲人的新鲜玩意。果然，这几个人对施十四在临高看的AV抱有极为浓厚的兴趣。
+After a round of toasts and three rounds of wine, everyone began to chat idly, only talking about the novelties of the Australians in Lingao. Sure enough, these few people were extremely interested in the AV that Shi Shisi had watched in Lingao.
 
-　　林佰光从他们嘴里知道，原来诸彩老对穿越集团早就有了兴趣。当初苟家庄被剿灭之时，诸彩老曾经动过全军到临高的念头，只是对穿越集团的“巨船”“快艇”心存畏惧才没有动手，改为派施十四去“钓鱼”。再后来，诸彩老就陷入了和刘香的混战中，无心他顾了。
+From their mouths, Lin Baiguang learned that Zhu Cailao had long been interested in the transmigrator group. When the Gou family estate was annihilated, Zhu Cailao had once thought of moving his entire army to Lingao, but he was afraid of the transmigrator group's "giant ships" and "fast boats" and did not act. Instead, he sent Shi Shisi to "fish." Later, Zhu Cailao was caught in a chaotic battle with Liu Xiang and had no time for other things.
 
-　　还真是好险！林佰光想要不是己方的铁船有足够的威慑力，加上这东南沿海的乱局，诸彩老当时要真是发动全军来攻，当时立足未稳的穿越集团虽然不至于团灭，但是损失惨重是免不了的了。
+That was a close call! Lin Baiguang thought that if it weren't for the sufficient deterrent power of his own iron ship, plus the chaotic situation on the southeast coast, if Zhu Cailao had really launched a full-scale attack at that time, although the transmigrator group, which had not yet established a firm foothold, would not have been wiped out, it would have been inevitable to suffer heavy losses.
 
-　　酒多了，话就开始乱说了。
+When there was too much wine, the words began to be spoken indiscriminately.
 
-　　“真是朝中有人好做官啊。”施十四露出一脸的愤愤不平之色。
+"It's really good to have someone in the court to be an official." Shi Shisi showed a look of indignation.
 
-　　“哦？有谁得罪施大哥了？”
+"Oh? Who has offended Brother Shi?"
 
-　　“哼，原本去临高买粮食的事情，打头就该我去。我都去二回了，路也熟，你们那里的规矩也懂，非要换贺新这个二货！还不是因为他是诸大掌柜小舅子的小老婆的表兄弟！”
+"Humph, I should have been the one to go to Lingao to buy grain in the first place. I've been there twice, I'm familiar with the road, and I know your rules there. But they had to replace me with He Xin, this idiot! Isn't it because he is the cousin of the little wife of the great shopkeeper Zhu's brother-in-law!"
 
-　　这复杂的关系林佰光一时间闹不清，不过意思却是听明白了，去临高买货物的“美差”被人用关系抢走了。
+Lin Baiguang couldn't figure out this complicated relationship for a moment, but he understood the meaning. The "good job" of buying goods in Lingao was snatched away by someone with connections.
 
-　　“算了，人家有靠山，哪里是我们这样苦哈哈出身比得上的？”
+"Forget it, he has a backer. How can we, who came from a poor background, compare with him?"
 
-　　“娘的！早知道我就不说在临高的事情了！干脆说成人间地狱就不会和我抢了。”显然，施十四还在念念不忘在临高的种种“奇遇”。
+"Damn it! If I had known, I wouldn't have talked about the things in Lingao! If I had said it was a living hell, he wouldn't have competed with me." Obviously, Shi Shisi was still obsessed with the various "adventures" in Lingao.
 
-　　从他嘴里，林佰光知道去临高的船是十二条诸彩老直辖的大船，最小的也有五六百料，最大的足是二千料——这诸彩老是要去临高“吃大户”啊。
+From his mouth, Lin Baiguang knew that the ships going to Lingao were twelve large ships directly under Zhu Cailao's command. The smallest was five or six hundred liao, and the largest was two thousand liao—this Zhu Cailao was going to Lingao to "eat the big households."
 
-　　“施大哥不必介怀么，去临高的机会以后多得是。”
+"Brother Shi, don't mind it. There will be many opportunities to go to Lingao in the future."
 
-　　“贺新这个小王八蛋，仗着算是个什么鸟亲戚，打仗不去，有好处的事情就是他沾。这帮子靠着女人卖X的皇亲国戚，都不是好东西！”
+"He Xin, this little bastard, relies on being some kind of damn relative. He doesn't go to war, but he gets all the benefits. These royal relatives who rely on women to sell their X are not good things!"
 
-　　“算了，这世道，哪里不是这样。”有个叫林淡的头目喝了一碗，“俺们在这里喝酒吃肉，下面小的们都在啃鱼骨头喝咸水呢，你当他们乐意？”
+"Forget it, in this world, where is it not like this." A leader named Lin Dan drank a bowl. "We are drinking and eating meat here, and the young ones below are gnawing on fish bones and drinking salt water. Do you think they are happy?"
 
-　　“俺们在这里喝酒吃肉是一刀一枪打出来的，像你，”施十四一指旁边一个胖子，“老胡是自己出钱造船，一家子来投的，都是有本钱的，贺新有什么本钱，靠女人的玩意？”
+"We earned this wine and meat with our swords and spears. Like you," Shi Shisi pointed to a fat man next to him, "Old Hu built his own ship with his own money and brought his whole family to join us. They all have capital. What capital does He Xin have? He relies on women's things?"
 
-　　众人一阵狂笑，便有人笑：“人的‘本钱’说不定比你长那么几分……”
+The crowd burst into laughter, and someone laughed: "Maybe his 'capital' is a few inches longer than yours..."
 
-　　林佰光发现关于“性”的话题总能引起大家热烈讨论。
+Lin Baiguang found that the topic of "sex" always aroused heated discussions among everyone.
 
-　　施十四愤愤不平，把胸中的许多不平都倒了出来：“打仗俺们卖命，分钱他们倒是头一份……”
+Shi Shisi was indignant and poured out a lot of his grievances: "We risk our lives in battle, but they are the first to get a share of the money..."
 
-　　“施大哥，慎言！慎言！”林佰光很喜欢这样的反应，但是昨天小树的事情让他产生了警觉——谁知道这施十四是不是在有意做作？就算不是，这帐篷内外，保不定有几个探子在时刻注意他的一举一动。
+"Brother Shi, be careful with your words! Be careful with your words!" Lin Baiguang liked this kind of reaction very much, but the matter of Xiaoshu yesterday made him alert—who knew if this Shi Shisi was deliberately putting on an act? Even if he wasn't, inside and outside this tent, there were probably a few spies paying attention to his every move.
 
-　　施十四借着酒意还要骂人，被人劝住了，那姓胡的胖子干了一碗酒，叹息道：“我们大帮也是一年不如一年了。想当年南北两个船队，纵横闽粤，那风光，气派！现在居然被挤兑的待在这小岛上混日子，还进退维谷！”
+Shi Shisi, under the influence of alcohol, still wanted to curse, but was stopped by others. The fat man surnamed Hu drank a bowl of wine and sighed, "Our big gang is getting worse year by year. I remember back then, the two fleets, north and south, roamed Fujian and Guangdong. What a sight, what a style! Now we are reduced to staying on this small island to get by, and we are in a dilemma!"
 
-　　“说到底，还是郑芝龙这反骨仔坏了规矩！老子要抓住他，非把他切成片喂狗不可！”
+"In the final analysis, it was Zheng Zhilong, this traitor, who broke the rules! If I catch him, I will definitely cut him into pieces and feed him to the dogs!"
 
-　　“哼，你以为李魁奇不想，大掌柜不想？可人家现在是堂堂游击，朝廷的官儿。”
+"Humph, you think Li Kuiqi doesn't want to, and the big boss doesn't want to? But now he is a dignified guerrilla, an official of the court."
 
-　　“游击算什么？芝麻大的官。参将都打死过，怕他个逑。”
+"What's a guerrilla? A sesame-sized official. We've even killed a vice-general, why should we be afraid of him?"
 
-　　“他手下人多船多，”林淡说，“想来钱也很多。”他奇怪道，“我就没搞明白过，去年李魁奇和他裂锅的时候，他的人马船只不是多数给李魁奇拉走了么？怎么一年不到声势就这么壮大了？”
+"He has many men and ships," Lin Dan said, "and probably a lot of money. I just don't understand. Last year, when Li Kuiqi broke with him, didn't most of his men and ships go with Li Kuiqi? How did he become so powerful in less than a year?"
 
-　　“朝廷支持他。听说巡抚熊文灿给他买炮造船，他的实力大增。”
+"The court supports him. I heard that Governor Xiong Wencan bought him cannons and built ships for him, and his strength has greatly increased."
 
-　　“熊文焕这个老货，想的是借刀杀人的把戏。”
+"Xiong Wenhuan, this old thing, is thinking of using a borrowed knife to kill people."
 
-　　“郑芝龙不也是一回事。他就想借助官府的力量把咱们这样的全干掉，以后就这海上的生意就全是他一个人做了。”林淡叹息道，“大掌柜不是他的对手。”
+"Zheng Zhilong is the same. He just wants to use the power of the government to wipe out all of us, and then he will be the only one doing business on the sea." Lin Dan sighed, "The big boss is no match for him."
 
-　　胡胖子道：“来来来，喝酒吧，反正眼下还过得，真要不行了，我就把帆一扬，带着全家老小跑路就是，大不了下南洋去求条活路。”
+Fatty Hu said, "Come, come, let's drink. Anyway, we can still get by for now. If it really doesn't work, I'll just raise the sail and run away with my whole family. At worst, I'll go to Southeast Asia to seek a living."
 
-　　众人一阵沉默，都觉得前途堪虑。这时，有人小声道：“听说了么？黑旗老四要跑路了。”
+The crowd fell silent, all feeling that the future was worrying. At this time, someone whispered, "Have you heard? Black Flag Old Fourth is going to run away."
 
-　　“哪个说的？”众人都吃了一惊。黑旗老四不是一般的掌柜，是大帮中的骨干，他要跑路，岂不是大树欲倾的征兆？
+"Who said that?" Everyone was shocked. Black Flag Old Fourth was not an ordinary shopkeeper, but a backbone of the big gang. If he ran away, wouldn't it be a sign that the big tree was about to fall?
 
-　　“看样子就像，人都回船上去了。一个也不在岸上。”
+"It looks like it. All his men have returned to the ships. Not a single one is on shore."
 
-　　“要真不行了，我也干脆跑路。这日子过得！”
+"If it really doesn't work, I'll just run away too. This kind of life!"
 
-　　“大伙到时候就投临高去吧。”施十四忽然蹦出这么一句话来。林佰光心中一惊。在他看来这话太直白了，简直有诱他上当的含义在内。
+"At that time, let's all go to Lingao." Shi Shisi suddenly blurted out this sentence. Lin Baiguang was startled. In his opinion, this was too blunt, and it almost had the meaning of luring him into a trap.
 
-　　“也是，听你把临高说得这么好，我也想去了。”有人就应道。
+"That's right. Hearing you describe Lingao so well, I also want to go," someone responded.
 
-　　“到时候你可得给我们当引见人啊。”胡胖子一脸诚挚的说。
+"At that time, you have to be our introducer," Fatty Hu said with a sincere face.
 
-　　“说不到，说不到。”林佰光小心的应对着，“如今大掌柜的局面还没到这个地步，大伙安心就是，只要对付过这几个月，说不定局势就会好转——大掌柜不是已经派船去临高运粮运火药了吗？真要不幸闹得大家流离失所，到临高来总有大伙一口饭吃。”他笑了笑，“不过眼下大伙还是齐心协力渡过难关才是。大树真要倒了，对我们这些猴子总不是好事。”
+"I can't say, I can't say." Lin Baiguang responded cautiously. "The situation of the great shopkeeper has not reached this point yet. Everyone should be at ease. As long as we get through these few months, maybe the situation will get better—hasn't the great shopkeeper already sent ships to Lingao to transport grain and gunpowder? If we are really unfortunate enough to be displaced, there will always be a mouthful of food for everyone in Lingao." He smiled and said, "But for now, everyone should work together to overcome the difficulties. If the big tree really falls, it's not a good thing for us monkeys."
 
-　　“林掌柜说得对。”林淡道，“做生不如做熟么。说不定再过些日子，就是转运的时候了。”
+"Shopkeeper Lin is right," Lin Dan said. "It's better to do what you know than what you don't. Maybe in a few more days, it will be a turning point."
 
-　　“就怕我们是齐心协力，那些平日里果子吃得最多的早就想下树了。”
+"I'm just afraid that we are working together, but those who have eaten the most fruits in normal times have long wanted to get off the tree."
 
-　　一直没怎么吭气的徐成吭气了，他的脸已经涨得通红，似乎憋了很久了，他是中军的一个小头目。原来就是低着头喝闷酒一言不发的。
+Xu Cheng, who had been silent for a long time, finally spoke. His face was flushed, as if he had been holding it in for a long time. He was a small leader in the central army. He had been drinking sullenly with his head down and had not said a word.
 
-　　“你们大概都不知道，”许成大着舌头，“四太太的兄弟最近押了好几船的东西出去，不知道送哪里去了……还有王二大掌柜的兄弟，也不见了……原先存在老营里装细软的铁箱子，也少了许多！”
+"You probably all don't know," Xu Cheng said with a thick tongue, "the brother of the fourth wife recently sent out several ships of goods. I don't know where they were sent... And the brother of the second great shopkeeper Wang is also gone... The iron boxes that used to store valuables in the old camp are also much fewer!"
 
-　　徐成低着脑袋结结巴巴的：“我算看透了，什么兄弟义气，什么江湖道义，全是狗屁，钱才是真的，老子跟着大掌柜十几年了，玩女人都轮不到排前队，尽是人家剩下的——倒是他们的亲戚、连宗、奴才一个个都成了头目，女人财货一船一船的往家里运！”
+Xu Cheng lowered his head and stammered, "I've seen through it. What brotherhood, what 江湖道义 (jiānghú dàoyì - righteousness of the martial arts world), it's all bullshit. Money is the only real thing. I've been with the big boss for more than ten years, and I'm not even in the front of the line when it comes to playing with women. It's all leftovers from others—but their relatives, clansmen, and slaves have all become leaders, and they transport women and goods to their homes by the boatload!"
 
-　　“你喝多了，别喝了，”几个人面色都变得不自然起来，赶紧扶住他不许他乱说话。施十四赶紧到帐篷外看看，见外面只有自己带来的几个亲信在放哨才略觉得放心。
+"You've had too much to drink, don't drink anymore," a few people's faces became unnatural, and they hurriedly held him down to prevent him from talking nonsense. Shi Shisi hurried outside the tent to have a look. He was slightly relieved to see that only a few of his trusted subordinates were on guard outside.
 
-　　“你们盯仔细点，有人过来打个讯！”说完又钻回帐篷里，这边几个人已经把菜塞了徐成一嘴巴。
+"You guys keep a close watch. If anyone comes over, give me a signal!" After saying that, he went back into the tent. A few people here had already stuffed Xu Cheng's mouth with food.
 
-　　“这个，徐兄弟酒后失言，失言……”
+"This, Brother Xu spoke out of turn after drinking, out of turn..."
 
-　　“没事，没事，小弟什么也没听到。”林佰光会心一笑。
+"It's okay, it's okay, I didn't hear anything." Lin Baiguang said with a knowing smile.
 
-　　看来诸彩老这里人心已经大大的不稳了，既得利益集团正在疯狂的偷盗，准备随时离开这条即将沉没的大船——这也是这类传统家族式封建式企业集团的必然结果。
+It seemed that the morale here in Zhu Cailao was already very unstable. The vested interest group was frantically stealing and preparing to leave this sinking ship at any time—this was also the inevitable result of this kind of traditional family-style feudal enterprise group.
 
-　　“咳咳，如今，唉，真是。”施十四不知道如何措辞。
+"Ahem, now, alas, really." Shi Shisi didn't know how to phrase it.
 
-　　“没事，我们继续喝酒好了。只谈风月，只谈风月。”
+"It's okay, we'll continue drinking. Let's only talk about romance, only talk about romance."
 
-　　诸彩老派去临高的船队离开南日岛已经十二天了。
+It had been twelve days since Zhu Cailao's fleet sent to Lingao left Nanri Island.
 
-　　这些天来。诸彩老已经不再召见他了，大约在他看来，林佰光作为一个使者的用处已经结束。现在不过是个抵押品而已。
+These days, Zhu Cailao had no longer summoned him. Perhaps in his opinion, Lin Baiguang's use as an envoy was over. Now he was just a hostage.
 
-　　在施十四的介绍下，林佰光和不少船队里的头目混熟了，每天除了喝酒就是赌钱——他带了不少银子在身上作为活动经费。林佰光用带来的扑克牌教大伙赌21点，这种新奇的牌戏因为简单又刺激，立刻成了风靡一时的赌博游戏。
+Under Shi Shisi's introduction, Lin Baiguang got acquainted with many of the leaders in the fleet. Every day, besides drinking, he gambled—he had brought a lot of silver with him as activity funds. Lin Baiguang used the playing cards he brought to teach everyone to gamble on 21, and this novel card game, because it was simple and exciting, immediately became a popular gambling game for a while.
 
-　　因为中军寨里不便赌博，他就每日到施十四的营里去，喝酒赌钱，看小海盗们打拳角力。
+Because it was inconvenient to gamble in the central army stockade, he went to Shi Shisi's camp every day to drink, gamble, and watch the young pirates practice boxing and wrestling.
 
-　　小树依然每晚被送到他帐内伺候。林佰光自然不会矫情，每晚还要变些花样出来，叫声传出几里地去。
+Xiaoshu was still sent to his tent to serve him every night. Lin Baiguang naturally would not be pretentious, and would even come up with some new tricks every night, and the screams could be heard for several li.
 
-　　赌钱、玩女人和喝酒加在一起，大家只是觉得林佰光是个纵情声色的人而已，不会把他频繁和头目们喝酒与其他事情联系到一起。这也是他自我掩护的招数。
+Gambling, playing with women, and drinking together, everyone just thought that Lin Baiguang was a person who indulged in sensual pleasures, and would not associate his frequent drinking with the leaders with other things. This was also his self-protection trick.
 
-　　不过他严格的秉承一点，在任何场所绝不流露出哪怕一点点的招揽之意，倒是有不少人向他打听临高的状况和实力。此时，已经出现了对前途无望，乘着夜晚带着船只脱队而去的小股了。
+However, he strictly adhered to one point: he would never show even a hint of solicitation in any place. On the contrary, many people asked him about the situation and strength of Lingao. At this time, there were already small groups who had lost hope for the future and left the team with their ships at night.
 
-　　看来，到时候在一片大乱的时候，自己只要及时掌握形势拉走百十条船是没有问题的。林佰光算计着。
+It seems that when there is a great chaos, it will not be a problem for me to take away a hundred or so ships in time by grasping the situation. Lin Baiguang calculated.
 
-　　不过，历史上郑芝龙和明军的船队是直追到南日岛的，并且就在南日岛将诸彩老击败。在一片混战中自己如何能保住命还是个问题——万一死在乱军之中岂不是冤枉？
+However, in history, Zheng Zhilong and the Ming army's fleet pursued all the way to Nanri Island and defeated Zhu Cailao right on Nanri Island. How he could save his life in a chaotic battle was still a problem—wouldn't it be an injustice if he died in the chaotic army?
 
-　　他每晚都在想这事，自己孤身一人，手无寸铁，如何才能应对？想来只有在这之前到施十四的船上去才行。施十四这老海狗，逃命的本事总是有的。
+He thought about this every night. He was alone and unarmed. How could he cope? He thought that the only way was to go to Shi Shisi's ship before that. This old sea dog, Shi Shisi, always had the ability to escape.
 
-　　但是另一个威胁却开始慢慢的降临到他身边。去临高的船队果然象他预计的那样没有按时归来。诸彩老等了几天之后开始烦躁不安。但是又不知道问题出在哪里。他开始疑心林佰光的来意，但是听人说他一天到晚喝酒赌钱，晚上玩女人也十分起劲，看不出有心怀鬼胎的样子。
+But another threat却开始慢慢的降临到他身边。去临高的船队果然象他预计的那样没有按时归来。诸彩老等了几天之后开始烦躁不安。但是又不知道问题出在哪里。他开始疑心林佰光的来意，但是听人说他一天到晚喝酒赌钱，晚上玩女人也十分起劲，看不出有心怀鬼胎的样子。
 
-　　“妈的，这到底是怎么回事！”
+“妈的，这到底是怎么回事！”
 
-　　忽然林佰光就不能再出中军寨子了，虽然伙食和女人继续供应，施十四也常来看他，但是他等于是被软禁了。这是第一个危险的信号。林佰光知道，事情的分晓就在这几天了。
+忽然林佰光就不能再出中军寨子了，虽然伙食和女人继续供应，施十四也常来看他，但是他等于是被软禁了。这是第一个危险的信号。林佰光知道，事情的分晓就在这几天了。
 
-　　诸彩老久等粮饷不到，肯定会按照历史上的做法，全军发动去攻闽安——这是可以预见的。
+诸彩老久等粮饷不到，肯定会按照历史上的做法，全军发动去攻闽安——这是可以预见的。
 
-　　不可预见的是，他会对买粮船队久久不归持有什么样的态度，会不会直接把他一刀砍了再出发去打仗？
+不可预见的是，他会对买粮船队久久不归持有什么样的态度，会不会直接把他一刀砍了再出发去打仗？
 
-　　林佰光无计可施，只好听天由命地等待着。他觉得：问题不大。
+林佰光无计可施，只好听天由命地等待着。他觉得：问题不大。
 
-　　第十三天的傍晚。诸彩老和主要头目正在中军帐内议事，这时候听到梆子响，不由得一惊。
+第十三天的傍晚。诸彩老和主要头目正在中军帐内议事，这时候听到梆子响，不由得一惊。
 
-　　“出什么事了？！”他厉声问。不是敌袭的号炮声，但是敲打梆子就是有紧急的意外事件发生。
+“出什么事了？！”他厉声问。不是敌袭的号炮声，但是敲打梆子就是有紧急的意外事件发生。
 
-　　不多会有人已来禀告：又有一股船只脱队而去了。
+不多会有人已来禀告：又有一股船只脱队而去了。
 
-　　“是黑旗老四的船！”
+“是黑旗老四的船！”
 
-　　众头目顿时骚动起来。这黑旗老四不是小股，是有六艘大船。二十条小船的中等匪伙，他投在诸彩老旗下也有十来年了，忽然起锚离去，显然是对前途失去了信心。
+众头目顿时骚动起来。这黑旗老四不是小股，是有六艘大船。二十条小船的中等匪伙，他投在诸彩老旗下也有十来年了，忽然起锚离去，显然是对前途失去了信心。
 
-　　“大掌柜！我这就去把他追回来！”
+“大掌柜！我这就去把他追回来！”
 
-　　“算了！人去不中留。”诸彩老的面色铁青，“大家弟兄一场，你去拦他不免来个刀兵相见。让外人看着笑话。让他走吧，以后还留个相见的余地。”
+“算了！人去不中留。”诸彩老的面色铁青，“大家弟兄一场，你去拦他不免来个刀兵相见。让外人看着笑话。让他走吧，以后还留个相见的余地。”
