--- a/_posts/2010-11-6-3-20200.md
+++ b/_posts/2010-11-6-3-20200.md
@@ -1,156 +1,157 @@
 ---
 layout: post
-title: 第二百零二节 林佰光的危局
+title: "Section 202: Lin Baiguang's Perilous Situation"
 category: 3
 path: 2010-11-6-3-20200.md
 tag: [normal]
 ---
 
-　　“可是大掌柜——”
+"But, big boss—"
 
-　　“我知道，不拦他怕是有人跟风学样。”诸彩老神色凝重，想了半晌，似乎是下了决心：
+"I know, if we don't stop him, I'm afraid someone will follow his example." Zhu Cailao's expression was grave. After thinking for a long time, he seemed to have made up his mind:
 
-　　“汪总管，你立刻关照粮台上，把存粮发到每股每船，把粮台上的粮食全部发完，全军造饭！准备打仗”
+"General Manager Wang, you immediately order the grain depot to distribute the stored grain to every share and every ship. Distribute all the grain in the grain depot and have the whole army cook! Prepare for battle."
 
-　　“啊？！”众头目望着他。只有老营总管汪友不觉得意外——虽然这十来天里又搞到一批粮食，还跑了一些人，粮食供给还算勉强对付过去了。但是杯水车薪，全军断粮只在这几天了。
+"Ah?!" The leaders looked at him. Only the old camp's general manager, Wang You, was not surprised—although they had obtained another batch of grain in the past ten days and some people had run away, the grain supply was barely enough. But it was a drop in the bucket, and the whole army would run out of food in just a few days.
 
-　　“大掌柜！我们现在少了十二条大船！是不是等去临高的船回来再议……”
+"Big boss! We are now short of twelve large ships! Should we wait for the ships going to Lingao to come back before we discuss..."
 
-　　“等贺新回来就太晚了，天知道他们遇到了什么事。”船队既然走的是外洋，一旦延期，各种因素都有可能，继续坐等不能解决任何问题，反而会陷入彻底断粮的绝地。汪友明确的指出现在的形势有多糟糕。
+"It will be too late when He Xin comes back. God knows what happened to them." Since the fleet was taking the outer sea route, once it was delayed, all kinds of factors were possible. Continuing to wait would not solve any problems, but would instead lead to a desperate situation of complete lack of food. Wang You clearly pointed out how bad the current situation was.
 
-　　“不能不打了，粮食就要见底了。”诸彩老冷冷道，“我们这就去打闽安！”
+"We have to fight. The grain is about to run out," Zhu Cailao said coldly. "We will go and fight Min'an now!"
 
-　　“少十几艘大海船也不是什么大不了的事情，小船一样打仗，打这样陆上的地方，小船还灵活些。”
+"It's not a big deal to be short of a dozen or so large sea ships. Small ships can also fight. For a land battle like this, small ships are more flexible."
 
-　　“大掌柜！那个澳洲人的使者怎么办？这小子会不会是在糊弄我们？”
+"Big boss! What about the Australian envoy? Is this kid fooling us?"
 
-　　“使者？”诸彩老不耐烦的一挥手，“把他留在南日就是了——没有船他跑不了。现在没工夫理会他！”他大声道，“和弟兄们说，饱餐一顿，明日一早启航。打下闽安三天不封刀！财物女人归弟兄们先取！”
+"Envoy?" Zhu Cailao waved his hand impatiently. "Just leave him on Nanri Island—he can't run away without a ship. I don't have time to deal with him now!" He said loudly, "Tell the brothers to have a full meal and set sail early tomorrow morning. After taking Min'an, there will be no sealing of blades for three days! The wealth and women will go to the brothers first!"
 
-　　“谢大掌柜！”众头目轰然应道。
+"Thank you, big boss!" the leaders responded in unison.
 
-　　贺新的船队，一路航行十分顺利，走外洋航线，不过六天功夫就到了博铺港。贺新此人其实不懂航海，不过靠着裙带关系上得位，所以船队旗舰的总管任福才是事实上的指挥官。
+He Xin's fleet had a very smooth voyage. Taking the outer sea route, it only took six days to reach Bopu Port. He Xin himself did not know how to sail, but he got his position through connections, so Ren Fu, the manager of the fleet's flagship, was the de facto commander.
 
-　　贺新被领去见了[文德嗣][y002]。[文德嗣][y002]说了几句场面话，又恭维了贺新“年少有为，英姿勃发”，送了一份贵重的礼物，把个贺新闹得晕头转向，乐不可支在商馆里胡吃海喝了一顿之后被领豪华套房里安排住下。屋子里，早有东门吹雨挑选来的两个姿容比较出众的妓女在等候。
+He Xin was led to see [Wen Desi][y002]. [Wen Desi][y002] said a few pleasantries, and complimented He Xin for being "young and promising, with a heroic spirit." He gave him a valuable gift, which made He Xin dizzy and overjoyed. After a hearty meal at the merchant's hall, he was led to a luxurious suite to stay. In the room, two prostitutes with outstanding looks, selected by Dongmen Chuiyu, were already waiting.
 
-　　任福和水手们也有专人接待，先洗了澡，又给他们每人一身衣服，好吃好喝的招待，众水手在南日岛上早就嘴里淡出鸟来。到了临高，既有新鲜蔬菜又有鸡鸭，至于酒饭更是敞开供应，都觉得这回能来临高是“走了运”。魏爱文亲自上阵，带着在总政治部实习的军政学校的士官生们明的是搞“接待”，实际上却是搞搞面对面的宣传工作。大力宣传穿越集团是如何的善待穷人，如何的让大家“有衣穿”、“有饭吃”、“有屋住”、“能娶老婆”、“不被欺负”之类的与普通人切身利益有关的事情。为了充分表示优越性还组织他们参观百仞、博铺两地公社的住宅、工厂、农庄和学校，外加东门市。
+Ren Fu and the sailors were also received by special personnel. They first took a bath, and then each of them was given a set of clothes and treated to good food and drink. The sailors on Nanri Island had long been bored to death. When they arrived in Lingao, there were not only fresh vegetables but also chicken and duck. As for wine and food, it was an open supply. They all felt that they were "lucky" to be able to come to Lingao this time. Wei Aiwen personally went into battle, leading the non-commissioned officer students of the military and political school who were interning at the General Political Department to ostensibly do "reception" work, but in fact, they were doing face-to-face propaganda work, vigorously publicizing how the transmigrator group treated the poor well, how they let everyone "have clothes to wear," "have food to eat," "have a house to live in," "be able to marry a wife," "not be bullied," and other things related to the vital interests of ordinary people. In order to fully demonstrate the superiority, they also organized them to visit the residences, factories, farms, and schools of the Bairen and Bopu communes, plus Dongmen Market.
 
-　　为了让他们对穿越集团的新社会优越性有充分的认识，又把这群人带到临高县城，给他们以鲜明的对比。
+In order to give them a full understanding of the superiority of the new society of the transmigrator group, they also took this group of people to Lingao County, to give them a sharp contrast.
 
-　　贺新则每日由外商委专人陪着，在东门市游览了一番。凡是有稍微中意之物，陪同立刻买下。遇到挂黄票的女人有中意的，晚上也准保送到商馆去，把个靠着裙带关系才在海盗团伙里混出线的贺新乐得不知东南西北了。吃喝享用倒在其次，他在海盗集团里一贯是被人瞧不起的主，这回有人如此的重视高看他，心理上得到了极大的满足。至于贷款买米之事，干脆甩在脑后——倒不是忘记了，而是买了米自然就要返程，干脆推迟几天买也就能多在这温柔乡里享受几天了。
+He Xin, on the other hand, was accompanied by a special person from the Foreign Trade Committee every day and toured Dongmen Market. Whenever he took a slight fancy to something, the person accompanying him would immediately buy it. If he met a prostitute with a yellow ticket that he liked, she would be sent to the merchant's hall at night. This made He Xin, who had only made a name for himself in the pirate group through connections, so happy that he didn't know which way was up. The food and enjoyment were secondary. He had always been looked down upon in the pirate group. This time, someone valued him so much, and he was greatly satisfied psychologically. As for the matter of buying rice with a loan, he simply threw it to the back of his mind—it wasn't that he had forgotten, but that if he bought the rice, he would naturally have to return. It was better to delay buying it for a few days so that he could enjoy a few more days in this gentle land.
 
-　　实际上，就算他是个极有责任感的人也走不了了。船只一进港口，海军就派人移动船只，封住船队的出港路线。海兵队在也随时待命准备接管船只——类似的演练在他们的跳帮战训练中已经做过无数次了。
+In fact, even if he were a very responsible person, he would not be able to leave. As soon as the ships entered the port, the navy sent people to move the ships and block the fleet's exit route. The marine corps was also on standby at any time to take over the ships—similar drills had been conducted countless times in their boarding combat training.
 
-　　“真闹不懂政保署的人，还费那个劲干嘛？又是招待吃饭，又是公费招待嫖娼的。直接全抓起来把船接收了不就是了。”老狄抱怨。他是负责指挥监视船只的海兵队的连长。
+"I really don't understand the people from the Political Security Department. Why go to all that trouble? They're treating them to meals and even paying for prostitutes. Wouldn't it be easier to just arrest them all and take over the ships?" Old Di complained. He was the company commander in charge of commanding the marine corps to monitor the ships.
 
-　　政治保卫总署的解释是：这是为了保证敌工人员的安全。
+The explanation from the Political Security General Administration was: this was to ensure the safety of the enemy's personnel.
 
-　　谁也不能保证临高就没有诸彩老或者其他势力的奸细存在。如果直接扣船抓人，对方星夜传送消息出去，最多一周时间也就传到南日岛上了。穿越集团“假谈判，真挖角”的面目就会完全暴露出来，林佰光非死无葬身之地不可。
+No one could guarantee that there were no spies of Zhu Cailao or other forces in Lingao. If they directly seized the ships and arrested the people, the other party could send a message out by star and night, and it would reach Nanri Island in at most a week. The transmigrator group's true face of "fake negotiations, real poaching" would be completely exposed, and Lin Baiguang would surely die without a burial place.
 
-　　现在用醇酒妇女人拖着贺新，事情办得慢就不是穿越集团的问题了。
+Now, by using fine wine and women to delay He Xin, the slow progress of the matter was not the problem of the transmigrator group.
 
-　　这么吃喝玩乐了好几天，任福到底是积年老匪，想到这次来是为了买粮买火药，若是再拖延下去，误了大事可不得了。贺新是皇亲国戚，到时候自然能脱身，责任可就成了自己的了。当下就来劝贺新：船队的几万弟兄，还有大掌柜他们在等粮食，还是乘早把事情办完了回去要紧。
+After several days of eating, drinking, and merrymaking, Ren Fu, after all, was an old bandit. He thought that this time they had come to buy grain and gunpowder. If they delayed any longer, it would be a big deal if they missed the important matter. He Xin was a royal relative and would naturally be able to get away with it, but the responsibility would fall on him. So he came to persuade He Xin: the tens of thousands of brothers in the fleet, and the big boss, were waiting for the grain. It was better to get things done and go back as soon as possible.
 
-　　贺新这才回过神来，想到出来的时候打掌柜对他说的话，不由得惊出一身冷汗来，赶紧要求见[文德嗣][y002]。
+Only then did He Xin come to his senses. Thinking of what the big boss had said to him when he came out, he broke out in a cold sweat and hurriedly asked to see [Wen Desi][y002].
 
-　　没想到[文德嗣][y002]居然不见了，他每次让人接洽买粮食的事情，澳洲人总是推脱——不是管事的没空，就是搬运工人不够。贺新这才觉得不对劲，而且他因为孤身一人住在商馆，四面连个可以商量的人都没有。任福则来了一次就再也不露面了。
+Unexpectedly, [Wen Desi][y002] was gone. Every time he asked someone to arrange the purchase of grain, the Australians always made excuses—either the person in charge was not free, or there were not enough porters. Only then did He Xin feel that something was wrong, and because he was living alone in the merchant's hall, there was no one around to discuss with. Ren Fu had come once and then never showed up again.
 
-　　贺新无法，打定主意先回博铺去。结果他刚一出屋门，门外的伙计就迎了上来：
+He Xin had no choice but to make up his mind to go back to Bopu first. As a result, as soon as he stepped out of the room, the clerk outside came up to him:
 
-　　“贺爷往哪里去？小的们好派人伺候。”
+"Where are you going, Master He? We can send someone to serve you."
 
-　　“没事，我上东门市去买香烟。”贺新还不算草包，马上想了个借口。
+"It's nothing, I'm going to Dongmen Market to buy cigarettes." He Xin was not a complete idiot and immediately thought of an excuse.
 
-　　“香烟一会就送来，不劳贺爷的尊步。”
+"The cigarettes will be delivered in a moment, no need to trouble Master He."
 
-　　“放屁，老子要自己买。”贺新发怒道。
+"Nonsense, I want to buy them myself," He Xin said angrily.
 
-　　“贺爷还是先回屋去的好，免得小的们担待不起……”伙计陪着笑脸，但是寸步不让。
+"Master He had better go back to his room first, so as not to make it difficult for us..." The clerk said with a smile, but did not move an inch.
 
-　　“混蛋，你什么意思，难道我是犯人？！”
+"Bastard, what do you mean? Am I a prisoner?!"
 
-　　“哪里，贺爷是首长们的贵客。您还是先屋里去，烟我们立刻就送来，若是觉得闷，关照一声，这就让人来放日本影戏。”
+"Not at all, Master He is a distinguished guest of the leaders. You should go back to your room first. We will send the cigarettes right away. If you feel bored, just say the word, and we will have someone come and show a Japanese movie."
 
-　　说着话，附近又点头哈腰的围上来三四个伙计，一个个面带不寒而栗的微笑。贺新不由得倒退了几步，心里知道大掌柜上了这伙髡贼的当了！
+As he spoke, three or four more clerks gathered around, bowing and scraping, each with a chilling smile on their faces. He Xin couldn't help but take a few steps back. He knew in his heart that the big boss had fallen into the trap of this group of 髡贼 (kūnzéi)!
 
-　　无可奈何回到屋子里，这陈设豪华舒适的屋子，不过是个镀金的笼子，贺新绝望的想到。任福和手下的弟兄，多半已经遭了他们的毒手！至于自己，不知道会让他活到几时。想到这里，心情顿时跌入了万丈深渊。居然躺在床上痛哭起来。
+Helplessly, he returned to his room. This luxuriously furnished and comfortable room was just a gilded cage, He Xin thought in despair. Ren Fu and his brothers had probably already been killed by them! As for himself, he didn't know how long they would let him live. Thinking of this, his mood suddenly fell into a bottomless abyss. He actually lay on the bed and cried bitterly.
 
-　　“什么海盗头目，原来就是个小娘们！”乌佛在隔壁的监听室里啐了一口以表达自己的藐视。
+"What kind of pirate leader is this? He's just a little girl!" Wu Fo spat in the next monitoring room to express his contempt.
 
-　　“他是靠裙带关系上位的，又不是正宗的海盗头目。”旁边的人说。
+"He got his position through connections, he's not a real pirate leader," the person next to him said.
 
-　　“燕子们来了吗？”
+"Have the 'swallows' arrived?"
 
-　　“到了，都在楼下等着。”
+"They've arrived, they're all waiting downstairs."
 
-　　乌佛从暗楼梯下了楼，在商馆的一个密室里，两个妓女正在等他。
+Wu Fo went downstairs through the secret staircase. In a secret room of the merchant's hall, two prostitutes were waiting for him.
 
-　　这是情报委员会从注册妓女里精心挑选出来的，不但要求容貌较好，体态玲珑，还得是胆大心细，善于应对。她们每个月接受少许津贴，条件是必须随时听候情报部门的差遣。
+These were carefully selected from the registered prostitutes by the Intelligence Committee. They were not only required to have good looks and a graceful figure, but also to be bold, careful, and good at dealing with people. They received a small monthly allowance on the condition that they must be at the disposal of the intelligence department at any time.
 
-　　“听着。”乌佛对着屋子里的妓女说，“从今天起，你们要全天跟着这位贺爷，不管他吃饭、睡觉还是上厕所。不管他说什么，做什么，随时向我汇报。”
+"Listen," Wu Fo said to the prostitutes in the room. "From today on, you will follow this Master He all day long, whether he is eating, sleeping, or going to the toilet. Whatever he says or does, report to me at any time."
 
-　　“婢子们知道。”
+"We understand."
 
-　　“事成之后，自然有你们的好处，现在好好的去伺候他吧。”
+"After this is done, you will naturally be rewarded. Now go and serve him well."
 
-　　乌佛布置完任务，赶紧骑上自行车直奔博铺。
+After Wu Fo had given his instructions, he hurriedly rode his bicycle straight to Bopu.
 
-　　博铺的局面已经控制住了，任福和他的水手们已经被控制起来了。
+The situation in Bopu was already under control. Ren Fu and his sailors had been controlled.
 
-　　“要定时让任福在公开场合露面，不要就此消失，明白么？”乌佛指示工作人员，“每天要安排让他上船看看说几句话。普通水手就让他们继续住船上，行动由政治部的人负责监视。”
+"Make sure Ren Fu appears in public regularly. Don't let him disappear just like that, understand?" Wu Fo instructed the staff. "Arrange for him to go on board every day to have a look and say a few words. Let the ordinary sailors continue to live on the ships, and their actions will be monitored by the people from the political department."
 
-　　“要是他们想夺船怎么办？”
+"What if they want to seize the ships?"
 
-　　“所以要把任福单独控制住，晚上不许他上船，防止他和水手传递消息。你们要时刻和魏部长保持联系。”
+"So we have to control Ren Fu separately. He is not allowed to go on board at night to prevent him from passing messages to the sailors. You must keep in touch with Minister Wei at all times."
 
-　　至于贺新，除了派遣了两个妓女贴身伺候他之外，每天还有许多活动在等待他。贺新就这么每天不是在酒楼吃喝，就是在街上挟妓游逛。他哪里还有这样的兴致，但是乌佛毫不客气的用比死更恐怖的东西来威胁他：说他要是胆敢在外面露出一丝一毫的勉强，就把他这小白脸卖到西洋人的相公堂子里做“相公”。接着又给他看了一晚上GAY SM电影。谁要胆敢不合作，到了洋人的相公堂子里就是这个下场。这一晚上的电影场面差点没让贺新昏过去，连着几天都觉得自己菊花不保。
+As for He Xin, in addition to sending two prostitutes to serve him personally, there were also many activities waiting for him every day. He Xin spent every day either eating and drinking in restaurants or strolling on the streets with prostitutes. He was in no mood for this, but Wu Fo unceremoniously threatened him with something more terrifying than death: he said that if he dared to show even a trace of reluctance outside, he would sell this pretty boy to a Westerner's male brothel to be a "male prostitute." Then he showed him a GAY SM movie for a whole night. Anyone who dared not to cooperate would end up like this in a foreigner's male brothel. The scenes in the movie that night almost made He Xin faint, and for several days he felt that his chrysanthemum was not safe.
 
-　　贺新为了保住自己的菊花，不得不每天敷衍，竭力表演自己的浪荡。几天醇酒妇人下来，原有的一点责任感也被渐渐消磨殆尽，想到自己多半是来日无多，干脆自暴自弃的加倍放浪起来。让情报委员会的人觉得很是欣慰，大家总结，这种办法以后说不定可以推广。
+In order to protect his chrysanthemum, He Xin had to go through the motions every day and try his best to perform his debauchery. After a few days of fine wine and women, his original sense of responsibility was gradually worn away. Thinking that he probably didn't have many days left, he simply gave up on himself and became even more dissolute, which made the people of the Intelligence Committee very gratified. Everyone concluded that this method might be promoted in the future.
 
-　　至于普通的水手，对待在临高好吃好喝，外加有女人睡的幸福日子一点都不觉得有什么不妥，最好这样的日子永无止境。就算急急忙忙的回去了，功劳也是贺新和任福的，他们回去不一样要去卖命打仗。
+As for the ordinary sailors, they did not feel that there was anything wrong with the happy days of good food, good drink, and women to sleep with in Lingao. It would be best if such days could last forever. Even if they went back in a hurry, the credit would go to He Xin and Ren Fu, and they would still have to go back to fight and risk their lives.
 
-　　虽说大伙也对为什么迄今还不装粮食火药觉得奇怪，但是他们向来是“大事有首领做主”，水手们对此并不在意。
+Although everyone also found it strange why they hadn't loaded the grain and gunpowder yet, they had always been of the opinion that "the leaders will take care of the important matters," and the sailors didn't care about it.
 
-　　情报委员会加强了对诸彩老海上动向的情报搜集活动。林佰光没有携带任何可以与临高联络的通迅工具，要知道事情发展的情况，只能靠情报部门自己去搜集了。广州站开始集中精力搜集有关诸彩老、南日岛和闽安的消息。
+The Intelligence Committee strengthened its intelligence gathering activities on Zhu Cailao's movements at sea. Lin Baiguang did not carry any communication tools that could contact Lingao. To know the development of the situation, they could only rely on the intelligence department to collect it themselves. The Guangzhou station began to concentrate on collecting information about Zhu Cailao, Nanri Island, and Min'an.
 
-　　张信把张大疤拉派了出去让他到福建去打听消息：他当过海盗，对里面的情势知道的多，容易打听到消息。
+Zhang Xin sent Zhang Dabala out to inquire about the news in Fujian: he had been a pirate and knew a lot about the situation inside, so it was easy to get news.
 
-　　“诸彩老要到闽安去，你到闽安附近找个地方躲起来，诸彩老一败退，你就放鸽子回来！”
+"Zhu Cailao is going to Min'an. You find a place to hide near Min'an. As soon as Zhu Cailao retreats, you send a pigeon back!"
 
-　　张大疤拉不解，诸彩老最近屯驻在南日，这是最近大家都知道的，但是何以见得他要去打闽安？又怎么知道他非败不可？
+Zhang Dabala was puzzled. Zhu Cailao had recently been stationed on Nanri, which everyone knew recently, but how could he be sure that he was going to attack Min'an? And how did he know that he would definitely be defeated?
 
-　　“是，只是这诸大掌柜的战力不弱，若是把闽安攻下来我该如何呢？”
+"Yes, but this great shopkeeper Zhu's combat power is not weak. What should I do if he captures Min'an?"
 
-　　“他攻不下来，非败不可。”张信自信满满的说，“要不用你这个月的月银和这次的出差费和我打个赌？我一赔五好了。”
+"He can't capture it, he will definitely be defeated," Zhang Xin said with full confidence. "Why don't you bet your monthly salary and this business trip fee with me? I'll give you five to one."
 
-　　“算了，你们有妖术，我才不赌呢。”张大疤拉喃喃自语，划了个十字，“上帝保佑！恶灵退散！”
+"Forget it, you have sorcery, I won't bet," Zhang Dabala muttered, making the sign of the cross. "God bless! Evil spirits, begone!"
 
-　　张信暗笑：他这教徒当得还真有创意。
+Zhang Xin smiled secretly: his way of being a Christian was really creative.
 
-　　诸彩老的船队终于在当年的八月发动了对闽安的进攻，进攻持续了四天。第一天攻势很是顺利，他的舢板和小船的船队在大船炮火的掩护下进入闽江，沿路击溃拦截的明军和乡勇，直驱闽安镇。
+Zhu Cailao's fleet finally launched an attack on Min'an in August of that year. The attack lasted for four days. The first day's offensive was very smooth. His fleet of sampans and small boats entered the Min River under the cover of the large ships' artillery fire, defeated the intercepting Ming army and local braves along the way, and went straight to Min'an Town.
 
-　　闽安距罗星塔十公里，距福州三十余公里。从罗星塔以下的后安至亭头，两岸群山连绵，江流曲折，而闽安镇峡处地势最为险要，江道深窄，最窄处仅有600米，是扼守闽江口的咽喉要道。明军在这里沿江两岸设置临时炮垒，布置了几十门大炮发炮拦截上行的船队，从沿江各处征发来乡勇扼守两岸，海盗们每次想登陆前进，就会遭到乡勇们的截杀。但是海盗们在三日不封刀的激励下，毫不退缩，不顾伤亡的一路猛攻。
+Min'an is ten kilometers from Luoxing Pagoda and more than thirty kilometers from Fuzhou. From Hou'an to Tingtou below Luoxing Pagoda, the mountains on both sides of the river are continuous, and the river flows in twists and turns. The terrain at the Min'an Town gorge is the most dangerous. The river channel is deep and narrow, and the narrowest part is only 600 meters. It is the throat that guards the mouth of the Min River. The Ming army set up temporary artillery batteries along both banks of the river here, and deployed dozens of cannons to intercept the upstream fleet. Local braves were conscripted from all over the river to guard both banks. Every time the pirates wanted to land and advance, they would be intercepted and killed by the local braves. But the pirates, encouraged by the promise of three days of no sealing of blades, did not retreat at all and attacked fiercely regardless of casualties.
 
-　　闽安是福州的门户，又是福建的主要出海口，一旦陷落，不仅在闽安的数万商民和无数财货要化为灰烟，福建的出海口也会就此被封闭，一时间福州震动。闽安商民纷纷外逃，局面一片混乱。
+Min'an was the gateway to Fuzhou and also the main sea outlet of Fujian. Once it fell, not only would the tens of thousands of merchants and people and countless wealth in Min'an be turned to ashes, but the sea outlet of Fujian would also be closed. For a time, Fuzhou was shaken. The merchants and people of Min'an fled one after another, and the situation was in chaos.
 
-　　然而郑芝龙已经率军赶来，随后在闽江口外与诸彩老的主力会战。郑芝龙此时装备了熊文焕赞助他的装有重炮的大船数十艘，在数量和质量上都形成了优势，双方在闽江口屡次接战，诸彩老屡遭败绩。军心大为动摇，到了第二天的傍晚，随着部分船只逃离战场，诸彩老的舰队终于全军崩溃。诸彩老见局势不可收拾，立刻收拾残军向南日岛退去，准备在那里集合残部，重整旗鼓。
+However, Zheng Zhilong had already rushed to the scene with his army, and then fought a decisive battle with Zhu Cailao's main force outside the mouth of the Min River. At this time, Zheng Zhilong was equipped with dozens of large ships with heavy cannons sponsored by Xiong Wenhuan, and had an advantage in both quantity and quality. The two sides fought several times at the mouth of the Min River, and Zhu Cailao was repeatedly defeated. The morale of the army was greatly shaken. By the evening of the second day, with some ships fleeing the battlefield, Zhu Cailao's fleet finally collapsed completely. Seeing that the situation was irreversible, Zhu Cailao immediately gathered the remnants of his army and retreated to Nanri Island, preparing to gather the remnants there and regroup.
 
-　　郑芝龙却不打算就此放过他，立刻展开追击，在郑芝龙的追击下，诸彩老部一路溃散，船只或者散失，或者被俘，退到南日岛的船只已经是十不存一。任谁都看得明白，诸彩老的覆灭只在朝夕之间了。
+However, Zheng Zhilong did not intend to let him go. He immediately launched a pursuit. Under Zheng Zhilong's pursuit, Zhu Cailao's troops were routed all the way. The ships were either scattered or captured. The ships that retreated to Nanri Island were less than one in ten. Anyone could see that Zhu Cailao's demise was only a matter of time.
 
-　　从闽安一路溃逃，大到“股”小到“只”，不断的有船只乘乱离开船队，或者另投生路，或者干脆投降郑芝龙这个胜利者去了——这在海上集团之间的来说是不稀罕的，这种联盟体，在顺风顺水的时候能够急速的膨胀，一旦吃了败仗形势不妙，马上就会分崩离析。
+Fleeing all the way from Min'an, from large "shares" to small "single ships," ships were constantly leaving the fleet in the chaos, either to find another way out, or simply to surrender to the victor, Zheng Zhilong—this was not uncommon among maritime groups. This kind of alliance could expand rapidly when things were going well, but once it suffered a defeat and the situation was not good, it would immediately fall apart.
 
-　　诸彩老就在这样的局势下，率领剩下的一百多只船退到了南日岛海面上。
+It was in this situation that Zhu Cailao led the remaining one hundred or so ships back to the waters of Nanri Island.
 
-　　这些船只冒着烟，有的桅杆桅杆已经折断，有的帆上还插着箭矢留着铅字石弹打穿的痕迹。船壳上伤痕累累，到处是破洞和血迹。这些船显得那样紧张、慌乱，以致完全失去了正常的队形。只顾争先恐后地逃命。
+These ships were smoking, some had broken masts, and some had arrows stuck in their sails and traces of being pierced by lead and stone projectiles. The hulls were scarred, with holes and bloodstains everywhere. These ships seemed so nervous and flustered that they had completely lost their normal formation, only caring about fleeing for their lives.
 
-　　而船上的海盗们，连日苦战，又为兵败如山倒的大溃败所惊吓。大多数人任凭浪涛的颠簸，一个个噤若寒蝉，一片静默。惊魂未定的眼睛不时搜索着远处的洋面，
+And the pirates on the ships, after days of hard fighting, were frightened by the great rout. Most of them let the waves toss them about, and they were all silent as cicadas in winter. Their frightened eyes searched the distant sea from time to time.
 
-　　败讯却比他们早一步已经传到了南日岛——原来从会战当天的早上开始就不断有脱队的船只逃回南日岛，等到全军开始从闽安败退的时候，眼明手快的头目们已经率先赶回南日转移自己的家眷财产。有的，干脆开始纵兵抢劫粮台和老营。老营里诸彩老的亲兵们拼死抵抗才把保住了营寨。
+The news of the defeat had reached Nanri Island before them—it turned out that from the morning of the day of the decisive battle, there had been a constant stream of ships that had left the team and fled back to Nanri Island. By the time the whole army began to retreat from Min'an, the quick-witted leaders had already rushed back to Nanri to transfer their families and property. Some even began to let their soldiers plunder the grain depot and the old camp. The personal soldiers of Zhu Cailao in the old camp fought desperately to protect the stockade.
 
-　　愈来愈多的船只开始拔锚逃离，那些诸彩老的亲族、同宗的“股”还抱着也许能收拾残局东山再起的想法，整顿人马船只在一片混乱中等候大军退回。
+More and more ships began to weigh anchor and flee. The "shares" of Zhu Cailao's relatives and clansmen still held on to the idea that they might be able to clean up the mess and make a comeback, and they organized their men and ships to wait for the return of the main army in the chaos.
 
-　　林佰光此时还被困在老营里。他原想着有人围攻老营的时候乘着混乱的时候逃出去，没想到外面枪炮厮杀声了一阵，渐渐平息下去了。再打听消息，说老营和粮台都守住了。
+Lin Baiguang was still trapped in the old camp at this time. He had originally thought of escaping in the chaos when someone besieged the old camp, but the sound of fighting with guns and cannons outside gradually subsided. When he inquired about the news again, he was told that both the old camp and the grain depot had been defended.
 
-　　这下他可成了热锅上的蚂蚁。从平日里和混熟的亲兵口中，林佰光知道有许多人已经驾船跑了。不由得忧心如焚——现在跑的，不外乎是非嫡系的人马，走得愈多，余下的就都是铁杆的亲信，自己怎么拉得动他们？再者他这些日子交际上的几位小头目也音信全无，不知道是跟了诸彩老去了闽安打了败仗还是留在南日了。他们现在是死是活，是已经跑路还是继续在岛上，他一概不知。
+Now he was like an ant on a hot pan. From the mouths of the personal soldiers he had become familiar with, Lin Baiguang knew that many people had already fled by boat. He couldn't help but be worried—those who were running now were nothing more than non-direct-line troops. The more they left, the more the remaining ones were die-hard loyalists. How could he win them over? Besides, the few small leaders he had made friends with these days had also disappeared. He didn't know if they had gone to Min'an with Zhu Cailao and were defeated, or if they had stayed on Nanri. He had no idea whether they were dead or alive, whether they had already run away or were still on the island.
 
-　　林佰光知道，他在老营里的待得时间愈久形势就愈加不利。那些头目们一旦跑了或者战死，自己掌握船队的企图就会彻底落空，而诸彩老一回来，南日岛上就会成为与郑芝龙最后决战的修罗场，自己十有八九会死在乱军之中！
-[y002]: /characters/y002 "文德嗣"
+Lin Baiguang knew that the longer he stayed in the old camp, the more unfavorable the situation would be. Once those leaders ran away or were killed in battle, his attempt to control the fleet would be completely in vain. And once Zhu Cailao returned, Nanri Island would become a Shura field for the final decisive battle with Zheng Zhilong, and he would most likely die in the chaotic army!
+
+[y002]: /characters/y002 "Wen Desi"
