--- a/_posts/2010-11-8-3-20400.md
+++ b/_posts/2010-11-8-3-20400.md
@@ -1,113 +1,113 @@
 ---
 layout: post
-title: 第二百零四节 投奔
+title: "Section 204: Defection"
 category: 3
 path: 2010-11-8-3-20400.md
 tag: [normal]
 ---
 
-　　林淡却道：“你们别白日做梦了。当年项羽说‘无言见江东父老’，为啥？三千人跟着他出去打仗一个都没能回来！你们出来闯荡这些年，家乡的子侄、亲族、同乡跟着出来的有多少，死了又有多少？就这么回去还想过安稳日子？那些弟兄的老母寡妇不把你们的门槛踹倒才怪！”
+Lin Dan said, "Don't you guys daydream. Back then, Xiang Yu said, 'I have no face to see the elders of Jiangdong.' Why? Three thousand men followed him to war, and not a single one came back! You've been out in the world for these years, how many of your hometown's nephews, relatives, and fellow villagers have come out with you, and how many have died? You think you can go back and live a peaceful life just like that? It would be strange if the old mothers and widows of those brothers didn't kick down your door!"
 
-　　林淡又道：“你们上得岸去，一个个腰缠万贯，这些年来在干什么又不是没人知道。手里没了刀枪，岂不是大大的肥羊？就算官府不来找你们的麻烦，那些劣绅要寻你个不是，你还不得乖乖的把银子吐出来？”
+Lin Dan continued, "When you go ashore, you'll all be rich. It's not like no one knows what you've been doing all these years. Without a sword or spear in your hand, aren't you just a big fat sheep? Even if the government doesn't come looking for trouble, if those evil gentry want to find fault with you, won't you have to obediently spit out your silver?"
 
-　　“再者，这些年来在座的谁没个仇家？杀了人家老子娘的，夺了人家老婆女儿的，烧了人家房子的……到时候一个个有冤报冤枉，有仇报仇，能不能留条性命都难说！”
+"Furthermore, who among those present here doesn't have an enemy these years? Those who have killed people's parents, taken people's wives and daughters, burned people's houses... At that time, when everyone comes to seek revenge, it's hard to say whether you can keep your life!"
 
-　　胡胖子一听颓然坐了下去，原本心思活络想回家的人也都不言声了。
+When Fatty Hu heard this, he sat down dejectedly. Those who had been thinking of going home also fell silent.
 
-　　投奔其他大帮没有前途，自立门户又办不到，连最后的回乡纳福也变得困难重重。
+There was no future in defecting to other big gangs, and it was impossible to start their own business. Even the final return home to enjoy their fortune had become fraught with difficulties.
 
-　　走投无路，这种感觉强烈的篡取了他们的心。仿佛是无边的黑暗笼罩在每个人的头上。
+They were at a dead end. This feeling strongly seized their hearts, as if an endless darkness was enveloping everyone's head.
 
-　　这时候林佰光才站了出来，他咳嗽了一声：
+At this time, Lin Baiguang stood up. He coughed:
 
-　　“诸位，不如去临高吧？”
+"Everyone, why don't we go to Lingao?"
 
-　　“临高？！”林淡如梦初醒，“去投奔澳洲人？！”
+"Lingao?!" Lin Dan woke up as if from a dream. "Go and defect to the Australians?!"
 
-　　施十四也仿佛想了起来一样：“不错，去投奔澳洲人吧！”
+Shi Shisi also seemed to remember: "That's right, let's go and defect to the Australians!"
 
-　　然而大伙还是用犹疑的眼光看着林佰光——喝酒的时候说的话是一回事，事到临头，要真正去做不得不好好地思量思量。
+However, everyone still looked at Lin Baiguang with doubtful eyes—what was said while drinking was one thing, but when it came to the real thing, they had to think it over carefully.
 
-　　“各位兄弟！”林佰光这几天攒足了精气神，就等着这一刻。这一瞬间，县招商办主任的灵魂附体！他开始阐述起已经打了几周的腹稿。着重说明：目前临高正在百废待举之时，大家去投奔，必然受到重用。而且澳洲人占有临高，不论是船只休整驻泊都有根据地，而且人人都有宅院，不会象过去那样在海上四处漂泊，时时要受断水断粮的困苦。
+"Brothers!" Lin Baiguang had been saving up his energy for this moment. At this moment, the soul of the director of the county's investment promotion office possessed him! He began to elaborate on the draft he had been working on for several weeks, emphasizing that Lingao was currently in a state of waiting for everything to be done. If everyone went to defect, they would surely be given important positions. Moreover, the Australians occupied Lingao, and whether it was for ship repairs or stationing, they had a base. Everyone would have a house and would not have to drift on the sea like in the past, suffering from the hardship of lack of water and food.
 
-　　这番说辞颇为打动人心，漂泊海上的苦处，不是一般人能够忍受的。但是这澳洲人毕竟根基甚浅，也不知道在临高能待到几时，众人的目光一下子都落在施十四的身上——这里唯一去过临高的只有他了。
+This speech was quite moving. The hardship of drifting on the sea was not something that ordinary people could endure. But after all, the foundation of these Australians was very shallow, and they didn't know how long they could stay in Lingao. Everyone's eyes suddenly fell on Shi Shisi—he was the only one here who had been to Lingao.
 
-　　施十四点点头：“林兄弟的话，我信得过！我愿意去临高！”
+Shi Shisi nodded: "I trust Brother Lin's words! I am willing to go to Lingao!"
 
-　　差不多就是一锤定义了。众人彼此对视，也想不出什么更好的主意来。这时候，忽然有人问道：“我有一事，想向林兄弟请教！”
+It was almost a final decision. Everyone looked at each other and couldn't think of a better idea. At this time, someone suddenly asked, "I have a question, I would like to ask Brother Lin for advice!"
 
-　　林佰光知道，这是进入到招商的答疑阶段了。一看发问的是个不大熟悉的头目，名叫李广发的，此人带来了三条船。他是偶然间闯到这里来的，原本只是想在此地取水，见大家都聚集此处，便留了下来——毕竟人多势众好照应。
+Lin Baiguang knew that this was the Q&A session of the investment promotion. He saw that the person who asked was a not-so-familiar leader named Li Guangfa. This person had brought three ships. He had come here by chance. He originally just wanted to get water here. Seeing that everyone was gathered here, he stayed—after all, there was strength in numbers.
 
-　　“澳洲人的本事，施大哥去过临高，都是见识过的，想来也不会哄骗兄弟们。只是澳洲人到底打算在临高待多久？”
+"The Australians' abilities, Brother Shi has been to Lingao and has seen them all. I don't think he would deceive us brothers. But how long do the Australians plan to stay in Lingao?"
 
-　　这事可是事关重大的问题，大家既然要投奔主家，就得有个安稳的地方，不能今天去了明天又散伙。
+This was a matter of great importance. Since everyone was going to defect to a master, they had to have a stable place. They couldn't just go today and break up tomorrow.
 
-　　“待到这天下不姓朱，我们也要在临高待下去！”林佰光毫不犹豫道。
+"We will stay in Lingao until this world is no longer surnamed Zhu!" Lin Baiguang said without hesitation.
 
-　　“好！”施十四不由得叫好——想不到这林兄弟还如此的豪情万丈。
+"Good!" Shi Shisi couldn't help but cheer—he didn't expect this Brother Lin to be so heroic.
 
-　　“兄弟有豪气！”李广发点点头，“若是刘大掌柜或者郑芝龙不让你们在临高待下去又如何？”
+"Brother has courage!" Li Guangfa nodded. "What if the great shopkeeper Liu or Zheng Zhilong don't let you stay in Lingao?"
 
-　　“呵呵，”林佰光笑道，“刘香郑芝龙两个加起来，想把我们从临高赶走也是痴心妄想而已！”他说，“我口说无凭，愿意去临高的自然会让大家看到我们的本钱。若是到了临高诸位觉得不是久留之地的，我等奉送粮食火药，来去自便，决不食言。”
+"Hehe," Lin Baiguang smiled. "Even if Liu Xiang and Zheng Zhilong join forces, it's just a pipe dream for them to drive us out of Lingao!" he said. "My words are no proof. Those who are willing to go to Lingao will naturally be shown our capital. If you feel that Lingao is not a place to stay for a long time after you arrive, we will give you food and gunpowder, and you can come and go as you please. We will never break our promise."
 
-　　眼见为实，与其徒费唇舌的解释自己拥有多少多少他们不懂的科技、工业，不如让他们亲眼看看大炮和机动船的力量。而且这一年来，澳洲人有大铁船、快船和快枪炸炮的讯息，在这闽粤两地流传很广，特别是刘香借助西班牙大帆船夜袭临高最终惨败的事情，更是传遍了各处。不能不对这些人产生影响。
+Seeing is believing. Instead of wasting words explaining how much technology and industry they had that they didn't understand, it was better to let them see the power of cannons and motorboats with their own eyes. Moreover, in the past year, the news that the Australians had large iron ships, fast boats, and fast guns and cannons had spread widely in Fujian and Guangdong. In particular, the story of Liu Xiang's disastrous defeat when he used a Spanish galleon to attack Lingao at night had spread everywhere. It could not but have an impact on these people.
 
-　　另外，林佰光深信穿越集团在临高经营一年，在当地逐渐塑造起来的蓬勃向上的社会氛围会感染到这群浑浑噩噩的海盗头目们——每个人都是有理想的。
+In addition, Lin Baiguang was convinced that the transmigrator group had been operating in Lingao for a year, and the vigorous and upward social atmosphere that had been gradually created there would infect this group of muddle-headed pirate leaders—everyone has ideals.
 
-　　胡胖子道：“我也愿意去临高！”
+Fatty Hu said, "I am also willing to go to Lingao!"
 
-　　林淡这时也点头：“我也愿往。”
+Lin Dan also nodded at this time: "I am also willing to go."
 
-　　众人在这样的气氛下，纷纷表示愿意去。起码愿意去看看是不是澳洲人是不是一股值得投靠的势力。
+In this atmosphere, everyone expressed their willingness to go. At least they were willing to go and see if the Australians were a force worth defecting to.
 
-　　林佰光见还有一些头目不言声，只是沉默不语。心想与其让他们现在不说话暗里使绊子，不如把话说开，来个光明磊落。便说：“此事绝不勉强，有愿意去临高的，我临高倒履相迎！若是不愿意去的，自便就是。”
+Seeing that there were still some leaders who were silent, Lin Baiguang thought to himself that instead of letting them not speak now and secretly cause trouble, it was better to speak openly and be frank. He said, "This matter is by no means forced. If you are willing to go to Lingao, I will welcome you with open arms! If you are not willing to go, you can do as you please."
 
-　　最后有大约三十条船不愿去临高，打算自谋出路。余下的近八十条船表示愿意去临高。从大担屿去临高，还有还几天的海路，船队里大船小船都有，不便走外洋航线。走内海就要预备着和刘香的船队遭遇的可能。为了便于指挥起见，大家公推施十四做总管。施十四让船上的弹药多的都匀出一些来给没了弹药的船只，又让妇孺老幼都上了几条大船，免得打仗的时候分心。
+In the end, about thirty ships were unwilling to go to Lingao and planned to find their own way out. The remaining nearly eighty ships expressed their willingness to go to Lingao. From Dadanyu to Lingao, there were still several days of sea travel. There were both large and small ships in the fleet, so it was not convenient to take the outer sea route. Taking the inner sea meant preparing for the possibility of encountering Liu Xiang's fleet. For the convenience of command, everyone publicly elected Shi Shisi as the general manager. Shi Shisi had the ships with more ammunition share some with the ships that had no ammunition, and also had the women, children, and the elderly board a few large ships to avoid distraction during battle.
 
-　　安排已定，大家各自回船准备。准备天亮开船前往临高。
+After the arrangements were made, everyone returned to their ships to prepare. They were ready to set sail for Lingao at dawn.
 
-　　林佰光心中十分兴奋，他没料到说服工作会如此的顺利，看来在南日岛上下得一番功夫还是到位的。不过他不敢把自己的兴奋溢于言表，越到关键时刻，越不能麻痹大意。他暗暗提醒自己。
+Lin Baiguang was very excited in his heart. He had not expected the persuasion work to be so smooth. It seemed that the efforts he had made on Nanri Island were in place. However, he did not dare to show his excitement. The more critical the moment, the more he could not be careless. He secretly reminded himself.
 
-　　他正要就寝，忽然施十四来了。
+Just as he was about to go to bed, Shi Shisi suddenly came.
 
-　　“林兄弟，以后我们就是一家人了。还要兄弟你多多照应！”施十四说着话，态度恭敬起来，说着拿上来一个小箱子。打开一看，里面黄是黄、绿是绿，都是贵重的首饰，金灿灿的直逼人眼。
+"Brother Lin, from now on we are one family. I will have to rely on you for your care!" As Shi Shisi spoke, his attitude became respectful. He brought up a small box. When he opened it, it was full of yellow and green, all valuable jewelry, shining with a golden light that was dazzling.
 
-　　“这是各位头目的一点心意。”
+"This is a small token from the leaders."
 
-　　“众位兄弟太见外了！”财宝在前，林佰光不是没有心动，但是转念一想自己要来何用？便换了极诚恳的态度说，“施大哥！这些财物都是弟兄们一刀一枪挣来的。我怎么好拿？拿了良心也会不安的。大哥不用担心，临高现在正是用人之际，大家去了，自然都有一份好前程。”
+"Brothers, you are too kind!" Lin Baiguang was not unmoved by the treasure, but on second thought, what use would he have for it? He changed to a very sincere attitude and said, "Brother Shi! These treasures were all earned by the brothers with their swords and spears. How can I take them? My conscience will not be at ease if I take them. Brother, don't worry. Lingao is in need of people right now. When everyone goes, there will naturally be a good future for everyone."
 
-　　“好，兄弟的话我信得。”施十四见他态度诚恳坚决，不再勉强。
+"Good, I believe you, brother." Seeing his sincere and firm attitude, Shi Shisi did not insist.
 
-　　陈海阳、魏爱文和冉耀正在博铺视察着准备派出去招纳诸彩老残部的人和船。为了防着招降不成反而被人吃了，慎重起见决定还是装备一个小型的舰队出发比较好，起码有能力自保。他们现在有了贺新带来的十二条大船，这些船全是二三百吨以上的海船。装备好之后足以自保。
+Chen Haiyang, Wei Aiwen, and Ran Yao were inspecting the people and ships preparing to be sent out to recruit Zhu Cailao's remnants in Bopu. In order to prevent being eaten by others instead of recruiting them, they decided out of caution that it was better to equip a small fleet to set off, at least with the ability to protect themselves. They now had the twelve large ships brought by He Xin. These ships were all sea ships of over two or three hundred tons. After being well-equipped, they were sufficient for self-protection.
 
-　　海军对船只进行了简单的改装，拆除了上面质量不一的，口径各异的各种铁炮，换上了武器设计小组设计的“低配置”海军炮。
+The navy made simple modifications to the ships, removing the various iron cannons of varying quality and caliber, and replacing them with the "low-configuration" naval guns designed by the weapons design team.
 
-　　所谓低配置海军炮是秉承“高低搭配”原则，装备制造简单，成本低廉的海军火炮。它是由24磅滑膛加农炮和48磅的短管卡隆炮组成的，专门装备风帆战舰。将来也准备用来出口。
+The so-called low-configuration naval guns were based on the principle of "high and low mix," equipped with naval artillery that was simple to manufacture and low in cost. It was composed of 24-pounder smoothbore cannons and 48-pounder short-barreled carronades, specially equipped for sailing warships. It was also planned to be used for export in the future.
 
-　　这些船配全火炮和弹药之后在海上足以自保。随贺新来的水手经过几天的教育宣传，已经有一部分人表示愿意投靠临高了。陈海阳决定每条船配上三分之一，其他由海军水手和海兵队的人填补。
+After these ships were fully equipped with cannons and ammunition, they were sufficient for self-protection at sea. After a few days of education and propaganda, some of the sailors who came with He Xin had already expressed their willingness to defect to Lingao. Chen Haiyang decided to assign one-third to each ship, and the rest would be filled by navy sailors and marines.
 
-　　正忙得不亦乐乎。忽然陈李迪上气不接下气的从港务办公室跑了出来，向他报告说林佰光回来了。
+Just as he was busy, Chen Lidi ran out of the port office, out of breath, and reported to him that Lin Baiguang had returned.
 
-　　“他回来了？在哪里？在哪里？”冉耀连声问。
+"He's back? Where? Where?" Ran Yao asked repeatedly.
 
-　　“刚过马袅！遇到了第三巡逻支队！他带回好几十条船！”
+"He just passed Maniao! He encountered the third patrol squadron! He brought back dozens of ships!"
 
-　　陈海阳听说带回来的许多船，不禁心中一喜，忙又问：“是诸彩老的船么？有多少艘。”
+When Chen Haiyang heard that many ships had been brought back, he couldn't help but be overjoyed. He hurriedly asked again, "Are they Zhu Cailao's ships? How many are there?"
 
-　　“可不少，足有七八十艘。一千多人” 李迪抑制不住心中的喜悦，“他上了乐琳的旗舰，刚和我通过话。”
+"Quite a few, at least seventy or eighty. More than a thousand people," Li Di couldn't suppress his joy. "He boarded Le Lin's flagship and just spoke to me."
 
-　　“七八十艘！都是什么船。”
+"Seventy or eighty ships! What kind of ships are they?"
 
-　　“有大有小，很多是大船！”
+"There are large and small ones, many are large ships!"
 
-　　七八十艘船！这可是发了一笔大财了！就算都是临高拖风这样的小吨位船只，对穿越集团的海上力量也是个可观的增长，更不用说还都配有水手。
+Seventy or eighty ships! This was a huge fortune! Even if they were all small-tonnage ships like the Lingao junk, it was a considerable increase in the maritime power of the transmigrator group, not to mention that they were all equipped with sailors.
 
-　　“走，看看去。”陈海阳按捺不住喜悦——诸彩老还真给力呀，前后送了两份大礼过来。
+"Let's go and have a look." Chen Haiyang couldn't hold back his joy—Zhu Cailao was really something, sending two big gifts one after another.
 
-　　“不用急，船还没过马袅呢。”李迪笑得脸象朵花似的，“林佰光说：他们一进琼州海峡，沿岸的烽火台就一个接一个的点烽火——大概是吓坏了吧。”
+"No hurry, the ships haven't passed Maniao yet." Li Di's face was like a flower with a smile. "Lin Baiguang said: as soon as they entered the Qiongzhou Strait, the beacon towers along the coast lit up one after another—they were probably scared."
 
-　　“我们还是应该去接应一下，以示郑重。”魏爱文提议，“至少得派遣个执委去……”
+"We should still go and meet them to show our solemnity," Wei Aiwen suggested. "At least we should send a member of the Executive Committee..."
 
-　　“我去吧。”陈海阳说，“我是海军的大头目嘛！”
+"I'll go," Chen Haiyang said. "I'm the big boss of the navy!"
 
-　　林佰光居然一口气拉了这么多船回来，不但在陈海阳等人看来是个意外，在冉耀看来也是一个意外，能从诸彩老那里搞到十二条大船，已经是很了不起的成绩了。
+Lin Baiguang had actually brought back so many ships at once. This was not only an accident in the eyes of Chen Haiyang and others, but also an accident in the eyes of Ran Yao. It was already a great achievement to be able to get twelve large ships from Zhu Cailao.
