--- a/_posts/2010-11-9-3-20500.md
+++ b/_posts/2010-11-9-3-20500.md
@@ -1,103 +1,103 @@
 ---
 layout: post
-title: 第二百零五节 招降
+title: "Section 205: Accepting Surrender"
 category: 3
 path: 2010-11-9-3-20500.md
 tag: [normal]
 ---
 
-　　冉耀原来觉得他这样用着自己的小命换来十二条船有些不值当，但是现在又带来了更多船，自己也活得好好的，不由得从心里为他高兴。
+Ran Yao originally felt that it was not worth it for him to risk his life for twelve ships, but now he had brought back more ships and was still alive and well. He couldn't help but be happy for him from the bottom of his heart.
 
-　　李迪这边一阵忙碌，指挥船只移动锚地。为这差不多八十艘船腾出锚地来，接着邬德也来了：为一千多人，“净化”、配给衣服和食品、安排住宿对已经熟悉业务的检疫营地来说原本不是大事，但是这批人不比从广州运来的难民，而是一伙海盗，必须小心应对。邬德怕阳河年轻没经验，决定还是自己亲自坐镇。
+Li Di was busy for a while, directing the ships to move their anchorages to make room for these nearly eighty ships. Then Wu De also came: for more than a thousand people, "purification," distribution of clothes and food, and arrangement of accommodation were originally not a big deal for the quarantine camp, which was already familiar with the business. But this group of people was not like the refugees transported from Guangzhou, but a group of pirates, and they had to be dealt with carefully. Wu De was afraid that Yang He was young and inexperienced, so he decided to personally take charge.
 
-　　“要不要调动再调动一个连来增援？”
+"Do we need to transfer another company to reinforce?"
 
-　　“不用了。”邬德说，“这里是光海兵就二个连了，还有一个镇暴的步兵连，训练了好几个月的正规军还干不过一千老老少少的海盗我们还是干脆跑路去澳大利亚了。”他停了下，“另外别搞得太紧张，人会以为我们是黑吃黑。”
+"No need," Wu De said. "There are already two companies of marines here, and a riot control infantry company. If the regular army that has been trained for several months can't handle a thousand pirates, old and young, we might as well just run away to Australia." He paused, "Besides, don't make it too tense, people will think we are playing black eat black."
 
-　　于是外松内紧的调子就定下了。但是“要是他们要见任福或者贺新怎么办？”这两个人先期到了临高，他们的下落和待遇显然可以被看作是样板。
+So the tone of being relaxed on the outside and tense on the inside was set. But "what if they want to see Ren Fu or He Xin?" These two people had arrived in Lingao earlier, and their whereabouts and treatment could obviously be seen as a model.
 
-　　“暂时不让他们见。小魏，这任福就归你好好的调教了。”
+"Don't let them see them for the time being. Xiao Wei, this Ren Fu is up to you to train well."
 
-　　“调教的事情不归冉耀吗？我这最多算洗脑吧。”魏爱文按了下被海风吹得要飞起来的大檐帽，又摸了摸武装带。
+"Isn't the training supposed to be Ran Yao's job? At most, I can only be considered brainwashing." Wei Aiwen pressed down on his big-brimmed hat that was about to be blown away by the sea breeze, and then touched his cartridge belt.
 
-　　“贺新其实好说话——这家伙没主见，就是一软骨头，墙头草，要他干啥就干啥。任福就不行了，他觉得俺们不仗义，不卖粮食还扣他的船……”
+"He Xin is actually easy to talk to—this guy has no opinion of his own, he's just a spineless person, a wallflower, he'll do whatever you ask him to do. Ren Fu is not okay. He feels that we are not righteous, not selling grain and still detaining his ship..."
 
-　　“和他说诸彩老要完蛋么？”
+"Did you tell him that Zhu Cailao is going to be finished?"
 
-　　“这怎么好说，说了不成了我们存心黑诸彩老了。”
+"How can we say that? If we say it, won't it become that we deliberately framed Zhu Cailao?"
 
-　　“要好好给他开导开导，让他知道俺们临高才是代表历史发展的正确方向。”邬德说着，想这事情还有点棘手。自带着阳河往检疫营去了。
+"We have to enlighten him well and let him know that our Lingao represents the correct direction of historical development," Wu De said, thinking that this matter was still a bit tricky. He took Yang He and went to the quarantine camp.
 
-　　这边两边电报不断，乐琳已经把船上的大概人员数字报了过来。检疫营这里的伙房立刻忙开了，改造完不久的煤球炉灶打开的风门往里面鼓风，一会新加进去的蜂窝煤就烧得通红了。锅子里是照例的检疫营的第一顿伙食：稀粥。
+Here, telegrams were constantly being sent back and forth. Le Lin had already reported the approximate number of people on the ship. The kitchen in the quarantine camp immediately got busy. The air door of the newly renovated briquette stove was opened to blow air into it, and in a short while, the newly added honeycomb briquettes were burning red. In the pot was the usual first meal of the quarantine camp: thin porridge.
 
-　　邬德看了看，摇头：“再添一半米下去，多加些蔬菜。”
+Wu De looked at it and shook his head: "Add another half of the rice, and add more vegetables."
 
-　　“不是说饿太久的人不能吃饱饭……”
+"Didn't you say that people who have been hungry for too long can't eat a full meal..."
 
-　　“他们不是饥民，就算最近吃得少点，差点，也不能和多少日子没吃没喝的难民相提并论——蔬菜要多加，海上没菜吃的。”
+"They are not refugees. Even if they have eaten less and worse recently, they can't be compared with the refugees who haven't eaten or drunk for many days—add more vegetables, there are no vegetables to eat at sea."
 
-　　宿舍、服装、还有准备为他们进行体检和治疗的卫生人员，陆续的到位了。做好了一切准备，为了增添气氛，丁丁已经雇来了本县的唯一的一班民间吹鼓手，到码头等候，准备鼓吹迎接。还准备叫国民学校的学生来列队欢迎。
+The dormitories, clothing, and the medical personnel who were preparing to conduct physical examinations and treatment for them arrived one after another. All preparations were made. In order to add to the atmosphere, Ding Ding had already hired the only band of folk musicians in the county to wait at the wharf, ready to play to welcome them. He also planned to have the students of the national school line up to welcome them.
 
-　　陈海阳却道：“不必太过隆重，这等海盗不能过于优崇，免得生了狂妄自大之心！”
+Chen Haiyang, however, said, "It doesn't have to be too grand. We can't be too respectful to these pirates, lest they become arrogant and conceited!"
 
-　　林佰光和乐琳交流过信息之后又回到了施十四的座船上，整个船队在巡逻船队的护送下向博铺驶去。
+After exchanging information with Le Lin, Lin Baiguang returned to Shi Shisi's flagship. The entire fleet, escorted by the patrol fleet, sailed towards Bopu.
 
-　　未几，只见前面有四艘桅杆上挂满彩旗，形制古怪的船正在破浪前进，浪花滚滚，气势极是惊人。施十四吃了一惊，这船上无帆也无桨，行驶竟然如此的迅速，大约就是澳洲人的“铁快船”了。须臾之间这四艘铁快船抢到船队之前，施十四刚要叫舵手小心，只见四船船头向两翼一分，已然避开船队，迂回到两翼。
+Before long, they saw four strangely shaped ships with colorful flags hanging on their masts, breaking through the waves. The waves were rolling, and the momentum was very amazing. Shi Shisi was taken aback. These ships had no sails or oars, but they sailed so fast. They were probably the Australians' "iron fast boats." In a moment, these four iron fast boats rushed to the front of the fleet. Just as Shi Shisi was about to tell the helmsman to be careful, the bows of the four ships split to the two wings, and they had already avoided the fleet and circled to the two wings.
 
-　　似乎是为了表演，这四艘铁快船在整个船队周边不时变幻队形，时快时慢，时而压阵时而领队，还不时在船队中来回穿梭。
+As if for a performance, these four iron fast boats constantly changed formations around the entire fleet, sometimes fast and sometimes slow, sometimes guarding the rear and sometimes leading the way, and from time to time they shuttled back and forth in the fleet.
 
-　　“好快！”施十四是个老海盗，当然知道这种可怕的操作性意味着什么，对方不仅不需要考虑风向，而且随时随地可以调整行驶方向，灵活的就象一条鱼一样。难怪澳洲人不过千把人，七八条船就能在临高立足，刘香和大掌柜对他们都是无可奈何！
+"So fast!" Shi Shisi was an old pirate, and of course he knew what this terrible maneuverability meant. The other party not only did not need to consider the wind direction, but also could adjust the sailing direction at any time, as flexible as a fish. No wonder the Australians, with only a thousand or so people and seven or eight ships, could gain a foothold in Lingao, and both Liu Xiang and the great shopkeeper were helpless against them!
 
-　　各条船上的水手、家眷们，听说澳洲人的“铁快船”前来迎接，纷纷涌上甲板看这些早就如雷贯耳，不用帆桨，用铁造却不会沉下去，有着“鬼神之力”的“铁快船”。
+The sailors and their families on each ship, hearing that the Australians' "iron fast boats" were coming to welcome them, all flocked to the deck to see these "iron fast boats" that they had long heard of, which did not use sails or oars, were made of iron but would not sink, and had the "power of ghosts and gods."
 
-　　“真的是铁造的！我的娘诶。铁在水里居然不会沉！”
+"It's really made of iron! My goodness. Iron doesn't sink in water!"
 
-　　“大约不是中国的铁吧。”
+"It's probably not Chinese iron."
 
-　　“谁知道！还没有帆，跑得有这么快。”
+"Who knows! It has no sails, but it runs so fast."
 
-　　“妖孽！妖孽！”有的水手恐怖的喊叫起来，被头目一个嘴巴打翻在地。立马被亲信拖进船舱里关押了起来。这话可让澳洲人知道了自己可就吃不了兜着了。
+"Monster! Monster!" some sailors shouted in terror, and were knocked to the ground by a slap from the leader. They were immediately dragged into the cabin and locked up. If the Australians knew about this, they would be in big trouble.
 
-　　头目们的心里很清楚，这是澳洲人的礼遇也是警告，一个个心情十分复杂。澳洲人那里的情况毕竟除了一个施十四之外，谁也不清楚。
+The leaders knew very well in their hearts that this was both a courtesy and a warning from the Australians, and their feelings were very complicated. After all, except for Shi Shisi, no one knew the situation in Australia.
 
-　　渔轮护送了一段之后，忽然加快马力，很快就从他们的视线中消失了，去的和来的一样迅捷。这时博铺港外的浮标了已经出现在林佰光的视线里了。接着，高耸的博铺烽火台上冒出了一股白烟，随即传来了滚雷般的炮声。
+After escorting for a while, the fishing boats suddenly accelerated and soon disappeared from their sight, coming and going as quickly as they came. At this time, the buoy outside Bopu Port had already appeared in Lin Baiguang's line of sight. Then, a puff of white smoke came out from the towering Bopu beacon tower, followed by a thunderous roar of cannons.
 
-　　“这是在放欢迎各位的礼炮。”林佰光说。
+"This is a salute to welcome you all," Lin Baiguang said.
 
-　　七十八艘大小海船，最大的有三百多吨，最小的也有四十多吨，都是东南沿海常见的广船和福船，现在他们沿着临高角上乱石堆成的天然防波堤一字排开，抛下船锚。这条天然形成的乱石堤岸已经被改造为一条真正的拦海大堤，堤上修了道路，建了灯塔，修了炮台，还造了便于人员登陆的栈桥。船上的海盗们就这样从栈桥上扶老携幼的登上了大堤。
+Seventy-eight sea ships of all sizes, the largest being more than three hundred tons and the smallest being more than forty tons, were all common Guangdong and Fujian ships on the southeast coast. Now they were lined up along the natural breakwater made of rubble on Lingao Cape, and dropped their anchors. This naturally formed rubble embankment had been transformed into a real sea-blocking dyke. A road was built on the dyke, a lighthouse was built, a battery was built, and a gangway for personnel to land was also built. The pirates on the ships thus landed on the dyke from the gangway, supporting the old and carrying the young.
 
-　　码头上，丁丁找来的吹打班子正在轮番吹打着“喜相逢”、“花连枝”。
+At the wharf, the band that Ding Ding had found was playing "Joyful Encounter" and "Flower and Branch" in turn.
 
-　　施十四和十来名主要头目，已经换上了他们最好的衣服，在林佰光的引导下去觐见“澳洲大头目”了。
+Shi Shisi and a dozen or so main leaders, had already changed into their best clothes and were being led by Lin Baiguang to have an audience with the "Australian big boss."
 
-　　陈海阳选择接见投奔的海盗头目的地方，在博铺的海关大楼前。海关大楼虽然不过是座三层的红砖楼房，但是前面有一大片的铺上煤渣的空地，钟楼上还没有钟，看上去还算气势巍峨。特别是站在大楼前的广场上，可以清楚地看到海关大楼后海湾对面丰城轮巨大的船影。足够给人留下深刻的印象。
+The place where Chen Haiyang chose to receive the defecting pirate leaders was in front of the customs building in Bopu. Although the customs building was only a three-story red brick building, there was a large open space paved with coal cinders in front of it. There was no clock in the clock tower yet, but it looked quite imposing. Especially when standing in the square in front of the building, one could clearly see the huge shadow of the Fengcheng ship across the bay behind the customs building, which was enough to leave a deep impression.
 
-　　陈海阳让人把一把高背的海军舰长椅放在海关大楼前的台阶上。从军政学校调来了海军士官生，算做是护卫人员。他们一律穿着海军制服，跨着最新的配发机制海军士官刀。士官生们在他的两翼排开，腰板挺得笔直煞是威武。
+Chen Haiyang had someone place a high-backed navy captain's chair on the steps in front of the customs building. He had transferred naval non-commissioned officer students from the military and political school to serve as guards. They were all wearing navy uniforms and carrying the latest issued navy non-commissioned officer swords. The non-commissioned officer students lined up on his two wings, their backs straight and very imposing.
 
-　　从台阶下开始一直延伸到广场的入口处，陆军海军各有六十人担任警戒，擦得雪亮的刺刀排成笔直的线条。
+From the bottom of the steps to the entrance of the square, there were sixty men from the army and navy on each side serving as guards, their bayonets polished to a shine and arranged in a straight line.
 
-　　海盗头目们跟着林佰光小心翼翼的走着，除了施十四之外，其他人都是第一次来到临高。巨大的铁船出现在视野时的瞬间震撼感还没有退去，看到海湾的另一边，一座座高大的楼阁矗立着，伸展出长长的臂膀。不时还冒出一阵阵的白色烟雾，传来轰隆轰隆的声响。
+The pirate leaders followed Lin Baiguang cautiously. Except for Shi Shisi, the others were all visiting Lingao for the first time. The momentary shock when the huge iron ship appeared in their field of vision had not yet subsided. Seeing the other side of the bay, tall pavilions stood, stretching out long arms. From time to time, puffs of white smoke came out, accompanied by rumbling sounds.
 
-　　“在转，在转！”有人小声的惊呼道。
+"It's turning, it's turning!" someone whispered in amazement.
 
-　　果然一台巨大的楼阁上的长臂正在缓慢的旋转着，下面是长长的绳索，吊着什么巨大的货物。忽然，远传出来一声高亢而激昂的尖叫声，声音传过海湾，直冲云霄，把他们吓的都是一激灵。
+Sure enough, the long arm on a huge pavilion was slowly rotating, with long ropes below, hanging some huge cargo. Suddenly, a high-pitched and impassioned scream came from afar, the sound passed over the bay and shot straight into the sky, scaring them all into a shiver.
 
-　　“妈的，什么鬼叫……”
+"Damn it, what the hell is that screaming..."
 
-　　“不要说话！”施十四小声说。
+"Don't talk!" Shi Shisi said in a low voice.
 
-　　施十四原本以为临高的大头目会多少客气些，让在码头见礼，双方一抱拳就过去了。然后就是大伙一起喝酒吃肉——这些年来凡是有人拉着队伍来投大掌柜的，多数是这个套路。没想到临高这里居然官威十足。心里不免有些别扭。
+Shi Shisi had originally thought that the big boss of Lingao would be somewhat polite and would meet them at the wharf, and they would just cup their hands in greeting and be done with it. Then everyone would drink and eat meat together—in these years, whenever someone brought a team to defect to the big boss, this was usually the routine. He didn't expect that Lingao would be so full of official airs. He couldn't help but feel a little awkward in his heart.
 
-　　广场外拉起了警戒线，众人的奴仆和亲兵将都不许进人，他们身上的刀剑也都留在外边。从入口到台阶下，两行士兵，戒备森严，整个广场上肃然无声。只有旗帜的猎猎飘动声音。
+A cordon was pulled up outside the square, and the servants and personal soldiers of the crowd were not allowed to enter. Their swords were also left outside. From the entrance to the bottom of the steps, there were two rows of soldiers, heavily guarded, and the entire square was silent, except for the sound of the flags fluttering.
 
-　　林佰光引着他们通过警戒线来到台阶下。没有人命令，这些人呼啦全部跪了下来。
+Lin Baiguang led them through the cordon to the bottom of the steps. Without anyone ordering, these people all knelt down with a whoosh.
 
-　　陈海阳现在也会说几句本时空的广东话和闽南话，但是他一句也不说，只用字正腔圆的普通话吩咐他们起来，不必下跪。旁侧担任翻译的熊卜佑跨出一步，先用广东话然后用闽南话说了一遍。
+Chen Haiyang could now speak a few words of Cantonese and Minnan dialect of this time and space, but he didn't say a word. He only ordered them to get up in standard Mandarin and said that there was no need to kneel. Xiong Buyou, who was serving as a translator on the side, took a step forward and said it once in Cantonese and then in Minnan dialect.
 
-　　这这种礼数，是在场几人会商的结果，陈海阳不说方言，是为了表明普通话“国语”地位，又让熊卜佑用流行的方言翻译表示对降人的尊重。
+This kind of etiquette was the result of the discussion of the few people present. Chen Haiyang did not speak dialect in order to show the status of Mandarin as the "national language," and he had Xiong Buyou translate in the popular dialect to show respect for the surrendering people.
 
-　　施十四等赶紧站起来，只见台阶上坐着的大头目不过三十出头的模样，坐在一张高背的藤椅上，身上不过是一身澳洲人喜欢穿的对襟蓝布小褂，腰里束着布腰带——这身打扮，真是简单到了极点，和他身边年轻的亲兵们几乎没有两样。
+Shi Shisi and the others quickly stood up. They saw that the big boss sitting on the steps was only in his early thirties. He was sitting on a high-backed rattan chair, wearing only a blue cloth jacket with buttons down the front that the Australians liked to wear, with a cloth belt around his waist—this outfit was really simple to the extreme, almost no different from the young personal soldiers around him.
 
-　　如此简朴的大头目，众人还是头一回看到，竟然有些不知所措起来。
+It was the first time that everyone had seen such a simple big boss, and they were a little at a loss.
 
-　　还是施十四和穿越集团打交道多些，忙踏上一步，抱拳行礼，说了些“久仰盛名，愿来投效，今后戮力同心，和衷共济”之类的“靠码头”投奔时候的话。说完这些，他把带来的簿册献上——这是这两天在海上誊写出来的花名册和船只、粮食、军器、火药的账册。作为输诚的表示。
+It was still Shi Shisi who had dealt with the transmigrator group more. He hurriedly took a step forward, cupped his hands in a salute, and said some words of "long admiring your great name, willing to come and serve, and from now on we will work together with one heart and one mind" and other "docking" words of defection. After saying these, he presented the booklet he had brought—this was the roster and the account books of the ships, grain, weapons, and gunpowder that had been transcribed on the sea these past two days, as a sign of submission.
