--- a/_posts/2010-12-29-3-25500.md
+++ b/_posts/2010-12-29-3-25500.md
@@ -1,129 +1,129 @@
 ---
 layout: post
-title: 第二百五十五节 秋赋（二十）
+title: "Section 255: Autumn Tax (XX)"
 category: 3
 path: 2010-12-29-3-25500.md
 tag: [normal]
 ---
 
-　　吴明晋和王兆敏面面相觑，这事情还真没法“就这么定了”，当下王兆敏道：“这个，办案侦缉拿人都要出签子火牌，诸位不是大明人士，又无功名、差遣在身……”
+Wu Mingjin and Wang Zhaomin looked at each other. This matter really couldn't be "settled just like that." Wang Zhaomin then said, "This, to handle a case, investigate, and arrest people, you need to issue warrants and fire plates. You are not from the Ming Dynasty, and you have no official rank or position..."
 
-　　“此事当然还是以县里为主了，”熊卜佑道，“我等不过从旁协助。”
+"Of course, the county will still be in charge of this matter," Xiong Buyou said. "We are just assisting from the side."
 
-　　王兆敏想所谓“从旁协助”，其实髡贼还是想要掌握此事的处理权——这倒也好，这个烫手的山芋干脆就丢给原主去处理好了。他也想看看，澳洲人的葫芦里到底卖得是什么药。
+Wang Zhaomin thought that the so-called "assisting from the side" actually meant that the 髡贼 (kūnzéi - 髡 bandits) still wanted to control the handling of this matter—which was also good. This hot potato might as well be thrown back to the original owner to deal with. He also wanted to see what kind of medicine the Australians were selling in their gourds.
 
-　　吴明晋咳嗽了一声，推辞自己身体不适要先回去休憩片刻。熊卜佑知道这是当官的表示“此事你们只管去干，但是与我无关”的一种做派，下面的事情，只要和王兆敏谈就是了。这也是官场上常用的法子。
+Wu Mingjin coughed and excused himself, saying that he was not feeling well and wanted to go back to rest for a while. Xiong Buyou knew that this was a way for officials to show that "you can do whatever you want with this matter, but it has nothing to do with me." The following matters could be discussed with Wang Zhaomin. This was also a common method in officialdom.
 
-　　王兆敏想此事办理，断然不能让澳洲人自己来搞坐堂审理之类的事情，唯一的法子就是委托县衙里的一名官员出面。由澳洲人在背后指挥就是。
+Wang Zhaomin thought that this matter could not be handled by the Australians themselves, such as holding a court session. The only way was to entrust an official from the county yamen to come forward, with the Australians directing from behind.
 
-　　“来人，请孙老爷来。”王兆敏吩咐道。
+"Someone, please ask Master Sun to come," Wang Zhaomin ordered.
 
-　　这个差使当仁不让的落到了典史的头上。典史是明代开始才有的官儿，是从宋元以来的县尉衍生过来的，主管的职责是大抵是狱囚警逻之类的治安工作，在没有巡检司分管的地方，也负责巡防、弹压、捕盗的事务。此事交给他办职责名正言顺。
+This errand naturally fell on the head of the county registrar. The county registrar was an official that only existed since the Ming Dynasty. It was derived from the county lieutenant of the Song and Yuan dynasties. The main responsibility was public security work such as prisons and patrols. In places where there was no inspection department, it was also responsible for patrol, suppression, and catching thieves. It was perfectly justifiable to hand this matter over to him.
 
-　　典史的级别很低，连从九品的最低一级官品也轮不上，算是“未入流”，不过这个未入流还是“官”，照例要朝廷除授的。
+The rank of the county registrar was very low, not even reaching the lowest rank of the ninth grade. It was considered "unranked," but this unranked was still an "official," and was supposed to be appointed by the court.
 
-　　当典史的人，都是些最不得意的读书人，多数是从“监生”中的选授的。如果说举人考不上进士，还能“大挑”当县令、县丞之类的官职，监生就只能混个主簿、教谕、训导和典史这样的微末之员了。而且升迁的希望很小。
+The people who served as county registrars were all the most unsuccessful scholars, most of whom were selected from the "jiansheng" (imperial college students). If a juren failed to pass the jinshi examination, he could still be "specially selected" to be a county magistrate, county assistant, or other official positions. But a jiansheng could only be a minor official such as a chief registrar, an education official, an instructor, or a county registrar, and the hope of promotion was very small.
 
-　　所以本县的孙典史孙瑞伍就成了一个典型一切向钱看的官了。可惜本地实在太穷，地方势力和土匪又厉害，他这个典史的油水实在有限。
+Therefore, the county registrar of this county, Sun Ruiwu, became a typical official who was all about money. Unfortunately, this place was too poor, and the local forces and bandits were powerful, so the profit he could make as a county registrar was very limited.
 
-　　澳洲人的到来给孙瑞伍带来了财运。因为他品级低微，常常被当作替死鬼给吴明晋打发去为澳洲人出头办事。每次办事，照例会有一笔好处。东门市上的种种享受让他更加难以自拔。于是孙典史就在在金钱贿赂和生活享用的双重刺激下越陷越深了。澳洲人每有什么行动，他总是第一个出现，办事极其殷勤。以至于在县里被人笑称为“澳洲典史”。
+The arrival of the Australians brought good fortune to Sun Ruiwu. Because his rank was low, he was often used as a scapegoat by Wu Mingjin to handle matters for the Australians. Every time he handled a matter, he would receive a benefit as a rule. The various enjoyments in Dongmen Market made it even more difficult for him to extricate himself. Thus, under the dual stimulation of money bribes and life enjoyment, the county registrar sank deeper and deeper. Whenever the Australians had any action, he was always the first to appear and was extremely diligent in his work, so much so that he was jokingly called the "Australian registrar" in the county.
 
-　　孙瑞伍自己倒是毫不在乎，每天在东门市“享受生活”，和独孤求婚很是相得。两人时常一起“腐败”。这位监生对自己度过的圣贤之书早就忘得一干二净，把华夷之防丢到九霄云外去。
+Sun Ruiwu himself didn't care at all. He "enjoyed life" in Dongmen Market every day and got along very well with Dugu Qiuhun. The two often "corrupted" together. This jiansheng had long forgotten the sage books he had read and had thrown the defense of Chinese and barbarians to the nine clouds.
 
-　　“不行，”没想到熊卜佑一反常态的表示反对，“王师爷，孙典史品级低微，这可是牵涉到本县缙绅大户们的案子，若没有一个相当的人物出面主持，恐怕人心难安啊。”
+"No," Xiong Buyou unexpectedly expressed his opposition. "Master Wang, the county registrar's rank is low. This is a case involving the gentry and powerful families of this county. If there is not a considerable figure to preside over it, I am afraid that people will not be at ease."
 
-　　“那，熊老爷的意思是？”
+"Then, what does Master Xiong mean?"
 
-　　“还是请吴县丞出面主持为好，孙老爷协办。”
+"It's better to ask County Assistant Wu to preside over it, with Master Sun assisting."
 
-　　“有理，有理。”王兆敏想这也算有些道理，反正只要不是自己老爷出面就好，孙典史还是吴县丞都没关系。
+"Reasonable, reasonable." Wang Zhaomin thought this was somewhat reasonable. Anyway, as long as it wasn't his own master who came forward, it didn't matter whether it was the county registrar or the county assistant.
 
-　　当下叫人把二位找来，将事情关照了一番。孙典史听了要为澳洲人办案，马上一力应承，倒是吴亚，想了片刻才道：“几位首长，这次刀箭入户恐吓缙绅的事情，案子本身原没什么，只是事情难办……”
+So he called for the two of them to be brought in and explained the matter to them. When the county registrar heard that he was going to handle a case for the Australians, he immediately agreed. On the other hand, Wu Ya, thought for a moment before saying, "Leaders, this matter of threatening the gentry with swords and arrows, the case itself is nothing, but the matter is difficult to handle..."
 
-　　王兆敏咳嗽了一声，说：既然你们谈公事，我就不再打扰了。当下也溜了出去。
+Wang Zhaomin coughed and said, "Since you are talking about official business, I will not disturb you anymore." He also slipped out.
 
-　　“事情难办，我略有耳闻。”熊卜佑说，“不过此事事关重大，还是要一查到底，给县里一个交代才是。”
+"The matter is difficult to handle, I have heard a little about it," Xiong Buyou said. "But this matter is of great importance, and it must be investigated to the end to give the county an explanation."
 
-　　“是，是，既然熊首长这么说，我等一力照办就是。”吴亚知道这事情里其实没自己什么事，自己和典史就是来当招牌的，“不知道周首长打算在哪里办公？”
+"Yes, yes, since Chief Xiong has said so, we will do as you say." Wu Ya knew that he had nothing to do with this matter. He and the county registrar were just here as figureheads. "I wonder where Chief Zhou plans to work?"
 
-　　“当然是在县衙里，就用二堂吧——”
+"Of course, in the county yamen. Let's use the second hall—"
 
-　　“不妥不妥，”吴亚摇头道，“周首长在大明并无功名，算是布衣，擅用二堂，本身就是犯法，再者——”
+"Inappropriate, inappropriate," Wu Ya shook his head. "Chief Zhou has no official rank in the Ming Dynasty and is a commoner. To use the second hall without authorization is a violation of the law in itself. Besides—"
 
-　　再者吴明晋总归是个“百里候”，不能象个小厮一样随传随到，而且升堂审案在过去也是很严肃重大的事情，不能太随便了。
+Besides, Wu Mingjin was after all a "bailihou" (a high-ranking official). He couldn't be summoned at will like a servant. Moreover, holding a court session was a very serious and important matter in the past, and it couldn't be too casual.
 
-　　“我看，不如在花厅办案。”孙典史道。
+"I think it's better to handle the case in the flower hall," the county registrar said.
 
-　　“我亦有此意。”吴亚点点头。
+"I also have this intention," Wu Ya nodded.
 
-　　花厅属于内衙范畴，不过，县内但凡牵涉到风化的案子或者和缙绅大户有关的案子，一般都在花厅内审理，并不在大堂二堂公开审理，为的是照顾当事人的颜面。
+The flower hall belonged to the inner yamen. However, any case in the county that involved public morals or was related to the gentry and powerful families was generally tried in the flower hall and not publicly in the main hall or the second hall, in order to save the face of the parties involved.
 
-　　因为属于内衙范畴，并非朝廷经制之地，周洞天在此地就能大大方方的办案了。
+Because it belonged to the inner yamen and was not a place established by the court, Zhou Dongtian could handle the case here in a grand manner.
 
-　　“好，”熊卜佑点点头，“就这么办吧。”他拱了拱手：“此案涉及甚广，事机须秘，一会我们会在县衙关防，请诸位莫要惊扰。”
+"Good," Xiong Buyou nodded. "Let's do it this way." He cupped his hands and said, "This case is very extensive, and the matter must be kept secret. We will set up a guard at the county yamen in a while. Please do not be disturbed."
 
-　　“关防？”吴亚和孙瑞伍都没料到还有这一招，不由大惊失色。这是要干吗？
+"Guard?" Wu Ya and Sun Ruiwu did not expect this move and were greatly shocked. What was this for?
 
-　　“毋庸担心，”熊卜佑温语宽慰，“这也是不得已，哈哈。”说着，他打了一个电话：
+"No need to worry," Xiong Buyou comforted them with a gentle voice. "This is also a last resort, haha." As he spoke, he made a phone call:
 
-　　“开始吧。”
+"Let's begin."
 
-　　驻守在县衙外的几十名警卫人员随即全部调入衙门内，将各出入口和衙署内的要地完全控制住。县衙里的人，许进不许出。
+The dozens of guards stationed outside the county yamen were immediately transferred into the yamen, and all the entrances and exits and important places in the yamen were completely controlled. People in the county yamen were allowed to enter but not to leave.
 
-　　这时候，根据熊卜佑打来的电话，早就准备完毕的陆军的三支小队迅速的开到了临高县的三座城门。随即控制了城门。他们并不明目张胆的接管城防，而是驻扎在城门口后的藏兵洞内，监视民壮。
+At this time, according to the phone call from Xiong Buyou, the three small teams of the army that had been prepared long ago quickly arrived at the three city gates of Lingao County and immediately controlled the city gates. They did not blatantly take over the city defense, but were stationed in the hidden soldier caves behind the city gates to monitor the local militia.
 
-　　每支小分队的士官们已经认了好几个星期人脸。现在他们已经把临高县内的胥吏和手下的“做公的”狐群狗党的面孔都记住了，邬德给他们的命令是：这些人只许进城不许出城。
+The non-commissioned officers of each small detachment had been recognizing faces for several weeks. Now they had memorized the faces of the runners in Lingao County and their "official" cronies. Wu De's order to them was: these people were only allowed to enter the city but not to leave.
 
-　　“如果有人要出城，直接扣押送到县衙，明白吗？”
+"If someone wants to leave the city, detain them directly and send them to the county yamen, understand?"
 
-　　“是！明白了。”
+"Yes! Understood."
 
-　　县衙里，随着关键部门被人控制，正在县衙内办公的胥吏们感到不安，纷纷出来打听探视。孙瑞伍只得出来安抚众人，要他们不要惊慌。
+In the county yamen, as the key departments were controlled, the runners who were working in the county yamen felt uneasy and came out one after another to inquire and observe. Sun Ruiwu had to come out to appease everyone and tell them not to panic.
 
-　　周洞天关照人把皂班班头叫来。
+Zhou Dongtian ordered someone to call the head of the soap-making team.
 
-　　皂班的班头林长三是个三十多岁的精悍汉子，刀条脸，一双小眼睛很是有神。双手胳膊肌肉发达，不愧是以行刑见长的老皂隶。
+The head of the soap-making team, Lin Changsan, was a capable man in his thirties, with a long face and a pair of small, very bright eyes. His arms were muscular, and he was worthy of being an old soap-maker who was good at punishment.
 
-　　到得花厅上，见过礼。林长三眼见花厅上面端坐着本县的两位老爷，一个三四十岁的澳洲人坐下下首的位置上，双目冰冷，一看就是个极不好惹的人物。
+When he arrived at the flower hall and had paid his respects, Lin Changsan saw that the two masters of the county were sitting on the top of the flower hall. An Australian in his thirties or forties was sitting in the lower seat, his eyes cold. He looked like a very difficult person to deal with.
 
-　　周洞天审视了一眼皂班头子，“把名册给我拿来！传齐全班的皂隶，我要点卯。”
+Zhou Dongtian looked at the head of the soap-making team and said, "Bring me the roster! Summon all the soap-makers in the team. I want to call the roll."
 
-　　“是，是，”林长三赶紧出去吩咐。一会，皂隶们都来齐了。
+"Yes, yes," Lin Changsan hurriedly went out to give orders. In a short while, all the soap-makers had arrived.
 
-　　周洞天打开名册，吃了一惊。原来这名册上密密麻麻，在册的皂隶有五六十人之多，而站在下面听候点卯的不过二十来人。
+Zhou Dongtian opened the roster and was surprised. It turned out that the roster was densely packed, and there were fifty or sixty soap-makers on the list, but only about twenty people were standing below waiting for the roll call.
 
-　　“怎么，人没来齐？”周洞天问。
+"What, not everyone is here?" Zhou Dongtian asked.
 
-　　“老爷有所不知，”林长三小心翼翼道，“名册上的数目是不作数的，这都是挂名的皂隶。”
+"Sir, you don't know," Lin Changsan said cautiously. "The number on the roster doesn't count. These are all soap-makers in name only."
 
-　　因为在衙门当衙役享有免疫免赋的好处，有些人就出点钱把自己的名字挂在衙役名册上，实际上从来不来衙门当差。
+Because being a yamen runner in the yamen had the benefit of being exempt from taxes, some people would pay a little money to have their names on the yamen runner roster, but in fact, they never came to the yamen to work.
 
-　　“……名字下面有领银子数目的，才是当差的。”
+"...Only those with a number of silver taels under their names are the ones who are on duty."
 
-　　周洞天一数，领银子的一共有二十四个人。点卯下去，人都来齐了。
+Zhou Dongtian counted, and there were a total of twenty-four people who received silver. When the roll was called, everyone was present.
 
-　　“每人立刻准备一套皂隶的衣服出来。马上！”
+"Everyone immediately prepare a set of soap-maker's clothes. Immediately!"
 
-　　众人面面相觑，不知道这是要干什么。林长三望着孙典史，孙瑞伍不耐烦的一挥手：“叫你们预备就赶快预备，啰嗦什么！”
+Everyone looked at each other, not knowing what this was for. Lin Changsan looked at the county registrar, and Sun Ruiwu waved his hand impatiently: "If you are told to prepare, then prepare quickly. What are you dawdling for!"
 
-　　“回老爷，小的只有这身公服啊。”
+"To answer your honor, I only have this official uniform."
 
-　　“那就脱下来！”孙瑞伍呵斥道。
+"Then take it off!" Sun Ruiwu scolded.
 
-　　众皂隶只得照办，不一会就把衣服凑齐了。
+The soap-makers had no choice but to do as they were told, and in a short while, they had gathered all the clothes.
 
-　　这批衣服转瞬就穿到了他们带来的政保速成训练班里学员身上。
+This batch of clothes was immediately put on the students of the political security crash course they had brought.
 
-　　“好了，大伙手脚麻利点！把衣服都换上。”尤国团吆喝着。
+"Alright, everyone, be quick! Change your clothes." You Guotuan shouted.
 
-　　尤国团是保卫总署下的一个工作人员。此公在现代时空是一默默无闻的小市民。但是到了17世纪却成了一个暴力手段至上的鼓吹者。他一贯主张只有最残酷无情的手段才能有效的进行统治。原本他在陆军服役，后来政保总署认为此人在陆军内会造成“不良倾向”，就把他干脆调入了本部门。
+You Guotuan was a staff member under the General Security Administration. This man was an unknown petty citizen in the modern time and space, but in the 17th century, he became an advocate of the supremacy of violent means. He had always advocated that only the most cruel and ruthless means could effectively rule. Originally, he served in the army. Later, the General Security Administration believed that this person would cause "bad tendencies" in the army, so they simply transferred him to this department.
 
-　　果然，到了政保总署让他如鱼得水。很快就以其残忍的言论让同事们侧目。当然他的残忍作风暂时还没机会来表现。
+Sure enough, when he arrived at the General Security Administration, he was like a fish in water. He soon made his colleagues look at him sideways with his cruel remarks. Of course, he had not yet had the opportunity to show his cruel style.
 
-　　“好了，现在你们就是县衙的皂隶了，按照事先的方案，把各个要点守好！”
+"Alright, now you are the soap-makers of the county yamen. According to the pre-arranged plan, guard all the key points!"
 
-　　片刻的工夫，临高县城和临高县衙就完全被穿越集团控制住了。
+In a moment, Lingao County and the Lingao County Yamen were completely controlled by the transmigrator group.
 
-　　皂班的衙役们，挤挤簇簇地站在花厅里，很是不安地看着发出奇怪命令的周洞天。林长三更是一脸惶恐巴结的模样。就差没有五体投地了。让周洞天心中一阵的暗自冷笑：“想用这种把戏骗人，装人畜无害？可惜，老子不是自以为浑身放王八气的小白。”
+The yamen runners of the soap-making team stood crowded in the flower hall, looking uneasily at Zhou Dongtian, who was giving strange orders. Lin Changsan had an even more frightened and fawning look on his face, almost prostrating himself on the ground. This made Zhou Dongtian sneer secretly in his heart: "You think you can deceive people with this trick, pretending to be harmless to humans and animals? Unfortunately, I am not a naive person who thinks he is full of kingly aura."
 
-　　“诸位，”周洞天缓缓道，“你们都是累世传承的祖业，用刑拷问最拿手不过，明日问案的时候，还有多多偏劳了！”
+"Everyone," Zhou Dongtian said slowly, "you have all inherited your ancestral profession for generations, and you are the best at torture and interrogation. When we interrogate the case tomorrow, I will have to trouble you all a lot!"
