--- a/_posts/2010-7-19-3-09200.md
+++ b/_posts/2010-7-19-3-09200.md
@@ -10,7 +10,7 @@ It was no big deal to take in a maid. If she was as good as she said, she could 
 
 "Alright, have her come over tomorrow for a look," Wen Tong said nonchalantly.
 
-"Thank you for your grace, master!" Ah Zhu arched her body媚 (mèi - "seductively") and slowly slid down towards Wen Tong's groin, gently biting his member, her tongue lightly licking it. A shiver ran through his body, and he immediately became erect again.
+"Thank you for your grace, master!" Ah Zhu arched her body seductively and slowly slid down towards Wen Tong's groin, gently biting his member, her tongue lightly licking it. A shiver ran through his body, and he immediately became erect again.
 
 *I'll have to teach her some new tricks in the future,* Wen Tong's consciousness gradually blurred under Ah Zhu's tongue. This thought flashed through his mind before he fell into the ecstasy of climax.
 
@@ -141,4 +141,5 @@ As for the laboratory, Shi Niaoren hoped to expand it—to be able to conduct me
 Finally, there was the matter of putting the pharmaceutical factory into production, which was extremely urgent. The glass factory could now provide them with enough specialized equipment. The bacterial strains brought by He Ping's wife were still in the laboratory. These things could not be stored for long and had to be put into production as soon as possible. They couldn't rely on chemical pharmaceuticals for the time being...
 
 "Director, everyone is here. Shall we begin?"
+
 [y009]: /characters/y009 "Wu Nanhai"
