--- a/_posts/2011-4-2-3-34900.md
+++ b/_posts/2011-4-2-3-34900.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Chapter Three Hundred and Forty-Nine: The Aftermath of the Dugu Incident
+title: "Section 349: The Aftermath of the Dugu Incident"
 category: 3
 path: 2011-4-2-3-34900.md
 tag: [normal]
 ---
 
-"Dugu Qiuhun's loyalty to the穿越 (Time-Cross) Group is reliable. Treating him this way will be disheartening."
+"Dugu Qiuhun's loyalty to the Transmigration Group is reliable. Treating him this way will be disheartening."
 
 "If we don't handle it this way, the masses will be disheartened," Ma Qianzhan sighed. "Do you think I want this? But the voice of the people is there, and we must give them an answer."
 
@@ -14,7 +14,7 @@ Ma Jia thought to himself, it seems the Director-General is about to "execute Ma
 
 At this moment, Wen Desi spoke slowly, "Director-General, I don't think we should make an example of Dugu Qiuhun and completely discredit him. He's still young, after all! It's inevitable for young people to be easily misled and make small mistakes. I think a month of confinement is enough. After he gets out, we can arrange a position for him in another department to redeem himself."
 
-Xiao Zishan thought this punishment was far too light, almost insincere. The new head of the Planning院 (Yuan), Wu De, said, "President Wen, your proposed solution is too lenient—the masses will not accept it."
+Xiao Zishan thought this punishment was far too light, almost insincere. The new head of the Planning Yuan, Wu De, said, "President Wen, your proposed solution is too lenient—the masses will not accept it."
 
 "The masses will definitely not accept it. Our protection of Dugu Qiuhun will result in the entire group losing its cohesion."
 
@@ -28,9 +28,9 @@ The air in the conference room suddenly became a bit stagnant. Everyone was wait
 
 "Comrades, as for personality cults, it's good for the natives to worship us. It would be best if they saw us as gods—or at least as representatives of gods on earth, like archangels. Of course, I know most comrades disagree. But within our group, blind worship of any individual is very harmful. Everyone has seen the consequences. Dugu Qiuhun is a victim of this erroneous concept," President Wen said eloquently.
 
-"But we should also see that Dugu Qiuhun's loyalty to the穿越 (Time-Cross) Group is primary. In the spirit of 'curing the sickness to save the patient,' we should give him a way out."
+"But we should also see that Dugu Qiuhun's loyalty to the Transmigration Group is primary. In the spirit of 'curing the sickness to save the patient,' we should give him a way out."
 
-The members of the Executive Committee thought to themselves that "loyalty to the穿越 (Time-Cross) Group" was more like "loyalty to the Executive Committee."
+The members of the Executive Committee thought to themselves that "loyalty to the Transmigration Group" was more like "loyalty to the Executive Committee."
 
 Wen Desi's tone made it clear that he wanted to give Dugu a way out, which was a great surprise to most of the Executive Committee members. Only Ma Jia knew—Dugu Qiuhun was ultimately just a pawn, and now he had become a discarded piece. Even if he were "checkmated," it would have little effect on the outcome of the game on the board.
 
@@ -48,7 +48,7 @@ The Executive Committee decided: to dismiss Dugu Qiuhun from his post as directo
 
 The observation period would last for one year. During this year, the General Political Security Department would send personnel to secretly observe him. After passing the observation, he would be reassigned to a new job, but he would no longer be able to work in violent institutions such as the police or the army.
 
-The decision would be communicated to all穿越 (Time-Cross) members. To prevent the materials from falling into the hands of the natives, the decision would only be announced on the internal network BBS.
+The decision would be communicated to all Transmigration members. To prevent the materials from falling into the hands of the natives, the decision would only be announced on the internal network BBS.
 
 Seeing that the matter was finally resolved in a relatively harmonious manner, everyone was satisfied, except for Dugu Qiuhun. Even Dugu Qiuhun, the biggest victim in this incident, was left with a way out. Although the decision was severe, his political future was not completely written off. After the observation period, he could re-emerge to dedicate his loyalty to the Executive Committee.
 
@@ -78,7 +78,7 @@ Now that he was finally removed, the next person to hold this position would ine
 
 Most importantly, Mu Min was a true outsider, with no background connections to anyone. Everyone would be at ease with her in charge of the peripheral security and public order of Bairen City.
 
-As for Li Yiyang, the company commander of the garrison company, in recognition of his firm stance, he was awarded the highest honor of the穿越 (Time-Cross) Group, the "Commendation Order of the Senate," which was also circulated throughout the army. The Executive Committee intended to establish Li Yiyang as a model of "obeying orders in all actions." At the same time, the Executive Committee instructed Xiao Zishan to put Li Yiyang on the "priority promotion" list.
+As for Li Yiyang, the company commander of the garrison company, in recognition of his firm stance, he was awarded the highest honor of the Transmigration Group, the "Commendation Order of the Senate," which was also circulated throughout the army. The Executive Committee intended to establish Li Yiyang as a model of "obeying orders in all actions." At the same time, the Executive Committee instructed Xiao Zishan to put Li Yiyang on the "priority promotion" list.
 
 "The promotion of military officers is not decided by me, is it?" Xiao Zishan said. "Isn't that under the jurisdiction of the Military Affairs Department?"
 
@@ -90,13 +90,14 @@ As for Li Yiyang, the company commander of the garrison company, in recognition 
 
 According to the "Common Program" stipulated at the Second Plenary Session, all cadres below the Executive Committee are appointed and dismissed by the Executive Committee. Among them, personnel changes of People's Commissars and the main leaders of departments must be approved by the Senate. The appointment and dismissal of cadres below the level of minister and People's Commissar do not require the approval of the Senate.
 
-This clarified the appointment and dismissal system for cadres. The Executive Committee decided to first establish a cadre management agency. To ensure that the power of the穿越 (Time-Cross) members remains unchanged, the cadre management agency would adopt a dual-track system. The personnel management of穿越 (Time-Cross) cadres would be the responsibility of the Organization Department of the General Office of the Executive Committee, while the appointment and management of native cadres would be the responsibility of the Cadre Department of the People's Committee of Civil Affairs.
+This clarified the appointment and dismissal system for cadres. The Executive Committee decided to first establish a cadre management agency. To ensure that the power of the Transmigration members remains unchanged, the cadre management agency would adopt a dual-track system. The personnel management of Transmigration cadres would be the responsibility of the Organization Department of the General Office of the Executive Committee, while the appointment and management of native cadres would be the responsibility of the Cadre Department of the People's Committee of Civil Affairs.
 
 The Organization Department was a key department in another time and space. Everyone had doubts about who would control this department. In the end, it was decided to place it under the General Office. Although the director of the General Office of the Executive Committee was a member of the Executive Committee, he had no voting rights and had the least influence in the Executive Committee, so it was not easy to cause a power imbalance.
 
-All elders—as long as they have not been deprived of their political rights—are eligible to serve as administrative officials at all levels. For ease of management, Ma Qianzhan's proposal for grading, ranking, and salary has finally been approved. Without definite ranks and military ranks, it is very inconvenient in daily affairs, especially in the army, where natives have military ranks but穿越 (Time-Cross) members do not.
+All elders—as long as they have not been deprived of their political rights—are eligible to serve as administrative officials at all levels. For ease of management, Ma Qianzhan's proposal for grading, ranking, and salary has finally been approved. Without definite ranks and military ranks, it is very inconvenient in daily affairs, especially in the army, where natives have military ranks but Transmigration members do not.
 
-To avoid conflicts among穿越 (Time-Cross) members due to the hierarchy of cadres, the Executive Committee decided to continue the past concept in the new system—that is, the material treatment difference between various levels is extremely small, and the concept that the salary income from the highest level to the lowest level is only different by a factor of 2 will continue to be followed.
+To avoid conflicts among Transmigration members due to the hierarchy of cadres, the Executive Committee decided to continue the past concept in the new system—that is, the material treatment difference between various levels is extremely small, and the concept that the salary income from the highest level to the lowest level is only different by a factor of 2 will continue to be followed.
+
 [y001]: /characters/y001 "Xiao Zishan"
 [y002]: /characters/y002 "Wen Desi"
 [y005]: /characters/y005 "Ma Qianzhan"
