--- a/_posts/2011-4-22-3-36900.md
+++ b/_posts/2011-4-22-3-36900.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title: Chapter Three Hundred and Sixty-Nine: The Revolver
+title: "Section 369: The Revolver"
 category: 3
 path: 2011-4-22-3-36900.md
 tag: [normal]
 ---
 
-There were also some dissenting voices who objected: would the widespread distribution of weapons to the natives at this time cause the weapons to be scattered? The controversy was particularly great over equipping native cadres with pistols: the army was centrally managed and strictly controlled by the 穿越 (Time-Cross) members from top to bottom, minimizing the possibility of weapons being scattered. Once the weapons were in the hands of the extremely dispersed native cadres, they would be difficult to manage.
+There were also some dissenting voices who objected: would the widespread distribution of weapons to the natives at this time cause the weapons to be scattered? The controversy was particularly great over equipping native cadres with pistols: the army was centrally managed and strictly controlled by the Transmigration members from top to bottom, minimizing the possibility of weapons being scattered. Once the weapons were in the hands of the extremely dispersed native cadres, they would be difficult to manage.
 
-However, the realistic threat eventually led the Planning院 (Yuan) to propose the creation of a pistol specifically for native personnel as a standard self-defense weapon.
+However, the realistic threat eventually led the Planning Yuan to propose the creation of a pistol specifically for native personnel as a standard self-defense weapon.
 
 So this problem was handed over to the First Weapons Design Group—the first group specialized in designing "modern weapons," unlike the second design group, which was mainly focused on retro-style weapons.
 
@@ -16,17 +16,17 @@ The main force of the First Weapons Design Group was Li Yi'ao. This man, who rar
 
 Li Yi'ao donated his full set of gun-making tools and many of his self-made special equipment to the organization. With this set of things, as long as he could find roughly suitable steel, it would not be too difficult to make an AK—of course, it could not be compared with the AKs that came out of regular factories. The only problem was that bullets were difficult to make. He humbly said that he could only reload them.
 
-Li Yi'ao's initial involvement in this line of work was more out of interest than for making money—a common pursuit for those who love weapons and have hands-on skills. However, once this interest was supported by profit, his dedication to technological research intensified, and the things he created became increasingly bold, from simply imitating crude small "zha pao" to a more sophisticated imitation of various famous pistols. If it weren't for the wormhole, Li Yi'ao's fate would be imaginable. His wife, Li Yuanyuan, said that their participation in the穿越 (Time-Cross) was largely out of necessity.
+Li Yi'ao's initial involvement in this line of work was more out of interest than for making money—a common pursuit for those who love weapons and have hands-on skills. However, once this interest was supported by profit, his dedication to technological research intensified, and the things he created became increasingly bold, from simply imitating crude small "zha pao" to a more sophisticated imitation of various famous pistols. If it weren't for the wormhole, Li Yi'ao's fate would be imaginable. His wife, Li Yuanyuan, said that their participation in the Transmigration was largely out of necessity.
 
 In Lingao, the couple lived a very happy life. His wife worked as a clerk in the Executive Committee, and he could finally make guns openly and legally—the joy of being able to make guns in the open and discuss his works with others in a grand manner was something Li Yi'ao had never enjoyed before.
 
-But Li Yi'ao didn't find many opportunities to show off his skills. The 穿越 (Time-Cross) members' armory was quite full, with rifles, pistols, and shotguns, so there was no need for his homemade firearms for the time being. Everyone praised his craftsmanship, but no one wanted to personally use the guns made from unqualified local steel. As for the Minie rifles made for the natives, they were the product of industrialized mass production and did not require much of his effort—Zhan Wuya and others had prepared a full set of tooling equipment needed for the production of Minie rifles in another time and space.
+But Li Yi'ao didn't find many opportunities to show off his skills. The Transmigration members' armory was quite full, with rifles, pistols, and shotguns, so there was no need for his homemade firearms for the time being. Everyone praised his craftsmanship, but no one wanted to personally use the guns made from unqualified local steel. As for the Minie rifles made for the natives, they were the product of industrialized mass production and did not require much of his effort—Zhan Wuya and others had prepared a full set of tooling equipment needed for the production of Minie rifles in another time and space.
 
 So Li Yi'ao was specially responsible for the manufacture of light weapon ammunition in the machinery factory—mainly reloading 7.62*54mm bullets for the SKS rifle—the consumption of this kind of bullet was very large in several battles. Li Yi'ao used to reload this kind of bullet frequently, was very familiar with it, and had specially made a set of small special equipment, including bullet molds and a special press.
 
 He couldn't make jacketed bullets—fortunately, lead was abundant here, so he used pure lead directly. The gunpowder was the best high-grade fine-grained black powder—no matter how hard the chemical department tried, nitrocellulose was still at the level of making paint.
 
-But the current situation was not like reloading a few, a dozen, or at most a hundred rounds at a time in the past. Even for the daily shooting training that the 穿越 (Time--Cross) members conducted to maintain their feel for weapons, the number of shell casings brought back after each session was at least two thousand. It was simply hard labor for him to reload them one by one.
+But the current situation was not like reloading a few, a dozen, or at most a hundred rounds at a time in the past. Even for the daily shooting training that the Transmigration members conducted to maintain their feel for weapons, the number of shell casings brought back after each session was at least two thousand. It was simply hard labor for him to reload them one by one.
 
 With the support of Zhan Wuya, Li Yi'ao improved the equipment, turning the small equipment that was suitable for him to use secretly by himself into an assembly line that could be operated by multiple workers. This way, he had time and energy to engage in his main business—light weapons manufacturing.
 
@@ -36,7 +36,7 @@ The task of imitating pistols temporarily interrupted his research and developme
 
 The soul of the First Weapons Design Group was Bai Yu. He was not only an armored corps officer, but also a bona fide graduate of weapons design and engineering. Although Li Yi'ao had rich experience in gun making, he had little experience in how to design weapons and adapt them to mass production—he had always been a workshop-style manufacturer.
 
-After receiving the task book, the members of the design team pondered the weapon requirements issued by the Planning院 (Yuan):
+After receiving the task book, the members of the design team pondered the weapon requirements issued by the Planning Yuan:
 
 This weapon must be cheap enough, consume less material, be convenient to manufacture, and be able to form a large-scale production capacity in a short period of time;
 
@@ -54,7 +54,7 @@ Revolvers have low material requirements and use a hammer firing mechanism, whic
 
 "Let's go with Smith & Wesson," Wang Ruixiang insisted. He really liked this pistol, although he had never seen an S&W pistol in another time and space—not even a dog. But he still fell in love with this rather romantic weapon.
 
-Among the self-defense pistols purchased by the 穿越 (Time-Cross) members through the North American branch were many S&W revolvers using 9mm Para ammunition, most of which had 4-inch barrels. Wang Ruixiang got one, and paired it with a replica American police revolver holster and bullet belt from a military surplus store, which he always hung on his hip.
+Among the self-defense pistols purchased by the Transmigration members through the North American branch were many S&W revolvers using 9mm Para ammunition, most of which had 4-inch barrels. Wang Ruixiang got one, and paired it with a replica American police revolver holster and bullet belt from a military surplus store, which he always hung on his hip.
 
 "The Webley revolver is very fast to load," Li Yi'ao said. The Webley revolver is loaded by pushing the ear pin on the left rear of the revolver frame forward to lower the grip, then the sleeve and barrel are closed to prepare for firing. When ejecting the shell casing, the gun is opened again, and a star-shaped ejector automatically removes the shell casing from the revolver. This is a faster and more advanced device than a swing-out cylinder, and it is more suitable for use with a speedloader.
 
@@ -62,7 +62,7 @@ Among the self-defense pistols purchased by the 穿越 (Time-Cross) members thro
 
 "Let's imitate the Smith & Wesson," Wang Ruixiang insisted.
 
-"I think it's still too complicated. The gun-making instructions given to us by the Planning院 (Yuan) are to simplify—and simplify again," Bai Yu said. "Eliminate all unnecessary parts and reduce the number of processes and processing requirements as much as possible."
+"I think it's still too complicated. The gun-making instructions given to us by the Planning Yuan are to simplify—and simplify again," Bai Yu said. "Eliminate all unnecessary parts and reduce the number of processes and processing requirements as much as possible."
 
 "If we simplify the Smith & Wesson any further, we'll have to make a Western-style revolver."
 
@@ -81,6 +81,7 @@ The more propellant, the more expanding gas when firing, and the higher the requ
 The last problem is the 13mm bullet. Whether it is a metal bullet or a paper-cased bullet, its size and weight are too large. The size of the pistol made will also increase accordingly. In order to reduce the size, the capacity of the magazine will have to be reduced.
 
 "In my opinion, the current 13mm Minie rifle is already too large in caliber and has excessive power, but this is a fait accompli and cannot be changed for a while."
+
 [y004]: /characters/y004 "Zhan Wuya"
 [y006]: /characters/y006 "Li Yi'ao"
 [y007]: /characters/y007 "Li Yuanyuan"
