--- a/_posts/2011-4-28-3-37500.md
+++ b/_posts/2011-4-28-3-37500.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Chapter Three Hundred and Seventy-Five: Distribution of the Spoils
+title: "Section 375: Distribution of the Spoils"
 category: 3
 path: 2011-4-28-3-37500.md
 tag: [normal]
 ---
 
-The OA announced the types, quantities, and distribution intentions of all the materials obtained in Incident A. Clothing, shoes, and cigarettes would be distributed in batches to every 穿越 (Time-Cross) member as welfare. Food, alcohol, professional clothing, tools, equipment, and materials would be stored and distributed centrally by the Planning院 (Yuan).
+The OA announced the types, quantities, and distribution intentions of all the materials obtained in Incident A. Clothing, shoes, and cigarettes would be distributed in batches to every Transmigration member as welfare. Food, alcohol, professional clothing, tools, equipment, and materials would be stored and distributed centrally by the Planning Yuan.
 
 Although this batch of materials was not of particularly great significance, it was still very popular with everyone, especially the clothing and shoes. It had been almost two years since they landed, and clothes and shoes were consumed particularly quickly. Although there was now a clothing factory that could produce its own shoes, hats, and clothing, the styles and colors were always very rustic and could not be compared with this batch of sportswear and casual wear. As for the shoes, that went without saying.
 
@@ -16,7 +16,7 @@ The General Office distributed the first batch of clothing and shoes on a per ca
 
 The leather goods were not very useful and were not distributed for the time being. Briefcases were listed in the "publicly allocated materials for official use" catalog and distributed to those who needed them.
 
-Alcohol and pornographic magazines were not distributed. Xiao Zishan handed over all the pornographic magazines to the Great Library for collection. 穿越 (Time-Cross) members could borrow and read them in the library. The whiskey was reserved for emergency use.
+Alcohol and pornographic magazines were not distributed. Xiao Zishan handed over all the pornographic magazines to the Great Library for collection. Transmigration members could borrow and read them in the library. The whiskey was reserved for emergency use.
 
 As for the other scattered daily necessities, clothing, and items found on the ship, they were dealt with by auction. They were listed on the BBS, and those who wanted to buy them could bid. The highest bidder would get them. The circulation coupons obtained from the sale were deposited into a special dividend account and distributed to all elders at the end of the year according to their shares.
 
@@ -42,7 +42,7 @@ These articles were either quite professional or simply nonsense, but the common
 
 "That's right, I saw it too. These traitors are always playing dirty tricks."
 
-Because the navy of the 穿越 (Time-Cross) country had a strong flavor of the old Japanese navy in its system and titles, especially after the "Warship March" was officially plagiarized as the navy's march, the army had put this hat on it. Of course, the hat that the navy put on the army was "Yellow Nazi," so much so that these two words were not allowed to be openly discussed in public and on the BBS, so as to avoid conflict between the two sides.
+Because the navy of the Transmigration country had a strong flavor of the old Japanese navy in its system and titles, especially after the "Warship March" was officially plagiarized as the navy's march, the army had put this hat on it. Of course, the hat that the navy put on the army was "Yellow Nazi," so much so that these two words were not allowed to be openly discussed in public and on the BBS, so as to avoid conflict between the two sides.
 
 "If this continues, the machine guns and so on may fall into the hands of the navy, or at least they will get half of them," Wei Aiwen was very anxious—the Executive Committee had been discussing this issue for the past few days. Once they were influenced, it would be hard to say.
 
@@ -62,7 +62,7 @@ The result of this "academic dispute" was that the two sides almost came to blow
 
 Finally, the Executive Committee announced that one of each of the guns and rocket launchers obtained in Incident A would be allocated to the design team as samples for research and preservation; 12 automatic rifles and 6 submachine guns would be allocated to the special reconnaissance team; the remaining weapons would be temporarily stored in the warehouse. The dispute was finally settled with neither the army nor the navy getting anything.
 
-Finally, there was the matter of dealing with the salvaged fishing boat. This fishing boat, codenamed "Ship A," was secretly towed to a mangrove-covered bay in Bopu in the middle of the night after it was salvaged. This was not only a naval警戒区 (warning zone) where natives were not allowed to approach, but also surrounded by tidal flats and forests on all sides, making it almost inaccessible by land. It had to be entered by small boat, which was convenient for secrecy and guarding.
+Finally, there was the matter of dealing with the salvaged fishing boat. This fishing boat, codenamed "Ship A," was secretly towed to a mangrove-covered bay in Bopu in the middle of the night after it was salvaged. This was not only a naval warning zone where natives were not allowed to approach, but also surrounded by tidal flats and forests on all sides, making it almost inaccessible by land. It had to be entered by small boat, which was convenient for secrecy and guarding.
 
 After Ship A was towed to Bopu, it had undergone simple maintenance: the inside and outside of the hull were cleaned, the attached marine life was removed, and the hull was temporarily sealed. After the secrecy level was lifted, how to repair this ship as soon as possible became a top priority.
 
@@ -97,6 +97,7 @@ But this was not the most difficult problem. Everyone agreed that although the e
 After evaluation, it was feared that Ship A would have to be repaired for two or three years before it could be put back into service. However, the various fishing equipment on it could be removed and utilized like the 8154 fishing boat.
 
 As for the engine, it was decided to remove it for repair. If it was not removed, even the seawater could not be cleaned thoroughly. As for the electronic equipment, it was all removed and handed over to Zhong Lishi for research. They would repair as much as they could.
+
 [y001]: /characters/y001 "Xiao Zishan"
 [y003]: /characters/y003 "Wang Luobin"
 [y005]: /characters/y005 "Ma Qianzhan"
