--- a/_posts/2011-4-6-3-35300.md
+++ b/_posts/2011-4-6-3-35300.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Chapter Three Hundred and Fifty-Three: Drawing a Clear Line
+title: "Section 353: Drawing a Clear Line"
 category: 3
 path: 2011-4-6-3-35300.md
 tag: [normal]
 ---
 
-The income of native officials was divided into three parts: one part was the "position salary"—the salary received for holding a particular office; another part was the "rank salary"—this part was unrelated to the native official's position and was only related to his years of service and contribution to the 穿越 (Time-Cross) regime. The total income of a senior grassroots clerk could be higher than that of a junior mid-level official. Xiao Zishan believed that this would allow native cadres to feel at ease in grassroots and professional work, and would not create a situation where the more skilled they became in grassroots and professional work, the less future they had. As long as their work was outstanding, their income would not be less. The last part was "allowances and benefits," which were issued according to the nature of the work, favoring dangerous, arduous, and difficult positions.
+The income of native officials was divided into three parts: one part was the "position salary"—the salary received for holding a particular office; another part was the "rank salary"—this part was unrelated to the native official's position and was only related to his years of service and contribution to the Transmigration regime. The total income of a senior grassroots clerk could be higher than that of a junior mid-level official. Xiao Zishan believed that this would allow native cadres to feel at ease in grassroots and professional work, and would not create a situation where the more skilled they became in grassroots and professional work, the less future they had. As long as their work was outstanding, their income would not be less. The last part was "allowances and benefits," which were issued according to the nature of the work, favoring dangerous, arduous, and difficult positions.
 
 Next, the meeting held a long discussion on a series of issues. This plenary meeting of the Executive Committee lasted for a whole night. In the end, everyone felt exhausted and starving, but before the meeting was adjourned, the members of the Executive Committee had to study the meeting communiqué word by word—not only to solve the problems left over from before the general assembly, but also to take into account the reaction of the masses. The taste of democracy was indeed not easy to savor.
 
@@ -28,7 +28,7 @@ After the meeting, the members of the Executive Committee turned off the lights 
 
 Ma Qianzhan, on the other hand, felt a little refreshed by the cold wind. For a moment, he felt that he couldn't sleep, so he went back to his office.
 
-Hou Wenyong had already come to work and had cleaned the large office used by the native clerks and scribes outside Ma Qianzhan's office. Like all the natives who had been taken in, educated, and employed by the 穿越 (Time-Cross) Group, he was extremely grateful to the group. He did not simply regard himself as a paid "employee" or a "cadre" in the "new language," but as a master-servant relationship with a closer personal attachment.
+Hou Wenyong had already come to work and had cleaned the large office used by the native clerks and scribes outside Ma Qianzhan's office. Like all the natives who had been taken in, educated, and employed by the Transmigration Group, he was extremely grateful to the group. He did not simply regard himself as a paid "employee" or a "cadre" in the "new language," but as a master-servant relationship with a closer personal attachment.
 
 If it weren't for the strict system of native entry and exit in a place like the Executive Committee compound, Hou Wenyong would have almost slept in the office—he thought this was a matter of course.
 
@@ -40,7 +40,7 @@ Ma Qianzhan instructed Hou Wenyong, "Make a cup of tea, make it strong!"
 
 "No need. Just sort out the materials on the table first." Ma Qianzhan felt that his thoughts were a little confused. He needed to sit down, drink some tea, and sort them out.
 
-Hou Wenyong brought him hot tea and carefully closed the door when he left. He could already tell what Chief Ma was thinking from his expression. Ma Qianzhan opened one of the countless drawers next to him and took out a lunch box containing Russian-style black bread baked by the cafeteria. This was originally intended for the army because it was filling and did not spoil easily, but the cafeteria found that it was particularly time-consuming to bake, and the wheat production was too low to even feed the 穿越 (Time-Cross) members themselves. So, only a small amount was produced for the elders to enjoy, but the sales were very average. Most elders were not interested in this sour and hard thing.
+Hou Wenyong brought him hot tea and carefully closed the door when he left. He could already tell what Chief Ma was thinking from his expression. Ma Qianzhan opened one of the countless drawers next to him and took out a lunch box containing Russian-style black bread baked by the cafeteria. This was originally intended for the army because it was filling and did not spoil easily, but the cafeteria found that it was particularly time-consuming to bake, and the wheat production was too low to even feed the Transmigration members themselves. So, only a small amount was produced for the elders to enjoy, but the sales were very average. Most elders were not interested in this sour and hard thing.
 
 He took out a chessboard from the drawer, set up a game in progress, and began to study it. This was his usual method when he had to consider some major issues.
 
@@ -50,11 +50,11 @@ Although many of his plans had been rejected, he was very happy that this Execut
 
 It was strange that a county yamen in the Ming Dynasty, with only a few officials, could manage its administrative affairs well by relying on a group of "petty officials" with the status of commoners. Ma Qianzhan had always admired the bureaucratic system. He firmly believed that the reason why modern society could achieve a powerful social control and execution that ancient and traditional societies could not was that it had established a huge bureaucratic group.
 
-If the 穿越 (Time-Cross) Group wanted to build a modern society, it would be impossible without cultivating a large number of its own cadres.
+If the Transmigration Group wanted to build a modern society, it would be impossible without cultivating a large number of its own cadres.
 
 Since Wu De had already left his post, the Civil Affairs Committee had fallen directly into his hands, and the appointment of native cadres was under the jurisdiction of the Cadre Department of the Civil Affairs Committee. This gave him greater initiative in the reform of the civil administration system of the entire Lingao.
 
-Although Ma Qianzhan had lost the position of the Planning Committee, which had once given him great power over the 穿越 (Time-Cross) Group, as the Secretary of State, he had become the "premier" of the 穿越 (Time-Cross) Group in name, and to a certain extent, he had more freedom of action. Through the State Council meetings, he could effectively impose his own will and ideas on various ministries and commissions, rather than relying on the past power of resource allocation to indirectly achieve his goals.
+Although Ma Qianzhan had lost the position of the Planning Committee, which had once given him great power over the Transmigration Group, as the Secretary of State, he had become the "premier" of the Transmigration Group in name, and to a certain extent, he had more freedom of action. Through the State Council meetings, he could effectively impose his own will and ideas on various ministries and commissions, rather than relying on the past power of resource allocation to indirectly achieve his goals.
 
 What Wu De handed over to him was a stall that was beginning to show results, but many things had just begun and needed to be carried on. He wondered, who would be the People's Commissar for Civil Affairs?
 
@@ -101,6 +101,7 @@ Ma Qianzhan just looked leisurely at the chessboard in front of him, chewing on 
 "Alright! I'll take responsibility for what I've done! I'll do it myself in the future!" Dugu Qiuhun finished speaking and rushed out.
 
 Ma Qianzhan's face was wooden as he put away the chessboard. Losing Dugu Qiuhun was a major loss for him, but after this incident, if he didn't draw a clear line with him, it would become a fatal wound to his political life.
+
 [y001]: /characters/y001 "Xiao Zishan"
 [y002]: /characters/y002 "Wen Desi"
 [y005]: /characters/y005 "Ma Qianzhan"
