--- a/_posts/2011-4-8-3-35500.md
+++ b/_posts/2011-4-8-3-35500.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Chapter Three Hundred and Fifty-Five: The General Political Security Bureau
+title: "Section 355: The General Political Security Bureau"
 category: 3
 path: 2011-4-8-3-35500.md
 tag: [normal]
 ---
 
-Such a person, even among the 穿越 (Time-Cross) members in the same courtyard, some did not know him, and some had never even known that such a person existed.
+Such a person, even among the Transmigration members in the same courtyard, some did not know him, and some had never even known that such a person existed.
 
 Zhao Manxiongski seemed to be very satisfied with his existence, as if he had entered a state of hibernation.
 
@@ -54,7 +54,7 @@ What does he mean by that? Ma Jia thought. He said, "You mean?"
 
 And so the deal was done. After receiving Ma Jia's request, Xiao Zishan felt that the title of "Executive Deputy Director" lacked deterrent power. After thinking for a long time, he came up with the title of "General Political Commissar of the General Political Security Bureau" for Zhao Manxiongski. The General Political Commissar was not the director of the General Bureau, but it clearly expressed his responsible position. Ma Jia thought it was very good.
 
-Unexpectedly, Zhao Manxiong firmly refused this title. He humbly stated that the title was too grand and not suitable for someone like him who had made no contribution to the 穿越 (Time-Cross) Group. He would rather have the title of "First Deputy Director of the General Political Security Bureau."
+Unexpectedly, Zhao Manxiong firmly refused this title. He humbly stated that the title was too grand and not suitable for someone like him who had made no contribution to the Transmigration Group. He would rather have the title of "First Deputy Director of the General Political Security Bureau."
 
 Later, when Ma Jia was reading a book by chance, he learned why Zhao Manxiongski did not like the imposing title of "General Political Commissar of the General Political Security Bureau." It turned out that Yagoda's last title before his arrest was "General Commissar of the State Security Committee."
 
@@ -90,7 +90,7 @@ The visitor was a stranger, and he exuded an uncomfortable chill. Wu Mu's hand s
 
 "Wu Mu, 21 years old, height 175 cm, weight 75 kg, bachelor's degree in administrative management, military history enthusiast, with outdoor sports experience."
 
-"That's right, this is my personal information." Wu Mu was surprised. Although the personal information of the 穿越 (Time-Cross) members was not top secret, very few people could see it.
+"That's right, this is my personal information." Wu Mu was surprised. Although the personal information of the Transmigration members was not top secret, very few people could see it.
 
 "In your personal information, you said you are a militarist," the visitor sat down opposite him. He was a fat man. Wu Mu was sure he had never seen this person before.
 
@@ -124,7 +124,7 @@ The visitor was a stranger, and he exuded an uncomfortable chill. Wu Mu's hand s
 
 "What does the General Political Security Bureau protect?"
 
-"Of course, it's the 穿越 (Time-Cross) Group and the entire cause."
+"Of course, it's the Transmigration Group and the entire cause."
 
 "For all those who hinder the group and the great cause, should we distinguish between elders and natives?"
 
@@ -145,4 +145,5 @@ That afternoon, he received a new appointment. Xiao Zishan handed the transfer o
 "He is your superior, the head of the General Political Security Bureau," Xiao Zishan asked strangely. "You don't know him? He specifically asked for you."
 
 "So that fat man is him," Wu Mu suddenly realized. But he felt strange again. What outstanding qualities had he shown that made this newly appointed secret police chief take a fancy to him?
+
 [y001]: /characters/y001 "Xiao Zishan"
