--- a/_posts/2011-6-15-4-04100.md
+++ b/_posts/2011-6-15-4-04100.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "Chapter 41: Cooperation"
+title: "Section 41: Cooperation"
 category: 4
 path: 2011-6-15-4-04100.md
 tag: [normal]
 ---
 
-However, this matter could serve as a wake-up call to the other Executive Committee members, especially Wu De, the president of the Planning院. He could certainly foresee the impact on the Planning院, as the direct successor to the Planning Committee, if the "Yi Fan-Chen Ce" system were to be adopted.
+However, this matter could serve as a wake-up call to the other Executive Committee members, especially Wu De, the president of the Planning Yuan. He could certainly foresee the impact on the Planning Yuan, as the direct successor to the Planning Committee, if the "Yi Fan-Chen Ce" system were to be adopted.
 
 Ma Qianzhu rang the doorbell at the end of the corridor. A small window immediately appeared on the iron-clad door, revealing a pair of alert eyes.
 
@@ -44,7 +44,7 @@ Ma Qianzhu introduced the plan for the Foreign Intelligence Bureau's deployment 
 
 "The investment and operation will be the responsibility of the Ministry of Colonial Trade, which will also be responsible for supporting the intelligence personnel. Is that what you mean?"
 
-"Of course," Ma Qianzhu nodded. "But I have to correct one point. Strictly speaking, all investments are provided by the Planning院 and the General Finance Directorate." He smelled a hint of bargaining and quickly shot down that possibility.
+"Of course," Ma Qianzhu nodded. "But I have to correct one point. Strictly speaking, all investments are provided by the Planning Yuan and the General Finance Directorate." He smelled a hint of bargaining and quickly shot down that possibility.
 
 "Yes," Si Kaide nodded. "What I mean is, if our department is responsible for business operations, then the selection of these sites will have commercial considerations, not purely for intelligence gathering. Some locations may be considered important by the intelligence bureau and require a permanent post, but from a commercial perspective, these locations may not be able to generate enough profit, or even enough to maintain the operation of the site itself."
 
@@ -183,6 +183,7 @@ So the telephone switchboard and transfer desk were in a flurry. Ming Qiu didn't
 After a simple interview, all of them were accepted. Li Yan had them sign, take photos, and fill out forms. After the procedures were completed, Wang Ding appeared before them with a serious expression:
 
 "The comrades here are all preparing to be dispatched to the mainland to engage in intelligence and trade activities. Some comrades will stay and work at the general bureau, but it's inevitable that they will also have to travel on business."
-[y001]: /characters/y001 "萧子山"
-[y005]: /characters/y005 "马千瞩"
-[y156]: /characters/y156 "李潇侣"
+
+[y001]: /characters/y001 "Xiao Zishan"
+[y005]: /characters/y005 "Ma Qianzhu"
+[y156]: /characters/y156 "Li Xiaolü"
