--- a/_posts/2011-6-22-4-04800.md
+++ b/_posts/2011-6-22-4-04800.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "Chapter 48: The Man on Ship A"
+title: "Section 48: The Man on the Ship"
 category: 4
 path: 2011-6-22-4-04800.md
 tag: [normal]
 ---
 
-Then he went to the Planning院 to apply for lead, tin, and antimony. These were the three essential metals for casting lead type. Especially antimony; without antimony, the effectiveness of lead type would be greatly reduced, and its lifespan would also be shortened.
+Then he went to the Planning Yuan to apply for lead, tin, and antimony. These were the three essential metals for casting lead type. Especially antimony; without antimony, the effectiveness of lead type would be greatly reduced, and its lifespan would also be shortened.
 
 "It would be even better if we had bismuth," Zhou Dongtian vaguely remembered that this was also needed for casting lead type.
 
@@ -38,7 +38,7 @@ The non-ferrous metal workshop under the metallurgy department had a long-term t
 
 As for daily utensils, most were pewter and tinware, which also contained a lot of antimony mixed in as tin. In this way, these antimony pieces were recovered bit by bit.
 
-"Although it's not much, it should be enough for now," Ji Wusheng said. "If you need it, I'll report the number to the Planning院 immediately. Once the procedures are done, it's all yours."
+"Although it's not much, it should be enough for now," Ji Wusheng said. "If you need it, I'll report the number to the Planning Yuan immediately. Once the procedures are done, it's all yours."
 
 "It's a bit little, but it's enough for now," Zhou Dongtian thought. Since people had already been sent to purchase it, subsequent antimony would arrive continuously.
 
@@ -46,7 +46,7 @@ After solving the problem of the type casting materials, he handed over the rema
 
 Zhou Dongtian only made one request: it would be best to design two different printing presses, one a small machine that could be hand-cranked or powered by animal power, and the other a large machine powered by machinery. The former he planned to use for setting up printing factories in the territory of the Great Ming in the future, especially in Nanjing. Zhou Dongtian was already preparing to reenact the events of Leizhou in Nanjing, to crush the woodblock printing industry of Sanshan Street in Nanjing in one fell swoop and establish a brand new printing empire. The latter would of course be used in the occupied areas of the transmigrators.
 
-He asked the Planning院 for a quota of "purified" apprentices and prepared to send them to Hu Qingbai for training.
+He asked the Planning Yuan for a quota of "purified" apprentices and prepared to send them to Hu Qingbai for training.
 
 "These apprentices don't need to be taught anything else. The key is to teach them to read. It's not over when they know the eight hundred commonly used characters. They must know at least three thousand Chinese characters," Zhou Dongtian said. "And they must know both simplified and traditional characters."
 
