--- a/_posts/2011-8-23-4-11000.md
+++ b/_posts/2011-8-23-4-11000.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Chapter 110: The Weapon of Art and Literature
+title: "Section 110: The Weapon of Art and Literature"
 category: 4
 path: 2011-8-23-4-11000.md
 tag: [normal]
 ---
 
-The victory of the first anti-encirclement campaign has ended. While a victory parade and犒勞 were held in Ma Niao, a commendation ceremony was held in Bairen City to award commemorative medals, bonuses, and prizes to the labor activists among the native laborers who had surrendered since D-Day, those who had made outstanding contributions, and those who had performed excellently in the wartime support work.
+The victory of the first anti-encirclement campaign has ended. While a victory parade and reward were held in Ma Niao, a commendation ceremony was held in Bairen City to award commemorative medals, bonuses, and prizes to the labor activists among the native laborers who had surrendered since D-Day, those who had made outstanding contributions, and those who had performed excellently in the wartime support work.
 
 Many labor activists and volunteer overtime workers in the factories received labor service medals of different levels. Some production teams received honorary titles and collective honor banners.
 
@@ -179,6 +179,7 @@ Fang Fei considered it: the proposal to establish a veterans' club had been subm
 "I think, can we have an annual meeting?"
 
 Holding an annual meeting was Fang Fei's specialty. The so-called annual meeting was nothing more than gathering together to eat, drink, and have fun, and to connect with colleagues and business partners. The transmigrator group could also follow suit.
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y005]: /characters/y005 "马千瞩"
+
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y005]: /characters/y005 "Ma Qianzhu"
