--- a/_posts/2012-7-3-5-18800.md
+++ b/_posts/2012-7-3-5-18800.md
@@ -6,7 +6,7 @@ path: 2012-7-3-5-18800.md
 tag: [normal]
 ---
 
-Of the four tasks assigned by the Executive Committee, the recruitment of labor had been handled, albeit with a discount on the numbers. Land consolidation was progressing, with a respectable report from the Agriculture Committee and the Heaven and Earth Society. Disaster relief and replanting were strengths of the穿越 regime, and with dedicated personnel in charge, there was no doubt it would be managed.
+Of the four tasks assigned by the Executive Committee, the recruitment of labor had been handled, albeit with a discount on the numbers. Land consolidation was progressing, with a respectable report from the Agriculture Committee and the Heaven and Earth Society. Disaster relief and replanting were strengths of the Transmigration regime, and with dedicated personnel in charge, there was no doubt it would be managed.
 
 However, the most crucial issue—grain—remained completely unresolved.
 
@@ -28,7 +28,7 @@ Using coercive measures would certainly be convenient. He wouldn't even need the
 
 But in his heart, he was reluctant to use such forceful means. He always felt it made him seem "incompetent." Liu Xiang had been struggling with this issue recently.
 
-"Why don't I have the protagonist's knack for a sudden stroke of genius from those穿越novels?" he muttered behind his desk, idly flipping through a new document from the General Directorate of Finance that had just been delivered.
+"Why don't I have the protagonist's knack for a sudden stroke of genius from those Transmigration novels?" he muttered behind his desk, idly flipping through a new document from the General Directorate of Finance that had just been delivered.
 
 After casually flipping through a few pages, he came across a document concerning the collection of the summer tax—a serious matter. He quickly began to read it carefully.
 
