--- a/_posts/2012-8-16-5-23200.md
+++ b/_posts/2012-8-16-5-23200.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "Chapter 232: Prey Nokor"
+title: "Section 232: Prey Nokor"
 category: 5
 path: 2012-8-16-5-23200.md
 tag: [normal]
 ---
 
-On the way, Ping Qiusheng patiently tried to make Quark understand his meaning: the slave trade was not limited to the area around Banten. As long as they were from Southeast Asia or were white-skinned, the 穿越集團 would accept them all. As for how to get more slaves, it was entirely up to Quark's methods. Before they even entered the city, the refugees along the road had already become rolling silver coins and various valuable goods in Quark's eyes.
+On the way, Ping Qiusheng patiently tried to make Quark understand his meaning: the slave trade was not limited to the area around Banten. As long as they were from Southeast Asia or were white-skinned, the Transmigration Group would accept them all. As for how to get more slaves, it was entirely up to Quark's methods. Before they even entered the city, the refugees along the road had already become rolling silver coins and various valuable goods in Quark's eyes.
 
 Just then, a man wearing a square kerchief boldly approached, trembling, and asked in Guangzhou official dialect if the group was from the Great Ming. After receiving an affirmative answer, the man introduced himself, claiming to be from Guangdong. He said he had been curious and eager to learn since he was young, and having heard that the Western countries had strange skills and could make Red Barbarian cannons and telescopes, he had traveled thousands of miles on a merchant ship to the southern countries. He had been there for five years and now missed his homeland. Not long ago, he had taken a merchant ship to this place, but with the war in the north, the number of ships traveling north had gradually decreased, and he had not been able to find a ship to return home.
 
@@ -36,7 +36,7 @@ It didn't take long for the group to arrive at the city gate. The gate was built
 
 The city of Prey Nokor was of a considerable size—at least larger than all the county towns on Hainan Island. After all, this was the residence of the viceroy, the political and economic center of Lower Cambodia.
 
-Why visit this viceroy? In Ping Qiusheng's view, this was a strategic point in the Mekong Delta. Regardless of the future situation, this would definitely be a population center, otherwise the later Saigon would not have developed. With population comes various needs, and when it comes to dumping goods, no one in this era could compare with the 穿越集團. Now, Lin'gao's reach was not that long, and the Engine Project would take more than two years to basically complete. The business of these two years could not be monopolized by the Dutch, and even the Dutch transport capacity could not fully meet the needs of the 穿越集團, so more trade was naturally better.
+Why visit this viceroy? In Ping Qiusheng's view, this was a strategic point in the Mekong Delta. Regardless of the future situation, this would definitely be a population center, otherwise the later Saigon would not have developed. With population comes various needs, and when it comes to dumping goods, no one in this era could compare with the Transmigration Group. Now, Lin'gao's reach was not that long, and the Engine Project would take more than two years to basically complete. The business of these two years could not be monopolized by the Dutch, and even the Dutch transport capacity could not fully meet the needs of the Transmigration Group, so more trade was naturally better.
 
 Feng Shengyue was already waiting at the city gate. His luggage was simple, just a bundle and a straw hat. Ping Qiusheng noticed that the straw hat on his head was made in Lin'gao. *Could Lin'gao's straw hats have been sold so far away?*
 
