--- a/_posts/2010-1-28-2-10300.md
+++ b/_posts/2010-1-28-2-10300.md
@@ -1,66 +1,67 @@
 ---
 layout: post
-title: 第一百零三节 铸炮（二）
+title: "Section 103: Casting Cannons (II)"
 category: 2
 path: 2010-1-28-2-10300.md
 tag: [normal]
 ---
 
-　　“军火商倒不急着做。”张柏林说，“我们自己也可以装备滑膛炮么，现在的火力空白点太多了。博铺公路上的三座炮楼就没有炮，百仞城也是一门炮都没有。另外，我们总要建立土著军队的，土著军队可以用滑膛炮组建炮兵部队。这样以后再改装成Armstrong炮，也培训出一批合格的炮手了。”
+"We're not in a hurry to become arms dealers," said Zhang Bolin. "We can also equip ourselves with smoothbore cannons. There are too many firepower gaps right now. The three blockhouses on the Bopu road have no cannons, and Bairen City doesn't have a single one either. Besides, we'll have to build up a native army eventually, and they can use smoothbore cannons to form artillery units. That way, when we upgrade to Armstrong cannons later, we'll have a batch of qualified gunners trained."
 
-　　张柏林这个大炮兵分子最关心的还是自己梦寐以求的炮兵队，不管是什么炮，有总比没有的好。
+Zhang Bolin, a big artillery enthusiast, was most concerned with his dream of an artillery team. Any cannon was better than no cannon.
 
-　　大家觉得这个建议倒也合理，即使无视制造成本和武装土著军队的需求，在使用成本上滑膛炮也低得多，因为滑膛炮没有膛线，所以炮弹理论上可以是任何装得进炮膛的东西，不需要精心制造的炮弹，最简单的就是实心铁球而已，这种炮弹即使到19世纪在海陆两方面的杀伤威力也还是属于可以接受的——事实上，实心弹一直到滑膛炮退出战争舞台还是发射得最多的炮弹，比起杀伤威力可疑的榴弹可靠的多。
+Everyone felt this suggestion was reasonable. Even ignoring the manufacturing cost and the need to arm a native army, the cost of using smoothbore cannons was much lower. Because smoothbore cannons had no rifling, the projectiles could theoretically be anything that could fit into the barrel. They didn't require carefully manufactured shells; the simplest was just a solid iron ball. The killing power of this kind of projectile was still acceptable on both land and sea even in the 19th century. In fact, solid shot was still the most fired projectile until smoothbore cannons withdrew from the stage of war, much more reliable than the questionable shrapnel.
 
-　　“嗯，我们还可以开发一些特殊的球形炮弹，比如榴弹和燃烧弹。”
+"Well, we can also develop some special spherical projectiles, like high-explosive shells and incendiary shells."
 
-　　“还有一个好处，可能你们都没意识到。”[王洛宾][y003]说，“[文总][y002]的代差理论。”
+"There's another benefit that you might not have realized," said [Wang Luobin][y003]. "[Chief Wen][y002]'s generation gap theory."
 
-　　“代差理论？”
+"Generation gap theory?"
 
-　　“在这个时空，至少在我们的有生之年，都是外来者。而为了征服和统治，我们要依靠当地人的帮助。所以迟早会建立起土著军队。”
+"In this time and space, at least in our lifetime, we are all outsiders. And to conquer and rule, we have to rely on the help of the locals. Sooner or later, a native army will be established."
 
-　　一旦建立起土著军队，因为其人数众多，必然会成为穿越国家的主要武装力量。
+Once a native army was established, due to its large numbers, it would inevitably become the main armed force of the transmigrated nation.
 
-　　不管你花多少心思去洗脑、去搞政治工作、去控制，军队作为一架暴力机器，一旦意识到自己的强大就会变得贪婪，他们会争取更多的权力和利益，而穿越者本身的力量是有限的。唯一的办法就保持技术代差。
+No matter how much effort you put into brainwashing, political work, and control, the army, as a machine of violence, would become greedy once it realized its own power. They would strive for more power and benefits, and the transmigrators' own power was limited. The only way was to maintain a technological generation gap.
 
-　　土著部队装备的20mm燧发枪，穿越者就得有栓动步枪一级的武器来对抗。这样可以保证以极少数的人就能压制住大群的人。同理，如果穿越者自己能制造92步兵炮，给土著军队装备的最好火炮不能超过37mm架退炮。
+If the native troops were equipped with 20mm flintlock rifles, the transmigrators would have to have bolt-action rifle-level weapons to counter them. This would ensure that a very small number of people could suppress a large group. Similarly, if the transmigrators could manufacture 92-type infantry guns themselves, the best artillery to equip the native army with should not exceed 37mm recoilless guns.
 
-　　这个理论目前[文德嗣][y002]还没有完善，他现在每天晚上都在对未来的军事机构和政权组织进行思考——“穿越者的江山永固”就是他的目标。
+[Wen Desi][y002] had not yet perfected this theory. He now spent every night thinking about the future military organization and political structure—"the eternal rule of the transmigrators" was his goal.
 
-　　经过几天的准备，铸炮工作开始了。作为技术储备和练习，炮兵小组将首先铸造传统的滑膛炮。一般来说，滑膛炮最好是用铜，寿命差不多可达到1000发，相比之下铸铁炮的寿命不过600发。但是铜比铁贵得多，对穿越者来说更是珍贵的工业原料，而登瀛洲从广东买回来的生铁质地优异，含硫率很低，非常适合铸炮。
+After a few days of preparation, the cannon casting work began. As a technical reserve and practice, the artillery team would first cast traditional smoothbore cannons. Generally speaking, it was best to use bronze for smoothbore cannons, with a lifespan of about 1,000 rounds, compared to cast iron cannons, which had a lifespan of only 600 rounds. But bronze was much more expensive than iron, and for the transmigrators, it was a precious industrial raw material. The pig iron bought from Guangdong by the Dengyingzhou was of excellent quality, with a very low sulfur content, making it very suitable for casting cannons.
 
-　　历史上，明代的闽粤地区的生铁就是以质地优越著称的，该地区的炼铁工场因为以木炭为燃料炼铁，含硫量比北方使用煤炭炼制出来的生铁要低得多。而硫正是使生铁变脆，品质下降的一个主要因素。明代人不能理解这个缘由，但是南方铸造的火炮要比北方坚固成了当时的一个共识。以至于明末朝廷大规模铸炮都在广东进行。万历四十七年徐光启奉命练兵拱卫京城的时候，就建议朝廷在福建和广东招募匠人来京铸炮。崇祯三年，他又自请赴广州铸炮，其原因是：“工匠甚众，铁料尤精，价亦可省三分之一……”而在崇祯初年，两广总督王尊德一次性就铸炮二百门。
+Historically, the pig iron from the Fujian and Guangdong regions in the Ming Dynasty was famous for its superior quality. The ironworks in this region used charcoal as fuel for ironmaking, and the sulfur content was much lower than the pig iron produced in the north using coal. Sulfur was a major factor that made pig iron brittle and reduced its quality. The Ming people could not understand this reason, but it became a consensus at the time that the cannons cast in the south were stronger than those in the north. As a result, the Ming court's large-scale cannon casting was carried out in Guangdong. In the 47th year of the Wanli reign, when Xu Guangqi was ordered to train troops to defend the capital, he suggested that the court recruit craftsmen from Fujian and Guangdong to come to the capital to cast cannons. In the third year of the Chongzhen reign, he volunteered to go to Guangzhou to cast cannons. The reason was: "There are many craftsmen, the iron is particularly fine, and the price can be saved by one-third..." And in the early years of the Chongzhen reign, the governor of Guangdong and Guangxi, Wang Zunde, cast two hundred cannons at one time.
 
-　　[王洛宾][y003]提议是否从广州招募几名善于铸炮的师傅来示范一次中国的传统铸炮技术，大家有了直观的概念之后再进行改进。林深河表示不需要：1628年不要说中国的炮匠的水平，就算当时师法的欧洲人的铸炮工艺水平也高不到哪里去，穿越者完全没必要去学习他们。
+[Wang Luobin][y003] suggested whether to recruit a few masters skilled in cannon casting from Guangzhou to demonstrate the traditional Chinese cannon casting technology once, so that everyone could have a visual concept before making improvements. Lin Shenhe said it was not necessary: in 1628, not to mention the level of Chinese cannon makers, even the level of European cannon casting technology they were imitating at that time was not very high. The transmigrators had no need to learn from them.
 
-　　利马窦在书中谈及当时中国大炮的问题是：装药少，射程短，没有准星，无法进行瞄准，火炮的炮膛外口宽，内部小，不能有效的聚集火药气体，炮膛内部也无法做到合格的圆形，炮膛没有镗光。炮弹尺寸乃至形状随心所欲，弹炮游隙过大，火炮没有炮耳，而且有头重脚轻的毛病，如果装药太过密实，就会在开炮的时候颠倒自行炸裂。
+Matteo Ricci mentioned in his book the problems with Chinese cannons at that time: less gunpowder, short range, no sights, unable to aim, the muzzle of the cannon was wide and the inside was small, which could not effectively gather the gunpowder gas, the inside of the barrel could not be made into a qualified circle, and the barrel was not bored. The size and even the shape of the cannonballs were arbitrary, the windage between the ball and the cannon was too large, the cannon had no trunnions, and it was top-heavy. If the gunpowder was packed too tightly, it would overturn and explode when fired.
 
-　　当时传入的红夷大炮，从本质上说和明军制造装备的各种传统火炮并无两样，都是滑膛前装炮，使用的是黑火药和实心炮弹。但是受惠与对科学的认识，欧洲火炮从设计上已经有了一些明显的优越性，如身管壁较厚，火炮倍径大，炮身也是从前至后渐粗，因此在射程、杀伤力和安全性方面都有优势。炮身上普遍有了准星和照门，炮身上铸有炮耳，便于架设在炮车上，调整射击角度和移动方便。
+The Hongyi cannon introduced at that time was essentially the same as the various traditional cannons manufactured and equipped by the Ming army. They were all smoothbore, muzzle-loading cannons that used black powder and solid cannonballs. However, benefiting from scientific knowledge, European artillery already had some obvious advantages in design, such as thicker barrels, larger cannon caliber, and the cannon body gradually thickened from front to back. Therefore, they had advantages in range, lethality, and safety. Sights and rear sights were common on the cannon body, and trunnions were cast on the cannon body, which was convenient for mounting on a gun carriage, adjusting the firing angle, and moving.
 
-　　穿越者要制造的滑膛炮，大体也可以算是一种红夷大炮，不过蓝本要稍微先进一些，仿制的是19世纪早期法军的6磅加农炮。这种炮有效射程500米，最大射程1500米，炮身重量大概在250kg。
+The smoothbore cannon that the transmigrators wanted to manufacture could also be regarded as a kind of Hongyi cannon, but the blueprint was slightly more advanced, imitating the French 6-pounder cannon of the early 19th century. This cannon had an effective range of 500 meters and a maximum range of 1,500 meters, and the barrel weighed about 250 kg.
 
-　　林深河和[王洛宾][y003]决定先采用一种17—18世纪的西洋铸炮法，这种铸炮术同样需要制造泥模。
+Lin Shenhe and [Wang Luobin][y003] decided to first adopt a Western cannon casting method from the 17th-18th centuries, which also required the creation of a clay mold.
 
-　　他们请木材加工厂加工出了一批专用的木模具：作为支撑体使用的锥形材，车制的炮尾模。完成之后，首先着手的是阳模的毛坯。先在作为支撑体的锥形木材上用草绳密实的缠出大炮的形状，此时的阳模毛肧离最终尺寸还有25cm左右的余量。然后用粘土和水混合成的泥灰均匀的一层一层的糊在阳模毛肧上。要等上一层彻底干透以后才能糊下一层。
+They asked the wood processing factory to process a batch of special wooden molds: a tapered material used as a support, and a lathed cannon breech mold. After completion, they first started on the rough model of the male mold. First, they tightly wound straw rope around the tapered wood as a support to form the shape of the cannon. At this time, the rough male mold was still about 25 cm away from the final size. Then, they evenly applied a layer of mud mixed with clay and water to the rough male mold. They had to wait for the previous layer to dry completely before applying the next layer.
 
-　　在涂抹的时候，他们让整个阳模的尺寸比大炮的实际尺寸要大一些，因为铸件会收缩。当最后一层泥灰干透并且矫正过外形之后，在阳模毛肧外面涂一层蜡——缺少石蜡，用蜂蜡代替。阳模表面会很光滑而在下一道工序中不会粘住阴模。炮尾是车制的木模，用螺钉固定在阳模毛肧上。
+When applying, they made the entire male mold slightly larger than the actual size of the cannon, because the casting would shrink. After the last layer of mud was dry and the shape was corrected, a layer of wax was applied to the outside of the rough male mold—lacking paraffin, they used beeswax instead. The surface of the male mold would be very smooth and would not stick to the female mold in the next process. The cannon breech was a lathed wooden mold, fixed to the rough male mold with screws.
 
-　　阳模完工之后就开始利用它制造铸炮的铸模。铸模是把粘土、陶土、细沙和水混合成的半流质泥灰一层一层的涂在阳模上，同样要一层干透以后才涂下一层。完全干透之后在铸模的外面加上铁条的加强筋。
+After the male mold was completed, they began to use it to make the casting mold. The casting mold was made by applying a semi-liquid mud mixed with clay, pottery clay, fine sand, and water to the male mold layer by layer. Similarly, they had to wait for one layer to dry completely before applying the next. After it was completely dry, iron bars were added to the outside of the casting mold for reinforcement.
 
-　　模具彻底干燥之后，要将阳模取出，方法是将铸模头尾部切开，取出阳模内芯的锥形木材，然后将缠绕的草绳拉出。因为有阳模和铸模之间的那层蜡，所以在取出的时候会比较容易，实在困难的话还可以通过加热的方法使蜡面熔化，造成空隙脱离开。炮尾的模具是单独制造的。
+After the mold was completely dry, the male mold had to be taken out. The method was to cut the head and tail of the casting mold, take out the tapered wood of the inner core of the male mold, and then pull out the wound straw rope. Because of the layer of wax between the male mold and the casting mold, it would be easier to take it out. If it was really difficult, the wax surface could be melted by heating to create a gap for separation. The mold for the cannon breech was made separately.
 
-　　模具的第三个部件是型芯，是由附着在铁条上的粘土制成的，一般为圆柱体，但是在装火药的部位可能一个特殊的形状。型芯被装入主模具中，装在主模尾部的铁制型芯撑和位于模具炮口部分的粘土制圆环会把型芯固定在适当的位置。
+The third part of the mold was the core, which was made of clay attached to an iron bar. It was generally cylindrical, but it might have a special shape at the part where the gunpowder was loaded. The core was loaded into the main mold, and the iron core support at the tail of the main mold and the clay ring at the muzzle of the mold would fix the core in the proper position.
 
-　　单独制作的炮尾阴模和炮身阴模重新组合在一起，三个模具装配牢固之后，就要加以焙烧模具完全坚固，最后模具被炮口朝上的整个埋进熔炉旁边填实压紧的土坑里。姜野设计安装了个可以把模具整个吊起的木吊架，因为当时在修建熔铁炉的时候没考虑到铸炮的需求，炼钢车间的地面是被硬化过的。不得已只好在铸造车间又修建了座熔铁炉，不过因为不需要炼铁，只是简单的将金属熔化了就可以，炉子没有使用蓄热炉。流道是一出四，季无声亲自来指导，[展无涯][y004]自己也有些铸造的经验，所以第一次铸造就很成功。
+The separately made female mold for the cannon breech and the female mold for the cannon body were reassembled. After the three molds were firmly assembled, they were fired to make the mold completely solid. Finally, the mold was buried muzzle-up in a tightly packed earth pit next to the furnace. Jiang Ye designed and installed a wooden derrick that could lift the entire mold, because when the iron melting furnace was built, the need for cannon casting was not considered, and the floor of the steelmaking workshop had been hardened. They had no choice but to build another iron melting furnace in the casting workshop. However, since there was no need for ironmaking, just simply melting the metal, the furnace did not use a regenerative furnace. The runner was one-out-four. Ji Wusheng personally came to guide, and [Zhan Wuya][y004] himself had some casting experience, so the first casting was very successful.
 
-　　浇铸完成之后保温24小时再从泥坑里挖出来。在进一步冷却以后阴模外面的加强筋被拿掉，铸模被打碎，炮兵小组的人用锤子和凿子清除掉炮身上残余的灰渣。
+After the casting was completed, it was kept warm for 24 hours before being dug out of the mud pit. After further cooling, the reinforcing bars on the outside of the female mold were removed, the casting mold was broken, and the artillery team used hammers and chisels to remove the remaining slag from the cannon body.
 
-　　最后，这门铸铁的6磅加农炮就算铸造完成了。它还需要进一步的加工，进行炮膛的镗光处理。机械组自己制造了一台简易的镗床来对炮膛进行加工，动力甚至都没用到电动机或者柴油机，而是一头驴。这头驴子驱动一个绞盘带动一根镗杆，镗杆顶部是一个高碳钢制的膛刀。
+Finally, the casting of this cast iron 6-pounder cannon was completed. It still needed further processing, boring the barrel. The machinery group built a simple boring machine to process the barrel. The power was not even an electric motor or a diesel engine, but a donkey. The donkey drove a winch to drive a boring bar, and the top of the boring bar was a high-carbon steel boring cutter.
 
-　　镗光作业可以大大提高火炮内壁的光洁度，但是经过测量发现镗光工艺并不能真正切削出一个圆柱体或者校正铸炮过程型芯的偏差，而在整个过程中硬质残留物对镗杆也伤害甚大。换句话说，这个工艺消耗过大。
+The boring operation could greatly improve the smoothness of the inner wall of the cannon, but after measurement, it was found that the boring process could not really cut a cylinder or correct the deviation of the core during the casting process, and the hard residue in the whole process also caused great damage to the boring bar. In other words, this process was too costly.
 
-　　“难怪到了1713年就改成了钻孔法了。”林深河有些沮丧。钻孔法就是先铸成实心的铁棍，再用钻机将炮膛钻出来。这个技术是由荷兰人第一个运用的，不过直到18世纪晚期才全面推广开，英国海军兵工厂直到1770年还在用上述的铸造法制造海军舰炮。
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
-[y004]: /characters/y004 "展无涯"
+"No wonder they switched to the drilling method in 1713." Lin Shenhe was a little frustrated. The drilling method was to first cast a solid iron rod, and then use a drilling machine to drill out the barrel. This technology was first used by the Dutch, but it was not fully promoted until the late 18th century. The British Royal Naval Arsenal was still using the above-mentioned casting method to manufacture naval guns until 1770.
+
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
+[y004]: /characters/y004 "Zhan Wuya"
