--- a/_posts/2010-1-3-2-07800.md
+++ b/_posts/2010-1-3-2-07800.md
@@ -1,76 +1,77 @@
 ---
 layout: post
-title: 第七十八节 开业大吉
+title: "Section 78: Grand Opening"
 category: 2
 path: 2010-1-3-2-07800.md
 tag: [normal]
 ---
 
-　　海南妇女合作社股份有限公司的名字虽然取得响亮，本质上只是家旧货商店，货源自然是从苟家庄抄来的家货。古董摆件字画瓷器这些东西在本地是没什么市场的，但是普通的家居生活用品数量很多，特别是衣服鞋帽，一捆一捆的衣服装来了几十车。这些东西对老百姓来说是很有吸引力的。
+Although the Hainan Women's Cooperative Co., Ltd. had a grand name, it was essentially just a second-hand store. The source of goods was naturally the household goods confiscated from the Gou family estate. Antiques, ornaments, calligraphy, paintings, and porcelain had no market locally, but there were a large number of ordinary household items, especially clothes, shoes, and hats, which were brought in by the dozens of cartloads. These things were very attractive to the common people.
 
-　　不过，正如[文德嗣][y002]说的，出资各方的资本是用穿越者内部的记账货币点券作为本金的，一点券到底该合计多少白银、铜钱成了个很大的问题。按照执委会过去的说明，一点券相对于一人民币。
+However, as [Wen Desi][y002] said, the capital of the various investors was based on the internal accounting currency of the transmigrators, the "dianquan". How much silver and copper coins one dianquan was worth became a big problem. According to the Executive Committee's past explanation, one dianquan was equivalent to one RMB.
 
-　　“既然点券是一人民币作为基准的，那么核算价值的时候可以用RMB作为参考——”李梅说。
+"Since the dianquan is based on one RMB, we can use RMB as a reference when calculating the value—" Li Mei said.
 
-　　“这个，虽然我不是学经济的，但是时空不同，人民币的价值没法这么套用。”[文德嗣][y002]有点担心，“比如一个花梨木的桌子，21世纪值老钱了，要用人民币套得话，这桌子不就得天价了。”
+"Well, although I'm not an economist, the time and space are different, and the value of the RMB can't be applied like that." [Wen Desi][y002] was a little worried. "For example, a huanghuali wood table is worth a lot of money in the 21st century. If we use RMB to calculate it, wouldn't this table be sky-high?"
 
-　　“可以用粮食价格换算，”程栋建议说，“这样表现出来的购买力比较真实。”
+"We can use grain prices for conversion," Cheng Dong suggested. "The purchasing power expressed in this way is more realistic."
 
-　　他使用大米作为换算基准。
+He used rice as the conversion benchmark.
 
-　　临高的米价是每石（94.4kg）一两三钱白银。
+The price of rice in Lingao was one tael and three qian of silver per shi (94.4 kg).
 
-　　现代的中国城市米价，平均每kg大约在3.2元之间，再换算成石，每石米合人民币302.08元
+The average price of rice in modern Chinese cities is about 3.2 yuan per kg. Converted to shi, one shi of rice is equivalent to 302.08 yuan.
 
-　　以此为单位，人民币在1628年的临高的实际购买力就是302.08元相当于一两三钱白银。临高的物价他们是基本都了解的，这样就能比较便捷的换算成人民币了。
+Using this as a unit, the actual purchasing power of the RMB in Lingao in 1628 was that 302.08 yuan was equivalent to one tael and three qian of silver. They basically understood the prices in Lingao, so it was more convenient to convert them into RMB.
 
-　　经过一番复杂的成本计算、了解行情，海南妇女合作社股份有限公司——简称妇女合作社终于开张了，因为它的开张时间比盐店要晚一些，加上李梅本人的公关交际能力，合作社的场面要比盐店大得多。虽然也只是几排砖砌的柱子，上面搭上棚架和雨布的简易大棚。但它占据了东门街上的一块很大的地皮——这块地皮李梅原想以公司的名义买下来，但是土地制度又是一个敏感的话题，执委会不敢做主，在她再三的活动下，才核发了一张三年期的土地使用证——光荣的001号。
+After a series of complex cost calculations and understanding of the market, the Hainan Women's Cooperative Co., Ltd.—referred to as the Women's Cooperative—finally opened for business. Because its opening time was a little later than the salt store, and with Li Mei's public relations and social skills, the cooperative's scene was much grander than the salt store's. Although it was also just a few rows of brick pillars with sheds and raincloths on top, it occupied a large piece of land on Dongmen Street. Li Mei originally wanted to buy this piece of land in the name of the company, but the land system was another sensitive topic, and the Executive Committee did not dare to make a decision. After her repeated efforts, a three-year land use certificate was issued—the glorious No. 001.
 
-　　比起盐店开张时的悄无声息，妇女合作社开张就显得特别“会来事”。开张的时候不但放了一万响特地叫人从县城里买来的鞭炮，简陋的砖砌门楼上悬挂着席亚洲手题“海南妇女合作社”七个大字的木牌匾，四周沿街的砖柱上琳琅满目的挂满了祝贺开张的牌子，虽然很简陋，但也像那么回事。落款的自然是各式各样的部门：左手第一块是执委会的，然后是东门市工商管理所、军事部、治安部、南海实验示范农场……连马袅的盐场村和大美村的村委会都有祝贺牌子送来。门口的一对喇叭里不断的播放着欢快的《喜相逢》。
+Compared to the quiet opening of the salt store, the opening of the Women's Cooperative was particularly "eventful." Not only were 10,000 firecrackers, specially bought from the county town, set off at the opening, but a wooden plaque with the seven large characters "Hainan Women's Cooperative" handwritten by Xi Yazhou was hung on the simple brick gatehouse. The brick pillars along the street were filled with congratulatory plaques, which, although simple, looked the part. The signatories were naturally various departments: the first one on the left was from the Executive Committee, followed by the Dongmen City Administration for Industry and Commerce, the Military Department, the Security Department, the Nanhai Experimental Demonstration Farm... Even the village committees of Maniao Salt Farm Village and Damei Village sent congratulatory plaques. A pair of loudspeakers at the door continuously played the cheerful "Joyful Encounter."
 
-　　这似曾相识的情景还是让许多穿越众感到亲切，就算不买什么也想进去逛逛了。里面设了十多个摊位，没有柜台，好在从苟家扫荡来的家具多得是，就用各种条案方桌代替。上面堆满了琳琅满目的货物——第一批进得货物李梅心里也有个算计，农村的购买力有限，所费无非是吃和穿。瓷器、摆件、家具这些不是必需品，老百姓一用不上二也买不起，唯有衣服和日用品，那是非买不可的，所以主力商品就是衣服鞋帽。把衣服按质地、新旧、用途一一整理分开，鞋子全部配对找全，好几千件各种衣物整理分类是个浩大的工程，明家一家四口齐上阵，忙活了两天两夜才搞完。破损的衣服不再发卖，直接装车拉到造纸厂工地去当原料。
+This familiar scene still made many transmigrators feel a sense of intimacy. Even if they didn't want to buy anything, they wanted to go in and have a look. There were more than a dozen stalls inside, with no counters. Fortunately, there was plenty of furniture swept from the Gou family, so various long tables and square tables were used instead. They were piled high with a dazzling array of goods. Li Mei had a plan for the first batch of goods. The purchasing power of the countryside was limited, and the expenses were nothing more than food and clothing. Porcelain, ornaments, and furniture were not necessities. The common people neither needed them nor could they afford them. Only clothes and daily necessities were essential, so the main products were clothes, shoes, and hats. Sorting and classifying thousands of pieces of clothing by texture, newness, and use was a huge project. The Ming family of four worked together for two days and two nights to finish it. Damaged clothes were no longer sold, but were directly loaded onto carts and sent to the paper mill construction site as raw materials.
 
-　　合作社门口一时间熙熙攘攘，好不喧哗，当地土著哪见过这样的场面，纷纷聚拢过来，李梅乘着这个机会，指挥伙计招揽客户。
+For a time, the entrance of the cooperative was bustling with activity. The local natives had never seen such a scene and gathered around. Li Mei took this opportunity to direct the clerks to attract customers.
 
-　　伙计是从大美村迁过来的村民里选的，都是脸相端正，能言善语的中年女子。洗澡换衣，清一色的靛蓝布裙袄，胸前还绣上了“妇女合作社”五个字，看上去整齐精神。她自己也是一身青布裙袄，她穿明装一点都没沐猴而冠的感觉，脸洗得干干净净，头发梳的整整齐齐，浑身一股干净利落的味道。一个人站在门口和各路来宾打着招呼，连探头探脑，不敢靠得太近的土著，她见了也会用不大流利的临高话打招呼——毕竟主要是赚他们的钱么！顾客就是如来佛祖。
+The clerks were selected from the villagers who had moved from Damei Village. They were all middle-aged women with decent looks and good speaking skills. After bathing and changing clothes, they all wore indigo cloth skirts and jackets, with the five characters "Women's Cooperative" embroidered on their chests, looking neat and energetic. She herself was also in a blue cloth skirt and jacket. She didn't look out of place in Ming dynasty clothes at all. Her face was clean, her hair was neatly combed, and she had a clean and capable air about her. She stood at the door alone, greeting guests from all walks of life. Even the natives who craned their necks but did not dare to get too close, she would greet them in not-so-fluent Lingao dialect—after all, the main purpose was to earn their money! The customer is the Buddha.
 
-　　她知道过去的农民因为见识少，往往不敢轻易进陌生的地方，生怕受骗上当，所以把比较能吸引他们的旧衣、鞋帽、小梳子、簪花之类的东西都放在沿街的铺面上发卖。绝大多数的老百姓有生以来从没见过这么多的商品货物。五光十色、绫罗绸缎的衣服，家里有女儿要出嫁，有儿媳要娶得，都盘算着挑几件回去。手头紧的，觉得穷人没福穿这个，不要紧，这里还有许多新的、半新的布衣，麻的、棉的都有，价钱呢？比自己织了布请裁缝做还便宜。再精明谨慎的人心里也活络起来。
+She knew that farmers in the past, due to their limited experience, often did not dare to enter unfamiliar places easily, for fear of being deceived. Therefore, she placed the old clothes, shoes, hats, small combs, hairpins, and other things that were more attractive to them on the stalls along the street for sale. The vast majority of the common people had never seen so many goods in their lives. Colorful clothes of silk and satin, families with daughters to marry or daughters-in-law to be married, all planned to pick a few pieces to take home. For those with tight hands who felt that the poor had no fortune to wear this, it didn't matter. There were also many new and semi-new cloth clothes, both linen and cotton, and the price? Cheaper than weaving the cloth themselves and hiring a tailor to make it. Even the most shrewd and cautious people's hearts were moved.
 
-　　开门还不到一小时，铺子门口的五开间门面上就都是埋头挑东西讲价钱的人了。李梅满面笑容地看着这一副热闹的场景，忽然觉得这样莫名其妙的到了1628年也没什么不好——她已经憧憬到未来的商业帝国了，在原来的那个时空里，那是无论如何也达不到的高峰啊！一激动，脑袋就有点晕，这才意识到自己是快六十的人了——不知道自己还能不能看到那一天——得找个中医诊下脉，秋令正是进补的日子，现在不正是秋天么……
+Less than an hour after opening, the five-bay storefront at the entrance of the shop was full of people bending over to pick things and bargain. Li Mei watched this lively scene with a smile on her face. She suddenly felt that it was not so bad to have come to 1628 so inexplicably—she was already looking forward to the future commercial empire, a peak that she could never reach in her original time and space! With a surge of excitement, her head felt a little dizzy. Only then did she realize that she was almost sixty years old—she didn't know if she could live to see that day—she had to find a Chinese medicine doctor to check her pulse. Autumn was the time for nourishment, and wasn't it autumn now...
 
-　　正想着，忽然看到从东城门里出来了一对男女，女的却是金发碧眼。正在门口看热闹的百姓们看到有了新的西洋镜，都涌过去看蛮夷女子了。
+Just as she was thinking, she suddenly saw a man and a woman coming out of the East Gate. The woman was blond and blue-eyed. The common people who were watching the excitement at the door saw a new spectacle and all flocked to see the barbarian woman.
 
-　　李梅忙分开众人迎了上去：“丁总编您好啊，您也来光临小店了？”
+Li Mei hurriedly separated the crowd and went up to greet them: "Hello, Editor-in-Chief Ding, you've come to grace my humble shop with your presence?"
 
-　　来人正是自封《临高时报》社长兼主编的丁丁，身边的自然是他的大洋马女友潘琳。前几天两个人才从大美村回来，连夜赶完了特别长篇报道《苟家的罪恶史》，昨天刚刚出清样。听说第一家股份制企业开张了，他那敏感的新闻神经又兴奋起来，两个人立马赶到东门市来。
+The person who came was Ding Ding, the self-proclaimed president and editor-in-chief of the "Lingao Times," and the one with him was naturally his foreign girlfriend, Pan Lin. The two had just returned from Damei Village a few days ago and had worked overnight to finish the special feature report "The Criminal History of the Gou Family." The final proof was just out yesterday. Hearing that the first joint-stock enterprise had opened, his sensitive news nerve was excited again, and the two of them immediately rushed to Dongmen City.
 
-　　“李大姐您新店开张，我们没第一个来给您捧场，已经失礼了。”丁丁也算个场面上的人物，开口更是客气。他环顾了一下，“呀，我都没给您送贺牌——”
+"Big Sister Li, your new shop is opening, and we didn't come to support you first. We've been rude." Ding Ding was also a man of the world, and his words were even more polite. He looked around, "Oh, I didn't even send you a congratulatory plaque—"
 
-　　“哪里哪里，您帮我以后多宣传就好！”丁丁现在还是一个没有报社的总编，但是李梅毫不怀疑《临高时报》总有一天会成像《纽约时报》一样的大报业集团的，此刻拉起关系来比以后再拉也容易得多。
+"Not at all, not at all. It's enough if you help me with more publicity in the future!" Ding Ding was still an editor-in-chief without a newspaper office, but Li Mei had no doubt that the "Lingao Times" would one day become a large newspaper group like the "New York Times." It was much easier to build a relationship now than later.
 
-　　“成，今天我就是来采编的，明天给您出个号外！”
+"Sure, I'm here to gather news today. I'll give you an extra tomorrow!"
 
-　　“哎，那就太谢谢您了！按说公司开业，该请大家喝几杯酒的，现在也没有这个条件。过几天贤伉俪到我家来喝几杯酒吧，我自己下厨——我那里还有几瓶郫县豆瓣酱，给你们做顿川菜吃！”
+"Oh, thank you so much! According to custom, when a company opens, everyone should be invited for a few drinks, but we don't have the conditions now. In a few days, you and your wife can come to my house for a few drinks. I'll cook myself—I still have a few bottles of Pixian doubanjiang there. I'll make you a Sichuan meal!"
 
-　　“那我们可一定来，我都想死水煮鱼了。这地方连个红辣椒也找不到。”丁丁笑着说，“李大姐您带我们参观参观吧。”
+"Then we'll definitely come. I'm dying for boiled fish. I can't even find a red chili in this place." Ding Ding said with a smile, "Big Sister Li, please show us around."
 
-　　李梅当然求之不得，带着他们各处参观了一下，物质条件还是很简陋的，但是整套商业管理已经上了正规：进货、领料、库存、销售都有记录。伙计不认字，记账的事情就由李梅自己来。伙计的报酬采用的是售货提成的方式，换句话说是没固定工资的，按销售额的百分比提成。每种商品的提成比率不一样，好卖的东西提成比率低，难买的高。每天管三顿饭，工作时间适应古人早起早睡的习惯，从早晨5点到晚上18点，没有休息日。不过，家中有事情或者生病可以请假，当然请假也就意味着没有收入。
+Of course, Li Mei was more than happy to. She took them on a tour of the place. The material conditions were still very simple, but the entire business management was already on the right track: there were records for purchasing, receiving materials, inventory, and sales. The clerks could not read, so Li Mei did the bookkeeping herself. The clerks' remuneration was based on a sales commission, which meant there was no fixed salary, but a percentage of the sales. The commission rate for each product was different. The commission rate for easy-to-sell items was low, and the rate for hard-to-sell items was high. Three meals a day were provided, and the working hours were adapted to the ancient people's habit of getting up early and going to bed early, from 5 am to 6 pm, with no rest days. However, they could ask for leave for family matters or illness, but of course, asking for leave also meant no income.
 
-　　这套制度按另一个时空的标准是严重违反劳动法，不过在这个时空这算不上有多苛刻。丁丁还记得有次去山东采访老字号的往事：直到20世纪初期，很多铺子里的伙计还是一文钱工资也没有的，老板就管三餐一宿，年底发个小红包就算完事了。
+According to the standards of another time and space, this system was a serious violation of labor laws, but in this time and space, it was not particularly harsh. Ding Ding still remembered an interview with an old brand in Shandong: until the early 20th century, many clerks in the shops had no salary at all. The boss just provided three meals and a place to sleep, and at the end of the year, a small red envelope was given as a bonus.
 
-　　【注：过去商业企业不发底薪相当普遍，伙计收入主要靠两个部分，一是每天小帐收入分钱，二是年底的老板会按人力股分红。】
+[Note: In the past, it was quite common for commercial enterprises not to pay a basic salary. The income of clerks mainly came from two parts: one was the daily small account income sharing, and the other was the year-end bonus from the boss according to the human capital shares.]
 
-　　他看到铺面一角备着几口瓷缸，里面泡满青蒿茶，有一把竹杓，边上还配了许多木碗。
+He saw a few porcelain vats in a corner of the shop, filled with artemisia tea, with a bamboo ladle and many wooden bowls beside them.
 
-　　“这是免费茶水。”李梅解释说，过去的有些商家每到一年四季都在店门口施茶，方便过往的行人，这是种传统的商业美德。很得人心，也有利于增加客源——许多人开始只是为了过来喝口茶，接着就被东西吸引住了。
+"This is free tea." Li Mei explained that in the past, some merchants would offer tea at the entrance of their shops in all four seasons for the convenience of passers-by. This was a traditional commercial virtue. It was very popular and also helped to increase the customer base—many people initially just came over for a drink of tea, and then were attracted by the goods.
 
-　　“您可真有一套。”丁丁不由得赞叹，“果然是行行出状元，不简单！我看这里您是第一个发财的了。”
+"You really have a way with things." Ding Ding couldn't help but praise. "Sure enough, every profession has its master. Not simple! I think you'll be the first one to get rich here."
 
-　　“那可不一定。”李梅笑着说，“您别看这买卖这么火，这只是第一天，以后日子长着呢。我们这是股份制企业，租土地使用权、盖房子的材料和人工，一直到伙计们每天吃饭的饭钱，可都是合作社现钱开支的，除了执委会作为投资给的那些货物，合作社没要执委会一分钱，这个怎么也得说是自力更生发展经济的典型了吧？您得给我好好宣传宣传，也好我以后争取点优惠政策不是？”
+"That's not necessarily true." Li Mei said with a smile, "Don't look at how hot this business is. This is just the first day. There are still many days to come. We are a joint-stock enterprise. The rent for the land use right, the materials and labor for building the house, and even the daily meal money for the clerks are all paid in cash by the cooperative. Except for the goods given by the Executive Committee as an investment, the cooperative did not ask for a penny from the Executive Committee. This can be said to be a typical example of self-reliance and economic development, right? You have to give me good publicity, so that I can strive for some preferential policies in the future, right?"
 
-　　“好！”丁丁一脸兴奋，忽而低声说，“咱们这妇女合作社，允许男人入股不？”
+"Okay!" Ding Ding said with an excited face, and then whispered, "Does our women's cooperative allow men to buy shares?"
 
-　　李梅心领神会：“小潘不就是女人么？”
+Li Mei understood: "Isn't Xiao Pan a woman?"
 
-　　两个人一起会意地笑了起来。
-[y002]: /characters/y002 "文德嗣"
+The two of them laughed knowingly.
+
+[y002]: /characters/y002 "Wen Desi"
