--- a/_posts/2010-1-30-2-10500.md
+++ b/_posts/2010-1-30-2-10500.md
@@ -1,114 +1,115 @@
 ---
 layout: post
-title: 第一百零五节 试炮
+title: "Section 105: Test Firing"
 category: 2
 path: 2010-1-30-2-10500.md
 tag: [normal]
 ---
 
-　　第一次海陆之争落下了帷幕，更多的人急于要看穿越者在本时空的第一件自制火器的威力，暂时没事做的人都来了，准备看个热闹。
+The first dispute between the army and the navy came to an end. More people were eager to see the power of the first self-made firearm of the transmigrators in this time and space. Those who had nothing to do for the time being all came to watch the excitement.
 
-　　林深河暂且充当炮兵教员，先将滑膛炮的整个发射过程都演示了一遍。滑膛炮在17世纪的欧洲已经形成了一套比较规范的发射程序，有了许多不同的专用装备，除了弹药之外，炮车上最要紧的就是装填工具了，可以说没有装填工具这个炮也打不了。在战斗中，步骑兵对炮兵阵地展开攻击占领阵地之后，如果时间仓促不能拖走或者破坏大炮的话，就会设法破坏装填工具。同样，炮兵万一需要弃炮逃命，第一件事情也是带走装填工具，这样做一是防止敌人马上利用这些火炮攻击我方，二来如果能够夺回阵地，有装填工具马上就能开火。
+Lin Shenhe temporarily acted as an artillery instructor and demonstrated the entire firing process of a smoothbore cannon. In 17th-century Europe, smoothbore cannons had already formed a relatively standardized firing procedure and had many different special equipments. In addition to ammunition, the most important thing on the gun carriage was the loading tool. It could be said that the cannon could not be fired without the loading tool. In battle, after the infantry and cavalry launched an attack on the artillery position and occupied it, if there was not enough time to drag away or destroy the cannons, they would try to destroy the loading tools. Similarly, if the artillerymen had to abandon their guns and flee for their lives, the first thing they would do was to take the loading tools with them. This was to prevent the enemy from immediately using these cannons to attack our side, and secondly, if they could retake the position, they could open fire immediately with the loading tools.
 
-　　“这tm什么蛋事。”应愈拿着来这些长长短短的木杆子来回打量着感慨地说了一句。他可是堂堂的130mm加农炮炮兵退伍，现在居然要一个从没当过兵的小伙子来教怎么打炮。
+"What the hell is this?" Ying Yu said with emotion as he looked at the long and short wooden poles. He was a veteran of the 130mm cannon artillery, but now he had to be taught how to fire a cannon by a young man who had never been a soldier.
 
-　　这套装填工具是林深河逐一画出尺寸和外形，然后由木材厂和机械厂联合制造的：第一个是炮刷，木杆的顶端包裹羊毛，蘸水后用来熄灭炮膛内残留的火星，炮兵小组在数据库里查询了半天也没有羊毛的存货记录，先用木棉代替了，第二个是干炮刷，和前一个类似，作用是擦干前面步骤留下的水分；一个顶部带涡状螺旋型的铁钩子的木杆是用来清除炮膛内可能残余的纸片或纤维的——当时的欧洲火炮的装药已经采用了定量药包，火药按分量用用纸或法兰绒包裹；头部膨大的是装填杆，塞紧火药和弹丸的。最后还有一个点火棒，原版的比较复杂，林深河把它简化了，用缴获的一支短矛缠绕上火绳代替。
+This set of loading tools was drawn by Lin Shenhe one by one with dimensions and shapes, and then jointly manufactured by the timber factory and the machinery factory: the first was a cannon brush, the top of the wooden pole was wrapped in wool, and after being dipped in water, it was used to extinguish the remaining sparks in the barrel. The artillery team searched the database for a long time but found no record of wool inventory, so they used kapok instead. The second was a dry cannon brush, similar to the previous one, used to dry the water left in the previous step; a wooden pole with a spiral iron hook at the top was used to remove any remaining paper or fiber in the barrel—at that time, the propellant charges for European artillery had already adopted fixed-charge bags, and the gunpowder was wrapped in paper or flannel according to the weight; the one with a swollen head was the loading rod, used to ram the gunpowder and projectile tightly. Finally, there was a linstock. The original version was more complicated. Lin Shenhe simplified it and replaced it with a captured short spear wrapped with a slow match.
 
-　　“现在开始试射吧。”经过几次模拟的哑射之后，林深河看到大家基本掌握了全套射击流程，决定开始正式射击了。
+"Let's start the test firing now." After several simulated dry fires, Lin Shenhe saw that everyone had basically mastered the entire firing process and decided to start the official firing.
 
-　　试验射击，最简单的莫过于直接朝海面上发射，但是博铺外海海面上没有礁石或者小岛之类的参照物，无法测量炮弹射击的实际距离，最后选择的靶场还是港区内的一片荒地，靠近临高角。
+For the test firing, the simplest way was to fire directly at the sea, but there were no reefs or small islands as reference objects on the sea outside Bopu, so the actual distance of the projectile could not be measured. In the end, the chosen firing range was a piece of wasteland in the port area, near Lingao Cape.
 
-　　靶场上设立了靶子，用土堆成十二个坟包一样的小土丘，分成三组，距离从400米、800米一直到1200米。另外在1500米外竖了一个标杆。
+Targets were set up on the firing range. Twelve small mounds like graves were piled up with earth, divided into three groups, with distances ranging from 400 meters, 800 meters, to 1200 meters. In addition, a marker pole was erected 1500 meters away.
 
-　　“报告，怎么瞄准？”应愈已经进入到炮兵的角色里去了。他忽然发觉自己的炮兵知识在这门炮面前全部失效了，那身管上的瞄准器怎么用，怎么测算角度，一概不知。
+"Report, how to aim?" Ying Yu had already entered the role of an artilleryman. He suddenly found that all his artillery knowledge was useless in front of this cannon. He had no idea how to use the sights on the barrel or how to calculate the angle.
 
-　　“用这个。”林深河从前车上卸下一个小的手提箱，这个箱子和博铺木材加工厂出品的光板木箱子完全不一样，一看即是年代久远，做工精良的产品。
+"Use this." Lin Shenhe took a small suitcase from the limber. This suitcase was completely different from the plain wooden boxes produced by the Bopu timber factory. It was obviously a product of a long time ago and of fine workmanship.
 
-　　“这个是我从美国带来的，真正的18世纪炮兵用的测量工具箱。”
+"I brought this from the United States. It's a real 18th-century artillery measurement toolbox."
 
-　　“这么牛B？”炮兵们的脑袋都挤了过来，想看看这19世纪的古董。
+"So awesome?" The heads of the artillerymen all crowded over, wanting to see this 19th-century antique.
 
-　　里面有一个是类似角度器的东西，是用一长一短两把铜尺钉成直角状的量具，两尺之间有一个1/4圆弧尺连接，上面刻着刻度。林深河介绍说这叫铳规，铳规的用处是测量火炮的仰角。
+Inside was something like a protractor, a measuring tool made of two copper rulers, one long and one short, nailed into a right angle. There was a 1/4 arc ruler connecting the two rulers, with scales engraved on it. Lin Shenhe introduced that this was called a gunner's quadrant, and its purpose was to measure the elevation angle of the cannon.
 
-　　他演示给大家看如何使用，将长柄插入炮口，经由所垂的权线，在弧度尺上读出身管的仰角。
+He demonstrated how to use it, inserting the long handle into the muzzle and reading the elevation angle of the barrel on the arc ruler through the plumb line.
 
-　　“这个角度有什么用呢？”林深河说，“其实是要和射表配合起来的。”他给大家看箱盖内侧刻着一个表格，全部是英文的，有很多的数字。
+"What's the use of this angle?" Lin Shenhe said, "Actually, it needs to be used in conjunction with a firing table." He showed everyone a table engraved on the inside of the box lid, all in English, with many numbers.
 
-　　“这是射表，所谓射表，就是工厂在火炮出厂前经过打靶测试得出具体射击数据。比如在使用实心弹，装药1磅，上扬5度的情况下，炮弹可以打出多少距离。这个表上不仅有实心弹，还有榴弹、榴霰弹和燃烧弹的数据。”
+"This is a firing table. The so-called firing table is the specific firing data obtained by the factory through test firing before the cannon leaves the factory. For example, when using solid shot with a charge of 1 pound and an elevation of 5 degrees, how far the projectile can be fired. This table not only has data for solid shot, but also for high-explosive shells, shrapnel, and incendiary shells."
 
-　　“现代火炮上也有。”应愈回忆起自己操作过的130加农炮上的射表。
+"Modern artillery also has them." Ying Yu recalled the firing table on the 130mm cannon he had operated.
 
-　　“没错，现代火炮上的射表概念就是这么来的，不过当年和我一起打炮那美国佬说过，这个东西发源很早，16世纪就出现了。”
+"That's right, the concept of the firing table on modern artillery comes from this. But the American guy who fired cannons with me back then said that this thing originated very early, in the 16th century."
 
-　　“打炮”这个词在个别人的面容上露出了猥亵的笑容。
+The word "fired cannons" brought a lewd smile to the faces of a few people.
 
-　　“有了射表，炮手们只要能估算出距离，就能知道该把火炮上调整到什么角度了。”林深河又拿起了一块带着线的铜制方板。
+"With the firing table, as long as the gunners can estimate the distance, they can know what angle to adjust the cannon to." Lin Shenhe picked up another square copper plate with a thread.
 
-　　“这个就是规度，是当时的炮兵测距仪。”他介绍了下测距原理和使用方法。这是一个采用相似三角形原理推算距离的简易数学工具，对受过完整现代教育的穿越者来说当然不值一提。
+"This is a gunner's level, the rangefinder of the artillery at that time." He introduced the principle of rangefinding and how to use it. This was a simple mathematical tool that used the principle of similar triangles to calculate the distance. Of course, it was not worth mentioning for the transmigrators who had received a complete modern education.
 
-　　“不过，这玩意有意义么？”张柏林疑惑者问，“我们都有望远镜，用望远镜就能大概的测距吧？还有专门的仪器。”
+"But, is this thing meaningful?" Zhang Bolin asked doubtfully. "We all have telescopes. We can probably measure the distance with a telescope, right? There are also special instruments."
 
-　　“要搞土著炮兵部队的话这个给他们用正好，制造简单，用起来不算难，丢了也不心疼。”
+"If we want to build a native artillery force, this is just right for them. It's simple to manufacture, not difficult to use, and it's not a pity to lose it."
 
-　　“这个是铳尺，其实是一把特殊的比例尺，是测算火药量用。”林深河拿出了另外一把铜尺。
+"This is a gunner's rule, actually a special slide rule, used to calculate the amount of gunpowder." Lin Shenhe took out another copper ruler.
 
-　　作为火炮的发射药，西方的炮术家们认为最理想的装药值是当火药完全燃烧完毕之时，炮弹正好射出炮口，早了，浪费火药，迟了，则身管壁与炮弹的摩擦会使得炮弹出膛的初速降低。
+As the propellant for artillery, Western artillery experts believed that the ideal charge value was when the gunpowder was completely burned and the projectile was just fired out of the muzzle. If it was too early, it would waste gunpowder. If it was too late, the friction between the barrel wall and the projectile would reduce the muzzle velocity of the projectile.
 
-　　这个理想值当然很难达到，但是铸炮家们一直通过试验来测试最佳的药弹比，从16世纪开始，欧洲的铸炮师们就在每一批出厂的炮上附赠铳尺。供炮手们在使用不同弹药的时候计算装药量。
+Of course, this ideal value was difficult to achieve, but cannon casters had been testing the optimal powder-to-shot ratio through experiments. Since the 16th century, European cannon casters had included a gunner's rule with every batch of cannons that left the factory, for gunners to calculate the charge amount when using different ammunition.
 
-　　有了铳尺，炮手可以通过简单的计算就能大致推算出不同重量的弹丸大概装药量。不仅可以节约火药，增强火炮射击的安全性，对射程的精确标定也有极大的益处。这一技术在17世纪由西方传教士传入国内。中国虽然号称火器发明最早，但在炮术学方面基本没有研究，药弹比的概念比较模糊，火药装填随意性很大，战斗激烈的时候就会大量装填火药，往往造成火炮炸膛。所以铳尺一传入很快被视为“秘法”，以至于当时出版的许多火药武器书籍里要么根本不提此事物，要么一笔带过。
+With the gunner's rule, the gunner could roughly calculate the charge amount for projectiles of different weights through simple calculations. This not only saved gunpowder and enhanced the safety of artillery firing, but also had great benefits for the accurate calibration of the range. This technology was introduced to China by Western missionaries in the 17th century. Although China claimed to be the earliest inventor of firearms, there was basically no research in the field of gunnery. The concept of the powder-to-shot ratio was relatively vague, and the filling of gunpowder was very arbitrary. When the battle was fierce, a large amount of gunpowder would be loaded, which often caused the cannon to burst. Therefore, the gunner's rule was quickly regarded as a "secret method" as soon as it was introduced, so much so that many books on gunpowder weapons published at that time either did not mention this matter at all, or mentioned it in passing.
 
-　　中国发明了火药和大炮，却没发明出炮术，这种怪异的反差让大家都有点不得劲。
+China invented gunpowder and cannons, but did not invent gunnery. This strange contrast made everyone feel a little uncomfortable.
 
-　　“开始射击吧。”
+"Let's start firing."
 
-　　因为没有射表可用，穿越者就从身管0度开始进行射击。
+Because there was no firing table available, the transmigrators started firing from 0 degrees of barrel elevation.
 
-　　首先试用的是传统的铸铁技术造出来的火炮。几个人挪动着炮架，用身管上那简陋的准星瞄准了四百米外的一个土堆。
+The first to be tested was the cannon made with traditional cast iron technology. Several people moved the gun carriage and aimed at a mound 400 meters away with the simple sights on the barrel.
 
-　　“这精确度——”应愈觉得自己有点像是成年人却在幼儿园和儿童一起做游戏。
+"This accuracy—" Ying Yu felt a bit like an adult playing games with children in a kindergarten.
 
-　　滑膛炮射击分为11个步骤，因为是冷射，第一、二个步骤就免去了，火药是化工组用缴获黑火药造粒处理出来的细粒火药，用粗纸包着，每包250克。
+Smoothbore cannon firing was divided into 11 steps. Since it was a cold shot, the first and second steps were omitted. The gunpowder was fine-grained gunpowder made by the chemical group from captured black powder, wrapped in coarse paper, 250 grams per pack.
 
-　　“装二包吧？”
+"Two packs?"
 
-　　“好，二包。”
+"Okay, two packs."
 
-　　6磅的铁圆弹从炮口滚了进去，听声音没有任何阻滞。这个游隙把握的还不错，张柏林小心的用装填杆把弹药压结实了——这个算是技术活，不能压得太紧，否则会形成闷烧现象，不爆发。
+The 6-pound iron round shot rolled in from the muzzle. Hearing the sound, there was no obstruction. The windage was well controlled. Zhang Bolin carefully pressed the ammunition firmly with the loading rod—this was a technical job, it couldn't be pressed too tightly, otherwise it would form a smoldering phenomenon and not explode.
 
-　　林深河随即用长铁锥从点火口伸进去，锥破药包，然后往点火口里灌满火药。
+Lin Shenhe then inserted a long iron cone from the touch-hole to pierce the powder bag, and then filled the touch-hole with gunpowder.
 
-　　“准备射击！”随着他的喊声，旁边的人赶紧竖起红旗来，提醒就要开炮了。
+"Ready to fire!" As he shouted, the people next to him quickly raised a red flag to remind them that the cannon was about to fire.
 
-　　“Fire！”
+"Fire!"
 
-　　“洋奴！”海军有人评论。
+"Foreign slave!" someone from the navy commented.
 
-　　随着林深河的一声吼叫，担任点火工作的应愈把缠绕在短铁枪上火绳吹了一下，凑到了点火口——心跳得厉害，当年新兵连出来下部队第一次实弹射击都没这么紧张。
+With a roar from Lin Shenhe, Ying Yu, who was in charge of ignition, blew on the slow match wrapped around the short iron spear and brought it to the touch-hole—his heart was beating wildly. He wasn't this nervous even during his first live-fire exercise after leaving the recruit company.
 
-　　点火口上的黑火药嗤得一声着了，点火口象焰火一样喷出半尺长的火花来，嘶嘶乱响。顷刻，大炮猛得往后一座，喷射出浓密的白烟和火光，伴随着轰鸣的炮声，一颗黑乎乎的炮弹飞了出去。
+The black powder on the touch-hole ignited with a hiss. The touch-hole spewed out sparks half a foot long like fireworks, hissing and crackling. In an instant, the cannon recoiled violently, spewing out thick white smoke and fire, and with a deafening roar, a black projectile flew out.
 
-　　“班载！”海军欢呼起来。
+"Banzai!" the navy cheered.
 
-　　“汉奸！绝对的汉奸。”张柏林嘀咕着。
+"Traitor! Absolute traitor," Zhang Bolin muttered.
 
-　　铁弹拖着青烟飞出了四百米之外，结结实实地砸在了地上，泥土夹杂着火药的余烬一起飞溅起来。
+The iron ball, trailing blue smoke, flew more than 400 meters and smashed into the ground with a solid thud. Dirt, mixed with the embers of gunpowder, flew up.
 
-　　“好猛。”张柏林面如土色，这位大炮兵主义者显然从没有真正见识过大炮的发射。剧烈的爆炸，大炮后座的震动，辛辣的火药味让人感到这东西的威力之大，比起过去试放各种杂式火炮大号爆竹一样的感觉完全不同。
+"So fierce." Zhang Bolin's face was ashen. This great artillery advocate had obviously never really witnessed the firing of a cannon. The violent explosion, the vibration of the cannon's recoil, and the pungent smell of gunpowder made people feel the power of this thing, which was completely different from the feeling of setting off large firecrackers like various miscellaneous cannons in the past.
 
-　　大炮往后移动了几米，但是身管、车架都完好无损。林深河顾不上火炮的热量和呛人的硝烟味，在身管上仔细的察看起来。
+The cannon moved back a few meters, but the barrel and carriage were intact. Lin Shenhe, ignoring the heat of the cannon and the choking smell of gunpowder smoke, carefully inspected the barrel.
 
-　　“怎么样？”季无声有些担心，毕竟铸炮也是人生头一回的事情。
+"How is it?" Ji Wusheng was a little worried. After all, it was his first time casting a cannon.
 
-　　“一切正常。”
+"Everything is normal."
 
-　　“别大意，再看看有没有裂纹什么的——”[展无涯][y004]提醒着，铸铁炮不比现代兵工厂出来的大炮，“对了，我那还有台探伤仪呢，要不要拉回去看看？”
+"Don't be careless, check again for any cracks or anything—" [Zhan Wuya][y004] reminded. Cast iron cannons were not like the cannons from modern arsenals. "By the way, I still have a flaw detector. Do you want to take it back and have a look?"
 
-　　“这没必要了吧。”林深河想这太奢侈了，“探伤仪还是以后铸钢炮的时候用好了。”
+"That's not necessary," Lin Shenhe thought this was too extravagant. "The flaw detector should be used for casting steel cannons in the future."
 
-　　应愈也跑了过来，他的脸上沾染了火药的黑烟：“大炮没问题吧？”
+Ying Yu also ran over, his face stained with black smoke from the gunpowder: "Is the cannon okay?"
 
-　　“没事，坚固的很。”
+"It's fine, it's very sturdy."
 
-　　“走，一起去看看炮弹的情况。”
-[y004]: /characters/y004 "展无涯"
+"Let's go and see the situation with the cannonball."
+
+[y004]: /characters/y004 "Zhan Wuya"
