--- a/_posts/2010-1-9-2-08400.md
+++ b/_posts/2010-1-9-2-08400.md
@@ -1,98 +1,99 @@
 ---
 layout: post
-title: 第八十四节 人市（二）
+title: "Section 84: The Human Market (II)"
 category: 2
 path: 2010-1-9-2-08400.md
 tag: [normal]
 ---
 
-　　果然，里面并不是自由市场，他们这几个衣着光鲜的人一进来，就有好些个人牙上来推销自己的货色：
+Sure enough, it wasn't a free market inside. As soon as these well-dressed people came in, several human traffickers came up to sell their goods:
 
-　　“你看这个怎么样？一口糯米细牙咬金断玉——十五两怎么样？”
+"What do you think of this one? A mouthful of fine glutinous rice teeth that can bite through gold and jade—how about fifteen taels?"
 
-　　“瞧瞧这姑娘的头发，乌黑乌黑得……”
+"Look at this girl's hair, it's so black..."
 
-　　“我这个您别看年龄大一些，可是认字！书香门第出身的，近翠楼的老鸨子肯出五十两我都没卖！”
+"Don't look at my age, but I can read! I'm from a scholarly family. The old procuress of Jincui Lou offered fifty taels and I didn't sell!"
 
-　　“您几位要的是服侍的人吧？这个姑娘才好，原来就是福建那边大户人家的丫环，调教好了的，模样身段都使得！我一口价，二十五两吧！”
+"Are you looking for someone to serve you? This girl is good. She used to be a maid in a big family in Fujian. She's well-trained, and her looks and figure are all good! I'll give you a price, twenty-five taels!"
 
-　　……
+...
 
-　　闹哄哄的一时间倒吧[萧子山][y001]一行给闹蒙了。他们何曾见识过这样的场面。见这七八个人口沫横飞的一个劲的把女孩子们往他们身边拽，又是拨弄头发，又是拉起胳膊给他们看皮肤的。这些小到十一二岁大到二十出头的女孩子，样貌都还端正，只是一个个面黄肌瘦，被人牙捏搓得要哭又不敢，一副忍泪含悲的模样。[萧子山][y001]心头一沉，果然是惨相，周围的几个人也都面露不忍之色。
+The noisy scene stunned [Xiao Zishan][y001] and his party for a moment. They had never seen such a scene before. Seeing these seven or eight people spitting and pulling the girls towards them, fiddling with their hair, and pulling up their arms to show them their skin. These girls, ranging in age from eleven or twelve to their early twenties, all had decent looks, but they were all sallow and emaciated. They were being pinched and kneaded by the human traffickers, wanting to cry but not daring to, with a look of suppressed tears and sorrow. [Xiao Zishan][y001]'s heart sank. It was indeed a miserable sight. The few people around him also showed unbearable expressions.
 
-　　两个镖师赶快上前把人牙都拦开，刘纲回头问[萧子山][y001]：“大掌柜的，是要买几个孩子么？”
+The two escorts hurried forward to block the human traffickers. Liu Gang turned back and asked [Xiao Zishan][y001], "Boss, are you going to buy a few children?"
 
-　　[萧子山][y001]有些犹豫不决。看起来这里稍有姿色的女孩子几乎全被人牙买下来了，每个女孩子的价钱从六两到五十两不等，总有三四十个，如果全买下来未免花销大了点，再说年龄也偏小，这十二三的女孩子算是少女还是儿童？正在迟疑间，严茂达说：“萧委员，我们干脆来个团购吧。可以狠狠的杀个价。”
+[Xiao Zishan][y001] was hesitant. It seemed that almost all the girls with some looks here had been bought by human traffickers. The price of each girl ranged from six to fifty taels, and there were thirty or forty of them in total. If he bought them all, it would be a bit expensive. Besides, they were a bit young. Were these twelve- or thirteen-year-old girls considered girls or children? While he was hesitating, Yan Maoda said, "Commissioner Xiao, let's just do a group purchase. We can bargain hard."
 
-　　“再杀价也得好几百两。”张信摇摇头，“我们干脆从人牙没兴趣的人上入手好了。等我们买得多了，他们眼看自己的货色我们没兴趣，就会减价处理了。”
+"Even if we bargain, it will still cost several hundred taels." Zhang Xin shook his head. "We might as well start with the people that the human traffickers are not interested in. When we buy more, they will see that we are not interested in their goods and will reduce the price."
 
-　　“这样好，本来也准备买一些孩子回去抚养教育的。”
+"That's a good idea. We were also planning to buy some children to raise and educate."
 
-　　“有多少预算呢？我得有个底。”
+"How much is the budget? I need to have a bottom line."
 
-　　“五百两以下。超一些也可以。”
+"Under five hundred taels. A little over is also acceptable."
 
-　　一行人摆脱人牙，直接往里面走去。只见沿路的窝棚空地上到处是逃荒的饥民，扶老携幼，见有人过来求乞的哀呼声此起彼落，不绝于耳。
+The group got rid of the human traffickers and walked straight inside. They saw that the shacks and open spaces along the road were full of famine-stricken refugees, supporting the old and carrying the young. The cries of begging when someone came over were endless.
 
-　　前面十字路口聚了一大堆人。他们走近一望，看清楚是个女子正拽着男人的腿，在那里嚎哭哀求，地上一堆破烂中还有二个孩子，大些的只三四岁，小得尚在襁褓之中。原来那女子全家逃荒到此，家里人已经死绝，只剩下这母子三人。人牙看上了女子，却不要孩子。
+A large group of people gathered at the crossroads ahead. They approached and saw that it was a woman pulling a man's leg, wailing and begging. There were also two children in a pile of rags on the ground. The older one was only three or four years old, and the younger one was still in swaddling clothes. It turned out that the woman's whole family had fled to this place, and all her family members had died, leaving only the mother and her three children. The human trafficker had taken a fancy to the woman, but did not want the children.
 
-　　女人已经被打得鼻口流血，倒卧地上。人牙还在一边用脚踢一边骂道：“你个饿不死的娼妇！老子又不开善堂，养你的孩子作甚！”抓着女人的头发就要拖走。
+The woman had been beaten until her nose and mouth were bleeding, and she was lying on the ground. The human trafficker was still kicking her and cursing, "You shameless hussy who won't starve to death! I'm not running a charity, why should I raise your children!" He grabbed the woman's hair and was about to drag her away.
 
-　　这边张信正要开口，忽然有人喝止：“住手！”却见人群分开，过来几个家丁，簇拥着一个三十左右的年轻人，人群中响起来窃窃私语：“梁公子来了，梁公子来了。”
+Just as Zhang Xin was about to speak, someone suddenly shouted, "Stop!" The crowd parted, and a few servants came over, surrounding a young man of about thirty. Whispers arose from the crowd: "Young Master Liang is here, Young Master Liang is here."
 
-　　只见那人走到人牙面前：“你既买她，怎么又逼她丢下孩子！这两个孩子如此幼小，没了母亲还是不是死路一条！”
+The man walked up to the human trafficker: "Since you bought her, why are you forcing her to abandon her children! These two children are so young, without their mother, isn't it a dead end!"
 
-　　人牙似乎是认得来人，忙开口辩道：“您老明鉴！我们吃这行饭也不容易，她这么个病怏怏的身子，再拖着两个孩子，哪有买主要买她？我要答应了她，还得平白还要加二张嘴。”
+The human trafficker seemed to recognize the person who came and hurriedly defended himself: "Your Honor, it's not easy for us to make a living in this business. With her sickly body and two children in tow, who would want to buy her? If I agreed to her, I would have to feed two more mouths for nothing."
 
-　　这梁公子生气道：“你赚不出来，不买就是，为何要强逼着离人骨肉！”
+This Young Master Liang said angrily, "If you can't make a profit, then don't buy her. Why do you have to force her to separate from her flesh and blood!"
 
-　　人牙苦笑着：“得，得，我好心还是办恶事了。就她这模样，我不买，明个她全家都得饿死！小的好歹能救她一个人。”
+The human trafficker smiled bitterly: "Alright, alright, I was trying to be kind but ended up doing a bad thing. With her looks, if I don't buy her, her whole family will starve to death tomorrow! At least I can save her."
 
-　　这话虽然近乎无赖，却也是实情。这梁公子一时间也说不出什么来。人牙不敢再多说什么，丢下人从人堆中溜走了。张信又看看地上的女子，其实不过二十出头，脸瘦得落了形，蜡黄的皮色上却又有一层不正常的嫣红色，看起来的确有病。梁公子叫仆人去买几个馒头给她。又散了一些钱给周边围上路的饥民。
+Although this was almost roguish, it was also the truth. This Young Master Liang was speechless for a moment. The human trafficker did not dare to say any more and slipped away from the crowd. Zhang Xin looked at the woman on the ground again. She was actually only in her early twenties, her face was so thin that it had lost its shape, and her sallow skin had an abnormal flush, which did look sick. Young Master Liang asked his servant to buy a few steamed buns for her. He also distributed some money to the hungry people who had gathered around.
 
-　　“我们买吧。”郭逸有些不忍心。
+"Let's buy them," Guo Yi said with some pity.
 
-　　[萧子山][y001]想这不大好，一是她有病，二则身边的孩子过于幼小了，买回去就是负担，迟疑了一下，见大家都在看着自己，便点点头：“买下吧！”
+[Xiao Zishan][y001] thought this was not a good idea. First, she was sick, and second, the children around her were too young. Buying them back would be a burden. He hesitated for a moment, and seeing that everyone was looking at him, he nodded: "Let's buy them!"
 
-　　这边的人群见几个客商把那女子全家都买了，顿时起了骚动。人场中马上传开了，难民老的、少的、男的、女的，挤到前边，愈来愈多，把他们团团围住，都求着他们收留，不要什么卖身钱，只求给口饭。
+When the crowd saw that the few merchants had bought the woman's whole family, there was a sudden commotion. The news spread quickly in the market. The old, the young, the men, and the women of the refugees all squeezed to the front, more and more of them, surrounding them, all begging them to take them in, not wanting any money for selling themselves, just asking for a mouthful of food.
 
-　　一时间乱成一团，幸亏刘纲有些见识，忙和镖师挤了出去，请在场的衙役民壮帮忙维持秩序。[萧子山][y001]手上有高举的名帖，又立马赏了几千钱，衙役们不敢怠慢，赶紧寻了官牙过来，流水价一般的写起卖身契来了。
+For a moment, it was a mess. Fortunately, Liu Gang had some experience. He and the escorts squeezed out and asked the yamen runners and militiamen on the scene to help maintain order. [Xiao Zishan][y001] had Gao Ju's name card in his hand and immediately rewarded them with several thousand coins. The yamen runners did not dare to be negligent and quickly found an official broker to write up the deeds of sale like an assembly line.
 
-　　周围的人很快就发现了，这几个人特别钟意儿童，特别是往日根本无人问津的幼童，见一个收一个，父母要随去的也一样收留，孤儿更是欢迎。张信出手又大方，反正身价钱是一文都没出，每买一个，就给在场的衙役官牙五百文。负责弹压的衙役干脆把场地里的孤儿，不管乐意不乐意的，统统都给抓过来写身契。没多大功夫，已经收买了七八十个孩子，另有四十来个成年男女。人牙们见这些人如此豪阔，赶紧上去求出售，张信摇摇头：“一个个的验看岂不是浪费时间，你们手里的孩子，我统统包了。”
+The people around soon discovered that these few people were particularly fond of children, especially the young children who had been ignored in the past. They took in every one they saw, and if the parents wanted to go with them, they would take them in as well. Orphans were even more welcome. Zhang Xin was very generous. Anyway, he didn't spend a penny on the price of the people. For every one he bought, he would give the yamen runners and official brokers on the scene five hundred coins. The yamen runners in charge of suppression simply grabbed all the orphans in the field, whether they were willing or not, and had them sign the deeds of sale. In a short time, they had already bought seventy or eighty children, as well as forty or so adult men and women. When the human traffickers saw how generous these people were, they hurried up to ask to sell. Zhang Xin shook his head: "Isn't it a waste of time to inspect them one by one? I'll take all the children you have."
 
-　　一番讨价还价之后，最后人牙手里的四十一个女孩子，按十两一个全部买了下来。一时间，废庙前黑压压的坐满了人。
+After some bargaining, all forty-one girls in the hands of the human traffickers were bought for ten taels each. For a time, the front of the ruined temple was filled with a dense crowd of people sitting there.
 
-　　[萧子山][y001]一面叫镖师通知孙可成：腾空一间骡马大店，速速升火做饭，再请几个大夫待命。签好身契的，每二十个一拨，由两个镖师护送着地走到旅店里去。身子病弱的，又命人雇了骡车来运。
+[Xiao Zishan][y001] on the one hand asked the escorts to inform Sun Kecheng: to empty a mule and horse inn, quickly start a fire to cook, and then ask a few doctors to be on standby. Those who had signed the deeds of sale were sent to the inn in batches of twenty, escorted by two escorts. For those who were sick and weak, he ordered people to hire mule carts to transport them.
 
-　　正忙忙碌碌间，忽然有个家丁过来，向刘纲说了几句什么，刘纲一脸恭敬，过来对[萧子山][y001]道：“梁公子想请诸位掌柜过去叙谈叙谈。”
+While he was busy, a servant suddenly came over and said something to Liu Gang. Liu Gang had a respectful look on his face and came over to [Xiao Zishan][y001] and said, "Young Master Liang would like to invite you all to have a chat."
 
-　　郭逸问：“这梁公子何许人也？”
+Guo Yi asked, "Who is this Young Master Liang?"
 
-　　刘纲道：“他是本县的举人，世家子弟，一贯急公好义，在县里很有善名。他想请这几位掌柜过去叙谈。”
+Liu Gang said, "He is a juren of this county, a descendant of a noble family, and has always been eager for public justice and has a good reputation in the county. He would like to invite you all to have a chat."
 
-　　几个人互相对看了一眼，觉得这样的当地士绅有结交的必要。张信继续留着安排发送奴仆的事情，其他人随着仆人往场外走去。
+The few of them looked at each other and felt that it was necessary to befriend such a local scholar-gentry. Zhang Xin continued to stay and arrange for the sending of the servants. The others followed the servant out of the field.
 
-　　荒地边缘，有一处茶棚，卖些茶水馒头之类的物品，原是人牙和弹压的衙役们休憩的地方，此刻里里外外已经全部换成了梁公子带来的家丁仆佣，不下二三十人，众人纳罕：这小小得一个举人，排场都如此之大！
+At the edge of the wasteland, there was a tea shed that sold tea, steamed buns, and other things. It was originally a place for the human traffickers and the yamen runners who were suppressing them to rest. At this moment, the inside and outside had all been replaced by the servants and maids brought by Young Master Liang, no less than twenty or thirty people. Everyone was surprised: this small juren had such a grand style!
 
-　　只见这位梁公子，年龄约在二十七八岁的模样，面皮微白，一副贵介公子模样，灰府绸长衫，手持一柄洒金川扇，虽不侈华，却是干净利落纤尘不染。见他们过来，也不倨傲，站起身来先拱手施了一礼：
+This Young Master Liang was about twenty-seven or twenty-eight years old, with a slightly pale face, looking like a young master from a noble family. He wore a gray silk long gown and held a gold-dusted Sichuan fan in his hand. Although it was not extravagant, it was clean and neat, without a speck of dust. When he saw them coming, he was not arrogant. He stood up and first cupped his hands in a salute:
 
-　　“梁存厚。”青年公子微微一笑，八字眉下一双黑瞋瞋的瞳仁闪烁着，说道：“敢问几位掌柜尊号？从哪里来的？”
+"Liang Cunhou." The young master smiled slightly, and a pair of black pupils under his eight-character eyebrows flickered. He said, "May I ask for the honorable names of you all? Where are you from?"
 
-　　一面说，目光幽幽地上下打量着这郭逸等人。他目光极其老道，郭逸不禁一怔：这人眼神犀利，绝非一般纨绔子弟所有。口中连道：“不敢不敢。”依次将几个人的姓名报上。
+As he spoke, his eyes looked up and down at Guo Yi and the others. His eyes were extremely experienced, and Guo Yi couldn't help but be startled: this person's eyes were sharp, definitely not something an ordinary dandy would have. He repeatedly said, "I dare not, I dare not." He reported the names of the few people in order.
 
-　　按照统一的口径，他们都是海商，因为海面不平靖，滞留在此，由刘纲陪着逛街散心。
+According to the unified statement, they were all sea merchants. Because the sea was not peaceful, they were stranded here, and Liu Gang accompanied them to stroll around the streets to relax.
 
-　　仆人送上茶水，梁公子又问道：“几位即是海商，为何要买这许多家人？”说着眼睛里流露出了怀疑的神情。
+The servant served tea, and Young Master Liang asked again, "Since you are all sea merchants, why do you want to buy so many family members?" As he spoke, a look of suspicion appeared in his eyes.
 
-　　[萧子山][y001]早有应对：“这几年海面不平，买卖一天比一天难做，就寻思着买些土地设庄收租过日子了。我等在琼州买地开荒，那里人少，佃户长工们每每没有婚配，只好来这里买些女子了。”
+[Xiao Zishan][y001] had already prepared for this: "The sea has not been peaceful these past few years, and business is getting harder and harder every day, so I thought of buying some land to set up a village to collect rent and live. We are buying land and reclaiming wasteland in Qiongzhou. There are few people there, and the tenants and long-term workers often have no marriage partners, so we have to come here to buy some women."
 
-　　“那也是一桩善行了。”梁公子慨叹着，“我见你们刚才怜弱惜病，不肯离人骨肉，连幼童稚子也愿意收留，又着人妥善安排食宿，真是宅心仁厚。我辈身为广州的土著，真是惭愧！”
+"That is also a good deed," Young Master Liang sighed. "I saw that you just now pitied the weak and sick, were unwilling to separate flesh and blood, and were even willing to take in young children. You also arranged for food and lodging properly. You are truly kind-hearted. We, as the natives of Guangzhou, are really ashamed!"
 
-　　“哪里哪里。”郭逸等人赶紧谦让一番，又有点觉得这梁公子矫情。穿越者们来自现代时空，完全不了解古代社会残酷的一面。总觉得既然都收买了人家做奴仆，吃饱穿暖算是最起码的待遇了，不用付工资好像已经占了天大的便宜。
+"Not at all, not at all." Guo Yi and the others quickly said modestly, and felt that this Young Master Liang was a bit pretentious. The transmigrators came from modern times and did not understand the cruel side of ancient society at all. They always felt that since they had bought people as slaves, it was the most basic treatment to feed them and keep them warm. It seemed that they had already taken a huge advantage by not having to pay wages.
 
-　　刘纲却乘机说了些逢迎的话：“梁公子在本县一贯乐善好施，不用说这南海县，就是广州一府之地，又有哪个不知您梁公子的大仁大义的。你们不知道，此地施粥棚所费的银子，多半都是梁府上取来的。”
+Liu Gang took the opportunity to say some flattering words: "Young Master Liang has always been charitable in this county. Not to mention this Nanhai County, even in the whole of Guangzhou Prefecture, who doesn't know of your great benevolence and righteousness, Young Master Liang. You don't know, most of the silver spent on the porridge shed here comes from the Liang residence."
 
-　　梁存厚却并不以为意，摇手道：“如今世道不靖，幸而广东地方尚算安静，我梁家世受国恩，非寒门可比。家中又有些薄产，尽绵薄之力行善事，也不过是为朝廷略略分忧。可叹的是在下在敝县赈济饥民一事，也竟然不见谅于乡邦士绅，背后颇有闲言。”说着长叹一声。
+Liang Cunhou, however, did not seem to mind. He waved his hand and said, "The world is not peaceful now. Fortunately, Guangdong is still relatively quiet. My Liang family has received the grace of the country for generations and is not comparable to a poor family. My family also has some small property. I am just doing my best to do good deeds, which is just to share a little of the court's worries. What is lamentable is that my relief of the hungry people in this county is not even understood by the local gentry, and there are quite a few gossips behind my back." He sighed longly.
 
-　　郭逸见他颇有苦衷，故意装糊涂道：“梁公子赈济饥民，是天大的善事，为何要有闲言碎语？”
-[y001]: /characters/y001 "萧子山"
+Guo Yi saw that he had some difficulties and deliberately pretended to be confused: "Young Master Liang's relief of the hungry people is a great good deed. Why should there be gossip?"
+
+[y001]: /characters/y001 "Xiao Zishan"
