--- a/_posts/2010-11-1-3-19700.md
+++ b/_posts/2010-11-1-3-19700.md
@@ -1,149 +1,150 @@
 ---
 layout: post
-title: 第一百九十七节 操纵温度
+title: Section 197: Manipulating Temperature
 category: 3
 path: 2010-11-1-3-19700.md
 tag: [normal]
 ---
 
-　　哎，没办法。只能拿这个去换了。[展无涯][y004]肉疼无比。精品大红鹰虽然已经是去年的香烟了，但是他精心保存味道一点都没变化。
+Alas, there was no other way. He had to trade this for it. [Zhan Wuya][y004] felt a pang of regret. Although the premium Dahongying cigarettes were from last year, he had carefully preserved them, and their flavor hadn't changed at all.
 
-　　这东西，弹一支出来就能办成很多事，现在居然要奉送出去一包，[展无涯][y004]心疼无比。
+This was something that could get a lot done with just a single cigarette. Now, he had to give away a whole pack. [Zhan Wuya][y004]'s heart ached.
 
-　　找到了[马千瞩][y005]，再费了一番口舌，花费了无数口水加上一包烟，附加了制冰机造出来之后首先给他试用的承诺后终于拿到了两瓶冷媒。
+He found [Ma Qianzhu][y005] and, after a great deal of persuasion, countless words, a pack of cigarettes, and the added promise that Ma would be the first to try the ice machine once it was built, he finally obtained two bottles of refrigerant.
 
-　　“没了P12以后的我气狗就玩不了了——”
+"Without F-12, I won't be able to play with my airsoft guns anymore—"
 
-　　“您可以玩真铁——以后专门给您造个机枪……”[展无涯][y004]满口敷衍着把两瓶F12藏包里去了。
+"You can play with real steel—we'll build a machine gun specially for you later..." [Zhan Wuya][y004] spouted empty promises as he hid the two bottles of Freon-12 in his bag.
 
-　　奋战了一晚上，又调试拆装了无数次设备之后，终于在冷凝器里出现了一大块洁白的冰！[展无涯][y004]和粱信顿时精神百倍——这玩意到底还是能工作的！
+After a night of hard work, countless adjustments, disassemblies, and reassemblies of the equipment, a large, white block of ice finally appeared in the condenser! [Zhan Wuya][y004] and Liang Xin were instantly energized—this thing actually worked!
 
-　　[展无涯][y004]赶紧回办公室把自己的保温杯找出来，把这第一块冰装了起来给[督公][y005]送去——上面还贴了张纸“喜报”，然后嘴里敲锣打鼓的一路去了。
+[Zhan Wuya][y004] rushed back to his office to find his thermos, packed the first block of ice inside, and sent it off to [Director Ma][y005]. He even attached a piece of paper that read "Good News," then headed off, mimicking the sound of gongs and drums with his mouth all the way.
 
-　　粱信打电话给食堂，叫食堂赶紧拿几个保温箱来。这种土制的保温箱里的保温材料是木棉和棉花，专门用来从丰城轮运送棒冰和运送鲜活海鲜。
+Liang Xin called the canteen and asked them to bring over several insulated boxes. These locally made boxes were insulated with kapok and cotton, specifically used for transporting popsicles and fresh seafood from the *Fengcheng*.
 
-　　最后这个制冰机运转下来大概每一小时可以制造2公斤的冰块。实话说效率低了点。不过粱信注意到他们的保温措施做得太差，如果加强一下制冰效率会更好一些。
+In the end, the ice machine could produce about 2 kilograms of ice per hour. To be honest, the efficiency was a bit low. However, Liang Xin noted that their insulation was very poor; with improvements, the ice-making efficiency would be much better.
 
-　　工能委搞出了这么个东西让大家都很高兴，毕竟从博铺运冰来不方便，现在有个东西之后等于随时随地都可以享用冷冻食品了。当即有人就提议在食堂先安装一台。也有人提议干脆把他们手里所有的空调都拆了改制冰机——反正空调就这么几台，给谁用都不好，干脆拆了做冰块还能大家享受。
+Everyone was pleased that the Industrial and Energy Committee had produced such a device. After all, transporting ice from Bopu was inconvenient. Now, with this machine, they could enjoy frozen foods anytime, anywhere. Someone immediately suggested installing one in the canteen first. Others proposed dismantling all their existing air conditioners to make more ice machines—since there were only a few air conditioners, and deciding who got to use them was a hassle, it was better to dismantle them and make ice for everyone to enjoy.
 
-　　实际上生产制冷设备的呼声最近一直很高，不仅是紫明楼。通迅中心需要冰块来对设备进行降温，炸药车间要用冰来降温保证生产安全，食堂要保存食品，卫生部要保存解剖用的尸体……
+In fact, the call for producing refrigeration equipment had been growing louder recently, and not just for the ZIMINLOU. The communications center needed ice to cool its equipment, the explosives workshop needed it for cooling to ensure production safety, the canteen needed it to preserve food, and the Ministry of Health needed it to preserve corpses for dissection...
 
-　　穿越集团的冰箱数量实在少得可怜——当初就没人想到过这东西。丰城轮上的冷库离百仞城又远了一点，而且船上的冷库是辅机燃烧宝贵的柴油维持运转的。[马千瞩][y005]一直期望工能委能搞出比船用冷库更经济的制冷设备来。
+The穿越 Group's number of refrigerators was pitifully small—no one had thought much about them initially. The cold storage on the *Fengcheng* was a bit far from Bairen City, and the ship's cold storage ran on its auxiliary engine, which burned precious diesel fuel. [Ma Qianzhu][y005] had been hoping the Industrial and Energy Committee could come up with a more economical refrigeration solution than the ship's cold storage.
 
-　　工能委已经就这个问题连续开了好几次的会议，他们早就找到了一个相对简单可行又经济的方法来达成[马千瞩][y005]的要求，那就是粱信提到的煤气冰箱。
+The Industrial and Energy Committee had already held several meetings on this issue. They had long since found a relatively simple, feasible, and economical method to meet [Ma Qianzhu][y005]'s request: the gas refrigerator mentioned by Liang Xin.
 
-　　所谓煤气冰箱是用煤气加热使浓氨水沸腾，蒸发出来的氨蒸气经过降温使其中的水蒸气冷凝液化，而氨气冷凝成液体氨，然后在蒸发器进口处和氢气混合，由于分压的不同氨从氨液中剧烈地向氢中扩散，使蒸发器温度降低，起到制冷的作用。此后氨气被稀氨水吸收又成为浓氨液，剩下的氢气则返回蒸发器。所以煤气冰箱是通过煤气燃烧加热，使氨、水、氢三种物质在管道内循环而制冷的，制冷温度最低可达负40℃。效率极高。
+A gas refrigerator uses gas heat to boil a concentrated ammonia solution. The evaporated ammonia vapor is cooled, causing the water vapor within it to condense and liquefy. The ammonia gas then condenses into liquid ammonia. At the evaporator inlet, it mixes with hydrogen gas. Due to the difference in partial pressures, the ammonia rapidly diffuses from the liquid ammonia into the hydrogen, lowering the evaporator's temperature and creating a cooling effect. Afterward, the ammonia gas is absorbed by a weak ammonia solution, becoming a concentrated solution again, while the remaining hydrogen returns to the evaporator. Thus, a gas refrigerator uses gas combustion for heating, causing ammonia, water, and hydrogen to circulate within its pipes to produce refrigeration. It can reach temperatures as low as -40°C and is highly efficient.
 
-　　氨水，在800吨合成氨系统已经开始初步运转的时候已经不成为问题，氢气则是电解食盐制碱流程过程中获取的副产品。
+Ammonia solution was no longer a problem now that the 800-ton synthetic ammonia system was in preliminary operation. Hydrogen was a byproduct of the chlor-alkali process through electrolysis of salt.
 
-　　使用这个原理是可以制造出家用冰箱级别的小型冰箱的，按照20世纪的标准来说煤气冰箱技术含量很低。但是在1629年的临高工业体系里，小型化的煤气冰箱制造却有很多现实的问题无法解决。特别是材料和工艺上。比如燃烧头上的耐火陶瓷制造和加工、燃烧器外壳的锌合金压铸件，这一切都不是立等可取就能解决的。再者箱体必须的高效的保温材料也是他们所欠缺的。
+Using this principle, it was possible to manufacture small, household-sized refrigerators. By 20th-century standards, gas refrigerator technology was very low-tech. But within the industrial system of Lingao in 1629, manufacturing a miniaturized gas refrigerator presented many practical problems that couldn't be solved immediately, especially in terms of materials and craftsmanship. For example, manufacturing and processing the refractory ceramic for the burner nozzle and the zinc-alloy die-cast housing for the burner were not things they could accomplish overnight. Furthermore, the high-efficiency insulation material required for the refrigerator's body was also something they lacked.
 
-　　既然太精细的做不了，工能委就打算制造一个大型的“煤气冰箱”来减少制造的技术难度——耐火陶瓷的小燃烧嘴做不了，大型的铸铁燃烧嘴总是没问题的——实际上他们准备建造一个煤气冷库。
+Since they couldn't make anything too refined, the Industrial and Energy Committee decided to build a large-scale "gas refrigerator" to reduce the technical difficulty of manufacturing—if they couldn't make small refractory ceramic burner nozzles, large cast-iron ones would certainly be no problem. In reality, they were preparing to build a gas-powered cold storage facility.
 
-　　这个冷库首先选择在食堂建造——食堂本身有充足的沼气供应，现在又有了煤气，燃料上堪称充沛。至于保温材料，仅仅用木棉或者棉花都不能有效的保温，[展无涯][y004]就使用古人最常用储冰方式——在地下建造冷库，用土壤来保温，过去的北京城里的几大冰窖，都是在腊月打冰储冰，储存的条件也就是土窑，外面用草帘子盖好之后堆上土。封存到第二年夏季开冰窖的时候，冰块的损失量小到可以忽略不计。
+The location chosen for this cold storage was the canteen—it had an ample supply of both biogas and, now, coal gas, making its fuel situation abundant. As for insulation material, kapok or cotton alone wouldn't be effective. [Zhan Wuya][y004] decided to use the most common method of ice storage from ancient times—building the cold storage underground and using the soil for insulation. The major ice cellars in old Beijing were filled with ice cut during the twelfth lunar month. The storage conditions were simply earthen cellars, covered with straw mats and then piled with earth. When the cellars were opened the following summer, the amount of ice lost was negligible.
 
-　　临高建筑公司首先在农庄的一个小土坡下开掘了一个一面敞开式的长方形地窖，夯实地面和四壁之后，再用多孔砖铺砌。再在内壁加上保温材料。
+The Lingao Construction Company first excavated a rectangular, open-faced cellar at the base of a small hill on the agricultural estate. After compacting the ground and walls, they paved them with porous bricks. Then, they added insulation material to the inner walls.
 
-　　工能委既没有泡沫塑料也没有石棉，临高当地能够大量供应的天然保温材料只有木棉和硅藻土。为了保证效果，工能委在冷库内壁上交替敷设了多层。管路全部使用黄铜件。安装好冷库之后，再在上面铺设一层草帘，最后用厚厚的泥土完全覆盖。只留下一个出入通道与地面连接。通道设有内外两层木门，门上装有厚厚的保温材料，机械厂的人尽量把它做得和门框密合，贴了好几层的皮带作为密封材料。冷库的燃烧室则设置在地面。使用农庄的配套煤气发生炉的煤气进行加热。临高多雨，所以最后在整个地下冷库上方专门修建了一座屋子用来遮蔽，四面还有排水沟。
+The Industrial and Energy Committee had neither foam plastic nor asbestos. The only natural insulation materials available in large quantities locally were kapok and diatomaceous earth. To ensure effectiveness, the committee applied multiple alternating layers to the inner walls of the cold storage. All piping was made of brass. After the cold storage was installed, another layer of straw mats was laid on top, and finally, it was completely covered with a thick layer of earth, leaving only an access tunnel connected to the surface. The tunnel had inner and outer wooden doors fitted with thick insulation. The mechanics from the factory did their best to make them fit snugly against the door frames, adding several layers of leather belts as sealing material. The combustion chamber for the cold storage was located above ground and used coal gas from the agricultural estate's supporting gasifier. Lingao was rainy, so a building was constructed over the entire underground facility for shelter, complete with drainage ditches on all sides.
 
-　　点火之后冷库连续运转了24小时，证明这个冷库的最低制冷到零下16度，并且可以稳定的维持在这个水平上
+After ignition, the cold storage ran continuously for 24 hours, proving it could reach a minimum temperature of -16°C and maintain it stably.
 
-　　大伙对此已经感到十分满意了。理论上能够达到的零下40度对穿越集团来说没什么特别意义。零下16度已经可以长期的储存各种生鲜食物、制造冰块、生产各种冷饮了。
+Everyone was quite satisfied with this. The theoretical -40°C had no special significance for the 穿越 Group. -16°C was already sufficient for long-term storage of all kinds of fresh food, making ice, and producing various cold drinks.
 
-　　由于建造了能廉价大量制造冰块的冷库，不仅满足了饮食上的需求，甚至在一定程度上充当了空调的角色——从冷库里取来的大块冰块放在屋子里使其自然融化，这种传统的降温法很快就在穿越者的宿舍、办公室里流传开来了。为了避免大家一窝蜂的去领冰，计委经过缜密的计算之后给大家发放的冰票，除了穿越者个人每天有若干公斤的冰块配额之外，各部门根据需要有不同的配额标准。
+Thanks to the construction of a cold storage facility that could cheaply produce large quantities of ice, not only were dietary needs met, but it also served as a form of air conditioning to some extent. The traditional cooling method of placing large blocks of ice from the cold storage in a room to melt naturally quickly became popular in the dormitories and offices of the transmigrators. To prevent a mad rush for ice, the Planning Committee, after meticulous calculations, issued ice tickets. In addition to a daily personal quota of several kilograms for each transmigrator, different departments received varying quotas based on their needs.
 
-　　临高电信的通迅机房也终于变得凉快了一些——不仅是为了舒服，还有益于保证机器设备的正常工作。自从进入夏季之后，临高电信的机组除了用加强通风降温之外，采用的是轮番开机的方式，以免热量过大造成事故。
+The communication room of Lingao Telecom finally became cooler—not just for comfort, but also to ensure the proper functioning of the machinery. Since the beginning of summer, besides using enhanced ventilation for cooling, Lingao Telecom had been operating its equipment in shifts to prevent overheating from causing accidents.
 
-　　在高温环境下工作的土著工人们也享受到了冰块的凉意。这种待遇让很多工人很是感动——在夏季能用冰，这是有钱人的享受，现在居然能让他们这些小百姓享用。虽然在庞大的车间里这点冷气根本抵不了多少热度。但是正如[萧子山][y001]经常说得：“有时候老百姓只是要统治者有个起码的态度而已。”
+The native workers toiling in high-temperature environments also enjoyed the coolness of ice. This treatment moved many workers—using ice in the summer was a luxury for the rich, and now even common folk like them could enjoy it. Although this bit of coolness couldn't offset much of the heat in the vast workshops, as [Xiao Zishan][y001] often said: "Sometimes, the common people just want the rulers to show a basic attitude."
 
-　　由于对冰块的需求旺盛，很快工能委又组织建造了第二、第三所冷库。由于有了经验的积累，建造的技术愈发熟练，冷库的能耗量进一步下降，故障的几率也大为减小。
+Due to the high demand for ice, the Industrial and Energy Committee soon organized the construction of a second and a third cold storage facility. With accumulated experience, the construction techniques became more refined, further reducing the energy consumption of the facilities and greatly decreasing the likelihood of breakdowns.
 
-　　随着在博铺的渔获专业冷库和配套的煤气站的落成，在计委的命令下丰城轮上的冷库宣告停止运转。在这个耗电大户停开之后，丰城轮的辅机运转也减少到了维持船只自身系统的最低的功率以节约燃料。这个连续运转了将近一年的冷库停机之后，海军俱乐部在执委会的影响力大幅度的下降，丰城轮再也不是某些委员热衷去得地方了。这一结果大概是最出人意料的。
+With the completion of a specialized cold storage for fish catches and a supporting gasworks in Bopu, the cold storage on the *Fengcheng* was shut down by order of the Planning Committee. After this major power consumer was turned off, the operation of the *Fengcheng*'s auxiliary engine was reduced to the minimum power required to maintain the ship's own systems, conserving fuel. The shutdown of this cold storage, which had been running for nearly a year, led to a sharp decline in the influence of the Navy Club within the Executive Committee. The *Fengcheng* was no longer a popular destination for certain committee members. This outcome was probably the most unexpected.
 
-　　当然让这个冷库闲置还是很可惜的，计委给工能委的另一项任务就是：研究如何用煤气来驱动船上的辅机发电，使其彻底的不使用储存的柴油？
+Of course, letting this cold storage lie idle would be a great waste. The Planning Committee gave the Industrial and Energy Committee another task: to research how to use coal gas to power the ship's auxiliary generator, completely eliminating its reliance on stored diesel fuel.
 
-　　“理论上说，当然是可以的。”[展无涯][y004]笑着说，“现实当中……”
+"Theoretically, of course, it's possible," [Zhan Wuya][y004] said with a smile. "In reality..."
 
-　　“怎么，不现实？”
+"What, it's not realistic?"
 
-　　“不是不现实，而是没必要。”[展无涯][y004]说，“船上明明可以外接电源的。”
+"It's not that it's unrealistic, but that it's unnecessary," [Zhan Wuya][y004] said. "The ship clearly has a shore power connection."
 
-　　现代船只入港之后完全可以使用岸上的电源，丰城轮自然也可以。
+Modern ships can use shore power when in port, and the *Fengcheng* was no exception.
 
-　　“说白了只要把博铺电站的装机容量扩大，丰城上的船用辅机就完全没必须继续发电了。”
+"To put it bluntly, as long as we expand the installed capacity of the Bopu power station, there's no need for the *Fengcheng*'s auxiliary engine to continue generating power at all."
 
-　　[展无涯][y004]继续说：“当然用煤气替代柴油给辅机作燃料发电理论上也是可以的，不过这管道的敷设可就是个大问题了。”
+[Zhan Wuya][y004] continued, "Of course, using coal gas instead of diesel to fuel the auxiliary engine for power generation is theoretically possible, but laying the pipes would be a huge problem."
 
-　　言下之意就是毫无必要。
+The implication was that it was entirely unnecessary.
 
-　　[萧子山][y001]提醒他：辅机是个大号的发电机机组，光输出功率就比整个博铺发电站所有锅驼机加起来都大，这么大一发电机机组计委是不肯让它停止运转的。到时候说不定博铺还要依赖丰城轮的辅机发电呢
+[Xiao Zishan][y001] reminded him: the auxiliary engine was a massive generator set. Its power output alone was greater than that of all the steam-powered generators at the Bopu power station combined. The Planning Committee was unwilling to let such a large generator sit idle. It was possible that Bopu might even come to rely on the *Fengcheng*'s auxiliary engine for power.
 
-　　“嗯，倒也是。不过船用辅机的这么大一个头的设备——我还真没玩过，心里没底。”
+"Hmm, that's true. But I've never worked on a piece of equipment as big as a ship's auxiliary engine. I'm not confident."
 
-　　“反正这事可以慢慢的研究，你就别着急了。”[萧子山][y001]安慰他，“你还是想想这么把真正的煤气冰箱造出来吧。”
+"Anyway, this is something we can research slowly, so don't rush," [Xiao Zishan][y001] comforted him. "You should focus on figuring out how to make a real gas refrigerator."
 
-　　[萧子山][y001]觉得用不了多久，就可以为每个穿越者的住宅里配备小型的煤气冰箱了——前提是能够把煤气管道安全的铺设入户，或许将来还会给土著的住宅都安装上煤气灯。
+[Xiao Zishan][y001] felt that it wouldn't be long before every transmigrator's home could be equipped with a small gas refrigerator—provided that gas pipes could be safely laid to each household. Perhaps in the future, even the homes of the natives would be fitted with gas lamps.
 
-　　至于[展无涯][y004]辛辛苦苦造出来的畜力制冰机，被安全的运到了广州。随后莫笑安就接到了一份电报：“速造热水瓶和大口保温桶。”——冰是造出来了，可是还没有地方储存。
+As for the animal-powered ice machine that [Zhan Wuya][y004] had painstakingly built, it was safely transported to Guangzhou. Soon after, Mo Xiao'an received a telegram: "Produce thermoses and wide-mouthed insulated buckets immediately." Ice was being made, but there was nowhere to store it.
 
-　　莫笑安叹息了一声，起身往玻璃厂去了。他忽然想到了：其实热水瓶也是种不错的贸易商品嘛！
+Mo Xiao'an sighed and got up to head to the glass factory. A thought suddenly occurred to him: thermos flasks could actually be a pretty good trade commodity!
 
-　　做热水瓶对玻璃厂来说已经是小菜一碟的水平。特别是他们已经比较熟练的掌握了模具吹制的技术之后，使得原来感觉最为困难的吹制成型上达成了突破，有了模具，他们就再也不必依赖吹制工人的手上感觉，可以成百上千的制造一模一样的成品。
+Making thermos flasks was now a piece of cake for the glass factory. Especially since they had become quite proficient with mold-blowing techniques, they had overcome what was once considered the most difficult part, the shaping process. With molds, they no longer had to rely on the feel of the glassblower's hands and could produce identical products by the hundreds and thousands.
 
-　　热水瓶的关键是瓶胆，瓶胆本质上就是一个带有空心夹层的玻璃瓶。在制造的时候，实际上采用的是大小瓶合制的技术。
+The key component of a thermos is the vacuum flask, which is essentially a double-walled glass bottle with a vacuum in between. Its production involves joining a smaller bottle and a larger bottle.
 
-　　首先工人在玻璃液内蘸取少量玻璃液吹制成玻璃泡，稍加冷却之后将这个玻璃泡不断的蘸取玻璃液不断的挥动吹大，然后将其引长，迅速的装入模具，然后转动气吹足，打开模型之后就制造出一只瓶坯来。
+First, a worker would dip a tool into molten glass, gather a small amount, and blow it into a bubble. After slight cooling, the bubble was repeatedly dipped into the molten glass and swung to enlarge it. It was then elongated and quickly placed into a mold. By rotating it and blowing air, the shape was formed. Once the mold was opened, a bottle blank was produced.
 
-　　随后玻璃工人重复这个劳动，只不过使用的模型要小一些。实际上在玻璃厂里，在模具内吹制成型时用压缩空气成批的吹制的。现在他们没有压缩空气可用，暂时还是用人力进行。
+Next, the glassworker would repeat this process, but with a smaller mold. In a modern glass factory, compressed air is used for batch blowing inside molds. For now, they lacked compressed air and were still relying on manual labor.
 
-　　莫笑安看着一个叫黄中山的少年熟练的吹制着一个个的瓶坯，动作之流畅堪称行云流水，不由得连连点头。
+Mo Xiao'an watched a young man named Huang Zhongshan skillfully blowing one bottle blank after another. His movements were so smooth they were like flowing water and moving clouds. Mo Xiao'an couldn't help but nod in approval.
 
-　　“这是徒工中吹得最快最好的。”萧白朗坐在一个木箱上擦着汗——他现在既管陶瓷厂也管玻璃厂——不管走到哪里都被烘烤。
+"He's the fastest and best blower among the apprentices," said Xiao Bailang, sitting on a wooden crate and wiping his sweat. He was now in charge of both the ceramics and glass factories, meaning he was constantly being baked no matter where he went.
 
-　　“有悟性吧。”
+"He's got a talent for it, huh?"
 
-　　“可惜有悟性也做不出吹制玻璃器。”
+"Unfortunately, talent alone can't produce free-blown glassware."
 
-　　迄今为止，玻璃厂的所有稍微复杂一点的产品几乎都是模吹或者模压的。仅仅用吹制加上剪刀、钳子就能做出各种产品来得技术玻璃厂的工人们还没掌握——因为穿越者们自己也不会。
+To date, almost all of the glass factory's slightly more complex products were either mold-blown or mold-pressed. The workers had not yet mastered the technique of creating various products using only a blowpipe, shears, and tongs—because the transmigrators themselves didn't know how.
 
-　　“得抓几个欧洲玻璃匠来！”
+"We need to get our hands on a few European glassblowers!"
 
-　　“亚洲哪里有欧洲玻璃匠。”莫笑安说，“来亚洲这里的欧洲人基本都是人渣层面的。”
+"Where in Asia are you going to find European glassblowers?" Mo Xiao'an said. "The Europeans who come to Asia are basically the dregs of society."
 
-　　萧白朗没搭话，注意着整个车间里的运转状况，看看是不是井井有条。最近天气炎热，加之[季思退][y044]要去搞煤化厂的试生产长期不在厂，玻璃厂里的劳动纪律未免有些松懈。萧白朗一到厂里就整饬劳动纪律。
+Xiao Bailang didn't respond, his attention focused on the operations throughout the workshop, checking to see if everything was in order. The weather had been hot lately, and with [Ji Situi][y044] away for a long time to work on the trial production at the coal chemical plant, labor discipline at the glass factory had become a bit lax. As soon as Xiao Bailang arrived, he immediately set about restoring order.
 
-　　萧白朗可不搞什么政治思想工作，直接把几个磨洋工分子抓进了劳改队——后来再邬德的干涉下才被放了出来。不过这样一来厂里的生产效率提高了不少。现在他的眼睛一扫，整个车间就鸦雀无声。
+Xiao Bailang didn't bother with political indoctrination. He directly sent a few slackers to the labor reform team. They were only released later through Wu De's intervention. Nevertheless, production efficiency in the factory had improved significantly. Now, a single glance from him was enough to silence the entire workshop.
 
-　　“你这样搞不行的。”莫笑安忍不住提醒他，“只要威压，人心不服。”
+"You can't keep doing things this way," Mo Xiao'an couldn't help but remind him. "Relying only on pressure won't win their hearts."
 
-　　“知道，知道恩威并重。”萧白朗随口敷衍着。
+"I know, I know, carrot and stick," Xiao Bailang replied dismissively.
 
-　　“得，我让食品厂给你这里送点格瓦斯吧。”
+"Alright, I'll have the food factory send some kvass over for your people."
 
-　　“首长，煤气站说可以送气了……”
+"Chief, the gas station says they can start supplying gas..."
 
-　　“行。你让人送来吧。”萧白朗把墨镜戴上，走到刚装好没多久的煤气喷嘴前，一排黄澄澄的铜制喷嘴。他挥了下手：“开始吧。”
+"Fine. Have them send it over," Xiao Bailang put on his sunglasses and walked over to the newly installed gas nozzles, a row of gleaming brass fixtures. He waved his hand. "Let's begin."
 
-　　几个工人旋开阀门，燃烧头上立刻喷射出红色的火焰来。萧白朗把厚厚的劳保手套戴上。仔细的调解着火焰，直到喷射出来的是蓝色的火焰。
+Several workers turned the valves, and red flames immediately shot out from the burner heads. Xiao Bailang put on his thick protective gloves and carefully adjusted the flames until they burned blue.
 
-　　“准备接口！”
+"Prepare for joining!"
 
-　　黄中山赶紧从退火窑里把刚才吹制出来的一大一小二个玻璃瓶胚用钳子送了过来。萧白朗先吧大瓶的底部和小瓶的颈部用煤气火家人，然后用刀片整齐的割掉。然后他把小瓶套进大瓶里，在大小瓶之间填入三小块软木。
+Huang Zhongshan quickly brought over the large and small glass bottle blanks that had just been blown, using tongs to retrieve them from the annealing kiln. Xiao Bailang first heated the bottom of the large bottle and the neck of the small bottle with the gas flame, then neatly cut them off with a blade. He then nested the small bottle inside the large one, inserting three small pieces of cork between them.
 
-　　正规说起来，这是应该用石棉颗粒的，工能委只能暂时用代用品。它的作用使得内外瓶之间的保持相等的间空隙，使其不致于摇动。还有一个作用是加强瓶胆的结构强度。瓶胆制好之后内外瓶之间的连接处只有瓶口，装水之后瓶口容易破裂。镶嵌石棉之后就等于在额外增加了三个支撑点。
+Properly, asbestos particles should have been used, but the Industrial and Energy Committee could only use a substitute for now. The cork served to maintain an equal gap between the inner and outer bottles, preventing them from shifting. It also strengthened the structure of the flask. Once the flask was made, the only connection point between the inner and outer bottles was at the mouth, which was prone to breaking when filled with water. The addition of the cork pieces created three extra points of support.
 
-　　接着他将套入小瓶的大瓶在煤气火上加热到半熔化的状态。这关键的一步就要到了。萧白朗面色严肃的拉起钳子拉住半熔的玻璃液，小心翼翼的拉拢底部的缺口。这个工序看似简单，对手工操作有一定的技术要求，不仅要求将瓶底光滑严密的封好，还得留出一个玻璃细管来。现代的保温瓶企业都是用自动拉底机来完成。
+Next, he heated the nested bottles over the gas flame until the glass was semi-molten. The critical step was approaching. With a serious expression, Xiao Bailang took his tongs and grasped the semi-molten glass, carefully pulling the opening at the bottom closed. This process seemed simple but required considerable manual skill. Not only did the bottom need to be sealed smoothly and tightly, but a thin glass tube also had to be left behind. Modern thermos companies used automatic bottom-sealing machines to accomplish this.
 
-　　萧白朗拉了几次，都没能成功。脸都被煤气火烤红了。他放下钳子喘息了几口，关照其他人试试看。折腾了几次之后，终于把这个底按要求封好了。
+Xiao Bailang tried several times without success, his face flushed red from the heat of the gas flame. He put down the tongs, took a few breaths, and had others give it a try. After several attempts, they finally managed to seal the bottom as required.
 
-　　接着就是镀银工序了。热水瓶胆的是用硝酸银镀上的。镀银剂通过瓶底预留的小玻璃管注入胆壁之间，有了基本的三酸二碱供应之后，这根本就不算一回事了。最后将残液倒出之后，整个玻璃瓶胆壁上留下了一层光亮的银，亮晶晶的犹如一面镜子。
+Next came the silvering process. The inner walls of a thermos flask are coated with silver nitrate. The silvering agent was injected between the walls through the small glass tube left at the bottom. With a basic supply of the "three acids and two bases," this was no big deal. After the residual liquid was poured out, a bright layer of silver was left on the walls of the glass flask, shining like a mirror.
 
-　　工人们发出一阵惊讶的叹息声。其实他们已经见识过了穿越者们造镜子的时候的“秘技”了。人群中颇有一些贪婪的眼神在注视着从瓶胆里倒出来的残液。
+The workers let out a collective gasp of amazement. They had, in fact, already witnessed the transmigrators' "secret technique" when they made mirrors. In the crowd, some greedy eyes watched the residual liquid being poured out from the flask.
 
-　　镀银之后，工人们倒入蒸馏水清洗一遍烘干，萧白朗把处理完毕的瓶子先用煤气火将瓶底的玻璃管在烧红拉细，然后插入抽气管——这台简易的抽气机是钟利时设计制造的，非常简易的抽气式，勉强能达到粗真空的水平。
+After silvering, the workers rinsed it with distilled water and dried it. Xiao Bailang took the finished bottle, first heating the small glass tube at the bottom with the gas flame to draw it out and make it thinner. Then, he inserted a suction tube. This simple vacuum pump, designed and built by Zhong Lishi, was a very basic suction-type model, barely capable of achieving a rough vacuum.
 
-　　一边抽气，一边再用煤气火对外瓶加热，促进气体膨胀以便快速的抽出气体。土法的抽气机当然无法测定抽气状况如何，萧白朗之前只好采用最原始的方法，反复尝试试验，直到找到最佳的抽气时间。
-[y001]: /characters/y001 "萧子山"
-[y004]: /characters/y004 "展无涯"
-[y005]: /characters/y005 "马千瞩"
-[y044]: /characters/y044 "季思退"
+While the pump was drawing out the air, the outer bottle was heated again with the gas flame to promote gas expansion and speed up the evacuation process. Of course, this crude pump couldn't measure the vacuum level. Xiao Bailang had previously resorted to the most primitive method: repeated trial and error until he found the optimal pumping time.
+
+[y001]: /characters/y001 "Xiao Zishan"
+[y004]: /characters/y004 "Zhan Wuya"
+[y005]: /characters/y005 "Ma Qianzhu"
+[y044]: /characters/y044 "Ji Situi"
