--- a/_posts/2010-11-10-3-20600.md
+++ b/_posts/2010-11-10-3-20600.md
@@ -1,105 +1,106 @@
 ---
 layout: post
-title: 第二百零六节 消化
+title: "Section 206: Digestion"
 category: 3
 path: 2010-11-10-3-20600.md
 tag: [normal]
 ---
 
-　　陈海阳点头叫人接下，照例说了一番勉励安抚的话，接着施十四又献上礼物，这是为了今天的仪式特意从各家的财宝里挑选出来的：一对上好的日本太刀，一对纯白无瑕的和田玉的狮子，一套酒器：黄金镶宝执壶和四个白玉镶金的杯子。最后是一箱子赤金的小元宝，每个一两，足有五十个。
+Chen Haiyang nodded and ordered someone to accept it. As usual, he said some words of encouragement and comfort. Then Shi Shisi presented a gift. This was specially selected from the treasures of each family for today's ceremony: a pair of fine Japanese katanas, a pair of pure white and flawless Hetian jade lions, a set of wine vessels: a gold-inlaid treasure pot and four white jade cups inlaid with gold. Finally, there was a box of small red gold ingots, each weighing one tael, a total of fifty.
 
-　　陈海阳略一过目，心里想：这群海盗果然很有底子！
+Chen Haiyang glanced at it and thought to himself: this group of pirates really has a solid foundation!
 
-　　不过他已经听先期来的水手们抱怨过，说已经欠饷一二个月了，看起来，发饷没钱，头目们的私囊还是很丰满的。
+However, he had heard the sailors who came earlier complain that they had been owed wages for one or two months. It seemed that although there was no money to pay wages, the private purses of the leaders were still very full.
 
-　　这既然是公献的礼物，就是输诚的象征，陈海阳自然要收。当下关照收下，交计委登帐入库。
+Since this was a public gift, it was a symbol of submission, so Chen Haiyang naturally had to accept it. He immediately ordered it to be accepted and handed over to the Planning Committee for accounting and storage.
 
-　　收下礼物，陈海阳缓缓地审视了他们一遍，略等了等才开口道：
+After accepting the gift, Chen Haiyang slowly looked them over, waited for a while before speaking:
 
-　　“诸位头目即来投效我临高，尔等就是我澳洲的人了，自此我们是一家人。戮力同心就不只是一句话，乃是要确确实实做到的。尔等可知晓？！”
+"Since you leaders have come to serve me in Lingao, you are now my people of Australia. From now on, we are one family. Working together with one heart is not just a saying, but something that must be truly achieved. Do you all understand?!"
 
-　　“是，小的们明白！”施十四背上开始出汗了。
+"Yes, we understand!" Shi Shisi's back began to sweat.
 
-　　“请诸位头目商馆入席吧。”陈海阳的面上露出了微笑，“为诸位头目接风洗尘！”
+"Please, leaders, take your seats at the merchant's hall." A smile appeared on Chen Haiyang's face. "A welcome banquet for you leaders!"
 
-　　仪式结束之后，林佰光将众头目带到博铺的食堂里，这里已经摆下了接风的酒宴。至于船上的男女老幼，自然有阳河检疫营的人过来清点人数，登记造册。再领去“净化”和吃饭。至于物资的查点工作，因为船上还有众人的私财，所以计委暂时不上船查点船上的粮食物资，只派人在各船的上下栈桥处站岗。
+After the ceremony, Lin Baiguang led the leaders to the cafeteria in Bopu, where a welcome banquet had already been laid out. As for the men, women, old and young on the boats, people from the Yanghe Quarantine Camp would naturally come to count the number of people and register them. Then they would be taken for "purification" and meals. As for the inventory of materials, because there were still the private property of the people on the boats, the Planning Committee would not go on board to check the food and materials on the boats for the time being, but only sent people to stand guard at the gangways of each boat.
 
-　　八十条大大小小的海船，最小是可载二十多人的大舢板，最大的足有四百多吨。都是这一带常见的广船、福船。
+There were eighty large and small sea boats, the smallest being a large sampan that could carry more than twenty people, and the largest being more than four hundred tons. They were all common Guangdong and Fujian boats in this area.
 
-　　海军添加了这许多的船只，不仅海上兵力大增，连一直感到匮乏的海运也能一并解决，原本即要当军舰，又要当运输船的状况总算得到了缓解。
+With the addition of so many ships, the navy not only greatly increased its maritime strength, but also solved the long-standing shortage of sea transportation. The situation of having to be both a warship and a transport ship was finally alleviated.
 
-　　接风宴刚结束陈海阳已经在海军部里开始筹划这些船只的分配方案了。现在海军部属下的杂类船只太多，要好好的做一番调整规划。
+Just after the welcome banquet, Chen Haiyang had already begun to plan the distribution of these ships in the Navy Department. Now there were too many miscellaneous ships under the Navy Department, and a good adjustment and planning was needed.
 
-　　但是事情并没有这么简单。这些船，迄今还是头目们的私产。他们的投奔并非无条件投降，而是一种“合股”的性质，作为董事长，不能随手就把股东的生产资料直接剥夺。这样做的结果是将来再也不会有人来“合股”了。
+But things were not that simple. These ships were still the private property of the leaders. Their surrender was not an unconditional surrender, but a kind of "partnership." As the chairman, he could not directly deprive the shareholders of their means of production. The result of doing so would be that no one would ever "join the partnership" in the future.
 
-　　力量上说，海盗头目们现在是处于绝对的劣势，无论是反抗还是逃跑，对他们来说都已经不可能。但是人心的招揽，却是件任重道远的事情。
+In terms of strength, the pirate leaders were now at an absolute disadvantage. It was impossible for them to either resist or escape. But winning the hearts of the people was a long and arduous task.
 
-　　穿越者需要的是“吸收”，而不是“联合”。这个基调是吸纳土著人员参加穿越集团的基本主旨，所以给予他们联盟者的地位是不被考虑的。
+What the transmigrators needed was "absorption," not "alliance." This was the basic principle of absorbing natives into the transmigrator group, so giving them the status of allies was not considered.
 
-　　这批投效来的海盗不是被剥夺了一切的战俘，也不是走投无路的饥民，而是成建制，有组织的武装团伙
+This group of pirates who came to serve were not prisoners of war who had been deprived of everything, nor were they desperate refugees, but an organized armed group with a complete establishment.
 
-　　要完全吸收，这伙头目们自然不乐意——这种团伙具有很强的私有性质，每个人都把船只和水手看做自己的私产。所以如何“改造”这批成建制的海盗就成了一件当务之急的课题了。
+To be completely absorbed, these leaders would naturally not be happy—this kind of group had a strong private nature, and everyone regarded the ships and sailors as their own private property. Therefore, how to "reform" this group of pirates with a complete establishment became an urgent task.
 
-　　“小魏，这活就交给你了。”[马千瞩][y005]在办公室说，“你要好好的动脑筋，把这支一千多人的队伍帮我们吃下去，还不能吃得消化不良。明白吗？”
+"Xiao Wei, this task is up to you," [Ma Qianzhu][y005] said in the office. "You have to use your brain to help us swallow this team of more than a thousand people, and you can't have indigestion. Understand?"
 
-　　“是，马总长，这事情你就看我的吧。”魏爱文信心满满。
+"Yes, Chief Ma, you can count on me for this matter." Wei Aiwen was full of confidence.
 
-　　魏爱文的吸收计划很传统，简而言之就是“安抚上层，拉拢中层，争取下层”。
+Wei Aiwen's absorption plan was very traditional. In short, it was "appease the upper level, win over the middle level, and win over the lower level."
 
-　　最重要的就是争取下层。他们人多势众，在分配利益的时候一贯处于被忽视的地位。与头目们并无太大的共同利益可言，可能还有不少怨言。争取他们相对容易。
+The most important thing was to win over the lower level. They were numerous and powerful, and had always been in a neglected position when it came to the distribution of benefits. They did not have much common interest with the leaders, and might even have many complaints. It was relatively easy to win them over.
 
-　　一旦争取到下层，中层分子就是墙头草，而上层分子即使有怨言也会因为失去了基层的支持而无力反抗。到时候优待他们作个表率也可以，直接人道毁灭也可以，全看穿越者的兴趣了。
+Once the lower level was won over, the middle-level elements would be like grass on a wall, and even if the upper-level elements had complaints, they would be powerless to resist because they had lost the support of the grassroots. At that time, it would be fine to treat them favorably as an example, or to directly eliminate them humanely, all depending on the interest of the transmigrators.
 
-　　至于上层分子，魏爱文认为也是可以进行分化的——头目们的诉求并不一致。林佰光在登陆之后马上提交的报告中指出，这批头目目前的想法并不一致。象胡胖子这样的，是想找个安乐窝稳稳当当的享清福；林淡，急于要找自己的老婆孩子；施十四则是想攀着这棵大树继续发财……
+As for the upper-level elements, Wei Aiwen believed that they could also be divided—the demands of the leaders were not consistent. In the report submitted by Lin Baiguang immediately after landing, he pointed out that the current ideas of this group of leaders were not consistent. Some, like Fatty Hu, wanted to find a comfortable nest to enjoy a stable life; Lin Dan was anxious to find his wife and children; Shi Shisi wanted to climb this big tree to continue to make a fortune...
 
-　　“我们分而治之，很快就能吸收他们。”魏爱文向[马千瞩][y005]阐述了他的思路。
+"We can divide and rule them, and we will soon be able to absorb them." Wei Aiwen explained his thoughts to [Ma Qianzhu][y005].
 
-　　“这事情你就全权负责。包括任福、贺新那批人也要下功夫。我们缺船，更缺水手。要尽快把水手和里面的技术骨干们争取过来。”
+"You are fully in charge of this matter. You also have to work on Ren Fu and He Xin's group. We are short of ships, and even more short of sailors. We must win over the sailors and the technical backbones inside as soon as possible."
 
-　　“还有，就是头目们的待遇问题，”魏爱文迟疑道，“这事情也得有个说法，水手们好说，按照海军士兵的供给就可以，这些头头呢？”
+"Also, there is the issue of the treatment of the leaders," Wei Aiwen hesitated. "There must be a statement on this matter. The sailors are easy to deal with, and the supply of naval soldiers is sufficient. What about these leaders?"
 
-　　现在穿越集团内已经在土著中实行了工人工种和技术等级制度，但是对行政人员和陆海军官兵还是采取共产主义式的供给制，军官和行政人员不过多拿些津贴而已，和普通士兵、职工也相差不了多少。
+Now, the transmigrator group has implemented a system of worker types and technical grades among the natives, but for administrative personnel and army and navy officers and soldiers, a communist-style supply system is still adopted. Officers and administrative personnel only receive a little more allowance, which is not much different from ordinary soldiers and employees.
 
-　　“这个你先不忙，执委会得考虑考虑。”[马千瞩][y005]想起了当初开会的时候自己提出的行政等级制度被枪毙的事情，“现在好了，你给这群人定什么待遇呢？”
+"Don't worry about this for now, the Executive Committee has to consider it." [Ma Qianzhu][y005] remembered that the administrative grade system he proposed at the meeting was rejected. "Now it's good, what kind of treatment do you set for this group of people?"
 
-　　首先就是工资待遇的问题，他们在诸彩老手下是不靠这个过日子的，抢劫和贸易就是收入的来源……
+The first is the issue of salary and treatment. They did not rely on this to make a living under Zhu Cailao. Robbery and trade were their sources of income...
 
-　　想到这里，[马千瞩][y005]眼前一亮：对啊，硬要把他们变成海军的船长或者舰队指挥，领工资过日子，积极性不高还会有怨言，不如让他们去发挥自己的所长，去干自己的老本行。
+Thinking of this, [Ma Qianzhu][y005]'s eyes lit up: that's right, if we force them to become navy captains or fleet commanders and live on salaries, their enthusiasm will not be high and they will have complaints. It is better to let them use their strengths and do their old business.
 
-　　“他们的位置，不在海军部，而是在外商委！”
+"Their position is not in the Navy Department, but in the Foreign Trade Committee!"
 
-　　他重新坐下，开始拟订一个对这批人马的处理意见。
+He sat down again and began to draft an opinion on the handling of this group of people.
 
-　　晚上，在执委会召开了一次会议。[马千瞩][y005]在会上阐述了自己的这一看法和设想。
+In the evening, a meeting was held in the Executive Committee. [Ma Qianzhu][y005] explained his views and ideas at the meeting.
 
-　　“这个提议好，否则这伙人还很难处置呢。交给他们带兵恐怕也不够可靠。”
+"This is a good proposal, otherwise this group of people would be difficult to deal with. It's probably not reliable to let them lead troops."
 
-　　“嗯，让他们去干自己的老本行就是了！”
+"Well, let them do their old business!"
 
-　　于是有人就提议重新考虑开设“东南亚公司”。这个所谓的“东南亚公司”执委会已经设想了不少日子，其目的是直接和东南亚进行海上贸易，获得东南亚的农林和矿产资源，以后实力增强之后还可以担负殖民拓展的工作。类似与东印度公司的性质。
+So someone proposed to reconsider the establishment of the "Southeast Asia Company." The Executive Committee had been thinking about this so-called "Southeast Asia Company" for many days. Its purpose was to directly trade with Southeast Asia to obtain agricultural, forestry, and mineral resources from Southeast Asia. After its strength increased, it could also undertake the work of colonial expansion, similar in nature to the East India Company.
 
-　　但是这个设想因为海军部属下的适合远航的船只不多而搁浅了，另外他们麾下也没有熟悉这方面的人才。现在让诸彩老这个大海商手下的头目去干这个正合适。
+However, this idea was shelved because the Navy Department did not have many ships suitable for long-distance voyages, and they did not have familiar talents in this area. Now it was just right to let the leaders under the great sea merchant Zhu Cailao do this.
 
-　　“过去一是船不够用，二来也怕在当地起了冲突我们人少船少不能自保。但是现在有了这么一股生力军的加入，在东南亚进行直接贸易的条件就成熟了。”[马千瞩][y005]说。
+"In the past, one was that there were not enough ships, and the other was that we were afraid that if there was a conflict in the local area, we would not be able to protect ourselves with few people and ships. But now with the addition of such a new force, the conditions for direct trade in Southeast Asia are mature," [Ma Qianzhu][y005] said.
 
-　　李海阳很是兴奋：“必要的时候，还可以叫他们在当地海域展开私掠。打击欧洲人在当地的贸易。”
+Li Haiyang was very excited: "When necessary, they can also be asked to carry out privateering in the local waters to attack the trade of Europeans there."
 
-　　“还没到这个时候。”[文德嗣][y002]反对，“私掠会引起仇视，我们在东南亚的存在还是空白，立足未稳不要干这个。荷兰人、西班牙人和英国人哪个都不是好惹的。真要冲突起来，我们在当地没有立足点，很容易被他们打败。另外私掠就是一种海盗行为，这伙人本身就是亦商亦盗，吃到了抢劫的甜头干脆就在东南亚海域当起海盗来的话，我们也不见得能控制得了。到时候反而祸害无穷。”
+"It's not time for that yet," [Wen Desi][y002] objected. "Privateering will cause hostility. Our presence in Southeast Asia is still blank. We should not do this before we have a firm foothold. The Dutch, the Spanish, and the British are not to be trifled with. If there is a real conflict, we have no foothold in the local area and can easily be defeated by them. In addition, privateering is a kind of piracy. This group of people is both merchant and pirate. If they get a taste of the sweetness of robbery and simply become pirates in the Southeast Asian waters, we may not be able to control them. At that time, it will be an endless disaster."
 
-　　[文德嗣][y002]继续道：“不管是私掠，还是开拓殖民地，在我们没有能力真正插手东南亚事务之前都不要搞。只要保住自己的贸易安全就可以。”
+[Wen Desi][y002] continued: "Whether it is privateering or developing colonies, we should not do it before we have the ability to truly intervene in Southeast Asian affairs. We just need to protect our own trade security."
 
-　　在[文德嗣][y002]的设想里，东南亚公司的船将采用编队的方式进行贸易，每次出航都组成大型的护航队——类似威尼斯人在地中海和黑海进行的一年一度的海上巡回贸易。这样的大型船队，拥有足够的人员和武力，足够在航行的时候自保。不管是欧洲人还是其他海商集团都不足为惧。
+In [Wen Desi][y002]'s vision, the ships of the Southeast Asia Company would trade in convoys. Each voyage would form a large convoy—similar to the annual sea trade tour conducted by the Venetians in the Mediterranean and the Black Sea. Such a large fleet would have enough personnel and force to protect itself during the voyage. Neither the Europeans nor other sea merchant groups would be a threat.
 
-　　“贸易的事情，我们海军是不懂的，”陈海阳说，“我只是想知道：执委会对他们的人和船到底持什么态度？是允许他们保留原有建制和指挥体系，还是彻底打散重组？”
+"We in the navy don't understand trade," Chen Haiyang said. "I just want to know: what is the Executive Committee's attitude towards their people and ships? Are they allowed to retain their original establishment and command system, or are they to be completely broken up and reorganized?"
 
-　　“和平改编式的保留建制。”[马千瞩][y005]说。
+"Peaceful adaptation and retention of the establishment," [Ma Qianzhu][y005] said.
 
-　　也就是说，名义上保留建制，实际采用人员渗透、人事结构调整的方式逐步剥夺头目们对原来人马的控制权。
+That is to say, the establishment is retained in name, but in reality, the method of personnel infiltration and personnel structure adjustment is used to gradually deprive the leaders of their control over the original personnel.
 
-　　“根据花名册上的数字还有检疫营送来的点验结果。”邬德打开文件夹，“总共是1803人。其中妇女、儿童和五十以上的老人230人。实际上，每条船上的水手平均下来只有不到20人。”
+"According to the numbers on the roster and the inspection results sent by the quarantine camp," Wu De opened the folder, "there are a total of 1803 people. Among them, there are 230 women, children, and elderly people over fifty. In fact, the average number of sailors on each boat is less than 20."
 
-　　很显然，即使把妇孺老幼都算上，再去掉里面只需要几个人的小型船只，他们还是严重的缺少人手。
+Obviously, even if the women, children, and the elderly were included, and the small boats that only needed a few people were removed, they were still seriously short of manpower.
 
-　　“这样，要让这些船重新运作起来，就势必要补充水手。”邬德看了下计委的船只点验表，“去掉小舢板什么的，至少要再补充1500人以上，这些船只才能充分的运作。”
-[y002]: /characters/y002 "文德嗣"
-[y005]: /characters/y005 "马千瞩"
+"In this way, in order to make these ships operate again, it is necessary to supplement the sailors." Wu De looked at the ship inspection form of the Planning Committee. "Excluding the small sampans and so on, at least 1,500 more people need to be supplemented for these ships to operate fully."
+
+[y002]: /characters/y002 "Wen Desi"
+[y005]: /characters/y005 "Ma Qianzhu"
