--- a/_posts/2010-11-11-3-20700.md
+++ b/_posts/2010-11-11-3-20700.md
@@ -1,104 +1,105 @@
 ---
 layout: post
-title: 第二百零七节 学习班（一）
+title: "Section 207: The Study Class (I)"
 category: 3
 path: 2010-11-11-3-20700.md
 tag: [normal]
 ---
 
-　　按照50％的比例掺沙子，就已经可以彻底的让其失去控制力了。再加以打乱编制平均分配，做到我中有你，你中有我，彻底搞乱里面的派系。
+By mixing in 50% sand, it was already possible to completely make them lose control. Then, by disrupting the organization and distributing them evenly, we could achieve a situation where "I am in you, and you are in me," completely messing up the factions within.
 
-　　“水手们反正要过60天的检疫期，我们政治部会抓紧这段时间进行教育工作，尽量把水手们争取过来的。”
+"The sailors will have to go through a 60-day quarantine period anyway. Our political department will seize this time to carry out educational work and try to win over the sailors as much as possible."
 
-　　“任福带来的人教育的怎么样了？”
+"How is the education of the people brought by Ren Fu going?"
 
-　　“有了相当的进展。”魏爱文眉飞色舞，“他们属于诸彩老的中军体系下，算是亲信。一开始还是有难度的，但是我们抓住其中的官兵矛盾——”
+"Considerable progress has been made." Wei Aiwen's face lit up. "They belong to Zhu Cailao's central army system and are considered trusted subordinates. It was difficult at first, but we seized on the contradiction between the officers and soldiers—"
 
-　　魏爱文说，在整个思想教育工作中，重点搞“诉苦”运动，诉谁的苦呢？第一自然是官僚劣绅了，欺压百姓，闹得大伙民不聊生才走上这条道的；至于第二，就是海主们了。要重点揭批海盗团伙里的种种欺压群众的行为，让水手们充分认识到，海主、头目们不是他们的恩人，而是剥削奴役他们的坏分子……
+Wei Aiwen said that in the entire ideological education work, the focus was on the "grievance" movement. Whose grievances were they to complain about? The first was naturally the corrupt officials and evil gentry, who oppressed the people and made their lives miserable, forcing them to take this path. As for the second, it was the sea lords. It was necessary to focus on exposing and criticizing the various acts of oppression of the masses within the pirate gangs, so that the sailors could fully realize that the sea lords and leaders were not their benefactors, but the bad elements who exploited and enslaved them...
 
-　　“停，停……”[文德嗣][y002]赶紧叫停，“这个思路我是明白的，离间双方的关系。但是这批头头脑脑们以后还要任用，不是直接拉出去枪毙的，搞得太对立了以后还怎么开展工作？水手一上船不就得揪斗这些人了？”
+"Stop, stop..." [Wen Desi][y002] hurriedly stopped him. "I understand this line of thinking, to drive a wedge between the two sides. But these leaders will be appointed in the future, not directly taken out and shot. If we make the relationship too confrontational, how can we carry out our work in the future? Won't the sailors have to denounce these people as soon as they get on board?"
 
-　　“当然会有分寸的。”魏爱文说，“不会激化的，只不过要他们看清真面目罢了。再说对这些海盗头子，我们也有学习课程。”
+"Of course, there will be a sense of proportion," Wei Aiwen said. "It won't be intensified, it's just to let them see the true face. Besides, we also have study courses for these pirate leaders."
 
-　　“要开学习班？”
+"You're going to hold a study class?"
 
-　　“对，开学习班。”
+"Yes, a study class."
 
-　　施十四等人在商馆里住下，好吃好喝招待一番之后。从第二天开始，就是不断的参观。
+Shi Shisi and the others stayed at the merchant's hall and were treated to good food and drink. From the second day on, it was a continuous series of visits.
 
-　　“参观，不断的组织他们参观，让他们充分的体会到我们集团的实力和制度的优越性！”魏爱文指示道，“事实胜于雄辩。”
+"Visits, constantly organize them to visit, so that they can fully appreciate the strength of our group and the superiority of our system!" Wei Aiwen instructed. "Facts speak louder than words."
 
-　　首先是丰城轮的参观，亲自登上这艘巨大的铁轮，让这伙海上汉子如同小孩子一般好奇心大起，刚上甲板没走几步路，就呼啦一下全部跑到舷墙上向下望去。
+The first was a visit to the Fengcheng ship. Personally boarding this huge iron wheel made this group of sea dogs as curious as children. They had just taken a few steps on the deck when they all rushed to the bulwarks to look down.
 
-　　“好高！”
+"So high!"
 
-　　有人则不相信这是铁的，用手摸，用身边的铜钱敲打、刻划，还有人干脆去舔的。看到甲板上新安装完毕的铸铁巨炮，这些人的眼睛都直了，这门和博铺烽火台上一样的150mm前装线膛炮。炮位旁运送弹药的滑轨，炮弹和有装填炮弹时用的吊车都引起了他们无穷的兴趣。
+Some people didn't believe it was made of iron. They touched it with their hands, knocked and scratched it with the copper coins they had with them, and some even licked it. Seeing the newly installed giant cast-iron cannon on the deck, these people's eyes went straight. This was a 150mm muzzle-loading rifled cannon, the same as the one on the Bopu beacon tower. The slide rails for transporting ammunition next to the gun position, the shells, and the crane used for loading the shells all aroused their endless interest.
 
-　　最让他们感兴趣的是炮位下面的滑动轨道，不用很大的力气，二三个人就可以使得火炮转动。他们都有海战的经验，知道这随意调整火炮射向的厉害之处，不由得一个个啧啧称奇。
+What interested them most was the sliding track under the gun position. Without much effort, two or three people could make the cannon rotate. They all had experience in naval warfare and knew the power of being able to adjust the direction of the cannon at will. They couldn't help but click their tongues in wonder.
 
-　　“奶奶的，有这玩意，郑芝龙算个屁呀。”施十四按捺不住兴奋之情，“就算澳门红毛人的大夹板船也不在话下。”
+"Damn it, with this thing, Zheng Zhilong is nothing." Shi Shisi couldn't hold back his excitement. "Even the big clippers of the red-haired people in Macau are no match for it."
 
-　　接着，又参观了博铺公社和造船厂。因为材料供应问题已经陷于半停工状态的第一艘铁壳船854工程已完工部分还是成了最好的建设成就展示品。
+Then, they visited the Bopu Commune and the shipyard. The completed part of the first iron-hulled ship, Project 854, which had been in a semi-shutdown state due to material supply problems, still became the best display of construction achievements.
 
-　　施十四和其他人亲身走到船坞里，抚摸着一排排小树干一样粗大的铁制肋骨，一片片被巨大的铆钉钉在肋骨上的铁板，完全是一种难以置信的眼神。
+Shi Shisi and the others personally walked into the dock, stroking the rows of iron ribs as thick as small tree trunks, and the iron plates nailed to the ribs with huge rivets, with a look of complete disbelief.
 
-　　魏爱文唯恐不给力，接连几天又播放了宣传片给他们看，郑重起见，日本秘影戏就不放了，放的是一部用各种资源剪辑出来的宣传片。
+Fearing that it was not enough, Wei Aiwen played a promotional film for them for several consecutive days. For the sake of solemnity, the Japanese secret film was not shown, but a promotional film edited from various resources was shown.
 
-　　活动的银幕上，钢铁联合企业里钢水飞溅，水电站喷涌着巨大的水龙，钢铁巨船从滑道上徐徐滑入大海，织布机在源源不断地吐出布匹和绸缎，城市璀璨的灯火和无尽的车流，红扑扑的面孔的现代农民，开着东方红拖拉机……
+On the moving screen, steel splashed in the iron and steel complex, the hydropower station spewed huge water dragons, giant steel ships slowly slid into the sea from the slipway, looms continuously spewed out cloth and silk, the city's brilliant lights and endless traffic, the ruddy-faced modern farmers, driving Dongfanghong tractors...
 
-　　接着是成排白盔白甲的帝国冲锋队正在行进，然后镜头一转，又换成了国庆阅兵中的装甲兵方阵……
+Then there were rows of Imperial Stormtroopers in white helmets and white armor marching, and then the camera turned, and it was replaced by the armored phalanx in the National Day parade...
 
-　　头目们一个个在黑暗中丧失了辨别的能力，这大大超越了他们对世界的理解能力。灯亮起来的时候，林佰光满意地看到他们个个呆若木鸡。
+The leaders lost their ability to distinguish in the darkness. This greatly surpassed their understanding of the world. When the lights came on, Lin Baiguang was satisfied to see that they were all dumbfounded.
 
-　　“诸位，这就是我们所来之地！”林佰光精气神十足地说道。
+"Everyone, this is the place we came from!" Lin Baiguang said with great spirit.
 
-　　几个人勉强想从脸上挤出点笑容来，也有人呆滞之余露出欣喜若狂的表情来。前者看来比较顺应潮流，后者则具有投机的潜质。负责观察他们表情的情报人员在每个人的照片下写下自己的直观评语。
+A few people tried to squeeze out a smile from their faces, and some showed ecstatic expressions in their daze. The former seemed to be more in line with the trend, while the latter had the potential for speculation. The intelligence personnel responsible for observing their expressions wrote down their intuitive comments under each person's photo.
 
-　　三天的参观学习结束之后，根据乌佛的窃听他们私下言谈的结果，头目们对穿越集团简直是五体投地，海盗们是崇拜强者的，几乎每个人都在言谈中认为，自己这次投奔临高是来对了地方。更有人野心勃勃的觉得，说不定澳洲人还会入主中原，取朱皇帝代之，大伙都能混个开国元老当当。
+After three days of visits and study, according to the results of Wu Fo's eavesdropping on their private conversations, the leaders were completely prostrate before the transmigrator group. Pirates worshiped the strong, and almost everyone in their conversations believed that they had come to the right place by defecting to Lingao this time. Some were even more ambitious, thinking that perhaps the Australians would even enter the Central Plains and replace the Zhu emperor, and everyone could be a founding father.
 
-　　在这种情绪之下，对船队进行必要的处置就变得容易多了。让他们休息放松几天之后，由邬德牵头，召开了一个专门的会议，向投奔的头目们宣布了政策。
+Under this sentiment, it became much easier to deal with the fleet as necessary. After letting them rest and relax for a few days, Wu De took the lead and held a special meeting to announce the policy to the defecting leaders.
 
-　　所有来投奔的头目，不论带来几条船，每人均获得独立住宅一套。这种住宅是临高建筑公司为以后将逐渐增加的土著管理层干部设计的，同时也是为了日后穿越集团集体宿舍制度取消之后的个人住宅做试验。
+All the defecting leaders, regardless of how many boats they brought, would each receive a set of independent housing. This kind of housing was designed by the Lingao Construction Company for the gradually increasing number of native management cadres in the future, and it was also an experiment for the individual housing after the collective dormitory system of the transmigrator group was abolished in the future.
 
-　　这种干部用房，采用的联排别墅的思路，以节约用地和建材。每栋小楼为二层半的结构，实用面积二百四十平方米。设有上下水和建议的蹲坑水冲式独立卫生间，不供电。所有房屋另附面积不大的前院后院。
+This kind of cadre housing adopted the idea of a terraced house to save land and building materials. Each small building had a two-and-a-half-story structure with a practical area of 240 square meters. It was equipped with running water and a simple squatting-pit flush toilet, but no electricity. All houses also had a small front and back yard.
 
-　　其携来的私人财产，一律保护，可自由处置。
+Their personal property would be protected and could be disposed of freely.
 
-　　头目们的家属子女，一律上岸居住，未成年子女入学，已成年的子女，根据家庭要求和本人意愿入学或者参加工作。
+The family members and children of the leaders would all live ashore. Minor children would go to school, and adult children would go to school or participate in work according to the family's request and their own wishes.
 
-　　本地不承认私人奴仆，所以头目们带来的奴仆一律废除身份，愿意继续为头目服务的，按照雇用关系处理。不愿意的，以移民论处。
+Private servants were not recognized locally, so the servants brought by the leaders would all have their status abolished. Those who were willing to continue to serve the leaders would be treated as an employment relationship. Those who were not willing would be treated as immigrants.
 
-　　至于他们带来的水手，凡是希望回家或者他去的，发给遣散路费。愿意留下的集中起来进行90天的检疫。
+As for the sailors they brought, those who wished to go home or go elsewhere would be given severance pay. Those who were willing to stay would be gathered for a 90-day quarantine.
 
-　　“检疫结束之后，凡是愿意回来当水手的，重新整补上船；不愿意的，由我们统一安排其他工作。”魏爱文解释着政策。
+"After the quarantine is over, those who are willing to come back as sailors will be re-enlisted on the ships; those who are not willing will be uniformly arranged for other work by us," Wei Aiwen explained the policy.
 
-　　下面的人开始不安起来。奴仆好说，本来也没几个人，水手里有不少都是被强抓来得百姓，如果来去自由，岂不是一下子要跑掉很多人？本来经过这次浩劫之后就损失了不少人，再这么一搞，岂不是要没人驱使了。
+The people below began to feel uneasy. Servants were easy to deal with, as there were not many of them in the first place. Many of the sailors were peasants who had been forcibly conscripted. If they were free to come and go, wouldn't a lot of them run away at once? After this catastrophe, they had already lost a lot of people. If they did this again, wouldn't they have no one to command?
 
-　　接着魏爱文继续宣布：“现在大伙的船，有的人多，有的少人，光航行还算勉强，要是要开仗估计就不够瞧得了，所以海军将会给各船定编员额，把缺额都补全了。以后发饷就按照各船定编之后的花名册。”
+Then Wei Aiwen continued to announce: "Now everyone's ships, some have more people, some have fewer. It's barely enough for sailing, but if we want to fight, it's probably not enough. So the navy will set a quota for each ship and fill up the vacancies. In the future, the pay will be issued according to the roster after each ship is staffed."
 
-　　“以后大伙的粮饷，就全部由海军发了，不用大家发愁了。不用愁柴米油盐的事情了。哈哈哈哈。”魏爱文笑了起来。
+"In the future, everyone's food and pay will be issued by the navy, so you don't have to worry about it. You don't have to worry about firewood, rice, oil, and salt. Hahahaha." Wei Aiwen laughed.
 
-　　施十四等人却笑不出来。他们自然知道这里的弯弯绕，重新整补人员之后，势必掺入大量的“沙子”，原有的以地域亲族构成的紧密小集团完全被稀释掉。纵然自己的船上还有些熟悉的面孔，也不是过去可以任意驱使的亲信了。
+Shi Shisi and the others could not laugh. They naturally knew the twists and turns here. After reorganizing the personnel, a large amount of "sand" would inevitably be mixed in, and the original tight small groups formed by regional and kinship ties would be completely diluted. Even if there were still some familiar faces on their own ships, they were no longer the trusted subordinates they could command at will.
 
-　　至于后勤统筹，听上去是好事，实际上拿谁的军饷当谁的兵。军饷和粮草统归了澳洲人发，船上的兄弟就不大会卖自己的帐了。粮、饷二途一被控制，他们只能服服帖帖的听从澳洲人的指挥了。
+As for the unified logistics, it sounded like a good thing, but in reality, whoever paid the army was the one whose army it was. Once the pay and grain were all issued by the Australians, the brothers on the ships would not be very loyal to them. Once the two channels of grain and pay were controlled, they could only obediently follow the command of the Australians.
 
-　　众人哪里不知道其中的利害，但是这些条件光明正大，甚至可以算是优厚。且不说自己现在要人没人，要粮没粮，而且一旦反对正好证明了自己有“贰心”。这对于刚刚改换门庭的人来说将会有什么样的下场大家都很清楚。
+How could everyone not know the stakes involved, but these conditions were open and aboveboard, and could even be considered generous. Not to mention that they now had no people and no grain, and once they objected, it would prove that they had "two hearts." Everyone knew what the consequences would be for someone who had just changed sides.
 
-　　参观学习了几天之后，他们对澳洲人的实力有了直观认识，不仅有了足够的敬畏，野心和期望也大了起来——看穿越集团的实力，不敢说能打到北京当皇帝，但是割据东南一隅，开府建牙大约是做得到的。到时候自己就是堂堂的开国功臣，封妻荫子的福分了！
+After a few days of visits and study, they had a direct understanding of the strength of the Australians. They not only had enough awe, but their ambitions and expectations also grew—seeing the strength of the transmigrator group, they dared not say that they could fight all the way to Beijing and become emperor, but it was probably possible to carve out a corner in the southeast and establish a government. At that time, they would be the founding fathers, with the blessing of ennobling their wives and sons!
 
-　　不如现在示以忠心——反正自己的一点力量穿越集团要扼杀也是举手之劳。既然要卖身投靠，干脆就卖得彻底一些。想到这里，施十四第一个站了起来：
+It was better to show loyalty now—anyway, the transmigrator group could crush their little strength with a wave of their hand. Since they were going to sell themselves into service, they might as well sell themselves completely. Thinking of this, Shi Shisi was the first to stand up:
 
-　　“在下即来投奔临高，所属部众、船只均愿献纳！只求为一先锋部将，为诸位首长冲锋陷阵！”
+"Since I have come to defect to Lingao, I am willing to offer all my subordinates and ships! I only ask to be a vanguard general, to charge into the enemy's lines for you leaders!"
 
-　　众人目瞪口呆，李广发跟着站了起来：“在下也愿意献船纳众。从此与首长们一路一心。同舟共济。”
+Everyone was dumbfounded. Li Guangfa followed and stood up: "I am also willing to offer my ships and men. From now on, I will be of one mind with the leaders, and we will be in the same boat."
 
-　　“我也愿意，在海上飘来飘去的日子我过够了！”胡胖子也喊道。
+"I am also willing. I have had enough of drifting on the sea!" Fatty Hu also shouted.
 
-　　这样一来，余下还不太愿意的人众也只好齐声附和。
+In this way, the rest of the people who were not very willing had to agree in unison.
 
-　　魏爱文做出领导的模样，把双手往下压压：“大家既然来到临高，就是一家人。既然是一家人就不用计较是谁的了。”
+Wei Aiwen put on the air of a leader and pressed his hands down: "Since everyone has come to Lingao, we are one family. Since we are one family, there is no need to argue about whose it is."
 
-　　他接着说道：“诸位的船只，还是由你们自己统带。如果不想再在海上漂泊的，执委会也有政策。”
+He continued: "Your ships will still be under your own command. If you don't want to drift on the sea anymore, the Executive Committee also has a policy."
 
-　　根据执委会定的政策：凡是愿意交出船只的，由执委会出钱将船只收购。交出船只之后愿意继续干海上钩当的，分配到海军部工作。不愿意继续出海的，另外分配去处。
-[y002]: /characters/y002 "文德嗣"
+According to the policy set by the Executive Committee: anyone who was willing to hand over their ships would have their ships purchased by the Executive Committee. Those who were willing to continue to work at sea after handing over their ships would be assigned to work in the Navy Department. Those who were not willing to continue to go to sea would be assigned to other places.
+
+[y002]: /characters/y002 "Wen Desi"
