--- a/_posts/2010-11-2-3-19800.md
+++ b/_posts/2010-11-2-3-19800.md
@@ -1,167 +1,167 @@
 ---
 layout: post
-title: 第一百九十八节 初到南日岛
+title: "Section 198: First Arrival at Nanri Island"
 category: 3
 path: 2010-11-2-3-19800.md
 tag: [normal]
 ---
 
-　　计时一到，他就开始用煤气火逐渐的加热尾部的玻璃管，使其逐渐弥合成条再自然的折断。这个工序要求非常仔细，不能让玻璃管出现一点缝隙，否则就前功尽弃了。萧白朗的墨镜几乎要凑到火头上了，汗珠从劳保帽子里直往下滴落。
+When the time was up, he began to gradually heat the glass tube at the tail with a gas flame, causing it to gradually fuse into a strip and then break naturally. This process required great care, and there could not be any gaps in the glass tube, otherwise all previous efforts would be wasted. Xiao Bailang's sunglasses were almost touching the flame, and beads of sweat dripped from his protective hat.
 
-　　“好了！”随着萧白朗的一声大吼，一个完整的亮晶晶的热水瓶胆终于诞生了。它被小心的装入藤条编制的热水瓶外壳里，固定好。
+"It's done!" With a loud shout from Xiao Bailang, a complete and shiny thermos liner was finally born. It was carefully placed into the rattan-woven thermos shell and fixed.
 
-　　“装开水吧！”
+"Fill it with boiling water!"
 
-　　莫笑安见所有的工人全都汗湿衣背，厚厚的土布劳保服后面都渗透出汗渍来，心里很是过意不去。车间里的熔炉、退火窑散发热量使得车间里的温度将近50度。唯一的降温措施就是厂房上面的通风窗口，门口的两个大木桶——里面装满了制药厂配制的口服生理盐水和枯草茶。
+Mo Xiao'an saw that all the workers were sweating through their clothes, and the thick homespun protective clothing was soaked with sweat. He felt very sorry. The heat from the melting furnace and annealing kiln in the workshop made the temperature in the workshop nearly 50 degrees. The only cooling measure was the ventilation window on the top of the workshop, and the two large wooden barrels at the door—filled with oral physiological saline and cogon grass tea prepared by the pharmaceutical factory.
 
-　　“太辛苦了。”莫笑安感慨道。
+"It's too hard," Mo Xiao'an said with emotion.
 
-　　“工厂都是这样的。”萧白朗猛喝了一大杯子茶水，又吞了片盐片，“制药厂还拿了很多解暑药过来。炉前工十五分钟轮换一次。出不了事。”
+"Factories are all like this." Xiao Bailang drank a large cup of tea and swallowed a salt tablet. "The pharmaceutical factory also brought a lot of heatstroke medicine. The furnace workers rotate every fifteen minutes. There won't be any accidents."
 
-　　过了一小时，莫笑安从热水瓶里倒出水来——水依然是滚烫的，再用工业温度计测量，温度几乎没有下降。
+After an hour, Mo Xiao'an poured water from the thermos—the water was still boiling hot. He then used an industrial thermometer to measure it, and the temperature had barely dropped.
 
-　　测试下来保温效果令人满意。莫笑安精神大振，关照人从食品厂拿来很多桶装的格瓦斯分给工人算是犒劳。土著工人们其实并不大理解这么大费周章地做出来的东西到底有什么用处，但是看到莫笑安如此高兴，知道大约是做出了什么好东西了，都跟着笑了起来。
+The insulation effect of the test was satisfactory. Mo Xiao'an was greatly encouraged and told people to get many barrels of kvass from the food factory and distribute them to the workers as a reward. The native workers didn't really understand the use of something made with so much trouble, but seeing Mo Xiao'an so happy, they knew that something good had probably been made, and they all laughed along.
 
-　　“再做些广口的保温瓶吧。”
+"Let's make some wide-mouthed thermos bottles."
 
-　　“再要机械厂开几副模具就行。”萧白朗满口答应。
+"We just need the machinery factory to open a few more molds," Xiao Bailang readily agreed.
 
-　　“林掌柜，请——”
+"Shopkeeper Lin, please—"
 
-　　站在船舷边的小海匪们恭恭敬敬地做了个请的姿势，林佰光定了定神，把手搭在他的胳膊上，从容的从甲板上跨到了栈桥上。
+The young pirates standing by the side of the ship respectfully made a gesture of invitation. Lin Baiguang composed himself, put his hand on his arm, and calmly stepped from the deck to the gangway.
 
-　　栈桥搭建的很是粗糙，踩上去摇摇晃晃的。海水在脚下急速的流动撞击着，飞沫四溅。南日岛的海湾里，密密麻麻的泊满了落下帆的大小船只。现在正是黄昏时分，许多船上冒出袅袅的炊烟。
+The gangway was roughly built and swayed when stepped on. The seawater flowed rapidly and hit against it under his feet, splashing everywhere. In the bay of Nanri Island, countless ships of all sizes were moored with their sails down. It was dusk, and wisps of cooking smoke rose from many ships.
 
-　　林佰光终于在这一生中第一次看到了真正的大明海盗的营寨。夏日的夕阳下，海湾里是连绵不绝的船只，桅杆如林，帆篷成云。
+For the first time in his life, Lin Baiguang finally saw a real pirate camp of the Ming Dynasty. Under the summer sunset, the bay was filled with an endless line of ships, with masts like a forest and sails like clouds.
 
-　　无数大大小小的船只从岸边一直排列到海湾的尽头。林佰光几乎看傻了眼。现代时空里他从没有哪一次一下子能看到这么多的船只，现在眼前这副景象怎能不让他感到吃惊。
+Numerous ships of all sizes were lined up from the shore to the end of the bay. Lin Baiguang was almost dumbfounded. In the modern time and space, he had never seen so many ships at once. How could he not be surprised by the scene before him now?
 
-　　这不是现代的工业社会，是一切都要靠手工完成的时代。这样多的船只要花费多少人力物力才能建立起来！
+This was not a modern industrial society, but an era where everything had to be done by hand. How much manpower and material resources would it take to build so many ships!
 
-　　这样的一支舰队，扬帆启程，走到哪里不能建立起一个全新的国家！中国人在陆地上扩展到了农耕民族生存所能达到的极限，在海上却止步不前，始终徘徊在近海，没有踏出这关键的一步来。
+With such a fleet, setting sail, where could they not establish a brand new country! The Chinese had expanded on land to the limit of what an agricultural nation could survive, but they had stopped at sea, always hovering in the coastal waters, never taking this crucial step.
 
-　　林佰光在叹息之余眼睛里流露出贪婪之色。可惜这样一笔巨大的财富，很快就会从海面上消失了：不是化为海上的熊熊火炬，就是被郑芝龙吞并。想到这里，一种急切的心情笼罩了他。
+As Lin Baiguang sighed, a greedy look appeared in his eyes. It was a pity that such a huge fortune would soon disappear from the sea: either it would be turned into a raging torch at sea, or it would be swallowed up by Zheng Zhilong. Thinking of this, a sense of urgency enveloped him.
 
-　　船只多数是四五十多吨的小型沿海用的渔船或者货船，结构简陋，看上去和他在临高看到的普通渔民的船只没什么两样。间或才有些上百吨的大船夹杂其中，甚至还有西方式的帆船。林佰光注意到几乎每艘船上有大小款式各不相同的火炮，用各种方式架设、捆绑在甲板上，海盗们很是随意地坐在火炮边吃饭、抽烟，船上甚至还有女人和小孩子。
+Most of the ships were small coastal fishing boats or cargo ships of forty or fifty tons. Their structure was simple, and they looked no different from the ordinary fishing boats he had seen in Lingao. Occasionally, there were some large ships of over a hundred tons mixed in, and even some Western-style sailing ships. Lin Baiguang noticed that almost every ship had cannons of different sizes and styles, mounted and tied to the deck in various ways. The pirates sat casually by the cannons, eating and smoking. There were even women and children on the ships.
 
-　　这种大聚落式的海盗群体看上去还真是稀罕。
+This kind of large-settlement-style pirate group was really rare.
 
-　　忽然有艘船上传来女人的尖叫声，循声望去，不由吃了一惊：只见一个女子被赤条条的捆在船帮上，一个精瘦的海盗正用泡了海水的鞭子狠抽她的光赤的背脊、屁股和大腿，每抽一下，女人就发出足以撕破耳膜的尖叫声，在木头上拼命的扭动着身子。
+Suddenly, a woman's scream came from a ship. Looking in the direction of the sound, he couldn't help but be startled: he saw a woman tied naked to the side of the ship, and a thin pirate was whipping her bare back, buttocks, and thighs with a whip soaked in seawater. With each lash, the woman let out a scream that was enough to tear the eardrums, and she writhed desperately on the wood.
 
-　　船上男的女的，老的少的，熟视无睹的自顾自的干活抽烟的。
+The men and women, old and young, on the ship, turned a blind eye and went about their own business, smoking.
 
-　　因为距离远，林佰光只隐隐约约地听到男人的呵斥：“……你以为自己是什么？装正经也不看看地方！看我不打烂你个臭X，还给爷拿乔……”
+Because of the distance, Lin Baiguang could only faintly hear the man's scolding: "...What do you think you are? You pretend to be decent, but you don't even look at the place! See if I don't beat your stinking X, you still put on airs for me..."
 
-　　这极富SM情趣的场面却让林佰光打了个寒颤——他提醒自己，自己要面对的就是这样一群人，他们几乎不受任何法律和道德的约束，心里也没有一丝一毫的怜悯。
+This scene, full of SM flavor, made Lin Baiguang shudder—he reminded himself that he was facing such a group of people. They were almost unrestrained by any law or morality, and there was not a trace of pity in their hearts.
 
-　　施十四将他引到岸上。和他想象的不一样，南日岛上的海盗根本没有搭建任何寨子、堡垒的之类的设施，岸上有些托上沙滩正在修补的船只，海盗们搭建了些草棚就算是临时的住所了。显然，海盗们并不认为有人能够冲上岸来直接威胁到他们——船队就是他们的堡垒。
+Shi Shisi led him ashore. Unlike what he had imagined, the pirates on Nanri Island had not built any stockades, fortresses, or other facilities at all. There were some ships on the shore that had been pulled onto the beach for repairs, and the pirates had built some thatched sheds as temporary shelters. Obviously, the pirates did not think that anyone could rush ashore and directly threaten them—the fleet was their fortress.
 
-　　林佰光因为事先已经换上了明人的装束，所以没有引起很多人的围观。一路走来，只见岸上有几座用残木石块的篱笆围起来的空地，四面有拿着刀枪，挥舞着鞭子的海盗在看守，里面或蹲或躺的关了许多人，男女老少一应俱全，有穿着绫罗绸缎的大户也有破衣烂衫的穷人，只是在这既不避风也不遮雨的地方一蹲就是十天几个月的，很多人已经面无人色，浑身肮脏不堪。篱笆墙外的木桩上挂着几个人，大概已经是死了，上面苍蝇乱飞。
+Because Lin Baiguang had already changed into Ming dynasty clothes in advance, he did not attract much attention. As he walked along, he saw a few open spaces on the shore enclosed by fences made of broken wood and stones. Pirates with swords and spears, waving whips, were guarding on all four sides. Inside, many people were squatting or lying down, men and women, old and young. There were rich people in silk and satin, and poor people in rags. But after squatting in this place that was neither sheltered from the wind nor the rain for ten days or a few months, many people were already pale and filthy. A few people were hanging on the wooden stakes outside the fence, probably already dead, with flies buzzing around them.
 
-　　篱笆墙外面大约有坟地，埋得不深，发出一股令人恶心的臭味，
+There was probably a graveyard outside the fence, not buried deep, emitting a disgusting stench.
 
-　　“这是票房。”施十四道，“各处抓来的票子都关这里。”
+"This is the ticket office," Shi Shisi said. "The tickets captured from all over the place are all locked up here."
 
-　　“这等穷鬼也抓来作甚？”林佰光故作惊讶道。
+"Why bother capturing such poor ghosts?" Lin Baiguang said with feigned surprise.
 
-　　“上岸劫掠的时候哪里来得及分穷得富得，一锅端来了再说。”施十四道。
+"When we go ashore to plunder, where do we have time to distinguish between the rich and the poor? We just take them all in one go," Shi Shisi said.
 
-　　“既缴不出赎金来，抓来何用呢？”
+"Since they can't pay the ransom, what's the use of capturing them?"
 
-　　“和你们澳洲人一样，用来干活。”施十四笑道，“咱们没你们这么心灵手巧，做得出这许多精巧的货色，但是大帮里的各色杂活有的是，有些不花钱的手下使唤也便利些。”
+"Just like you Australians, we use them for work," Shi Shisi said with a smile. "We are not as clever as you, and we can't make so many exquisite goods, but there are all kinds of miscellaneous jobs in the big gang. It's also convenient to have some subordinates who don't cost money."
 
-　　被抓来的缴不出赎金的一律用来役使，从打柴、烧火、修船、挑水之类无一不干，睡的是露天，吃也是有一顿没一顿——海盗并不关心这些俘虏的死活，若是能熬过几个月不死，首领发了善心也许就会放人，若是大帮里缺人就会被拉去当海盗。
+Those who were captured and could not pay the ransom were all used for labor, from cutting firewood, making fires, repairing ships, to carrying water. They slept in the open and ate irregularly—the pirates did not care about the life and death of these captives. If they could survive for a few months without dying, the leader might be kind enough to release them. If the big gang was short of people, they would be pulled to be pirates.
 
-　　稍有姿色的女子用来满足生理需求，等到大伙腻味了，就送到大陆上卖掉，有时候送到南洋去卖——在南洋的做生意的中国商人们虽然可以拿土著女人将近，但是从国内来得女子更能得到他们的青睐——卖出个好价钱来。
+The slightly good-looking women were used to satisfy physiological needs. When everyone got tired of them, they would be sold on the mainland, and sometimes sold to Southeast Asia—although the Chinese merchants doing business in Southeast Asia could get by with native women, the women from China were more favored by them—and could be sold for a good price.
 
-　　林佰光随着他穿过票房，远远地看到海边的小山上居然有一座完整的寨子，上面飘扬着诸彩老的字号，不由吃了一惊，这寨子修得好整齐规整！待到走近一看，却见寨墙已经塌毁了多处，寨子里的屋子也有坍塌的，再看寨墙上的敌楼、旗杆座之类，他知道这原来是座明军的水寨，荒废了许久之后又被海盗所占用而已
+Lin Baiguang followed him through the ticket office and saw from a distance a complete stockade on a small hill by the sea, with the banner of Zhu Cailao flying on it. He couldn't help but be surprised. This stockade was so neat and orderly! When he got closer, he saw that the stockade wall had collapsed in many places, and the houses in the stockade had also collapsed. Looking at the watchtowers and flagpole bases on the stockade wall, he knew that this was originally a Ming army water stockade, which had been abandoned for a long time and then occupied by pirates.
 
-　　寨子周围，密密麻麻的搭建着许多棚子帐幕，大约是诸彩老手下的亲信和大小头目的居所。挎着刀拿着竹竿矛的海盗们也多了起来，林佰光知道，此地大约已经接近诸彩老的牙帐了。
+Around the stockade, many sheds and tents were densely built, which were probably the residences of Zhu Cailao's trusted subordinates and leaders of all sizes. There were also more pirates with swords and bamboo spears. Lin Baiguang knew that this place was probably close to Zhu Cailao's headquarters.
 
-　　一行人一路向着明军的废寨而去。沿途不断地碰到巡逻的小股海匪们，比起在海边遇到的难民一般的海盗来要显得要精悍些，显示他们离诸彩老的中军越来越近了。
+The group walked all the way towards the abandoned Ming army stockade. Along the way, they constantly encountered small groups of patrolling pirates. Compared with the refugee-like pirates they met by the sea, they seemed to be more capable, which showed that they were getting closer and closer to Zhu Cailao's central army.
 
-　　不过，就算以林佰光不专业的眼光看，诸彩老的陆上营寨并不见得高明，一看就是毫无章法的随意安插的，岗哨、巡逻队都很随意，不少地方的设防非常松懈，徒居其表。
+However, even in Lin Baiguang's unprofessional eyes, Zhu Cailao's land camp was not very brilliant. It was obvious that it was randomly arranged without any rules. The sentries and patrols were very casual, and the defense in many places was very lax, just for show.
 
-　　这样一支看起来水平就一般海盗人马。也能屡次登陆，深入内地抢劫州县，而且多半还是所向披靡了。要么他最强的人马不在南日岛，要么就是他的对手实在太滥。林佰光认为后者的可能性比较大。
+Such a group of pirates, who seemed to be of average level, could also repeatedly land and go deep into the inland to plunder prefectures and counties, and most of them were invincible. Either his strongest men were not on Nanri Island, or his opponents were really too bad. Lin Baiguang thought the latter was more likely.
 
-　　明军的战斗力的评估，在穿越集团中一直有两种极端，一种是觉得不堪一击，大有几百人枪就能打遍广东乃至直取南京的。一种是觉得敌人再滥也是正规军，我们再强也是业余选手，没有全身装甲、AK47、马克沁机枪就难以取胜。
+The assessment of the combat effectiveness of the Ming army had always had two extremes in the transmigrator group. One was that it was vulnerable, and that a few hundred men with guns could fight all over Guangdong and even take Nanjing directly. The other was that no matter how bad the enemy was, they were still a regular army, and no matter how strong we were, we were still amateurs. It would be difficult to win without full body armor, AK-47s, and Maxim machine guns.
 
-　　现在看来，起码广东福建的明军是没什么好怕的，诸彩老如此水平的人马也能纵横广东福建两省，让明军无可奈何，以临高县保安团的装备、训练和纪律水准来看，以一敌十不见得行，打败三四倍的敌人是毫无悬念的。
+Now it seemed that at least the Ming army in Guangdong and Fujian was nothing to be afraid of. A person of Zhu Cailao's level could also run rampant in Guangdong and Fujian provinces, leaving the Ming army helpless. Judging from the equipment, training, and discipline of the Lingao County Security Regiment, it was not certain that they could fight one against ten, but there was no doubt that they could defeat an enemy three or four times their size.
 
-　　又走了一阵，虽然还隔着较远的距离，但是晴空之下林佰光还是能够清楚地看到寨子上的大旗上面绣着着斗大的“诸”字，旁边还有一面旗帜，绣着“三军司令”。
+After walking for a while, although they were still at a considerable distance, Lin Baiguang could still clearly see under the clear sky that the big flag on the stockade was embroidered with the large character "Zhu," and next to it was another flag embroidered with "Commander of the Three Armies."
 
-　　这大明的军旗海盗也挂起来了。林佰光哑然。看来即使是土匪海盗这样的造反派，也有崇拜体制的弱点。
+This Ming army flag was also hung by the pirates. Lin Baiguang was speechless. It seemed that even rebels like bandits and pirates had the weakness of worshiping the system.
 
-　　到得寨门外，施十四停住了脚步。和站岗的小海匪说了几句话。回过头道：
+When they arrived outside the stockade gate, Shi Shisi stopped. He said a few words to the young pirate on guard, then turned back and said:
 
-　　“林掌柜！劳烦您在这里坐一会。容我先进去回禀一声。”施十四说，“大掌柜的要是在寨子里，很快就会见您。”
+"Shopkeeper Lin! Please sit here for a while. Allow me to go in and report first," Shi Shisi said. "If the big boss is in the stockade, he will see you soon."
 
-　　“好，你去吧。”林佰光点点头。施十四和周围的吩咐几句，自顾自的进去了。这边的小海匪们端来桌椅，请他坐下，又端来一碗茶来。
+"Okay, you go ahead." Lin Baiguang nodded. Shi Shisi said a few words to the people around him and went in by himself. The young pirates here brought a table and chairs, asked him to sit down, and brought a bowl of tea.
 
-　　林佰光见茶碗是缺了口的，边缘还有一圈污渍，茶水黄澄澄的，不知道什么味。他强忍厌恶之情，喝了一大口，还砸了一下嘴，做出满意的样子来。
+Lin Baiguang saw that the tea bowl was chipped, and there was a circle of stains on the edge. The tea was yellow and he didn't know what it tasted like. He suppressed his disgust, took a big gulp, and smacked his lips, pretending to be satisfied.
 
-　　茶水即苦又涩，还有一股海水的咸腥味。林佰光却道：“总算喝上碗茶了！”
+The tea was both bitter and astringent, and had a salty and fishy smell of seawater. Lin Baiguang said, "I finally got a bowl of tea!"
 
-　　送茶来的海匪一笑：“茶好不好，小的们不知道，这水又咸又苦的，不加上点茶叶还真喝不下去。”
+The pirate who brought the tea smiled: "We don't know if the tea is good or not, but this water is salty and bitter. It's really hard to drink without adding some tea leaves."
 
-　　南日岛上虽然有淡水，也经不起这一万多人马云集，每天的喝水很成问题，多数人只好随地掘井取水。这样的小岛上地下水多少被海水渗透，只能勉强度日而已。
+Although there was fresh water on Nanri Island, it could not withstand the gathering of more than 10,000 people. Drinking water was a big problem every day. Most people had to dig wells on the spot to get water. On such a small island, the groundwater was more or less infiltrated by seawater, and they could only barely get by.
 
-　　看门的海匪们虽然不知道他是谁，但是林佰光是施十四送来的，显然身份不低。他一身打扮非富非贱，浑身又透出精悍之气来，大伙估摸着大约是哪一路的同道。招呼起来也客气几分：最近大掌柜的日子不好过，来个同道大约是谈联合的事情。
+Although the pirates guarding the gate did not know who he was, Lin Baiguang was brought by Shi Shisi, so his status was obviously not low. He was dressed neither rich nor poor, and his whole body exuded a capable air. Everyone guessed that he was probably a fellow from some other group. They were also a little more polite when they greeted him: the big boss's days had not been easy recently, and a fellow coming was probably to discuss an alliance.
 
-　　林佰光也有意引他们说话，他当过办公室主任，属于特别会说话，能搞人际关系的。他自有一套能说会道的工夫，很快就和守门的几个搭上了话头，混了个自来熟。
+Lin Baiguang also deliberately led them to talk. He had been an office director and was particularly good at talking and building relationships. He had his own set of eloquent skills, and soon he struck up a conversation with the few guards at the gate and became familiar with them.
 
-　　很快，林佰光就从这小几个小海匪嘴里知道了一些事情：云集在这里的船队基本上是诸彩老的全部家当了，据说大掌柜的要带着他们去“干票大的”。干票什么大的，他们不知道，林佰光可知道，显然是指进攻闽安的事情。
+Soon, Lin Baiguang learned some things from these few young pirates: the fleet gathered here was basically all of Zhu Cailao's property. It was said that the big boss was going to take them to "do a big job." They didn't know what big job it was, but Lin Baiguang knew. It obviously referred to the attack on Min'an.
 
-　　林佰光没有打听船只、人数这类敏感的事情，他觉得这不是需要关心的。他想掌握的是海匪们的士气和供给的状况。要在部队的溃散的时候拉走人马，这个才是至关重要的。从和海匪们聊天的只言片语中，他感觉得出海匪们士气不高——把这一大群人马聚集在一起，每天的吃喝拉撒就是极大的麻烦。为了供应粮食蔬菜，不得不每天派船队出去搜罗，就是这样，也不时有船断顿的。有些小股因为吃饭困难，取水又不便，来而复去，已经走掉了。
+Lin Baiguang did not inquire about sensitive matters such as the number of ships and people. He felt that this was not something to be concerned about. What he wanted to grasp was the morale and supply situation of the pirates. When the troops were routed, it was crucial to pull away the men. From the bits and pieces of conversation with the pirates, he could feel that the pirates' morale was not high—gathering such a large group of people together, the daily food, drink, and sanitation was a huge trouble. In order to supply food and vegetables, they had to send out fleets to search every day. Even so, there were still ships that ran out of food from time to time. Some small groups had already left because of the difficulty in getting food and the inconvenience of getting water.
 
-　　“也就是我们这里的中军，天天吃喝不愁，有时候还能有点肉吃。其他的小股，都是吃了上顿没下顿的，只好天天捞鱼吃。”有个海匪还得意地说道。
+"It's only us here in the central army who don't have to worry about food and drink every day, and sometimes we can even have some meat. The other small groups are all living from hand to mouth, so they have to fish every day," a pirate said proudly.
 
-　　这样云山雾罩的侃大山也不知道过了多久，就在林佰光已经喝下第四碗茶，快要挺不住了的时候，突然从中军营寨里传出了嘹亮的海螺声。
+He didn't know how long this rambling conversation lasted. Just when Lin Baiguang had already drunk his fourth bowl of tea and was about to give up, a loud conch shell sound suddenly came from the central army camp.
 
-　　“大掌柜升帐了！”小头目说，“大掌柜的怕是要立刻见你了。”
+"The big boss is holding court!" the young leader said. "The big boss probably wants to see you right away."
 
-　　随着海螺声响彻营寨，忽然冒出来许多小股的海匪，个个刀剑出鞘，纷纷朝着寨墙、道路两旁涌去站队。
+As the conch shell sound echoed through the camp, many small groups of pirates suddenly appeared, all with their swords drawn, and rushed to the stockade walls and both sides of the road to line up.
 
-　　这是摆出迎接的威仪来了。林佰光暗道。
+This was to show the majesty of the welcome. Lin Baiguang thought to himself.
 
-　　从好的一面来说，这是对他这个使者的尊重，从糟糕的一面说，是下马威。或许二者兼而有之，就看自己如何的应对了。
+On the one hand, this was a sign of respect for him as an envoy. On the other hand, it was a show of force. Perhaps it was both, and it all depended on how he responded.
 
-　　看着眼前热闹纷乱的场面，林佰光心里感慨万分，自己力排众议，孤身冒险来到这里，就都是为了能混入海匪集团的内部，诸彩老这个纵横海上的枭雄，大约做梦也不会想到自己到来的目的居然是要挖他的墙角——
+Looking at the lively and chaotic scene in front of him, Lin Baiguang was filled with emotion. He had gone against the opinions of the crowd and came here alone on a risky adventure, all in order to infiltrate the pirate group. Zhu Cailao, this hero who roamed the seas, probably never dreamed that the purpose of his arrival was actually to undermine him—
 
-　　正想着，几个穿着整齐的海匪从大门里的道路上一路跑来，来到近旁高声道：“请问哪位是来得同道？”
+Just as he was thinking, a few neatly dressed pirates ran out from the road inside the main gate and shouted from a distance, "May I ask which one is the fellow who has come?"
 
-　　从他的喊话中，林佰光猜到诸彩老并不愿意把自己到来的消息泄露出去。至于他为什么这么做还不明白。只能见机行事了。
+From his shout, Lin Baiguang guessed that Zhu Cailao was not willing to leak the news of his arrival. As for why he did this, he still didn't understand. He could only act according to the circumstances.
 
-　　林佰光拱手道：“正是在下！”
+Lin Baiguang cupped his hands and said, "It is I!"
 
-　　那头目换了个礼，然后说道：“这位同道，我们大掌柜的请您先行到老营休息！请！”
+The leader returned the salute and then said, "This fellow, our big boss invites you to rest in the old camp first! Please!"
 
-　　原来海盗们也叫“老营”，这称呼难道是明朝军队里的常用词么？
+It turned out that the pirates also called it the "old camp." Was this term commonly used in the Ming army?
 
-　　林佰光点点头，向门口的站岗的几个海匪拱手作了一个四方揖道：“众位兄弟，多谢各位照顾了！后会有期！”
+Lin Baiguang nodded, and cupped his hands in a four-directional bow to the few pirates on guard at the gate, saying, "Brothers, thank you for your care! We will meet again!"
 
-　　众人忙慌忙恭敬地拱手回礼。都觉得这同道处事漂亮，礼节周全，只是不知道是哪一路的好汉？
+The crowd hurriedly and respectfully returned the salute. They all felt that this fellow was very good at handling things and had perfect etiquette, but they didn't know which hero he was.
 
-　　沿着道路直到老营门口的时候，门外已经摆出了两行队伍迎接林佰光的到来。
+When they reached the gate of the old camp along the road, two lines of troops had already been arranged outside the gate to welcome Lin Baiguang's arrival.
 
-　　这批人衣装整齐，武器闪亮，看起来十分的骠悍，显然是诸彩老的精锐亲信。比起沿路看到的难民式的海匪来，简直就是天上地下。
+This group of people was neatly dressed, with shining weapons, and looked very fierce. They were obviously Zhu Cailao's elite and trusted subordinates. Compared with the refugee-like pirates seen along the way, they were like heaven and earth.
 
-　　排列在道路两边的海匪们手中的兵器在阳光下闪闪发光，一眼看过去就感觉到气势迫人。他们一色握着的明军制式长枪，跨着日本打刀。冷漠的面孔上是一对对凶狠的眼睛，射出骇人的眼光。
+The weapons in the hands of the pirates lined up on both sides of the road glittered in the sun, and one could feel the imposing momentum at a glance. They all held Ming army standard long spears and wore Japanese katanas. On their indifferent faces were pairs of fierce eyes, shooting out a terrifying light.
 
-　　在两边如狼似虎的海匪的目光盯注下，林佰光走上了通向中军的道路，那种无言的威压感的确骇人——过去林佰光看到电视电影里的这种镜头，只觉得装模作样，设身处地才能感到期间的恐怖感觉，一度他的面色有些发白，觉得快喘不过气来了。
+Under the gaze of the wolf-like pirates on both sides, Lin Baiguang walked onto the road leading to the central army. The silent pressure was indeed terrifying—in the past, when Lin Baiguang saw such scenes in movies and TV shows, he only felt that they were pretentious. Only when he was in the situation could he feel the terror. For a time, his face turned a little pale, and he felt that he could hardly breathe.
 
-　　正在这个时候，先前进去禀报的施十四跑了出来，高声喊道：“有请贵客！！”
+At this moment, Shi Shisi, who had gone in to report earlier, ran out and shouted loudly, "Please welcome the distinguished guest!!"
 
-　　林佰光强定心神——事已至此，怕也无用。不由得闭目在心中向上苍祈祷：
+Lin Baiguang forced himself to calm down—since it had come to this, it was useless to be afraid. He couldn't help but close his eyes and pray to heaven in his heart:
 
-　　“在各个时空里奋斗的穿越前辈们，把你们的王八之气通过时空传达到我的身上吧！”暗暗祈祷数遍之后，重新睁开双眼的时候，只觉得浑身都是劲道，身后隐隐约约有一光环，上面大书二字：“主角”。
+"Transmigrator seniors who are struggling in various time and space, please transmit your protagonist aura to me through time and space!" After praying secretly several times, when he opened his eyes again, he only felt that his whole body was full of strength, and there was a faint halo behind him, with two large characters written on it: "Protagonist."
 
-　　“有劳带路了！”
+"Thank you for leading the way!"
 
-　　跟着施十四走了一会儿之后，面前的道路上出现了一道辕门。门旁又有海匪喝道：
+After following Shi Shisi for a while, a gate appeared on the road ahead. A pirate by the gate shouted:
 
-　　“来人取下刀剑！”
+"Take off your swords!"
 
-　　“我没有。”林佰光坦然道，“这位兄弟是不是要搜查一下？”
+"I don't have one," Lin Baiguang said calmly. "Does this brother want to search me?"
 
-　　“不必，不必！”施十四赶紧过去和人交涉。他一路陪同而来，知道这林掌柜身无寸铁随身，完全是赤手空拳。
+"No need, no need!" Shi Shisi hurried over to negotiate with the person. He had accompanied him all the way and knew that this Shopkeeper Lin was unarmed and completely empty-handed.
