--- a/_posts/2010-11-7-3-20300.md
+++ b/_posts/2010-11-7-3-20300.md
@@ -1,177 +1,177 @@
 ---
 layout: post
-title: 第二百零三节 逃出生天
+title: "Section 203: Escape from Death"
 category: 3
 path: 2010-11-7-3-20300.md
 tag: [normal]
 ---
 
-　　想到这里，林佰光深悔自己当初竭力要求来做“榕工作”，这事情的确太不靠谱了！这纷乱如麻的局面，自己如何能够掌握？如意算盘打了一遍又一遍，就是没料到变化从来都比计划快。自己死了不要紧——他一贯抱着“富贵险中求”，“愿赌服输”的理念，但是留下的名声恐怕就是一个狂妄自大的反面典型了！徒然被临高那群人当作笑柄啊。
+Thinking of this, Lin Baiguang deeply regretted that he had insisted on doing the "Rong work" in the first place. This matter was indeed too unreliable! How could he control this chaotic situation? He had made his wishful calculations over and over again, but he had never expected that changes would always be faster than plans. It didn't matter if he died—he had always held the belief of "seeking wealth in danger" and "willing to accept defeat in a gamble," but the reputation he left behind would probably be a negative example of arrogance and self-importance! He would be a laughingstock for the group in Lingao.
 
-　　但是自己对地形不熟悉，根本就出不了营寨，就算能出去，到了海边没有船也是徒唤奈何。
+But he was not familiar with the terrain and could not get out of the camp at all. Even if he could get out, it would be useless to be at the seaside without a boat.
 
-　　正想找个人打听下眼下的局面，奈何外面纷乱如麻，自己冒冒失失的跑出帐篷，没等开口估计就要挨刀。正彷徨无措间，忽然有人闯了进来，定睛一看，正是徐成。
+Just as he was thinking of finding someone to inquire about the current situation, the outside was in a mess. If he rashly ran out of the tent, he would probably be stabbed before he could open his mouth. Just as he was at a loss, someone suddenly rushed in. He took a closer look and saw that it was Xu Cheng.
 
-　　“徐大哥！”
+"Brother Xu!"
 
-　　“闲话少说，快随我来。”徐成一把把他拖了过去，“路上不要说话，看我眼色行事。”
+"Less talk, follow me quickly." Xu Cheng dragged him over. "Don't talk on the way, and act according to my winks."
 
-　　“好。”林佰光知道此时毋须多问，跟着走就是。他已经把自己不多的东西都收拾好，乱军中最要紧的就是银子，必要的时候能买命，其次是干粮和清水。又给自己弄了一把小刀作为护身的武器。
+"Okay." Lin Baiguang knew that there was no need to ask more at this time, just follow him. He had already packed his few belongings. The most important thing in a chaotic army was silver, which could buy his life when necessary. The second was dry food and fresh water. He also got himself a small knife as a self-defense weapon.
 
-　　徐成带着他从帐篷里出来，营寨里乱哄哄的到处是跑动的人。亲兵和家眷、奴仆们都象没头的苍蝇一样乱串，灭火的、找人的、包裹伤口的……大哭小叫乱成一团。
+Xu Cheng led him out of the tent. The camp was in a mess with people running around everywhere. The personal soldiers, family members, and servants were all running around like headless flies, putting out fires, looking for people, bandaging wounds... Crying and shouting in a mess.
 
-　　徐成拽着他一路飞奔，直到营寨的一堵围墙旁方停下脚步，这里有处墙洞，旁边有五六个人守护着。
+Xu Cheng dragged him and ran all the way until they stopped by a wall of the camp. There was a hole in the wall, and five or six people were guarding it.
 
-　　“你从这里出去，直向北走，施十四的船就停在那里等你！赶快上船走吧。”
+"You go out from here, go straight north, and Shi Shisi's boat will be waiting for you there! Get on the boat and go quickly."
 
-　　“那你呢？”林佰光心中感激，反问道。
+"What about you?" Lin Baiguang was grateful and asked in return.
 
-　　“我在诸大掌柜身边干了十三年了，就这样自顾自的逃命的事情我做不出来。”徐成叹了口气，“还有我手下的七八十个弟兄，丢下他们我也于心不忍……”
+"I have been with the great shopkeeper Zhu for thirteen years. I can't do such a thing as escaping for my own life," Xu Cheng sighed. "And there are seventy or eighty of my brothers. I can't bear to leave them behind..."
 
-　　“带着大家一起逃命吧！”
+"Take everyone and escape together!"
 
-　　“一起跑了，老营顷刻就完了！这里还有大掌柜和各家首领的家眷。”
+"If we all run away, the old camp will be finished in an instant! There are also the family members of the great shopkeeper and the leaders here."
 
-　　现在岛上已经秩序大乱，为了争夺财物和逃命的船只，甚至已经开始自相残杀。老营若是崩溃，里面的妇孺老幼一个都跑不掉。林佰光想不到这个牢骚满腹的小头目在最后关头竟然能如此，不由得肃然起敬：
+Now the island was in chaos. In order to fight for property and escape boats, they had even begun to kill each other. If the old camp collapsed, none of the women, children, and the elderly inside would be able to escape. Lin Baiguang did not expect that this grumbling little leader could be like this at the last moment, and he couldn't help but feel a sense of respect:
 
-　　“徐大哥你真是义胆忠肝……”
+"Brother Xu, you are truly righteous and loyal..."
 
-　　“别说废话了，快走吧！一会乱兵过来，连你也是一个死！”徐成跺着脚叫道，说着丢了一个包裹给他。
+"Stop talking nonsense and go! When the chaotic soldiers come over in a while, you will be dead too!" Xu Cheng stomped his feet and shouted, and threw a package to him.
 
-　　“这是我的一点积蓄，你若是能逃出一条命来，帮我把它交给我家里人！地址就在包裹上！”
+"This is a little of my savings. If you can escape with your life, help me give it to my family! The address is on the package!"
 
-　　海面上忽然有一艘船的火药库爆炸了，喷发出的火焰直冲云霄。黑烟滚滚。周围的人个个面无人色。林佰光点点头：“定不辱命！”说着把包裹捆在身上，一路狂奔而去。
+Suddenly, the gunpowder magazine of a ship on the sea exploded, and the flames shot up into the sky, with black smoke billowing. Everyone around was pale. Lin Baiguang nodded: "I will not fail my mission!" He tied the package to his body and ran away.
 
-　　路上已经变得极不太平，处处生火，四处冒险。沿路尽是纷乱的人群，挥着刀枪，背着包裹，漫无目的奔跑着，有时候两股人碰撞到一起，无缘无故的就开始互相砍杀。
+The road had become extremely unsafe, with fires everywhere and adventures everywhere. The road was full of chaotic crowds, waving swords and spears, carrying packages, and running aimlessly. Sometimes two groups of people collided, and they began to hack at each other for no reason.
 
-　　林佰光不敢逗留，专拣没人的地方跑，见到大股的人群就躲一躲。好不容易跑到了海边的栈桥上。
+Lin Baiguang did not dare to linger. He ran in places where there were no people and hid when he saw a large group of people. He finally ran to the gangway by the sea.
 
-　　定睛一看，施十四的船果然还在那里，施十四带着几个精壮的海盗，手持弓箭长矛，守在船头，见到企图来夺船的就是一箭。即使这样，船甲板上也已经塞满了人。
+He took a closer look and saw that Shi Shisi's boat was still there. Shi Shisi, with a few strong pirates, armed with bows, arrows, and long spears, stood guard at the bow of the boat. Anyone who tried to seize the boat was shot with an arrow. Even so, the deck of the boat was already full of people.
 
-　　“快来！”施十四眼睛尖，见一个短发的家伙飞奔而来，还四处张望，知道就是林佰光了，赶紧招呼，一面甩下几条绳子来，让手下下去接应。
+"Come quickly!" Shi Shisi had sharp eyes. He saw a short-haired guy running over and looking around, and knew it was Lin Baiguang. He quickly greeted him and threw down a few ropes to let his men go down to help.
 
-　　林佰光总算是爬上了施十四的船，一上甲板就软瘫如泥，大口地喘着粗气——这生死狂奔实在是太刺激了！
+Lin Baiguang finally climbed onto Shi Shisi's boat. As soon as he got on the deck, he collapsed like mud, panting heavily—this life-and-death run was really too exciting!
 
-　　“老徐呢？”
+"Where's Old Xu?"
 
-　　“他不肯出来，说老营里还有各家首领的家眷……”
+"He refused to come out, saying that there are still the family members of the leaders in the old camp..."
 
-　　“唉，这家伙真是。”施十四连连跺脚，“白白送掉一条小命！诸大掌柜连自己都顾不了了！”
+"Alas, this guy is really." Shi Shisi stomped his feet repeatedly. "He's just throwing away his life for nothing! The great shopkeeper Zhu can't even take care of himself!"
 
-　　“怎么？”
+"What?"
 
-　　“你看吧！”施十四一边关照水手开船，一边指着南日岛东边的水域，林佰光顿时倒吸一口凉气——密密麻麻的帆篷正从天际线上不断的出现，向这里涌来。还不断的喷吐着白色的烟雾。海面上一会被浓厚的烟云所笼罩，一会又被海风吹拂，露出千帆竞进的壮观场面来。
+"Look!" Shi Shisi said as he ordered the sailors to set sail, pointing to the waters east of Nanri Island. Lin Baiguang immediately gasped—a dense mass of sails was constantly appearing on the horizon, rushing towards here, and constantly spewing white smoke. The sea was sometimes covered by thick smoke, and sometimes blown by the sea breeze, revealing the spectacular scene of a thousand sails competing.
 
-　　相形之下，沿着南日岛边缘布阵的诸彩老的船队显得十分的单薄。
+In contrast, Zhu Cailao's fleet, which was arranged along the edge of Nanri Island, seemed very thin.
 
-　　谁都看得出来，诸彩老这次是必败无疑了。他在海边布阵，大约是为了给老营脱逃争取些时间。
+Anyone could see that Zhu Cailao was bound to be defeated this time. He arranged his formation by the sea, probably to buy some time for the old camp to escape.
 
-　　“这是郑芝龙的船队？！”
+"Is this Zheng Zhilong's fleet?!"
 
-　　“没错，看起来是倾巢出动。”
+"That's right, it looks like they've come out in full force."
 
-　　诸彩老的船队，在对方的步步紧逼之下，不断的退缩，那些没来得及退后的船只，一艘接一艘的被包围吞没了。起火的战船瘫在海面上，犹如一个个散布着黑烟的火炬。
+Zhu Cailao's fleet, under the constant pressure of the other side, was constantly retreating. Those ships that did not retreat in time were surrounded and swallowed up one by one. The burning warships were paralyzed on the sea, like torches spreading black smoke.
 
-　　原来郑芝龙的船有这么多！林佰光终于理解为什么执委会对这个时空的海上集团畏敌如虎了。果然了得！光装有几门线膛炮，没有发动机的船只，对方真是淹都淹得死你。
+So Zheng Zhilong had so many ships! Lin Baiguang finally understood why the Executive Committee was so afraid of the maritime groups of this time and space. It was really amazing! With just a few rifled cannons and no engines, the other side could really drown you.
 
-　　施十四说倾巢出动，林佰光很清楚郑芝龙还有个更大的对手李魁奇，他不可能把全部人船都带到南日岛附近来的，起码也得留下三分之一到一半的实力提防李魁奇，再说他还有在贸易航线上做买买的船只——郑芝龙的实力真是非同小可。
+Shi Shisi said that they had come out in full force. Lin Baiguang knew very well that Zheng Zhilong had an even bigger opponent, Li Kuiqi. It was impossible for him to bring all his men and ships to the vicinity of Nanri Island. At least he had to leave one-third to half of his strength to guard against Li Kuiqi. Besides, he also had ships doing business on the trade routes—Zheng Zhilong's strength was really not to be underestimated.
 
-　　“兄弟你要再不来，我就只好跑路了。”施十四指点附近的海域，“郑芝龙的船正在包抄过来，再过一个多时辰就谁也跑不掉了。”
+"Brother, if you hadn't come, I would have had to run away." Shi Shisi pointed to the nearby sea. "Zheng Zhilong's ships are closing in. In another hour or so, no one will be able to escape."
 
-　　“几位兄弟呢？”
+"What about the other brothers?"
 
-　　“胡胖子带着船已经先跑了，林淡是也跟着大队人马去打闽安的，不知道他怎么样……”大部分人因为跟随诸彩老去打闽安，现在生死不知。少部分人则已经跑了。施十四的经历颇为惊险，他是攻打闽安的一路的，郑芝龙和诸彩老的主力在闽江口会战的时候，他率领的船队正在闽安镇外和乡勇打仗。
+"Fatty Hu has already run away with his ships. Lin Dan also followed the main force to attack Min'an. I don't know how he is..." Most of the people were with Zhu Cailao to attack Min'an, and their life and death were unknown. A small number of people had already run away. Shi Shisi's experience was quite thrilling. He was on the way to attack Min'an. When Zheng Zhilong and Zhu Cailao's main forces were fighting at the mouth of the Min River, the fleet he led was fighting with the local braves outside Min'an Town.
 
-　　乡勇因为有官军火器助阵，加之是保卫乡梓，打得很是凶狠。施十四几次带人涉水登陆，都被乡勇打了回去前前后后丢下了四十多个弟兄，混乱中还有一艘大船搁浅，只好丢弃。小船也被烧毁夺走了三四艘。
+The local braves, with the help of the official army's firearms, and because they were defending their hometown, fought very fiercely. Shi Shisi led his men to land by wading several times, but was beaten back by the local braves. He lost more than forty brothers, and a large ship ran aground in the chaos and had to be abandoned. Three or four small boats were also burned and captured.
 
-　　“这次真是亏大了！”施十四痛心疾首。
+"This time it's a big loss!" Shi Shisi was heartbroken.
 
-　　后来他才得到命令，要全队速返闽江口外海域支援本队。率领船只刚出闽江口，就看到郑芝龙的船队源源不绝而来，知道己方绝非对手，就从战场上直接跑路了。
+Later, he received an order to quickly return to the waters outside the mouth of the Min River to support the main force. As soon as he led his ships out of the mouth of the Min River, he saw Zheng Zhilong's fleet coming in an endless stream. He knew that his side was no match for them, so he ran away directly from the battlefield.
 
-　　“我跑得再慢个几步，就回不了了！”施十四大约自己也觉得命大。
+"If I had run a few steps slower, I wouldn't have been able to come back!" Shi Shisi probably also felt that he was lucky to be alive.
 
-　　林佰光微微失望，眼下这个乱局，他最多也就能说动施十四去投临高，其他这些头目眼下连下落都不知道，哪里谈得上招募。
+Lin Baiguang was slightly disappointed. In this chaotic situation, at most he could persuade Shi Shisi to go to Lingao. He didn't even know the whereabouts of the other leaders, so how could he talk about recruiting them?
 
-　　施十四见他面色沉重，还以为他是为这一干朋友担心，宽慰道：“不必担心，大伙已经约了，若是失散了，就到大担屿附近汇合再图出路。”
+Seeing his grave expression, Shi Shisi thought he was worried about his friends and comforted him, "Don't worry, we've already agreed that if we get separated, we'll meet up near Dadanyu to figure out a way out."
 
-　　林佰光点点头，想着到了大担屿之后怎么说服这些失魂落魄的海盗头目们去投奔临高。正想着，忽然身后的小海盗们发出一声呐喊，随即紧张地骚动起来。
+Lin Baiguang nodded, thinking about how to persuade these disheartened pirate leaders to go to Lingao after arriving at Dadanyu. Just as he was thinking, the young pirates behind him suddenly let out a shout, and then there was a nervous commotion.
 
-　　林佰光吃了一惊，抬眼张望，只见在混乱中，三艘足有二百吨的三桅帆船从斜刺里直接冲了上来。眼看着就要撞进施十四的船队里来了。它们都挂着满帆，来势又急，正当其冲的几只船总算闪避得及时，才好歹险险让过，没有被撞上。不过尽管如此，也已经把施十四的手下吓得高叫起来：“哪里的王八蛋，怎么开船！”、“X你老母！”
+Lin Baiguang was startled and looked up. He saw that in the chaos, three three-masted sailing ships of at least two hundred tons rushed up from the side. It looked like they were about to crash into Shi Shisi's fleet. They were all under full sail and coming at a high speed. The few ships in their path managed to dodge in time and narrowly avoided being hit. But even so, it had already scared Shi Shisi's men into shouting, "Which bastard is driving the boat!", "F*ck your mother!"
 
-　　……
+...
 
-　　施十四嘴角露出藐视的眼神：“这厮跑路倒是挺快！”
+A look of contempt appeared on Shi Shisi's lips: "This fellow runs away quite fast!"
 
-　　“是谁？”
+"Who is it?"
 
-　　“贺新一路的货色。”施十四说，这是诸彩老的一个所谓同宗，叫诸挺。也不知道怎么得给他七绕八弯的联了宗。中国式的家族集团里，最重就是血缘关系，即使假冒的也是，于是这新出炉的同宗很快在集团里就步步高升，在老营混上了一个头目，配船也是大船。算是心腹骨干。
+"The same kind of goods as He Xin," Shi Shisi said. This was a so-called clansman of Zhu Cailao, named Zhu Ting. He didn't know how he had managed to connect with him through some convoluted relationship. In a Chinese-style family group, the most important thing is blood relationship, even if it is fake. So this newly-minted clansman quickly rose through the ranks in the group and became a leader in the old camp, and was also assigned a large ship. He was considered a trusted backbone.
 
-　　这三只船对它们的叫骂一概不应，三条船张满的风帆在众人的眼前一晃而过，直往外海而去。
+These three ships did not respond to their curses at all. The three ships with full sails flashed past everyone's eyes and headed straight for the open sea.
 
-　　忽然有水手喊道：“这几条船蹊跷！”
+Suddenly, a sailor shouted, "There's something strange about these ships!"
 
-　　“怎么蹊跷了？”
+"What's so strange?"
 
-　　“它船身很重，莫不是装了什么货物……”
+"Its hull is very heavy. Could it be loaded with some cargo..."
 
-　　诸彩老纵横闽粤十几载，积攒下无数财宝金银。除了运回家乡去的，光随军行动的老营听闻就有上百只的铁箱子，据徐成说，里面都是金银珠宝。
+Zhu Cailao had roamed Fujian and Guangdong for more than ten years and had accumulated countless treasures, gold, and silver. In addition to what was transported back to his hometown, it was heard that the old camp that moved with the army alone had hundreds of iron boxes, which, according to Xu Cheng, were all filled with gold, silver, and jewels.
 
-　　诸挺的船上，装得极有可能有就是这些财宝。
+It was very likely that Zhu Ting's ships were loaded with these treasures.
 
-　　旧的秩序一旦崩溃，每个人都会在瞬间变得肆无忌惮。象诸挺这样的人，过去施十四鄙视归鄙视，表面还是极客气的。现在这“皇亲国戚”没了身份，又有可能带财宝，就是一只大大的肥羊罢了！
+Once the old order collapsed, everyone would become unscrupulous in an instant. In the past, Shi Shisi despised people like Zhu Ting, but he was still very polite on the surface. Now that this "royal relative" had lost his status and might be carrying treasures, he was just a big fat sheep!
 
-　　然而施十四却不为所动，只关照打旗号，叫各船直驱大担屿，不要停留——钱财和小命哪个要紧他还是知道的。追上去打诸挺是打得赢，但是花掉的时间就找不回了，到时候郑芝龙一拉网自己抢到多少财宝还不是都是一场空！
+However, Shi Shisi was unmoved. He only ordered the flag to be raised and told all the ships to head straight for Dadanyu without stopping—he still knew which was more important, money or his life. He could win a fight against Zhu Ting, but the time spent could not be recovered. At that time, when Zheng Zhilong cast his net, no matter how much treasure he had snatched, it would all be for nothing!
 
-　　逃命的路上依然危急重重，各股的船队，零星的船只四散奔逃，接下来的几个时辰里，他们又连续几次碰上这样慌不择路，仓皇逃窜的船只有的就像刚才诸挺的船队一样，一声不响，只顾逃命；但也有的分明吓破了胆，一发现有船挡在前面，就不管三七二十一，又是放火箭，又是开炮的，把施十四的船上的弟兄都打死了好几个。把施十四气得破口大骂，一面也点炮乱放。
+The road of escape was still full of dangers. The fleets of various groups and scattered ships fled in all directions. In the next few hours, they encountered such panicked and fleeing ships several more times. Some, like Zhu Ting's fleet just now, were silent and only cared about escaping; but some were clearly scared out of their wits. As soon as they found a ship blocking their way, they would, regardless of the consequences, fire rockets and cannons, killing several of Shi Shisi's brothers. This made Shi Shisi curse loudly, and at the same time, he also fired his cannons randomly.
 
-　　林佰光坐在船艉楼最安全的地方，看到这溃散的混乱局面，心里也不觉恻然。
+Lin Baiguang sat in the safest place in the sterncastle, watching this chaotic scene of rout, and couldn't help but feel a little sad.
 
-　　南日岛海域的战斗正在进入尾声，郑芝龙的船队突破了诸彩老在两翼的掩护，绕过海湾，开始把南日岛和附近的海域都封锁起来，南日岛周围的小岛，原本诸彩老都设置了营寨和炮台的，也一个接一个的竖起了降旗。那些原本还在坚持作战的船只也开始纷纷掉头逃跑。
+The battle in the waters of Nanri Island was coming to an end. Zheng Zhilong's fleet broke through Zhu Cailao's cover on the flanks, bypassed the bay, and began to blockade Nanri Island and the nearby waters. The small islands around Nanri Island, where Zhu Cailao had originally set up camps and batteries, also raised their surrender flags one after another. Those ships that were still fighting also began to turn around and flee.
 
-　　黄昏时分，从万历末年起就煊赫一时的诸彩老集团彻底的覆灭了。他本人和主要头目全部战死。
+At dusk, the Zhu Cailao group, which had been famous since the end of the Wanli reign, was completely wiped out. He himself and the main leaders were all killed in battle.
 
-　　诸彩老最后覆灭的消息，是从张大疤啦那里第一个传到临高的。张大疤拉见诸彩老从闽安溃败，放出鸽子之后赶紧赶到郑芝龙的老巢中左所一带打探消息。没有几天，只见中左所一带的海面上。果然打听到，诸彩老已经在南日岛毙命，全军覆灭。手下的船只人马不是逃散就是为郑芝龙收编。
+The news of Zhu Cailao's final demise was first transmitted to Lingao from Zhang Dabala. Seeing Zhu Cailao's rout from Min'an, Zhang Dabala sent a pigeon and then hurried to the vicinity of Zheng Zhilong's old lair, Zhongzuosuo, to inquire about the news. In a few days, he saw on the sea near Zhongzuosuo. Sure enough, he heard that Zhu Cailao had been killed on Nanri Island, and his entire army was wiped out. His ships and men were either scattered or incorporated by Zheng Zhilong.
 
-　　张大疤拉知道这消息对澳洲人极其重要，不敢怠慢，赶紧雇上一条快船星夜返回广州报讯。
+Zhang Dabala knew that this news was extremely important to the Australians. He did not dare to be negligent and hurriedly hired a fast boat to return to Guangzhou overnight to report the news.
 
-　　“林佰光这傻子！白白的送了一条性命！”冉耀看到广州站发来的急电，狠狠地拍了下桌子。心里不由得有些难过。到底也是一个同志。他在办公室里转了几个圈，林佰光虽然死了，但是他收编海盗扩大海军力量的计划还是要执行下去的。
+"Lin Baiguang, that fool! He threw away his life for nothing!" Ran Yao saw the urgent telegram from the Guangzhou station and slammed the table hard. He couldn't help but feel a little sad. After all, he was a comrade. He walked around the office a few times. Although Lin Baiguang was dead, his plan to expand the navy by recruiting pirates still had to be carried out.
 
-　　不过，此前他还得再做一件事。他挂了个电话到博铺：“老狄么？动手吧。”
+However, before that, he had to do one more thing. He made a phone call to Bopu: "Old Di? Let's do it."
 
-　　贺新是在商馆的套房被捕的，随后就被脑袋上套个罩子，从秘道里押送了出去。他被关到了一个秘密的地点，任福随即在博铺软禁的地点被押走去和贺新作伴了。至于水手们，被以“看倭国影戏”的幌子叫到了岸上，随即全部被送进了检疫营，期间没有动用任何武力。
+He Xin was arrested in his suite at the merchant's hall. Then a hood was put over his head and he was taken away through a secret passage. He was locked up in a secret location. Ren Fu was immediately taken away from his house arrest in Bopu to keep He Xin company. As for the sailors, they were called ashore under the pretext of "watching a Japanese movie" and were all sent to the quarantine camp. No force was used during the process.
 
-　　执委会、海军对林佰光的成建制招降方案本来就没抱太大的期望，早就制订了一个诸彩老覆灭之后的“招纳流亡”的计划。准备派出一些伪装成商船或者渔船的船只，到福建和广东洋面进行招降。
+The Executive Committee and the navy had not had high hopes for Lin Baiguang's plan to recruit the entire establishment. They had long formulated a plan to "recruit the exiles" after Zhu Cailao's demise. They were prepared to send out some ships disguised as merchant ships or fishing boats to the waters of Fujian and Guangdong to recruit them.
 
-　　施十四的船队，总算是有惊无险的跑到了大担屿。大担屿不过是个光秃秃的岩石小岛而已，并无常住的人口。但是岛上有淡水可取用，又有港湾避风，临时驻泊不成问题。施十四手下，连大船带小船，只跑出来八条。损失差不多三分之二。他这些年来积蓄下来的金银也随船沉掉了不少。把施十四心疼的直骂娘。
+Shi Shisi's fleet finally reached Dadanyu without any danger. Dadanyu was just a bare rocky island with no permanent population. But there was fresh water available on the island, and there was a harbor to shelter from the wind, so it was no problem to stay there temporarily. Under Shi Shisi's command, only eight ships, large and small, escaped. The loss was almost two-thirds. Much of the gold and silver he had accumulated over the years had also sunk with the ships, which made Shi Shisi curse his mother in pain.
 
-　　大担屿这里，胡胖子带着自己的五条船已经到了。他因为见机的早，第一个跑路，毫发无损，也无伤亡。
+Here at Dadanyu, Fatty Hu had already arrived with his five ships. Because he had seen the opportunity early and was the first to run away, he was unscathed and had no casualties.
 
-　　接着陆陆续续又来了一些船只，林淡也来了。他只剩下了四条船，见到施十四就流眼泪——他的几个兄弟全都在海战中被打死了。至于眷属，则陷在南日岛上，不知生死。他一到施十四船上就来问有无音讯？
+Then, some more ships came one after another, and Lin Dan also came. He only had four ships left. When he saw Shi Shisi, he shed tears—several of his brothers had all been killed in the naval battle. As for his family, they were trapped on Nanri Island, and their life and death were unknown. As soon as he got on Shi Shisi's ship, he came to ask if there was any news.
 
-　　“老营最后跑出来了么？”
+"Did the old camp finally escape?"
 
-　　“大约是没有。”施十四说，“我走的时候，老营的船还在岸边没动，大掌柜带人在岸边拼命抵挡，大约就是为了让老营能走——那会郑芝龙的船已经围过来了。我自己都差点没跑掉。”
+"Probably not," Shi Shisi said. "When I left, the ships of the old camp were still on the shore and hadn't moved. The big boss was leading his men to fight desperately on the shore, probably to let the old camp escape—at that time, Zheng Zhilong's ships had already surrounded them. I almost didn't escape myself."
 
-　　林淡听说之后面色灰暗，连说话的兴趣都没有了。
+After hearing this, Lin Dan's face turned gray, and he had no interest in speaking.
 
-　　当初和林佰光一起喝酒、赌钱的十来个头目里，有一半不是死在阵上就是下落不明，不过余下来的人和其他零星跑到大担屿休整的船只，居然也汇聚起了一百多艘。
+Among the dozen or so leaders who had drunk and gambled with Lin Baiguang, half were either dead in battle or their whereabouts were unknown. However, the remaining people and other scattered ships that had come to Dadanyu to rest and reorganize had actually gathered more than a hundred ships.
 
-　　但是大担屿是个荒岛，并无粮食。各船舱促逃命，船上纵然有些存粮，也支撑不了几天。一百多艘船，男女老幼差不多有一千多人。挤在方寸之地也非长久之计。各股都在计较，下一步到底该何去何从。
+But Dadanyu was a deserted island with no grain. The ships had fled in a hurry, and even if there was some grain on board, it would not last for a few days. There were more than a hundred ships, with nearly a thousand men, women, old and young. It was not a long-term solution to be crowded in such a small place. All the groups were discussing what to do next.
 
-　　眼下，他们的选择无非是：投奔某一股海上势力：比如郑芝龙、李魁奇、刘香这几个“大掌柜”，或者把船烧毁上岸，暂时隐蔽起来。
+Right now, their choices were nothing more than: to seek refuge with a certain maritime force, such as the "big bosses" Zheng Zhilong, Li Kuiqi, or Liu Xiang, or to burn their ships and go ashore to hide for the time being.
 
-　　到底应该投奔谁，大家都有不同的看法，一时间谁也说服不了谁。但是大多数人不大愿意走这条路，经过这次大战，损兵折将——没有实力，投奔过去也不会受到重视，到时候就是当炮灰的命。
+As for who to seek refuge with, everyone had different opinions, and for a time, no one could persuade anyone else. But most people were not willing to take this road. After this great battle, they had lost soldiers and generals—without strength, they would not be taken seriously if they sought refuge, and at that time, they would be cannon fodder.
 
-　　至于自己起头自己干的想法，倒不是没人想过，但是这里船少头目多，又没有人有足够的威信，大家根本举荐不出一个头目来掌握大局。
+As for the idea of starting their own business, it was not that no one had thought of it, but there were few ships and many leaders here, and no one had enough prestige. Everyone simply could not recommend a leader to take control of the overall situation.
 
-　　溃败之后，粮、饷都没有来源，各家虽然都带出些积存的财物，对于重整旗鼓来说未免是杯水车薪。
+After the rout, there was no source of grain or pay. Although each family had brought out some accumulated property, it was a drop in the bucket for regrouping.
 
-　　林佰光一直没有吭声，与其现在提出来就遭到无穷的置疑和反对，不如等他们山穷水尽，走投无路的时候再说话。往往能一锤定音。
+Lin Baiguang had been silent all along. Instead of raising it now and being met with endless doubts and opposition, it was better to speak when they were at their wit's end and had nowhere to go. It could often be a final word.
 
-　　就这样商议了二天，一直没有什么结果。大担屿除了有限的淡水之外一无所有，连烧柴都不足，再商议下去，大家就要断粮。这天晚上胡胖子终于忍耐不住，宣布自己要上岸了。
+They discussed for two days like this, but there was no result. Dadanyu had nothing but limited fresh water, and even firewood was insufficient. If they continued to discuss, everyone would run out of food. That night, Fatty Hu finally couldn't bear it anymore and announced that he was going ashore.
 
-　　“老子不干这买买了，洗脚上岸算了！这十来年，担惊受怕，搞了这几万的银子，吃吃喝喝混个富家翁等死算了。”
+"I'm not doing this business anymore. I'll just wash my feet and go ashore! For the past ten years, I've been living in fear. I've made tens of thousands of taels of silver. I'll just eat, drink, and be a rich man waiting to die."
 
-　　这话倒引起了不少人的共鸣。有些只剩下一两条船的人都在打起了这个主意。他们几乎人人都积累的数目不等的财物，而且过去发达的时候，托人在家乡置下许多产业，回去收租当个富家翁过日子还是不成问题的。
+These words resonated with many people. Some who only had one or two ships left were also thinking about this. Almost all of them had accumulated a certain amount of property, and when they were prosperous in the past, they had entrusted people to set up many properties in their hometowns. It was not a problem to go back and collect rent and live as a rich man.
 
-　　大败之后，人心往往心灰意懒，退隐的心思就占了上风。
+After a major defeat, people's hearts are often disheartened, and the thought of retirement gains the upper hand.
