--- a/_posts/2011-4-3-3-35000.md
+++ b/_posts/2011-4-3-3-35000.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Chapter Three Hundred and Fifty: Institutional Readjustment
+title: "Section 350: Institutional Readjustment"
 category: 3
 path: 2011-4-3-3-35000.md
 tag: [normal]
 ---
 
-Based on the different nature of the work—the degree of danger, difficulty, complexity, and so on—various subsidies were used to differentiate compensation, favoring those穿越 (Time-Cross) members engaged in dangerous, arduous, and heavy-duty positions. To this end, in addition to the previously issued subsidies for danger, rural assignments, sea voyages, heavy physical labor, and high temperatures, a variety of new, intricately named subsidies were added. Not only was the scope of the subsidies greatly expanded, but the threshold for obtaining them was also lowered.
+Based on the different nature of the work—the degree of danger, difficulty, complexity, and so on—various subsidies were used to differentiate compensation, favoring those Transmigration members engaged in dangerous, arduous, and heavy-duty positions. To this end, in addition to the previously issued subsidies for danger, rural assignments, sea voyages, heavy physical labor, and high temperatures, a variety of new, intricately named subsidies were added. Not only was the scope of the subsidies greatly expanded, but the threshold for obtaining them was also lowered.
 
 Regarding the issue of cadres using their authority to gain benefits from the natives, which had drawn significant public complaint, the Executive Committee stipulated that cadres were not allowed to privately accept gifts from the natives. All gifts presented by the natives had to be reported and turned over to the public. The nature of the gift would then determine its disposition. Gifts of small value or purely commemorative significance would be returned to the individual. For gifts of greater value that the cadre wished to keep, they would have to repurchase them by paying the market value in circulation coupons. If a native gifted a servant or woman to a cadre, not only would the cadre have to pay their price, but they would also have to undergo a political review by the General Political Security Department.
 
@@ -42,7 +42,7 @@ Xiao Zishan coughed. "Ultimately, what skills or conditions are needed is up to 
 
 Ma Qianzhan coughed. "But it's impossible to establish all of them—at this stage, there's no need for them to be large and comprehensive."
 
-"If we were to establish all of them, even if we let children be leaders, it wouldn't be enough," Wen Desi said. "The position is not a problem. Sooner or later, everyone will get to be an official. For now, we should expand the organizational structure, absorb more capable people into leadership positions, which will be conducive to the overall harmony within the穿越 (Time-Cross) Group."
+"If we were to establish all of them, even if we let children be leaders, it wouldn't be enough," Wen Desi said. "The position is not a problem. Sooner or later, everyone will get to be an official. For now, we should expand the organizational structure, absorb more capable people into leadership positions, which will be conducive to the overall harmony within the Transmigration Group."
 
 Everyone felt that President Wen's idea of "making the porridge pot bigger" was a more suitable solution. It was a fundamental solution that addressed the problem at its source. Wen Desi continued:
 
@@ -60,23 +60,24 @@ The Industry and Energy Committee was abolished. Its subordinate departments—t
 
 The Foreign Affairs and Commerce Committee was abolished. Its subordinate Foreign Affairs Department, Foreign Trade Company, and overseas stations were placed under the supervision of the Colonial and Trade Officer. A new Ministry of Colonial Affairs was established to manage the colonies.
 
-The Finance and Banking Committee was abolished and replaced by the Ministry of Finance, supervised by the Financial Controller. Delong Grain Company was officially renamed Delong Bank and would act as the central bank before a formal central bank was established. A new Monopoly Bureau was established. The穿越 (Time-Cross) Group had already decided to implement a monopoly system for salt and tobacco.
+The Finance and Banking Committee was abolished and replaced by the Ministry of Finance, supervised by the Financial Controller. Delong Grain Company was officially renamed Delong Bank and would act as the central bank before a formal central bank was established. A new Monopoly Bureau was established. The Transmigration Group had already decided to implement a monopoly system for salt and tobacco.
 
 "I have decided to resign from my position as Chief of the General Staff." When discussing the new military structure, Ma Qianzhan submitted his resignation. "I am now the Secretary of State. There is no reason to continue holding a military post. I implore the Executive Committee to approve my resignation."
 
-The resignation was subsequently approved. The position of Chief of the General Staff in the穿越 (Time-Cross) Group was equivalent to the commander-in-chief of the army and navy, with excessive power and influence. The elders generally believed that this position should not be held by a powerful figure in the Executive Committee. Ma Qianzhan, who was previously the People's Commissar for Planning and was now the Secretary of State, was no longer suitable to be the Chief of the General Staff.
+The resignation was subsequently approved. The position of Chief of the General Staff in the Transmigration Group was equivalent to the commander-in-chief of the army and navy, with excessive power and influence. The elders generally believed that this position should not be held by a powerful figure in the Executive Committee. Ma Qianzhan, who was previously the People's Commissar for Planning and was now the Secretary of State, was no longer suitable to be the Chief of the General Staff.
 
 Under the new system, the General Staff was under the jurisdiction of the Military Affairs Supervisor. A joint meeting was established under the General Staff Department, attended by the chiefs of staff of the various military branches and the inspectors general of the branches. Its main functions were the coordination of the branches and joint staff work. The original Political Department of the Army Department was transferred to the General Staff Department and renamed the General Staff Political Department, responsible for the ideological and political work and propaganda of the entire army.
 
 The army and navy implemented a system of separating military administration and military command. Neither the army nor the navy had a commander-in-chief position. The People's Commissar for the Army and the People's Commissar for the Navy were no longer the commanders of the past, but the administrative heads of the army, responsible for managing the military administration of the army and navy. Training and operations were the responsibility of the Army Chief of Staff and the Chief of Naval Operations. This system could effectively strengthen the management and restraint of the army.
 
-Due to the huge consumption of materials by the army established by the穿越 (Time--Cross) Group and the unprecedented demand for logistics in this era, a Logistics Command was established at the suggestion of the military to implement joint logistics management for the army and navy. At the same time, to meet the needs of the expanding army, a new Training Directorate was established to be responsible for the training of new recruits for the army and navy and the military training of laborers.
+Due to the huge consumption of materials by the army established by the Transmigration Group and the unprecedented demand for logistics in this era, a Logistics Command was established at the suggestion of the military to implement joint logistics management for the army and navy. At the same time, to meet the needs of the expanding army, a new Training Directorate was established to be responsible for the training of new recruits for the army and navy and the military training of laborers.
 
 The Special Reconnaissance Team, which was originally under the army's establishment, was now promoted to an independent agency, directly under the jurisdiction of the Military Affairs Supervisor, and in fact, under the direct command of the Executive Committee. The Executive Committee expected the Special Reconnaissance Team to not only complete its own duties, but also to serve as the Executive Committee's praetorian guard and military police.
 
 Ma Jia was a little surprised that the General Political Security Bureau was assigned to him. In his view, the Tribunal was a legal institution and did not need such a violent department. However, after thinking about Ma Qianzhan being the Secretary of State, he understood—the Executive Committee did not intend to let the Director-General control the most lethal department of "political security" after he had already controlled the police.
 
 As for the institutional organization of the Tribunal, Ma Jia created a plan based on the suggestions submitted by everyone: three new professional courts were established: a civil court, a criminal court, and a public security court—Ma Jia believed that the police directly controlling the power of public security punishment had long-term drawbacks, so he imitated the system of some European and American countries and set up a public security court for the rapid trial of minor cases. The original maritime court was reorganized into a maritime-commercial court. A notary office and a "legal counsel office" were also established to accommodate the idle members of the law club.
+
 [y001]: /characters/y001 "Xiao Zishan"
 [y002]: /characters/y002 "Wen Desi"
 [y004]: /characters/y004 "Zhan Wuya"
