--- a/_posts/2011-5-28-4-02300.md
+++ b/_posts/2011-5-28-4-02300.md
@@ -1,211 +1,211 @@
 ---
 layout: post
-title: 第二十三节 刘三的恋情
+title: "Section 23: Liu San's Love Affair"
 category: 4
 path: 2011-5-28-4-02300.md
 tag: [normal]
 ---
 
-　　县城门口，县快班的头目带着人正在恭候。临高县城里现在还不是绿区，所以他要搬进来常住照规矩是要配备警卫员的，刘三考虑到润世堂本身比较封闭，外人出入很难，安全性是有保证的，没必要安插太多的人员徒增不便，所以谢绝了政治保卫总局为他派遣的贴身警卫，只同意在润世堂门口由派出所安插暗哨守望。
+At the entrance of the county town, the head of the county's fast-response team was waiting respectfully with his men. Lingao County was not yet a green zone, so if he wanted to move in and live there permanently, he had to be equipped with guards according to the rules. Liu San considered that Runshitang itself was relatively closed, and it was difficult for outsiders to enter and exit, so safety was guaranteed. There was no need to place too many personnel to increase inconvenience, so he declined the personal guards sent by the General Political Security Bureau for him, and only agreed to have the police station place plainclothes sentinels to watch over the entrance of Runshitang.
 
-　　杨世祥给他安排的住所是润世堂和住宅之间的一处跨院，院子不大且很冷僻，一般人等闲走不到。有条夹弄可以直接通到宅邸后面的一道小门，出入方便。
+The residence that Yang Shixiang arranged for him was a courtyard between Runshitang and the residence. The courtyard was not large and was very secluded, and ordinary people would not easily walk there. There was a narrow alley that could directly lead to a small door behind the mansion, making it convenient to enter and exit.
 
-　　管事的带着他在院子里转了一圈，屋子是旧得，但是最近由办公厅重新把这里翻修过，墙壁刷得雪白，窗户全部镶嵌了玻璃，屋子里铺了地板，收拾的干净敞亮。
+The manager took him on a tour of the courtyard. The house was old, but it had recently been renovated by the General Office. The walls were painted snow-white, the windows were all inlaid with glass, the floor was paved, and it was clean and bright.
 
-　　刘三围着窗户前的紫檀木书桌转了一圈，上面擦拭的一尘不染。书架、文博架，笔筒，全是上好的东西。
+Liu San walked around the rosewood desk in front of the window, which was wiped clean. The bookshelves, curio shelves, and pen holders were all of good quality.
 
-　　最扎眼的是桌子上有一门电话。这种灰绿色的手摇军用磁石电话机看似老土，在穿越集团中却是地位和权力的象征。刘三摇了三圈，拿起话筒。
+The most eye-catching thing on the table was a telephone. This grayish-green hand-cranked military magneto telephone seemed old-fashioned, but in the Transmigration Group, it was a symbol of status and power. Liu San cranked it three times and picked up the receiver.
 
-　　“县转接台，请问你要呼叫哪里？”话筒中传来一个娇媚的女声。
+"County switchboard, who do you want to call?" a charming female voice came from the receiver.
 
-　　临高电信最近已经在县城设立了一个电话转接台，在县里拥有电话的地方也从驻县办扩展到了征粮局、县快班（县派出所）和各处城门值班室。
+Lingao Telecom had recently set up a telephone switchboard in the county town, and the places with telephones in the county had also expanded from the county office to the grain collection bureau, the county fast-response team (county police station), and the duty rooms at the city gates.
 
-　　“润世堂办公室电话测试。”刘三嘀咕着。
+"Runshitang office telephone test," Liu San muttered.
 
-　　“您好，首长，电话一切正常。”
+"Hello, Chief, the phone is working normally."
 
-　　“谢谢。”刘三挂掉了电话。看了看目瞪口呆的符悟本——他不明白师父在干什么。刘三笑了笑：“有事弟子服其劳，你就把行李打开收拾一下吧。”
+"Thank you." Liu San hung up the phone and looked at the dumbfounded Fu Wuben—he didn't understand what his master was doing. Liu San smiled, "When there is work to be done, the disciple should do it. You can just open the luggage and tidy it up."
 
-　　“是，师父。”符悟本东张西望的看得正起劲，这会问，“师父，我睡哪里？”
+"Yes, master." Fu Wuben was looking around with great interest. At this moment, he asked, "Master, where do I sleep?"
 
-　　“就睡东厢房吧。”门外传来一个女声。刘三抬眼望去，正是萱春。
+"Just sleep in the east wing," a female voice came from outside the door. Liu San looked up and saw that it was Xuan Chun.
 
-　　萱春依然是半旧的蓝布裙。洗漝的干干净净，上身却是一水红色缎对襟短袄。双丫鬟上系着红色的缎带——这种束发的缎带其实是从穿越众那里流行出来的，确切的是说是从李赤骑的妹妹张雨那里流行出来的新时尚。
+Xuan Chun was still wearing a semi-old blue cloth skirt, washed clean. Her upper body was a water-red satin short jacket with buttons down the front. Her double buns were tied with red satin ribbons—this kind of hair-tying ribbon was actually a new fashion that had become popular from the transmigrators, or more precisely, from Li Chiqi's sister, Zhang Yu.
 
-　　模样比上次见到的更为齐整。刘三心中不觉一动，笑着招招手。
+Her appearance was even neater than the last time he saw her. Liu San's heart couldn't help but move, and he smiled and beckoned.
 
-　　萱春盈盈含笑，把双手放在左腰上，福了一福：“三老爷万福。”
+Xuan Chun smiled gracefully, put her hands on her left waist, and curtsied: "Third Master, may you be blessed."
 
-　　“好，好。”刘三在杨家日久，多少知道点大户人家的规矩。此时照例要放赏，钱他自然有，流通券三五元的赏格就足够了。但是刘三对萱春是另眼相看，另备了赏物。
+"Good, good." Liu San had been in the Yang family for a long time and knew a little about the rules of a large family. At this time, it was customary to give a reward. He naturally had money, and a reward of three or five yuan in circulation coupons was enough. But Liu San looked at Xuan Chun with different eyes and had prepared another reward.
 
-　　“行李还是让奴婢来收拾安排好了，他一个半大小子，自己还是要老娘照顾的时候。”萱春说。
+"Let me tidy up the luggage. He's just a half-grown boy, and he still needs his mother to take care of him," Xuan Chun said.
 
-　　符悟本脸都红了，他是乡下小子，见到这样漂亮大方的大户人家丫鬟不免自惭形愧。
+Fu Wuben's face turned red. He was a country boy, and he couldn't help but feel ashamed in front of such a beautiful and generous maid from a large family.
 
-　　“他可是我的徒弟，很能干得。”刘三说，“既然有你代劳，就免了他的差使好了。”
+"He is my apprentice, and he is very capable," Liu San said. "Since you are doing it for him, then he is relieved of his duties."
 
-　　符悟本跟着刘三不少日子，有了点眼色，赶紧退出去。萱春笑了一下也退了出去。
+Fu Wuben had been with Liu San for many days and had learned a little. He quickly withdrew. Xuan Chun smiled and also withdrew.
 
-　　不多片刻她又出现了，打来一盆清水，先将他挎包上的毛巾解下来清洗了一遍，这才又打了热水过来给他绞毛巾，端茶递水，服侍依然周到细致不减。刘三原本打算专注于工作把男女之事抛到一边。见了萱春不免又心猿意马起来。
+In a short while, she appeared again, bringing a basin of clean water. She first untied the towel from his satchel and washed it, then brought hot water for him to wring out the towel, served him tea and water, and her service was still as thoughtful and meticulous as ever. Liu San had originally planned to focus on his work and put aside matters of men and women. Seeing Xuan Chun, he couldn't help but be moved again.
 
-　　“三老爷先洗脸，宽衣。晚上用什么菜？。”
+"Third Master, please wash your face and change your clothes first. What would you like for dinner?"
 
-　　“晚饭你做吗？”
+"Are you cooking dinner?"
 
-　　“当然由灶下的去做了。”萱春一笑，“若是老爷不嫌弃，奴婢也能做，就是没人家手艺好。”
+"Of course, the kitchen will do it," Xuan Chun smiled. "If you don't mind, I can also cook, but my skills are not as good as others."
 
-　　“那我倒是要尝尝。”刘三说。
+"Then I'd like to try it," Liu San said.
 
-　　“好。”萱春毫不推脱，“反正你也是这家的半个主人，做得了这个主。”
+"Good." Xuan Chun did not refuse at all. "Anyway, you are half the master of this family, so you can make this decision."
 
-　　原以为她要推辞，没想到答应的干净利落。让刘三有点意外，再看今天她的表情比上次丰富的多。
+He had originally thought she would refuse, but he didn't expect her to agree so readily. This surprised Liu San a little. Looking at her expression today, it was much richer than last time.
 
-　　“看你的样子，有高兴的事？”他试探地问道。
+"You look happy, is there something good?" he asked tentatively.
 
-　　“奴婢又没有什么不高兴的事情。”萱春一面说一面替他解钮扣卸去外套，身子半依偎在身边，又是那种无限幽怨的声音，刘三别有一般滋味。
+"I have nothing to be unhappy about," Xuan Chun said as she helped him unbutton his coat. Her body was half-leaning against him, and her voice was infinitely melancholic. Liu San had a different kind of feeling.
 
-　　等她低头去解他腰里的皮带扣，他不由得就伸手去摸她黑漆般的头发，萱春把头再往下低，避开了他的手：“三老爷，青天白日的——”
+When she bent down to unbuckle his belt, he couldn't help but reach out to touch her jet-black hair. Xuan Chun lowered her head further to avoid his hand: "Third Master, it's broad daylight—"
 
-　　“嗯，是我唐突了。”刘三有些扫兴。
+"Well, I was being abrupt," Liu San was a little disappointed.
 
-　　“大白天的，让人瞧见了不好。”萱春小声说着。取来身宽松的绵绸长衫服侍他穿上。话虽简短，内中却有极亲昵的成分，让刘三一阵心摇神曳。
+"It's broad daylight, it's not good to be seen," Xuan Chun said in a low voice. She brought a loose cotton long gown and helped him put it on. Although the words were short, they contained a very intimate component, which made Liu San's heart flutter.
 
-　　他从挎包里掏出个小盒子。里面是一只银粉盒。这是紫珍斋量产的玻璃镜粉盒，专门打中等市场之用。其实不是手工制造，而是在临高用机器批量冲压成型后再送到广州去做简单的手工修饰最后镶上小镜子，因为不费劳力，成本极低。
+He took out a small box from his satchel. Inside was a silver powder box. This was a glass mirror powder box mass-produced by Zizhenzhai, specifically for the mid-range market. In fact, it was not handmade, but was mass-produced by machine stamping in Lingao and then sent to Guangzhou for simple manual finishing and finally inlaid with a small mirror. Because it did not require much labor, the cost was extremely low.
 
-　　但是这东西在临高是极罕见的。萱春是惊多于喜，看了又看，开了又关上。好半天说不出话。最后才放下来：
+But this thing was extremely rare in Lingao. Xuan Chun was more surprised than happy. She looked at it again and again, opened and closed it. She was speechless for a long time. Finally, she put it down:
 
-　　“三老爷的赏赐太重了。”萱春不无遗憾的摇头，“我一个丫头，当不起。”
+"Third Master's reward is too heavy," Xuan Chun shook her head with some regret. "I am just a maid, I don't deserve it."
 
-　　“有什么当不起的？”刘三说，“一直让你伺候，也没什么东西好谢你，这个权作谢礼。”
+"What's not to deserve?" Liu San said. "You've been serving me all this time, and I have nothing to thank you with. Take this as a thank-you gift."
 
-　　萱春依然不肯要。不是不想要，而是这种玻璃镜小粉盒她是见识过得，最近二年组时兴的洋货，价钱很大。自己家的太太和小姐都没有，杨家也只有太太有，她一个丫鬟拿了岂不是成了众矢之的？
+Xuan Chun still refused to take it. It wasn't that she didn't want it, but she had seen this kind of glass mirror small powder box before. It was a fashionable foreign product in the past two years, and the price was very high. Neither her own mistress nor the young ladies had one. In the Yang family, only the mistress had one. If she, a maid, took it, wouldn't she become the target of public criticism?
 
-　　但是一味的峻拒，让刘三没了面子也不好。犹豫再三还是接了，又跪下磕了个头。
+But to refuse so sternly would make Liu San lose face, which was not good. After hesitating again and again, she finally accepted it and knelt down to kowtow.
 
-　　“哎，哎，不必不必。”刘三想这动不动就要当“受头”的滋味其实也不怎么样么。
+"Hey, hey, no need, no need." Liu San thought that this feeling of being "kowtowed to" at every turn was actually not that great.
 
-　　借拉她起来的机会又捏着她的手，萱春也不甩手，只小声道：“奴婢的手粗。”
+Taking the opportunity to help her up, he squeezed her hand again. Xuan Chun did not pull her hand away, but only said in a low voice, "My hands are rough."
 
-　　“不要紧。”刘三想不出什么其他话好赞美，“劳动最光荣。”
+"It doesn't matter." Liu San couldn't think of any other words of praise. "Labor is the most glorious."
 
-　　“什么？”
+"What?"
 
-　　“没什么。”刘三赶紧换个话题，“杨老爷最近纳妾了？”
+"Nothing." Liu San quickly changed the subject. "Has Master Yang taken a concubine recently?"
 
-　　“没有，不过快了。”萱春小声说，“杨大老爷送了二个歌伎给杨老爷，杨老爷喜欢得紧。花园里的锁春轩就是为这个修得。”
+"No, but it's coming soon," Xuan Chun said in a low voice. "Master Yang Da sent two songstresses to Master Yang. Master Yang likes them very much. The Suochun Pavilion in the garden was built for this."
 
-　　“送歌伎？”刘三不由得浮想联翩了一番。忽然他警觉起来最近杨家生人多了起来。这倒不可不查。问：“杨家添了不少人口，都是哪里来得？”
+"Sending songstresses?" Liu San couldn't help but let his imagination run wild. Suddenly, he became alert that there were more and more strangers in the Yang family recently. This had to be investigated. He asked, "The Yang family has added a lot of people. Where did they all come from?"
 
-　　“大多是自己投效进来的，也有是亲戚朋友送得荐来得。”萱春不以为意，“杨老爷发达了，想来混口饭的人自然就多了。最近人添了不少。”
+"Most of them came to serve on their own initiative, and some were recommended by relatives and friends," Xuan Chun said nonchalantly. "Master Yang has become rich, so naturally there are more people who want to make a living. There have been a lot of new people recently."
 
-　　润世堂作为重点企业，现在招募的员工都是通过检疫营地的政审的，唯有这杨家的奴仆，一直没有监控其来路。混进几个奸细来就不好了。这是应该写入报告提醒政保总局的。
+As a key enterprise, the employees recruited by Runshitang now all passed the political review of the quarantine camp. Only the servants of the Yang family, their origins had not been monitored. It would be bad if a few spies slipped in. This should be written into a report to remind the General Political Security Bureau.
 
-　　而且传统企业的特点就是往往家企不分，传统用人模式中自己人占有很大的地位：家人亲戚自不用说，徒弟、奴仆虽然没有血缘的关系，却也算是“自己人”。以后再拓展分号，宅子里新来得奴仆就有很大的机会。最近润世堂规模拓展很快，店里旧有的伙计都提拔起担当一面了，杨世祥几次说过现在人不大够用。
+Moreover, a characteristic of traditional enterprises is that the family and the enterprise are often not separated. In the traditional employment model, one's own people occupy a very important position: family members and relatives go without saying, and apprentices and servants, although not related by blood, are also considered "one's own people." In the future, when the branch is expanded, the new servants in the house will have a great opportunity. Recently, the scale of Runshitang has expanded rapidly, and the old clerks in the shop have all been promoted to take charge of one aspect. Yang Shixiang has said several times that there are not enough people now.
 
-　　过去刘三一直对自己和润世堂搞合资自鸣得意，认为是神来之笔——典型的“双赢”格局，现在看来，这种合资还是留下了很大的后遗症。
+In the past, Liu San had always been complacent about his joint venture with Runshitang, thinking it was a stroke of genius—a typical "win-win" situation. Now it seemed that this joint venture had left a lot of sequelae.
 
-　　他打定主意，制药厂和分号这两块的人事绝对不能让杨世祥插进手去。正在盘算此事该怎么办，萱春又走了回来，手里多了一个托盘，里面一只盖碗，揭开碗盖来看：
+He made up his mind that the personnel of the pharmaceutical factory and the branch must not be interfered with by Yang Shixiang. While he was pondering what to do about this matter, Xuan Chun came back with a tray in her hand. Inside was a covered bowl. He lifted the lid to see:
 
-　　碗里是杂果糖水：木瓜、椰肉、荔枝、芒果、西米和蒟蒻，还浮动着许多珍珠圆子，看上去香味浓郁，鲜艳夺目，加上碎冰之后更是清润甜美。这道点心和萱春头上的发带一样也是穿越众带来的新时尚。象西米、蒟蒻和珍珠圆子之类更是食品厂的出品。做法是从合作社的酒楼里流传出来的。
+In the bowl was a mixed fruit sweet soup: papaya, coconut meat, lychee, mango, sago, and konjac. There were also many pearl balls floating in it. It looked fragrant and colorful, and after adding crushed ice, it was even more refreshing and sweet. This dessert, like the ribbon on Xuan Chun's head, was also a new fashion brought by the transmigrators. Things like sago, konjac, and pearl balls were all products of the food factory. The recipe was passed down from the restaurant of the cooperative.
 
-　　刘三原本走得有些热了，这碗糖水来得正好。吃了几口，一人坐窗边，吃着那碗糖水，往窗外望去，只见绿荫婆娑，花影摇曳，心境是说不出的那种开阔轻松，真有南面王不易之乐。
+Liu San was originally a little hot from walking, and this bowl of sweet soup came at just the right time. After a few bites, he sat by the window alone, eating the bowl of sweet soup and looking out the window. He saw the green shade and the swaying flower shadows. His mood was indescribably open and relaxed, and he truly felt the joy that even a king in the south would not trade.
 
-　　“糖水是我煮得，没有酒楼里煮得好。”萱春说，“三老爷有什么忌口的没有？”
+"I made the sweet soup. It's not as good as the one from the restaurant," Xuan Chun said. "Is there anything you don't eat, Third Master?"
 
-　　“没有，两条腿不吃人，四条腿不吃桌子。”刘三开玩笑道，“不过，肉是多多益善。鱼虾越少越好。”
+"No, I don't eat people with two legs, and I don't eat tables with four legs," Liu San joked. "But, the more meat the better. The less fish and shrimp the better."
 
-　　食堂里的供应，算是愈来愈好了，不仅开始每天能有鸡蛋，猪肉也变成每周供应一次。偶然还有牛肉。不过蛋白质的主角还是鱼虾海产品和豆制品。所以元老们特别馋肉。
+The supply in the cafeteria was getting better and better. Not only did they start to have eggs every day, but pork was also supplied once a week. Occasionally, there was also beef. However, the main source of protein was still fish, shrimp, seafood, and soy products. So the elders were particularly greedy for meat.
 
-　　“好。”萱春答应。
+"Good," Xuan Chun agreed.
 
-　　“晚上你还来吗？”
+"Are you coming tonight?"
 
-　　“不来哪个给你送饭。”
+"If I don't come, who will bring you dinner?"
 
-　　“送完之后呢？”
+"And after you've delivered it?"
 
-　　萱春犹豫了下：“老爷要我来我就来。”
+Xuan Chun hesitated for a moment: "If you want me to come, I will come."
 
-　　她面色微红，似羞还嗔，一副小女儿的娇羞样。这种卖弄小意儿的温情，恰恰是现代男人很少能接触到的，刘三身边常伴河东之狮，更是少尝这样的滋味，不由得神魂颠倒。一把搂住了她的腰，直接拉到自己身畔。
+Her face was slightly red, as if she was shy and angry, with the shyness of a young girl. This kind of tenderness, which was a display of affection, was something that modern men rarely came into contact with. Liu San, who was often accompanied by a shrew, had even less of a taste for it, and he couldn't help but be infatuated. He put his arm around her waist and pulled her directly to his side.
 
-　　柔软温热的身体贴在身上，刘三不由得怦然心动。萱春默不作声，心里有些不安，她一直有这样一个感觉，这位刘三老爷对自己有着别样的情感，并非仅仅是贪图一夕一刻的皮肉之欢。
+The soft and warm body pressed against him, and Liu San's heart couldn't help but pound. Xuan Chun was silent, a little uneasy in her heart. She had always had such a feeling that this Third Master Liu had a different kind of affection for her, not just for the pleasure of the flesh for a moment.
 
-　　既然有情，就不是薄情之人。自己到了青春落寞的年华，难道就这样下去白首垂鬟？总得有个归宿才好。心思一活动，态度便不同了，靠紧了刘三，口中发出“嗯，嗯”的腻声。刘三在她腰臀间游移，让她一阵耳热心跳。
+Since there was affection, he was not a heartless person. She had reached the age of lonely youth. Was she going to grow old with her hair down like this? She had to have a home. Once her mind was active, her attitude was different. She leaned closer to Liu San and made a soft "hmm, hmm" sound. Liu San's hands roamed over her waist and hips, making her ears hot and her heart beat fast.
 
-　　刘三摸着她的脸说：“好烫！”
+Liu San touched her face and said, "It's so hot!"
 
-　　萱春把脸避了开去，但身子却靠得更紧了。似乎只有让他抱紧了一颗心才由了着落。
+Xuan Chun turned her face away, but her body leaned closer. It seemed that only by being held tightly by him could her heart be at ease.
 
-　　……
+...
 
-　　刘三放开了手：“给我倒茶去。”
+Liu San let go of his hand: "Go and pour me some tea."
 
-　　萱春赶紧站起身子，背着他钮好了马甲，又抿了抿散开的头发。
+Xuan Chun quickly stood up, buttoned up her vest with her back to him, and then smoothed her disheveled hair.
 
-　　“茶凉了。奴婢去换热得。”
+"The tea is cold. I'll go and get some hot tea."
 
-　　“就用凉的好了。”刘三只觉得浑身燥热，但是这里大白天的说不定有谁会进来，何况还有个符悟本在外面，他只好先放手再说了。
+"The cold one is fine." Liu San only felt hot all over, but it was broad daylight here and someone might come in at any time. Besides, there was still Fu Wuben outside. He had to let go for now.
 
-　　萱春从茶壶里倒出一碗凉透了的茶，刘三大大地喝了一口，沁人脾胃，顿觉心地清凉。想到刚才的光景，居然有点象高中时候第一次和女生在楼梯下偷偷摸摸鬼混的感觉。即激动又惶恐。
+Xuan Chun poured a bowl of cold tea from the teapot. Liu San took a big gulp. It was refreshing to the spleen and stomach, and he immediately felt cool and clear in his heart. Thinking of the scene just now, it was a bit like the feeling of secretly fooling around with a girl under the stairs for the first time in high school, both excited and frightened.
 
-　　萱春走了之后刘三打了几个电话，把明晚宴请和接待的各项事宜安排下去。商馆的大宴是少不了的，不过不是重点——靠吃饭是吃不出强国来得。烹调天下第一又顶个屁用！最多人以为你们全是厨子而已。
+After Xuan Chun left, Liu San made a few phone calls and arranged for the banquet and reception for tomorrow night. The grand banquet at the merchant's hall was indispensable, but it was not the main point—you can't eat your way to a strong country. What's the use of being the best cook in the world! At most, people will think you are all cooks.
 
-　　重点是如何展示己方的强大——军队演习？大炮射击？看电影还是参观工厂，要不要看看圣船？或者把那烂尾的854工程再给他看看？
+The key was how to show one's strength—a military exercise? Cannon firing? Watching a movie or visiting a factory? Should he show him the Holy Ship again? Or show him the unfinished Project 854 again?
 
-　　这是个相当伤脑筋的问题，赤裸裸的炫耀太过着相，最好是让他主动提出来。
+This was a rather brain-racking problem. A naked display of power was too obvious. It was best to let him take the initiative to propose it.
 
-　　李洛由一行人收拾行装安顿下来，新装修的盥洗室让李洛由大开眼界——全部用瓷器装修的房子，用瓷器做得浴桶便桶，光这份新意就让他叫绝。而且用起来之方便，环境之干净都是前所未有。
+Li Luoyou and his party packed their luggage and settled down. The newly renovated bathroom opened Li Luoyou's eyes—a house decorated entirely with porcelain, with a bathtub and toilet made of porcelain. Just this novelty alone made him exclaim in admiration. And the convenience of use and the cleanliness of the environment were unprecedented.
 
-　　这个盥洗室的轰动效应甚至超过了全玻璃窗的效果。不仅顾葆成、夸克等人都去参观，连仆人们也找机会进去看一眼。大家都对这个一开就来的冷热水感到迷惑不解。到底在哪里烧水的呢？
+The sensation of this bathroom even surpassed the effect of the all-glass windows. Not only did Gu Baocheng, Quark, and others go to see it, but even the servants also found an opportunity to take a look. Everyone was puzzled by the hot and cold water that came out as soon as it was turned on. Where was the water being heated?
 
-　　倒是夸克有点概念。他说应该是有水管通向某个蓄水池，至于热水，大概有加热器之类，不断的派人烧火。
+Quark, on the other hand, had some idea. He said that there should be a water pipe leading to a reservoir. As for the hot water, there was probably a heater or something, and people were constantly sent to light the fire.
 
-　　不过，他对居然有瓷器做马桶和浴缸表达了极大的震惊。欧洲对瓷器的价值是高估的，最初的时候堪称价比黄金。夸克久在中国知道在大明瓷器不算什么特别珍贵的东西，但是用来做如此大型的洁具，这份豪奢真是让人难以想象。
+However, he expressed great shock that there were toilets and bathtubs made of porcelain. The value of porcelain in Europe was overestimated, and at the beginning, it was comparable to gold. Quark had been in China for a long time and knew that porcelain was not a particularly precious thing in the Ming Dynasty, but to use it to make such large sanitary ware, this kind of luxury was really unimaginable.
 
-　　众人都对澳洲人的手面感到由衷的佩服。
+Everyone was sincerely impressed by the Australians' generosity.
 
-　　李洛由痛痛快快的在青花瓷浴缸里泡了个热水澡，洗掉一身的尘嚣，换上一双陈州草拖鞋，宽松着袍子出来散步。
+Li Luoyou took a comfortable hot bath in the blue and white porcelain bathtub, washed away the dust of the journey, changed into a pair of Chenzhou straw slippers, and came out for a walk in a loose robe.
 
-　　院里新栽了许多花木。这里地气和暖湿润又甚于广州，此时已交二月，院中早已是花木葱茏。花叶在风中婆娑舞动，甚是雅静悠闲。
+Many flowers and trees had been newly planted in the courtyard. The climate here was warmer and more humid than in Guangzhou. It was already February, and the courtyard was already lush with flowers and trees. The flowers and leaves danced in the wind, which was very elegant and leisurely.
 
-　　院中有一架多年生的葫芦，是李洛由特意从城外寻觅了移栽而来，这会已经活了，满架的浓荫。
+There was a perennial gourd trellis in the courtyard, which Li Luoyou had specially sought out from outside the city and transplanted. It had already survived and was now a dense shade.
 
-　　仆佣们早在葫芦架下安设了藤榻桌几，李洛由坐在藤榻上，只觉得凉风习习，一路上的尘嚣一扫而空。
+The servants had already set up a rattan couch and a table under the gourd trellis. Li Luoyou sat on the rattan couch and only felt a cool breeze, and the dust of the journey was swept away.
 
-　　扫叶并几个贴身小厮都在廊檐下垂手伺候。顾葆成是子侄辈，也不得坐，只有韩师爷和夸克各有座椅。韩师爷不敢放恣，只坐了张藤春凳。倒是夸克四仰八叉地靠在一般藤交椅上，大口大口地喝着格瓦斯。
+Sao Ye and a few personal servants were waiting with their hands down under the eaves of the corridor. Gu Baocheng was a nephew, so he was not allowed to sit. Only Master Han and Quark each had a seat. Master Han did not dare to be presumptuous and only sat on a rattan spring stool. Quark, on the other hand, leaned back on a rattan armchair, drinking kvass in large gulps.
 
-　　“这东西好喝，又酸又甜又解渴。”夸克说着往杯子里又倒了几盎司的朗姆酒，“没想到这里也有朗姆酒！你也来一杯？”
+"This thing is delicious, sour, sweet, and thirst-quenching." Quark said as he poured a few more ounces of rum into his glass. "I didn't expect there to be rum here too! Would you like a glass?"
 
-　　“不吃饭就喝酒，这个我可不行。”李洛由笑道。扫叶早已用他常用的茶壶给沏好了一壶上好的新茶。
+"I can't drink without eating," Li Luoyou said with a smile. Sao Ye had already brewed a pot of good new tea for him with his usual teapot.
 
-　　“葆成！”他不再理睬夸克，“一路行来，观感如何？”
+"Baocheng!" He no longer paid attention to Quark. "How do you feel after this journey?"
 
-　　“回老爷的话，这里一是阔绰，二是地方不靖。”顾葆成小心翼翼地回答道。
+"To answer your honor, this place is first, rich, and second, not peaceful," Gu Baocheng answered cautiously.
 
-　　“嗯，”李洛由点点头，“阔绰二字怎么讲？”
+"Hmm," Li Luoyou nodded. "What do you mean by rich?"
 
-　　“是，”顾葆成应了一声，“从博铺到县城，就这一条路，还有河工，若没有十几万的银子，怕是办不起来。”
+"Yes," Gu Baocheng replied. "From Bopu to the county town, just this one road, and the river works, if there weren't hundreds of thousands of taels of silver, I'm afraid it couldn't be done."
 
-　　“地面不靖呢？”
+"And the place is not peaceful?"
 
-　　“沿路碉楼森严，到处有丁壮值哨。就算是牛车上的驭手也带着鸟铳刀剑。”
+"The watchtowers along the road are heavily guarded, and there are sentries everywhere. Even the drivers of the ox carts carry muskets and swords."
 
-　　“你看得不错，很有心思。”李洛由赞同道，“不过治安好不好不能用戒备上来看，以澳洲人之力，难道还怕几个小贼土匪吗？”
+"You have a good eye and are very thoughtful," Li Luoyou said in agreement. "But whether the public security is good or not cannot be judged by the level of security. With the power of the Australians, are they still afraid of a few petty thieves and bandits?"
 
-　　“这么说——”
+"So you mean—"
 
-　　“现在还不好说。”李洛由啪得合上了扇子，“明日到得市面上才能知晓一二。”
+"It's hard to say now," Li Luoyou snapped his fan shut. "We'll only know a thing or two when we get to the market tomorrow."
 
-　　地面不靖的地方，市面必定凋敝。这是造不了假得。县城很冷清，似乎印证了顾葆成的说法，但是听杨家的仆人说过，本地最繁华的地方不在县城，而是在百仞城外的东门市——那里是澳洲人屯居的地方。
+In a place where the ground is not peaceful, the market must be depressed. This cannot be faked. The county town was very deserted, which seemed to confirm Gu Baocheng's statement. However, he had heard from the servants of the Yang family that the most prosperous place in the local area was not in the county town, but in Dongmen Market outside Bairen City—that was where the Australians were stationed.
 
-　　李洛由知道澳洲人对自己必然有一番款待。从他们费尽心思如此周到的安排自己的住所就知道，这伙人对自己很是重视。
+Li Luoyou knew that the Australians would definitely treat him to a feast. From the fact that they had gone to great lengths to arrange his residence so thoughtfully, he knew that this group of people attached great importance to him.
 
-　　他现在已经看到了澳洲人的一部分实力，显然还有更多的东西他没有看到。李洛由自诩眼光老到，心思缜密。澳洲人的实力和弱点绝对瞒不过自己。
+He had now seen a part of the Australians' strength, and there were obviously more things he had not seen. Li Luoyou prided himself on his experienced eyes and meticulous mind. The Australians' strength and weakness would definitely not be hidden from him.
 
-　　正说着话，只见扫叶进来禀告：今晚是润世堂的主人杨老爷摆宴为一行人接风洗尘。还有一封请柬，是刘三发出的，请他们明日晚上在东门市商馆赴宴。
+As they were talking, Sao Ye came in to report: tonight, the owner of Runshitang, Master Yang, was holding a banquet to welcome the group. There was also an invitation, sent by Liu San, inviting them to a banquet at the Dongmen Market merchant's hall tomorrow night.
 
-　　“这个刘三是谁？”
+"Who is this Liu San?"
 
-　　“润世堂的二东家，润世堂杨掌柜的义弟。上次也到过佛山。”韩师爷回禀道。
+"The second owner of Runshitang, the sworn brother of Shopkeeper Yang of Runshitang. He has also been to Foshan before," Master Han replied.
 
-　　“哦，是他。这刘三大概就是个澳洲人吧？”李洛由道，“上次在佛山我就觉得此人有些奇怪，果不其然！”
+"Oh, it's him. This Liu San is probably an Australian, right?" Li Luoyou said. "Last time in Foshan, I felt that this person was a bit strange, and it turned out to be true!"
